--- a/MANUALHTML/calclock.html
+++ b/MANUALHTML/calclock.html
@@ -1,20 +1,19 @@
-<!doctype html>
-
+<!DOCTYPE html>
 <html lang="ja">
 <head>
   <meta charset="utf-8">
-  <title>UEC - usp engineers' community - Tukubaiオンラインコマンドマニュアル</title>
-  <link rel="stylesheet" href="COMMON/CSS/MAIN.CSS" />
-  <link rel="stylesheet" href="COMMON/CSS/MENU.CSS" />
-  <link rel="stylesheet" href="COMMON/CSS/PRINT.CSS" />
+  <title>calclock - UEC - usp engineers' community - Tukubaiオンラインコマンドマニュアル</title>
+  <link rel="stylesheet" href="COMMON/CSS/MAIN.CSS">
+  <link rel="stylesheet" href="COMMON/CSS/MENU.CSS">
+  <link rel="stylesheet" href="COMMON/CSS/PRINT.CSS">
   <!--[if lte IE 8]>
-  <link rel="stylesheet" href="COMMON/CSS/IE67HACK.CSS" />
+  <link rel="stylesheet" href="COMMON/CSS/IE67HACK.CSS">
   <![endif]-->
   <!--[if IE 7]>
-  <link rel="stylesheet" href="COMMON/CSS/IE7HACK.CSS" />
+  <link rel="stylesheet" href="COMMON/CSS/IE7HACK.CSS">
   <![endif]-->
   <!--[if IE 6]>
-  <link rel="stylesheet" href="COMMON/CSS/IE6HACK.CSS" />
+  <link rel="stylesheet" href="COMMON/CSS/IE6HACK.CSS">
   <![endif]-->
   <script src="COMMON/JS/MENU.JS"></script>
 </head>
@@ -22,74 +21,104 @@
   <div id="container">
     <div id="header">
       <div id="logo">
-        <img id="logoimage" src="COMMON/IMG/TUKUBAI_LOGO.JPG" />
+        <img id="logoimage" src="COMMON/IMG/TUKUBAI_LOGO.JPG">
       </div>
       <div id="title">
         <p id="slogan"></p>
         <ul id="megamenu">
           <li id="tukubai_man"><a href="index.html" class="target">Tukubaiマニュアル</a>
             <ul>
+              <li><a href="1bai.html">1bai(1)</a></li>
+              <li><a href="block_getlast.html">block_getlast(1)</a></li>
               <li><a href="calclock.html">calclock(1)</a></li>
+              <li><a href="calsed.html">calsed(1)</a></li>
+              <li><a href="cap.html">cap(1)</a></li>
               <li><a href="cgi-name.html">cgi-name(1)</a></li>
               <li><a href="check_attr_name.html">check_attr_name(1)</a></li>
+              <li><a href="check_cmp_name.html">check_cmp_name(1)</a></li>
+              <li><a href="check_date_name.html">check_date_name(1)</a></li>
+              <li><a href="check_dble_name.html">check_dble_name(1)</a></li>
+              <li><a href="check_inlist_name.html">check_inlist_name(1)</a></li>
               <li><a href="check_need_name.html">check_need_name(1)</a></li>
               <li><a href="cjoin0.html">cjoin0(1)</a></li>
               <li><a href="cjoin1.html">cjoin1(1)</a></li>
+              <li><a href="cjoin1x.html">cjoin1x(1)</a></li>
               <li><a href="cjoin2.html">cjoin2(1)</a></li>
+              <li><a href="cjoin2x.html">cjoin2x(1)</a></li>
               <li><a href="comma.html">comma(1)</a></li>
               <li><a href="count.html">count(1)</a></li>
               <li><a href="ctail.html">ctail(1)</a></li>
               <li><a href="dayslash.html">dayslash(1)</a></li>
               <li><a href="delf.html">delf(1)</a></li>
+              <li><a href="delr.html">delr(1)</a></li>
               <li><a href="divsen.html">divsen(1)</a></li>
+              <li><a href="exist.html">exist(1)</a></li>
+              <li><a href="extname.html">extname(1)</a></li>
               <li><a href="filehame.html">filehame(1)</a></li>
               <li><a href="formhame.html">formhame(1)</a></li>
+              <li><a href="fsed.html">fsed(1)</a></li>
               <li><a href="getfirst.html">getfirst(1)</a></li>
               <li><a href="getlast.html">getlast(1)</a></li>
               <li><a href="gyo.html">gyo(1)</a></li>
+              <li><a href="haba.html">haba(1)</a></li>
               <li><a href="han.html">han(1)</a></li>
+              <li><a href="isdate.html">isdate(1)</a></li>
+              <li><a href="itouch.html">itouch(1)</a></li>
               <li><a href="join0.html">join0(1)</a></li>
               <li><a href="join1.html">join1(1)</a></li>
+              <li><a href="join1x.html">join1x(1)</a></li>
               <li><a href="join2.html">join2(1)</a></li>
+              <li><a href="join2x.html">join2x(1)</a></li>
               <li><a href="juni.html">juni(1)</a></li>
               <li><a href="kasan.html">kasan(1)</a></li>
               <li><a href="keta.html">keta(1)</a></li>
               <li><a href="keycut.html">keycut(1)</a></li>
               <li><a href="loopj.html">loopj(1)</a></li>
               <li><a href="loopx.html">loopx(1)</a></li>
+              <li><a href="maezero.html">maezero(1)</a></li>
+              <li><a href="man2.html">man2(1)</a></li>
               <li><a href="map.html">map(1)</a></li>
               <li><a href="marume.html">marume(1)</a></li>
               <li><a href="mdate.html">mdate(1)</a></li>
               <li><a href="mime-read.html">mime-read(1)</a></li>
               <li><a href="mojihame.html">mojihame(1)</a></li>
+              <li><a href="msort.html">msort(1)</a></li>
               <li><a href="nameread.html">nameread(1)</a></li>
+              <li><a href="numchar.html">numchar(1)</a></li>
               <li><a href="plus.html">plus(1)</a></li>
               <li><a href="rank.html">rank(1)</a></li>
               <li><a href="ratio.html">ratio(1)</a></li>
               <li><a href="retu.html">retu(1)</a></li>
+              <li><a href="rjson.html">rjson(1)</a></li>
               <li><a href="self.html">self(1)</a></li>
+              <li><a href="selr.html">selr(1)</a></li>
               <li><a href="sm2.html">sm2(1)</a></li>
               <li><a href="sm4.html">sm4(1)</a></li>
               <li><a href="sm5.html">sm5(1)</a></li>
               <li><a href="tarr.html">tarr(1)</a></li>
               <li><a href="tateyoko.html">tateyoko(1)</a></li>
               <li><a href="tcat.html">tcat(1)</a></li>
+              <li><a href="uconv.html">uconv(1)</a></li>
+              <li><a href="ulock.html">ulock(1)</a></li>
               <li><a href="unmap.html">unmap(1)</a></li>
               <li><a href="up3.html">up3(1)</a></li>
+              <li><a href="xmldir.html">xmldir(1)</a></li>
               <li><a href="yarr.html">yarr(1)</a></li>
               <li><a href="ycat.html">ycat(1)</a></li>
               <li><a href="yobi.html">yobi(1)</a></li>
               <li><a href="ysum.html">ysum(1)</a></li>
               <li><a href="zen.html">zen(1)</a></li>
-              <li class="separator"><hr/></li>
-              <li class="separator"><hr/></li>
-              <li class="separator"><hr/></li>
+              <li></li>
+
+              <li class="separator"><hr></li>
+              <li class="separator"><hr></li>
+              <li class="separator"><hr></li>
               <li><a href="tag-format.html">タグ形式(5)</a></li>
               <li><a href="name-format.html">ネーム形式(5)</a></li>
               <li><a href="field-format.html">フィールド形式(5)</a></li>
               <li><a href="master-file.html">マスタファイル(5)</a></li>
               <li><a href="name-file.html">ネームファイル(5)</a></li>
-              <li><a href="transaction-file.html" class="target">トランザクションファイル(5)</a></li>
+              <li><a href="transaction-file.html">トランザクションファイル(5)</a></li>
             </ul> 
           </li>
         </ul>
@@ -99,37 +128,30 @@
     <div id="main">
       <h1>Tukubaiオンラインコマンドマニュアル</h1>
 
-      <h2>calclock(1)</h2>
+<h2>calclock(1)</h2>
+<h3>【名前】</h3>
+<p><code>calclock</code> :  日付と時刻を秒数に変換</p>
+<h3>【書式】</h3>
+<pre class="list">Usage   : calclock [-r] [&lt;f1&gt; &lt;f2&gt; &lt;f3&gt; ...] &lt;file&gt;
+Version : Thu Apr 21 00:58:46 JST 2022
+Edition : 1
 
-      <h3>【名前】</h3>
-
-      <p>calclock : 日付と時刻を秒数に変換</p>
-
-      <h3>【書式】</h3>
-
-      <pre class="list">Usage   : calclock [-r] &lt;f1&gt; &lt;f2&gt; &lt;f3&gt; ... &lt;file&gt;
-Version : Thu Mar 21 21:57:55 JST 2013</pre>
-
-      <h3>【説明】</h3>
-
-      <p>標準入力または入力ファイル&lt;file&gt;の指定フィールド&lt;f1&gt; &lt;f2&gt; &lt;f3&gt;...の年月日や時間を1970年1月1日0時0分0秒からの秒数に変換して出力する。オプション-rを指定すると逆の変換を実施する。年月日データや時刻データを10進数に置き換えて計算するなどの用途に使用する。</p>
-
-      <p>日付や時刻は次のフォーマットである必要がある。</p>
-
-      <dl>
-        <dt>yyyymmdd</dt>
-        <dd>年月日(8桁)</dd>
-        <dt>HHMMSS</dt>
-        <dd>時分秒(6桁)</dd>
-        <dt>yyyymmddHHMMSS</dt>
-        <dd>年月日時分秒(14桁)</dd>
-      </dl>
-
-      <p>変換後の値を分に直す場合は60、時は3600、日は86400で除算する。</p>
-
-      <h3>【例1】</h3>
-
-      <pre class="prettyprint">$ cat data
+</pre>
+<h3>【説明】</h3>
+<p>標準入力または入力ファイル<code>&lt;file&gt;</code>の指定フィールド<code>&lt;f1&gt; &lt;f2&gt; &lt;f3&gt;</code>...の年月日や時間を1970年1月1日0時0分0秒からの秒数に変換して出力する。オプション<code>-r</code>を指定すると逆の変換を実施する。年月日データや時刻データを10進数に置き換えて計算するなどの用途に使用する。<code>&lt;file&gt;</code>として<code>-</code>を指定すると標準入力を使用する。</p>
+<p>日付や時刻は次のフォーマットである必要がある。</p>
+<pre class="prettyprint">yyyymmdd
+    年月日(8桁)
+HHMMSS
+    時分秒(6桁)
+yyyymmddHHMMSS
+    年月日時分秒(14桁)
+</pre>
+<p>変換後の値を分に直す場合は60、時は3600、日は86400で除算する。</p>
+<h3>【注意】</h3>
+<p> 入力ファイル<code>&lt;file&gt;</code>は省略できない フィールド指定<code>&lt;f1&gt; &lt;f2&gt; &lt;f3&gt;</code>... を省略すると全フィールド指定となる。 フィールド指定<code>&lt;f1&gt; &lt;f2&gt; &lt;f3&gt;</code>... に0があると全フィールド指定となる。 このとき同時に0以外のフィールド指定があってもそれらは無視される。</p>
+<h3>【例1】</h3>
+<pre class="prettyprint">$ cat data
 0001 0000007 20060201 20060206 117 8335 -145
 0001 0000007 20060203 20060206 221 15470 0
 0001 0000007 20060205 20060206 85 5950 0
@@ -138,11 +160,10 @@ Version : Thu Mar 21 21:57:55 JST 2013</pre>
 0002 0000007 20060208 20060206 150 11768 -1268
 0002 0000007 20060209 20060206 588 41160 0
 0002 0000007 20060210 20060206 444 31080 0
-$ </pre>
-
-      <p>4フィールド目と3フィールド目を変換し、その間の差分の日数を求めるには次のようにコマンドを実行する。</p>
-
-      <pre class="prettyprint">$ calclock 3 4 - &lt; data         |
+$
+</pre>
+<p>4フィールド目と3フィールド目を変換し、その間の差分の日数を求めるには次のようにコマンドを実行する。</p>
+<pre class="prettyprint">$ calclock 3 4 - &lt; data         |
 tee data2                       |
 awk '{print ($6-$4)/86400}'     &gt; data3
 $ cat data2
@@ -163,13 +184,11 @@ $ cat data3
 -2
 -3
 -4
-$ </pre>
-
-      <h3>【例2】</h3>
-
-      <p>-rオプションを使用すると、指定したフィールドの値(1970年1月1日0時0分0秒からの秒数)を通常の年月日時分秒の14桁の表記に変換する。年月日のみのフォーマットにする場合は、出力後awk(1)のsubstr()やself(1)で上8桁を切り出す。</p>
-
-      <pre class="prettyprint">$ cat data
+$
+</pre>
+<h3>【例2】</h3>
+<p><code>-r</code>オプションを使用すると、指定したフィールドの値(1970年1月1日0時0分0秒からの秒数)を通常の年月日時分秒の14桁の表記に変換する。年月日のみのフォーマットにする場合は、出力後awk(1)のsubstr(-,-)や<a href="self.html" class="command">self(1)</a>で上8桁を切り出す。</p>
+<pre class="prettyprint">$ cat data
 0001 0000007 20060201 117 8335 -145
 0001 0000007 20060203 221 15470 0
 0001 0000007 20060205 85 5950 0
@@ -178,11 +197,10 @@ $ </pre>
 0002 0000007 20060208 150 11768 -1268
 0002 0000007 20060209 588 41160 0
 0002 0000007 20060210 444 31080 0
-$ </pre>
-
-      <p>3フィールド目の各日の3日後の日付を求めるには、次のようにコマンドを実行する。</p>
-
-      <pre class="prettyprint">$ calclock 3 data               |
+$
+</pre>
+<p>3フィールド目の各日の3日後の日付を求めるには、次のようにコマンドを実行する。</p>
+<pre class="prettyprint">$ calclock 3 data               |
 awk '{print $4+86400*3}'        |
 tee data2                       |
 calclock -r 1 -                 |
@@ -197,7 +215,7 @@ $ cat data2
 1139583600
 1139670000
 1139756400
-$ cat data3 
+$ cat data3
 1138978800 20060204000000
 1139151600 20060206000000
 1139324400 20060208000000
@@ -215,17 +233,15 @@ $ cat data4
 20060211
 20060212
 20060213
-$ </pre>
-
-      <h3>【関連項目】</h3>
-
-      <p><a href="dayslash.html">dayslash(1)</a>、<a href="mdate.html">mdate(1)</a>、<a href="yobi.html">yobi(1)</a></p>
-
+$
+</pre>
+<h3>【関連項目】</h3>
+<p><a href="dayslash.html" class="command">dayslash(1)</a>、<a href="mdate.html" class="command">mdate(1)</a>、<a href="yobi.html" class="command">yobi(1)</a></p>
     </div>
 
-    <div id="lastmodified">last modified: 2014-08-13 16:01:13</div>
+    <div id="lastmodified">Last modified: Mon Aug  1 15:39:19 JST 2022</div>
 
-    <div id="footer">Contact us: uecinfo@usp-lab.com<br/>Copyright (c) 2012,2013 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
+    <div id="footer">Contact us: uecinfo@usp-lab.com<br>Copyright &copy; 2012-2022 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
   </div>
 </body>
 </html>
