--- a/MANUALHTML/comma.html
+++ b/MANUALHTML/comma.html
@@ -1,20 +1,19 @@
-<!doctype html>
-
+<!DOCTYPE html>
 <html lang="ja">
 <head>
   <meta charset="utf-8">
-  <title>UEC - usp engineers' community - Tukubaiオンラインコマンドマニュアル</title>
-  <link rel="stylesheet" href="COMMON/CSS/MAIN.CSS" />
-  <link rel="stylesheet" href="COMMON/CSS/MENU.CSS" />
-  <link rel="stylesheet" href="COMMON/CSS/PRINT.CSS" />
+  <title>comma - UEC - usp engineers' community - Tukubaiオンラインコマンドマニュアル</title>
+  <link rel="stylesheet" href="COMMON/CSS/MAIN.CSS">
+  <link rel="stylesheet" href="COMMON/CSS/MENU.CSS">
+  <link rel="stylesheet" href="COMMON/CSS/PRINT.CSS">
   <!--[if lte IE 8]>
-  <link rel="stylesheet" href="COMMON/CSS/IE67HACK.CSS" />
+  <link rel="stylesheet" href="COMMON/CSS/IE67HACK.CSS">
   <![endif]-->
   <!--[if IE 7]>
-  <link rel="stylesheet" href="COMMON/CSS/IE7HACK.CSS" />
+  <link rel="stylesheet" href="COMMON/CSS/IE7HACK.CSS">
   <![endif]-->
   <!--[if IE 6]>
-  <link rel="stylesheet" href="COMMON/CSS/IE6HACK.CSS" />
+  <link rel="stylesheet" href="COMMON/CSS/IE6HACK.CSS">
   <![endif]-->
   <script src="COMMON/JS/MENU.JS"></script>
 </head>
@@ -22,74 +21,104 @@
   <div id="container">
     <div id="header">
       <div id="logo">
-        <img id="logoimage" src="COMMON/IMG/TUKUBAI_LOGO.JPG" />
+        <img id="logoimage" src="COMMON/IMG/TUKUBAI_LOGO.JPG">
       </div>
       <div id="title">
         <p id="slogan"></p>
         <ul id="megamenu">
           <li id="tukubai_man"><a href="index.html" class="target">Tukubaiマニュアル</a>
             <ul>
+              <li><a href="1bai.html">1bai(1)</a></li>
+              <li><a href="block_getlast.html">block_getlast(1)</a></li>
               <li><a href="calclock.html">calclock(1)</a></li>
+              <li><a href="calsed.html">calsed(1)</a></li>
+              <li><a href="cap.html">cap(1)</a></li>
               <li><a href="cgi-name.html">cgi-name(1)</a></li>
               <li><a href="check_attr_name.html">check_attr_name(1)</a></li>
+              <li><a href="check_cmp_name.html">check_cmp_name(1)</a></li>
+              <li><a href="check_date_name.html">check_date_name(1)</a></li>
+              <li><a href="check_dble_name.html">check_dble_name(1)</a></li>
+              <li><a href="check_inlist_name.html">check_inlist_name(1)</a></li>
               <li><a href="check_need_name.html">check_need_name(1)</a></li>
               <li><a href="cjoin0.html">cjoin0(1)</a></li>
               <li><a href="cjoin1.html">cjoin1(1)</a></li>
+              <li><a href="cjoin1x.html">cjoin1x(1)</a></li>
               <li><a href="cjoin2.html">cjoin2(1)</a></li>
+              <li><a href="cjoin2x.html">cjoin2x(1)</a></li>
               <li><a href="comma.html">comma(1)</a></li>
               <li><a href="count.html">count(1)</a></li>
               <li><a href="ctail.html">ctail(1)</a></li>
               <li><a href="dayslash.html">dayslash(1)</a></li>
               <li><a href="delf.html">delf(1)</a></li>
+              <li><a href="delr.html">delr(1)</a></li>
               <li><a href="divsen.html">divsen(1)</a></li>
+              <li><a href="exist.html">exist(1)</a></li>
+              <li><a href="extname.html">extname(1)</a></li>
               <li><a href="filehame.html">filehame(1)</a></li>
               <li><a href="formhame.html">formhame(1)</a></li>
+              <li><a href="fsed.html">fsed(1)</a></li>
               <li><a href="getfirst.html">getfirst(1)</a></li>
               <li><a href="getlast.html">getlast(1)</a></li>
               <li><a href="gyo.html">gyo(1)</a></li>
+              <li><a href="haba.html">haba(1)</a></li>
               <li><a href="han.html">han(1)</a></li>
+              <li><a href="isdate.html">isdate(1)</a></li>
+              <li><a href="itouch.html">itouch(1)</a></li>
               <li><a href="join0.html">join0(1)</a></li>
               <li><a href="join1.html">join1(1)</a></li>
+              <li><a href="join1x.html">join1x(1)</a></li>
               <li><a href="join2.html">join2(1)</a></li>
+              <li><a href="join2x.html">join2x(1)</a></li>
               <li><a href="juni.html">juni(1)</a></li>
               <li><a href="kasan.html">kasan(1)</a></li>
               <li><a href="keta.html">keta(1)</a></li>
               <li><a href="keycut.html">keycut(1)</a></li>
               <li><a href="loopj.html">loopj(1)</a></li>
               <li><a href="loopx.html">loopx(1)</a></li>
+              <li><a href="maezero.html">maezero(1)</a></li>
+              <li><a href="man2.html">man2(1)</a></li>
               <li><a href="map.html">map(1)</a></li>
               <li><a href="marume.html">marume(1)</a></li>
               <li><a href="mdate.html">mdate(1)</a></li>
               <li><a href="mime-read.html">mime-read(1)</a></li>
               <li><a href="mojihame.html">mojihame(1)</a></li>
+              <li><a href="msort.html">msort(1)</a></li>
               <li><a href="nameread.html">nameread(1)</a></li>
+              <li><a href="numchar.html">numchar(1)</a></li>
               <li><a href="plus.html">plus(1)</a></li>
               <li><a href="rank.html">rank(1)</a></li>
               <li><a href="ratio.html">ratio(1)</a></li>
               <li><a href="retu.html">retu(1)</a></li>
+              <li><a href="rjson.html">rjson(1)</a></li>
               <li><a href="self.html">self(1)</a></li>
+              <li><a href="selr.html">selr(1)</a></li>
               <li><a href="sm2.html">sm2(1)</a></li>
               <li><a href="sm4.html">sm4(1)</a></li>
               <li><a href="sm5.html">sm5(1)</a></li>
               <li><a href="tarr.html">tarr(1)</a></li>
               <li><a href="tateyoko.html">tateyoko(1)</a></li>
               <li><a href="tcat.html">tcat(1)</a></li>
+              <li><a href="uconv.html">uconv(1)</a></li>
+              <li><a href="ulock.html">ulock(1)</a></li>
               <li><a href="unmap.html">unmap(1)</a></li>
               <li><a href="up3.html">up3(1)</a></li>
+              <li><a href="xmldir.html">xmldir(1)</a></li>
               <li><a href="yarr.html">yarr(1)</a></li>
               <li><a href="ycat.html">ycat(1)</a></li>
               <li><a href="yobi.html">yobi(1)</a></li>
               <li><a href="ysum.html">ysum(1)</a></li>
               <li><a href="zen.html">zen(1)</a></li>
-              <li class="separator"><hr/></li>
-              <li class="separator"><hr/></li>
-              <li class="separator"><hr/></li>
+              <li></li>
+
+              <li class="separator"><hr></li>
+              <li class="separator"><hr></li>
+              <li class="separator"><hr></li>
               <li><a href="tag-format.html">タグ形式(5)</a></li>
               <li><a href="name-format.html">ネーム形式(5)</a></li>
               <li><a href="field-format.html">フィールド形式(5)</a></li>
               <li><a href="master-file.html">マスタファイル(5)</a></li>
               <li><a href="name-file.html">ネームファイル(5)</a></li>
-              <li><a href="transaction-file.html" class="target">トランザクションファイル(5)</a></li>
+              <li><a href="transaction-file.html">トランザクションファイル(5)</a></li>
             </ul> 
           </li>
         </ul>
@@ -99,57 +128,51 @@
     <div id="main">
       <h1>Tukubaiオンラインコマンドマニュアル</h1>
 
-      <h2>comma(1)</h2>
+<h2>comma(1)</h2>
+<h3>【名前】</h3>
+<p><code>comma</code> :  指定したフィールドに3桁または4桁のカンマを追加</p>
+<h3>【書式】</h3>
+<pre class="list">Usage   : comma [+&lt;n&gt;h][-4] [&lt;f1&gt; &lt;f2&gt; ...] &lt;file&gt;
+        : comma -d[4] &lt;string&gt;
+Version : Thu Apr 21 00:58:47 JST 2022
+Edition : 1
 
-      <h3>【名前】</h3>
-
-      <p>comma : 指定したフィールドに3桁または4桁のカンマを追加</p>
-
-      <h3>【書式】</h3>
-
-      <pre class="list">Usage	: comma [+&lt;n&gt;h][-4] &lt;f1&gt; &lt;f2&gt; ... &lt;file&gt;
-	: comma -d[4] &lt;string&gt;
-Version	: Thu Dec 15 13:46:38 JST 2011</pre>
-
-      <h3>【説明】</h3>
-
-      <p>引数のファイルまたは標準入力のテキストデータの数字フィールドに3桁または4桁のカンマを追加する。カンマを追加するフィールドは引数で指定できる。</p>
-
-      <h3>【例1】</h3>
-
-      <pre class="prettyprint">$ cat data
+</pre>
+<h3>【説明】</h3>
+<p>引数のファイルまたは標準入力のテキストデータの数字フィールドに3桁または4桁のカンマを追加する。カンマを追加するフィールドは引数で指定できる。<code>&lt;file&gt;</code>として<code>-</code>を指定すると標準入力を使用する。</p>
+<h3>【注意】</h3>
+<p> 入力ファイル<code>&lt;file&gt;</code>は省略できない フィールド指定<code>&lt;f1&gt; &lt;f2&gt;</code>... を省略すると全フィールド指定となる。 フィールド指定<code>&lt;f1&gt; &lt;f2&gt;</code>... に0があると全フィールド指定となる。 このとき同時に0以外のフィールド指定があってもそれらは無視される。</p>
+<h3>【例1】</h3>
+<pre class="prettyprint">$ cat data
 20060201 296030 6710000
 20060202 1300100 3130000
 20060203 309500 20100
 20060204 16300 300100
 20060205 41000 210000
 20060206 771100 400000
-$ </pre>
-
-      <pre class="prettyprint">$ comma 2 3 data
+$
+</pre>
+<pre class="prettyprint">$ comma 2 3 data
 20060201 296,030 6,710,000
 20060202 1,300,100 3,130,000
 20060203 309,500 20,100
 20060204 16,300 300,100
 20060205 41,000 210,000
 20060206 771,100 400,000
-$ </pre>
-
-      <pre class="prettyprint">$ comma -4 2 3 data	←4桁カンマ
+$
+</pre>
+<pre class="prettyprint">$ comma -4 2 3 data     ←4桁カンマ
 20060201 29,6030 671,0000
 20060202 130,0100 313,0000
 20060203 30,9500 2,0100
 20060204 1,6300 30,0100
 20060205 4,1000 21,0000
 20060206 77,1100 40,0000
-$ </pre>
-
-      <h3>【例2】</h3>
-
-      <p>+hオプションを使用すると1行目の行を除いてカンマを追加する。先頭行が項目名などの場合に使用する。+2hや+3hのように数字を指定すると、2行目または3行目以降の行にカンマを追加するようになる。</p>
-
-      <pre class="prettyprint">
-$ cat data		←元データ：先頭行に項目(ヘッダー)がついている
+$
+</pre>
+<h3>【例2】</h3>
+<p><code>+h</code>オプションを使用すると1行目の行を除いてカンマを追加する。先頭行が項目名などの場合に使用する。+2hや+3hのように数字を指定すると、2行目または3行目以降の行にカンマを追加するようになる。</p>
+<pre class="prettyprint">$ cat data              ←元データ：先頭行に項目(ヘッダー)がついている
 年月日 売上高 発注高
 20060201 296030 6710000
 20060202 1300100 3130000
@@ -157,10 +180,9 @@ $ cat data		←元データ：先頭行に項目(ヘッダー)がついている
 20060204 16300 300100
 20060205 41000 210000
 20060206 771100 400000
-$ </pre>
-
-      <pre class="prettyprint">
-$ comma +h 2 3 data		←先頭行を除いてカンマ変換する
+$
+</pre>
+<pre class="prettyprint">$ comma +h 2 3 data             ←先頭行を除いてカンマ変換する
 年月日 売上高 発注高
 20060201 296,030 6,710,000
 20060202 1,300,100 3,130,000
@@ -168,36 +190,29 @@ $ comma +h 2 3 data		←先頭行を除いてカンマ変換する
 20060204 16,300 300,100
 20060205 41,000 210,000
 20060206 771,100 400,000
-$ </pre>
-
-      <h3>【例3】</h3>
-
-      <p>数字の文字列を直接引数に指定してカンマを追加することができる。</p>
-
-      <pre class="prettyprint">$ comma -d 1234567
+$
+</pre>
+<h3>【例3】</h3>
+<p>数字の文字列を直接引数に指定してカンマを追加することができる。</p>
+<pre class="prettyprint">$ comma -d 1234567
 1,234,567
-$ </pre>
-
-      <pre class="prettyprint">$ comma -d4 1234567
+$
+</pre>
+<pre class="prettyprint">$ comma -d4 1234567
 123,4567
-$ </pre>
-
-      <h3>【ワンポイント】</h3>
-
-      <p>データファイルの数値にcommaでカンマを追加してしまうと、それ以降は<a href="sm2.html">sm2(1)</a>や<a href="divsen.html">divsen(1)</a>などでの数値計算はできなくなる。カンマの追加はすべての計算を終えた最終成形の段階で使用する。</p>
-
-      <h3>【ワンポイント】</h3>
-
-      <p>小数桁についてはカンマを追加しない。負数も正しくカンマ処理が実施される。</p>
-
-      <h3>【関連項目】</h3>
-
-      <p><a href="keta.html">keta(1)</a></p>
+$
+</pre>
+<h3>【ワンポイント】</h3>
+<p>データファイルの数値にcommaでカンマを追加してしまうと、それ以降は<a href="sm2.html" class="command">sm2(1)</a>や<a href="divsen.html" class="command">divsen(1)</a>などでの数値計算はできなくなる。カンマの追加はすべての計算を終えた最終成形の段階で使用する。</p>
+<h3>【ワンポイント】</h3>
+<p>小数桁についてはカンマを追加しない。負数も正しくカンマ処理が実施される。</p>
+<h3>【関連項目】</h3>
+<p><a href="keta.html" class="command">keta(1)</a></p>
     </div>
 
-    <div id="lastmodified">last modified: 2014-08-13 16:01:13</div>
+    <div id="lastmodified">Last modified: Fri Jul 15 16:39:29 JST 2022</div>
 
-    <div id="footer">Contact us: uecinfo@usp-lab.com<br/>Copyright (c) 2012,2013 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
+    <div id="footer">Contact us: uecinfo@usp-lab.com<br>Copyright &copy; 2012-2022 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
   </div>
 </body>
 </html>
