--- a/MANUALHTML/join2.html
+++ b/MANUALHTML/join2.html
@@ -1,20 +1,19 @@
-<!doctype html>
-
+<!DOCTYPE html>
 <html lang="ja">
 <head>
   <meta charset="utf-8">
-  <title>UEC - usp engineers' community - Tukubaiオンラインコマンドマニュアル</title>
-  <link rel="stylesheet" href="COMMON/CSS/MAIN.CSS" />
-  <link rel="stylesheet" href="COMMON/CSS/MENU.CSS" />
-  <link rel="stylesheet" href="COMMON/CSS/PRINT.CSS" />
+  <title>join2 - UEC - usp engineers' community - Tukubaiオンラインコマンドマニュアル</title>
+  <link rel="stylesheet" href="COMMON/CSS/MAIN.CSS">
+  <link rel="stylesheet" href="COMMON/CSS/MENU.CSS">
+  <link rel="stylesheet" href="COMMON/CSS/PRINT.CSS">
   <!--[if lte IE 8]>
-  <link rel="stylesheet" href="COMMON/CSS/IE67HACK.CSS" />
+  <link rel="stylesheet" href="COMMON/CSS/IE67HACK.CSS">
   <![endif]-->
   <!--[if IE 7]>
-  <link rel="stylesheet" href="COMMON/CSS/IE7HACK.CSS" />
+  <link rel="stylesheet" href="COMMON/CSS/IE7HACK.CSS">
   <![endif]-->
   <!--[if IE 6]>
-  <link rel="stylesheet" href="COMMON/CSS/IE6HACK.CSS" />
+  <link rel="stylesheet" href="COMMON/CSS/IE6HACK.CSS">
   <![endif]-->
   <script src="COMMON/JS/MENU.JS"></script>
 </head>
@@ -22,74 +21,104 @@
   <div id="container">
     <div id="header">
       <div id="logo">
-        <img id="logoimage" src="COMMON/IMG/TUKUBAI_LOGO.JPG" />
+        <img id="logoimage" src="COMMON/IMG/TUKUBAI_LOGO.JPG">
       </div>
       <div id="title">
         <p id="slogan"></p>
         <ul id="megamenu">
           <li id="tukubai_man"><a href="index.html" class="target">Tukubaiマニュアル</a>
             <ul>
+              <li><a href="1bai.html">1bai(1)</a></li>
+              <li><a href="block_getlast.html">block_getlast(1)</a></li>
               <li><a href="calclock.html">calclock(1)</a></li>
+              <li><a href="calsed.html">calsed(1)</a></li>
+              <li><a href="cap.html">cap(1)</a></li>
               <li><a href="cgi-name.html">cgi-name(1)</a></li>
               <li><a href="check_attr_name.html">check_attr_name(1)</a></li>
+              <li><a href="check_cmp_name.html">check_cmp_name(1)</a></li>
+              <li><a href="check_date_name.html">check_date_name(1)</a></li>
+              <li><a href="check_dble_name.html">check_dble_name(1)</a></li>
+              <li><a href="check_inlist_name.html">check_inlist_name(1)</a></li>
               <li><a href="check_need_name.html">check_need_name(1)</a></li>
               <li><a href="cjoin0.html">cjoin0(1)</a></li>
               <li><a href="cjoin1.html">cjoin1(1)</a></li>
+              <li><a href="cjoin1x.html">cjoin1x(1)</a></li>
               <li><a href="cjoin2.html">cjoin2(1)</a></li>
+              <li><a href="cjoin2x.html">cjoin2x(1)</a></li>
               <li><a href="comma.html">comma(1)</a></li>
               <li><a href="count.html">count(1)</a></li>
               <li><a href="ctail.html">ctail(1)</a></li>
               <li><a href="dayslash.html">dayslash(1)</a></li>
               <li><a href="delf.html">delf(1)</a></li>
+              <li><a href="delr.html">delr(1)</a></li>
               <li><a href="divsen.html">divsen(1)</a></li>
+              <li><a href="exist.html">exist(1)</a></li>
+              <li><a href="extname.html">extname(1)</a></li>
               <li><a href="filehame.html">filehame(1)</a></li>
               <li><a href="formhame.html">formhame(1)</a></li>
+              <li><a href="fsed.html">fsed(1)</a></li>
               <li><a href="getfirst.html">getfirst(1)</a></li>
               <li><a href="getlast.html">getlast(1)</a></li>
               <li><a href="gyo.html">gyo(1)</a></li>
+              <li><a href="haba.html">haba(1)</a></li>
               <li><a href="han.html">han(1)</a></li>
+              <li><a href="isdate.html">isdate(1)</a></li>
+              <li><a href="itouch.html">itouch(1)</a></li>
               <li><a href="join0.html">join0(1)</a></li>
               <li><a href="join1.html">join1(1)</a></li>
+              <li><a href="join1x.html">join1x(1)</a></li>
               <li><a href="join2.html">join2(1)</a></li>
+              <li><a href="join2x.html">join2x(1)</a></li>
               <li><a href="juni.html">juni(1)</a></li>
               <li><a href="kasan.html">kasan(1)</a></li>
               <li><a href="keta.html">keta(1)</a></li>
               <li><a href="keycut.html">keycut(1)</a></li>
               <li><a href="loopj.html">loopj(1)</a></li>
               <li><a href="loopx.html">loopx(1)</a></li>
+              <li><a href="maezero.html">maezero(1)</a></li>
+              <li><a href="man2.html">man2(1)</a></li>
               <li><a href="map.html">map(1)</a></li>
               <li><a href="marume.html">marume(1)</a></li>
               <li><a href="mdate.html">mdate(1)</a></li>
               <li><a href="mime-read.html">mime-read(1)</a></li>
               <li><a href="mojihame.html">mojihame(1)</a></li>
+              <li><a href="msort.html">msort(1)</a></li>
               <li><a href="nameread.html">nameread(1)</a></li>
+              <li><a href="numchar.html">numchar(1)</a></li>
               <li><a href="plus.html">plus(1)</a></li>
               <li><a href="rank.html">rank(1)</a></li>
               <li><a href="ratio.html">ratio(1)</a></li>
               <li><a href="retu.html">retu(1)</a></li>
+              <li><a href="rjson.html">rjson(1)</a></li>
               <li><a href="self.html">self(1)</a></li>
+              <li><a href="selr.html">selr(1)</a></li>
               <li><a href="sm2.html">sm2(1)</a></li>
               <li><a href="sm4.html">sm4(1)</a></li>
               <li><a href="sm5.html">sm5(1)</a></li>
               <li><a href="tarr.html">tarr(1)</a></li>
               <li><a href="tateyoko.html">tateyoko(1)</a></li>
               <li><a href="tcat.html">tcat(1)</a></li>
+              <li><a href="uconv.html">uconv(1)</a></li>
+              <li><a href="ulock.html">ulock(1)</a></li>
               <li><a href="unmap.html">unmap(1)</a></li>
               <li><a href="up3.html">up3(1)</a></li>
+              <li><a href="xmldir.html">xmldir(1)</a></li>
               <li><a href="yarr.html">yarr(1)</a></li>
               <li><a href="ycat.html">ycat(1)</a></li>
               <li><a href="yobi.html">yobi(1)</a></li>
               <li><a href="ysum.html">ysum(1)</a></li>
               <li><a href="zen.html">zen(1)</a></li>
-              <li class="separator"><hr/></li>
-              <li class="separator"><hr/></li>
-              <li class="separator"><hr/></li>
+              <li></li>
+
+              <li class="separator"><hr></li>
+              <li class="separator"><hr></li>
+              <li class="separator"><hr></li>
               <li><a href="tag-format.html">タグ形式(5)</a></li>
               <li><a href="name-format.html">ネーム形式(5)</a></li>
               <li><a href="field-format.html">フィールド形式(5)</a></li>
               <li><a href="master-file.html">マスタファイル(5)</a></li>
               <li><a href="name-file.html">ネームファイル(5)</a></li>
-              <li><a href="transaction-file.html" class="target">トランザクションファイル(5)</a></li>
+              <li><a href="transaction-file.html">トランザクションファイル(5)</a></li>
             </ul> 
           </li>
         </ul>
@@ -99,39 +128,30 @@
     <div id="main">
       <h1>Tukubaiオンラインコマンドマニュアル</h1>
 
-      <h2>join2(1)</h2>
+<h2>join2(1)</h2>
+<h3>【名前】</h3>
+<p><code>join2</code> :  トランザクションファイルにマスタファイルを連結(一致しなかった行はダミーデータへ置換)</p>
+<h3>【書式】</h3>
+<pre class="list">Usage   : join2 [-d&lt;string&gt;|+&lt;string&gt;] key=&lt;key&gt; &lt;master&gt; [&lt;tran&gt;]
+Version : Sun Jun 19 23:55:51 JST 2022
+Edition : 1
 
-      <h3>【名前】</h3>
-
-      <p>join2 : <a href="transaction-file.html">トランザクションファイル</a>に<a href="master-file.html">マスタファイル</a>を連結(一致しなかった行はダミーデータへ置換)</p>
-
-      <h3>【書式】</h3>
-
-      <pre class="list">Usage	: join2 [-d&lt;string&gt;] [+&lt;string&gt;] key=&lt;key&gt; &lt;<a href="master-file.html">master</a>&gt; &lt;<a href="transaction-file.html">tran</a>&gt;
-Version	: Thu Dec 15 13:46:38 JST 2011</pre>
-
-      <h3>【説明】</h3>
-
-      <p><a href="transaction-file.html">tran</a>のkey=&lt;n&gt;で指定したキーフィールドが<a href="master-file.html">master</a>の第1フィールド(キーフィールド)と一致した行を<a href="transaction-file.html">tran</a>から抽出し、<a href="master-file.html">master</a>の情報を連結して出力する。一致しない行はダミーデータ*を連結して出力する。ダミーデータは-dオプションにて指定できる。</p>
-
-      <p><a href="master-file.html">master</a>に-を指定すると標準入力を<a href="master-file.html">マスタファイル</a>とする。<a href="transaction-file.html">tran</a>が無指定かまたは-が指定されている場合には、標準入力が<a href="transaction-file.html">トランザクションファイル</a>となる。</p>
-
-      <p><a href="master-file.html">master</a>の第1フィールドおよび<a href="transaction-file.html">tran</a>の第&lt;n&gt;フィールドは必ず昇順で整列されていることが条件となる。また、<a href="master-file.html">master</a>はキーフィールド(第1フィールド)がユニークでなければならない(第1フィールドが同じ値を持つ行が複数あってはならない)。<a href="transaction-file.html">tran</a>についてはこの制約はなく、キーフィールド(第&lt;n&gt;フィールド)が同じ値の行はいくつあっても構わない。</p>
-
-      <p><a href="master-file.html">master</a>の第1フィールドおよび<a href="transaction-file.html">tran</a>の第&lt;n&gt;フィールドは必ず昇順で整列されていることが条件となる。また、<a href="master-file.html">master</a>のキーフィールド(第1フィールド)はユニークでなければならない。(第1フィールドが同じ値をもつ行が複数あってはならない)。<a href="transaction-file.html">tran</a>についてはこの制約はなく、キーフィールド(第&lt;n&gt;フィールド)が同じ値を行はいくつあっても構わない。</p>
-
-      <p><a href="transaction-file.html">tran</a>でキーが整列されていないものはjoin2(1)では処理できない。その場合は一旦<a href="transaction-file.html">tran</a>を整列してからjoin2(1)で処理するか、join2(1)のかわりに<a href="cjoin2.html">cjoin2(1)</a>を使って処理すればよい。</p>
-
-      <h3>【例1】基本パターン</h3>
-
-      <pre class="prettyprint">$ cat <a href="master-file.html">master</a>
+</pre>
+<h3>【説明】</h3>
+<p>tranの<code>key=&lt;n&gt;</code>で指定したキーフィールドがmasterの第1フィールド(キーフィールド)と一致した行をtranから抽出し、masterの情報を連結して出力する。一致しない行はダミーデータ*を連結して出力する。ダミーデータは<code>-d</code>オプションまたは+オプションにて指定できる。</p>
+<p>masterに<code>-</code>を指定すると標準入力をマスタファイルとする。tranが無指定かまたは<code>-</code>が指定されている場合には、標準入力がトランザクションファイルとなる。</p>
+<p>masterの第1フィールドおよびtranの第<code>&lt;n&gt;</code>フィールドは必ず昇順で整列されていることが条件となる。また、masterのキーフィールド(第1フィールド)はユニークでなければならない。(第1フィールドが同じ値をもつ行が複数あってはならない)。tranについてはこの制約はなく、キーフィールド(第<code>&lt;n&gt;</code>フィールド)が同じ値の行はいくつあっても構わない。</p>
+<p>キー指定にひとつでも0があると全フィールドを指定したことになる</p>
+<p><code>tran</code>でキーが整列されていないものは<a href="join2.html" class="command">join2(1)</a>では処理できない。その場合は一旦tranを整列してから<a href="join2.html" class="command">join2(1)</a>で処理するか、<a href="join2.html" class="command">join2(1)</a>のかわりに<a href="cjoin2.html" class="command">cjoin2(1)</a>を使って処理すればよい。</p>
+<h3>【例1】基本パターン</h3>
+<pre class="prettyprint">$ cat master
 0000003 杉山______ 26 F
 0000005 崎村______ 50 F
 0000007 梶川______ 42 F
 0000010 柳本______ 50 F
-$ </pre>
-
-      <pre class="prettyprint">$ cat kekka
+$
+</pre>
+<pre class="prettyprint">$ cat kekka
 0000000 91 59 20 76 54
 0000001 46 39 8  5  21
 0000003 30 50 71 36 30
@@ -142,11 +162,10 @@ $ </pre>
 0000009 60 89 33 18 6
 0000010 95 60 35 93 76
 0000011 92 56 83 96 75
-$ </pre>
-
-      <p><a href="master-file.html">master</a>に存在しない行は次のように*で補完して出力される。</p>
-
-      <pre class="prettyprint">$ join2 key=1 <a href="master-file.html">master</a> kekka
+$
+</pre>
+<p>masterに存在しない行は次のように*で補完して出力される。</p>
+<pre class="prettyprint">$ join2 key=1 master kekka
 0000000 ********** ** * 91 59 20 76 54
 0000001 ********** ** * 46 39 8  5  21
 0000003 杉山______ 26 F 30 50 71 36 30
@@ -157,20 +176,18 @@ $ </pre>
 0000009 ********** ** * 60 89 33 18 6
 0000010 柳本______ 50 F 95 60 35 93 76
 0000011 ********** ** * 92 56 83 96 75
-$ </pre>
-
-      <h3>【例2】</h3>
-
-      <p>左から順に連続した複数のフィールドをキーに指定する場合次のようになる。第2、第3フィールドでキーが一致するかどうかをチェックしている。</a>
-
-      <pre class="prettyprint">$ cat <a href="master-file.html">master</a>
+$
+</pre>
+<h3>【例2】</h3>
+<p>左から順に連続した複数のフィールドをキーに指定する場合次のようになる。第2、第3フィールドでキーが一致するかどうかをチェックしている。</p>
+<pre class="prettyprint">$ cat master
 A 0000003 杉山______ 26 F
 A 0000005 崎村______ 50 F
 B 0000007 梶川______ 42 F
 C 0000010 柳本______ 50 F
-$ </pre>
-
-      <pre class="prettyprint">$ cat kekka
+$
+</pre>
+<pre class="prettyprint">$ cat kekka
 1 A 0000000 91 59 20 76 54
 2 A 0000001 46 39 8  5  21
 3 A 0000003 30 50 71 36 30
@@ -181,9 +198,9 @@ $ </pre>
 8 C 0000009 60 89 33 18 6
 9 C 0000010 95 60 35 93 76
 10 C 0000011 92 56 83 96 75
-$ </pre>
-
-      <pre class="prettyprint">$ join2 key=2/3 <a href="master-file.html">master</a> kekka
+$
+</pre>
+<pre class="prettyprint">$ join2 key=2/3 master kekka
 1 A 0000000 ********** ** * 91 59 20 76 54
 2 A 0000001 ********** ** * 46 39 8  5  21
 3 A 0000003 杉山______ 26 F 30 50 71 36 30
@@ -194,20 +211,18 @@ $ </pre>
 8 C 0000009 ********** ** * 60 89 33 18 6
 9 C 0000010 柳本______ 50 F 95 60 35 93 76
 10 C 0000011 ********** ** * 92 56 83 96 75
-$ </pre>
-
-      <h3>【例3】</h3>
-
-      <p>+&lt;string&gt;はダミーデータとして補完する文字を指定するオプション。+の後に補完で使用する文字を指定する。</p>
-
-      <pre class="prettyprint">$ cat <a href="master-file.html">master</a>
+$
+</pre>
+<h3>【例3】</h3>
+<p>+<code>&lt;string&gt;</code>はダミーデータとして補完する文字を指定するオプション。+の後に補完で使用する文字を指定する。</p>
+<pre class="prettyprint">$ cat master
 0000003 杉山______ 26 F
 0000005 崎村______ 50 F
 0000007 梶川______ 42 F
 0000010 柳本______ 50 F
-$ </pre>
-
-      <pre class="prettyprint">$ cat kekka
+$
+</pre>
+<pre class="prettyprint">$ cat kekka
 0000000 91 59 20 76 54
 0000001 46 39 8  5  21
 0000003 30 50 71 36 30
@@ -218,9 +233,9 @@ $ </pre>
 0000009 60 89 33 18 6
 0000010 95 60 35 93 76
 0000011 92 56 83 96 75
-$ </pre>
-
-      <pre class="prettyprint">$ join2 +@ key=1 <a href="master-file.html">master</a> kekka
+$
+</pre>
+<pre class="prettyprint">$ join2 +@ key=1 master kekka
 0000000 @ @ @ 91 59 20 76 54
 0000001 @ @ @ 46 39 8  5  21
 0000003 杉山______ 26 F 30 50 71 36 30
@@ -231,30 +246,25 @@ $ </pre>
 0000009 @ @ @ 60 89 33 18 6
 0000010 柳本______ 50 F 95 60 35 93 76
 0000011 @ @ @ 92 56 83 96 75
-$ </pre>
-
-      <h3>【備考】</h3>
-
-      <p><a href="master-file.html">master</a>が0バイトの時は何も連結せず<a href="transaction-file.html">tran</a>そのものを出力する。</p>
-
-      <pre class="prettyprint">$ : &gt; <a href="master-file.html">master</a>
-$ join2 key=1 <a href="master-file.html">master</a> <a href="transaction-file.html">tran</a> &gt; data
-$ cmp <a href="transaction-file.html">tran</a> data		←同じデータが出力される</pre>
-
-      <p><a href="master-file.html">master</a>のフィールドを保証したい時は、例えば次のようなコードを書く。</p>
-
-      <pre class="prettyprint">$ [ ! -s <a href="master-file.html">master</a> ] &amp;&amp; echo 0000000 0 &gt; <a href="master-file.html">master</a>
-$ join2 key=1 <a href="master-file.html">master</a> <a href="transaction-file.html">tran</a></pre>
-
-      <h3>【関連項目】</h3>
-
-      <p><a href="cjoin0.html">cjoin0(1)</a>、<a href="cjoin1.html">cjoin1(1)</a>、<a href="cjoin2.html">cjoin2(1)</a>、<a href="join0.html">join0(1)</a>、<a href="join1.html">join1(1)</a>、<a href="loopj.html">loopj(1)</a>、<a href="loopx.html">loopx(1)</a>、<a href="up3.html">up3(1)</a>、<a href="master-file.html">マスタファイル(5)</a>、<a href="transaction-file.html">トランザクションファイル(5)</a></p>
-
+$
+</pre>
+<h3>【備考】</h3>
+<p>masterが0バイトの時は何も連結せずtranそのものを出力する。</p>
+<pre class="prettyprint">$ : &gt; master
+$ join2 key=1 master tran &gt; data
+$ cmp tran data         ←同じデータが出力される
+</pre>
+<p>masterのフィールドを保証したい時は、例えば次のようなコードを書く。</p>
+<pre class="prettyprint">$ [ ! -s master ] &amp;&amp; echo 0000000 0 &gt; master
+$ join2 key=1 master tran
+</pre>
+<h3>【関連項目】</h3>
+<p><a href="cjoin0.html" class="command">cjoin0(1)</a>、<a href="cjoin1.html" class="command">cjoin1(1)</a>、<a href="cjoin2.html" class="command">cjoin2(1)</a>、<a href="join0.html" class="command">join0(1)</a>、<a href="join1.html" class="command">join1(1)</a>、<a href="loopj.html" class="command">loopj(1)</a>、<a href="loopx.html" class="command">loopx(1)</a>、<a href="up3.html" class="command">up3(1)</a>、<a href="master-file.html" class="command">マスタファイル(5)</a>、<a href="transaction-file.html" class="command">トランザクションファイル(5)</a></p>
     </div>
 
-    <div id="lastmodified">last modified: 2014-08-13 16:01:13</div>
+    <div id="lastmodified">Last modified: Fri Jul 15 15:42:38 JST 2022</div>
 
-    <div id="footer">Contact us: uecinfo@usp-lab.com<br/>Copyright (c) 2012,2013 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
+    <div id="footer">Contact us: uecinfo@usp-lab.com<br>Copyright &copy; 2012-2022 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
   </div>
 </body>
 </html>
