--- a/MANUALHTML/kasan.html
+++ b/MANUALHTML/kasan.html
@@ -1,20 +1,19 @@
-<!doctype html>
-
+<!DOCTYPE html>
 <html lang="ja">
 <head>
   <meta charset="utf-8">
-  <title>UEC - usp engineers' community - Tukubaiオンラインコマンドマニュアル</title>
-  <link rel="stylesheet" href="COMMON/CSS/MAIN.CSS" />
-  <link rel="stylesheet" href="COMMON/CSS/MENU.CSS" />
-  <link rel="stylesheet" href="COMMON/CSS/PRINT.CSS" />
+  <title>kasan - UEC - usp engineers' community - Tukubaiオンラインコマンドマニュアル</title>
+  <link rel="stylesheet" href="COMMON/CSS/MAIN.CSS">
+  <link rel="stylesheet" href="COMMON/CSS/MENU.CSS">
+  <link rel="stylesheet" href="COMMON/CSS/PRINT.CSS">
   <!--[if lte IE 8]>
-  <link rel="stylesheet" href="COMMON/CSS/IE67HACK.CSS" />
+  <link rel="stylesheet" href="COMMON/CSS/IE67HACK.CSS">
   <![endif]-->
   <!--[if IE 7]>
-  <link rel="stylesheet" href="COMMON/CSS/IE7HACK.CSS" />
+  <link rel="stylesheet" href="COMMON/CSS/IE7HACK.CSS">
   <![endif]-->
   <!--[if IE 6]>
-  <link rel="stylesheet" href="COMMON/CSS/IE6HACK.CSS" />
+  <link rel="stylesheet" href="COMMON/CSS/IE6HACK.CSS">
   <![endif]-->
   <script src="COMMON/JS/MENU.JS"></script>
 </head>
@@ -22,74 +21,104 @@
   <div id="container">
     <div id="header">
       <div id="logo">
-        <img id="logoimage" src="COMMON/IMG/TUKUBAI_LOGO.JPG" />
+        <img id="logoimage" src="COMMON/IMG/TUKUBAI_LOGO.JPG">
       </div>
       <div id="title">
         <p id="slogan"></p>
         <ul id="megamenu">
           <li id="tukubai_man"><a href="index.html" class="target">Tukubaiマニュアル</a>
             <ul>
+              <li><a href="1bai.html">1bai(1)</a></li>
+              <li><a href="block_getlast.html">block_getlast(1)</a></li>
               <li><a href="calclock.html">calclock(1)</a></li>
+              <li><a href="calsed.html">calsed(1)</a></li>
+              <li><a href="cap.html">cap(1)</a></li>
               <li><a href="cgi-name.html">cgi-name(1)</a></li>
               <li><a href="check_attr_name.html">check_attr_name(1)</a></li>
+              <li><a href="check_cmp_name.html">check_cmp_name(1)</a></li>
+              <li><a href="check_date_name.html">check_date_name(1)</a></li>
+              <li><a href="check_dble_name.html">check_dble_name(1)</a></li>
+              <li><a href="check_inlist_name.html">check_inlist_name(1)</a></li>
               <li><a href="check_need_name.html">check_need_name(1)</a></li>
               <li><a href="cjoin0.html">cjoin0(1)</a></li>
               <li><a href="cjoin1.html">cjoin1(1)</a></li>
+              <li><a href="cjoin1x.html">cjoin1x(1)</a></li>
               <li><a href="cjoin2.html">cjoin2(1)</a></li>
+              <li><a href="cjoin2x.html">cjoin2x(1)</a></li>
               <li><a href="comma.html">comma(1)</a></li>
               <li><a href="count.html">count(1)</a></li>
               <li><a href="ctail.html">ctail(1)</a></li>
               <li><a href="dayslash.html">dayslash(1)</a></li>
               <li><a href="delf.html">delf(1)</a></li>
+              <li><a href="delr.html">delr(1)</a></li>
               <li><a href="divsen.html">divsen(1)</a></li>
+              <li><a href="exist.html">exist(1)</a></li>
+              <li><a href="extname.html">extname(1)</a></li>
               <li><a href="filehame.html">filehame(1)</a></li>
               <li><a href="formhame.html">formhame(1)</a></li>
+              <li><a href="fsed.html">fsed(1)</a></li>
               <li><a href="getfirst.html">getfirst(1)</a></li>
               <li><a href="getlast.html">getlast(1)</a></li>
               <li><a href="gyo.html">gyo(1)</a></li>
+              <li><a href="haba.html">haba(1)</a></li>
               <li><a href="han.html">han(1)</a></li>
+              <li><a href="isdate.html">isdate(1)</a></li>
+              <li><a href="itouch.html">itouch(1)</a></li>
               <li><a href="join0.html">join0(1)</a></li>
               <li><a href="join1.html">join1(1)</a></li>
+              <li><a href="join1x.html">join1x(1)</a></li>
               <li><a href="join2.html">join2(1)</a></li>
+              <li><a href="join2x.html">join2x(1)</a></li>
               <li><a href="juni.html">juni(1)</a></li>
               <li><a href="kasan.html">kasan(1)</a></li>
               <li><a href="keta.html">keta(1)</a></li>
               <li><a href="keycut.html">keycut(1)</a></li>
               <li><a href="loopj.html">loopj(1)</a></li>
               <li><a href="loopx.html">loopx(1)</a></li>
+              <li><a href="maezero.html">maezero(1)</a></li>
+              <li><a href="man2.html">man2(1)</a></li>
               <li><a href="map.html">map(1)</a></li>
               <li><a href="marume.html">marume(1)</a></li>
               <li><a href="mdate.html">mdate(1)</a></li>
               <li><a href="mime-read.html">mime-read(1)</a></li>
               <li><a href="mojihame.html">mojihame(1)</a></li>
+              <li><a href="msort.html">msort(1)</a></li>
               <li><a href="nameread.html">nameread(1)</a></li>
+              <li><a href="numchar.html">numchar(1)</a></li>
               <li><a href="plus.html">plus(1)</a></li>
               <li><a href="rank.html">rank(1)</a></li>
               <li><a href="ratio.html">ratio(1)</a></li>
               <li><a href="retu.html">retu(1)</a></li>
+              <li><a href="rjson.html">rjson(1)</a></li>
               <li><a href="self.html">self(1)</a></li>
+              <li><a href="selr.html">selr(1)</a></li>
               <li><a href="sm2.html">sm2(1)</a></li>
               <li><a href="sm4.html">sm4(1)</a></li>
               <li><a href="sm5.html">sm5(1)</a></li>
               <li><a href="tarr.html">tarr(1)</a></li>
               <li><a href="tateyoko.html">tateyoko(1)</a></li>
               <li><a href="tcat.html">tcat(1)</a></li>
+              <li><a href="uconv.html">uconv(1)</a></li>
+              <li><a href="ulock.html">ulock(1)</a></li>
               <li><a href="unmap.html">unmap(1)</a></li>
               <li><a href="up3.html">up3(1)</a></li>
+              <li><a href="xmldir.html">xmldir(1)</a></li>
               <li><a href="yarr.html">yarr(1)</a></li>
               <li><a href="ycat.html">ycat(1)</a></li>
               <li><a href="yobi.html">yobi(1)</a></li>
               <li><a href="ysum.html">ysum(1)</a></li>
               <li><a href="zen.html">zen(1)</a></li>
-              <li class="separator"><hr/></li>
-              <li class="separator"><hr/></li>
-              <li class="separator"><hr/></li>
+              <li></li>
+
+              <li class="separator"><hr></li>
+              <li class="separator"><hr></li>
+              <li class="separator"><hr></li>
               <li><a href="tag-format.html">タグ形式(5)</a></li>
               <li><a href="name-format.html">ネーム形式(5)</a></li>
               <li><a href="field-format.html">フィールド形式(5)</a></li>
               <li><a href="master-file.html">マスタファイル(5)</a></li>
               <li><a href="name-file.html">ネームファイル(5)</a></li>
-              <li><a href="transaction-file.html" class="target">トランザクションファイル(5)</a></li>
+              <li><a href="transaction-file.html">トランザクションファイル(5)</a></li>
             </ul> 
           </li>
         </ul>
@@ -99,36 +128,30 @@
     <div id="main">
       <h1>Tukubaiオンラインコマンドマニュアル</h1>
 
-      <h2>kasan(1)</h2>
+<h2>kasan(1)</h2>
+<h3>【名前】</h3>
+<p><code>kasan</code> :  累計</p>
+<h3>【書式】</h3>
+<pre class="list">Usage   : kasan [+r] [ref=&lt;ref&gt;] key=&lt;n&gt; &lt;file&gt;
+Version : Sat Sep 19 23:49:25 JST 2020
+Edition : 1
 
-      <h3>【名前】</h3>
-
-      <p>kasan : 累計</p>
-
-      <h3>【書式】</h3>
-
-      <pre class="list">Usage	: kasan [+r] [ref=&lt;ref&gt;] key=&lt;n&gt; &lt;file&gt;
-Version	: Thu Dec 15 13:46:38 JST 2011</pre>
-
-      <h3>【説明】</h3>
-
-      <p>引数のファイルまたは標準入力のテキストデータの指定したフィールドの値を、各行ごとに加算して指定したフィールドの次のフィールドに挿入する。累計値を求める場合などに使用する。</p>
-
-      <h3>【例1】</h3>
-
-      <p>店別の累計の仕入れ値を算出する。ここでは4フィールド目の値を加算して5フィールド目に挿入する。</p>
-
-      <pre class="prettyprint">$ cat data
-a店 1日目 103 62		←店名 日付 売れ数 仕入数
+</pre>
+<h3>【説明】</h3>
+<p>引数のファイルまたは標準入力のテキストデータの指定したフィールドの値を、各行ごとに加算して指定したフィールドの次のフィールドに挿入する。累計値を求める場合などに使用する。</p>
+<h3>【例1】</h3>
+<p>店別の累計の仕入れ値を算出する。ここでは4フィールド目の値を加算して5フィールド目に挿入する。</p>
+<pre class="prettyprint">$ cat data
+a店 1日目 103 62                ←店名 日付 売れ数 仕入数
 a店 2日目 157 94
 a店 3日目 62 30
 a店 4日目 131 84
 a店 5日目 189 111
 a店 6日目 350 20
 a店 7日目 412 301
-$ </pre>
-
-      <pre class="prettyprint">$ kasan key=4 data
+$
+</pre>
+<pre class="prettyprint">$ kasan key=4 data
 a店 1日目 103 62 62
 a店 2日目 157 94 156
 a店 3日目 62 30 186
@@ -136,14 +159,13 @@ a店 4日目 131 84 270
 a店 5日目 189 111 381
 a店 6日目 350 20 401
 a店 7日目 412 301 702
-$ </pre>
-
-      <h3>【例2】</h3>
-
-      <p>あるフィールドの値が変わった場所で加算をリセットする場合は、そのリセットのキーとなるフィールドをref=で指定する。たとえば店別の累計仕入数を算出する場合には、次のように1フィールド目が変更されるごとに加算をリセットする。</p>
-
-      <pre class="prettyprint">$ cat data
-a店 1日目 103 62		←店名 日付 売れ数 仕入数
+$
+</pre>
+<h3>【例2】</h3>
+<p>あるフィールドの値が変わった場所で加算をリセットする場合は、そのリセットのキーとなるフィールドを<code>ref=</code>で指定する。たとえば店別の累計仕入数を算出する場合には、次のように1フィールド目が変更されるごとに加算をリセットする。</p>
+<p><code>ref=&lt;ref&gt;</code>で指定できるのは数値、範囲(/)、<code>NF NF -&lt;n&gt;</code>である。</p>
+<pre class="prettyprint">$ cat data
+a店 1日目 103 62                ←店名 日付 売れ数 仕入数
 a店 2日目 157 94
 a店 3日目 62 30
 a店 4日目 131 84
@@ -155,28 +177,26 @@ c店 1日目 81 52
 c店 2日目 76 49
 c店 3日目 38 21
 c店 4日目 81 48
-$ </pre>
-
-      <pre class="prettyprint">$ kasan ref=1 key=4 data
+$
+</pre>
+<pre class="prettyprint">$ kasan ref=1 key=4 data
 a店 1日目 103 62 62
 a店 2日目 157 94 156
 a店 3日目 62 30 186
 a店 4日目 131 84 270
-b店 1日目 210 113 113		←累計加算をリセット
+b店 1日目 210 113 113           ←累計加算をリセット
 b店 2日目 237 121 234
 b店 3日目 150 82 316
 b店 4日目 198 105 421
-c店 1日目 81 52 52		←累計加算をリセット
+c店 1日目 81 52 52              ←累計加算をリセット
 c店 2日目 76 49 101
 c店 3日目 38 21 122
 c店 4日目 81 48 17
-$ </pre>
-
-      <h3>【例3】</h3>
-
-      <p>元データのフィールドをその加算値と置き換えて出力する場合は+rオプションを使用する。たとえば仕入れ数を累計仕入れ数に置き換えるのであれば、この場合であれば4フィールド目の加算値を4フィールド目に出力するようにすれば良い。</p>
-
-      <pre class="prettyprint">$ cat data		←店名 日付 売れ数 仕入数
+$
+</pre>
+<h3>【例3】</h3>
+<p>元データのフィールドをその加算値と置き換えて出力する場合は<code>+r</code>オプションを使用する。たとえば仕入れ数を累計仕入れ数に置き換えるのであれば、この場合であれば4フィールド目の加算値を4フィールド目に出力するようにすれば良い。</p>
+<pre class="prettyprint">$ cat data              ←店名 日付 売れ数 仕入数
 a店 1日目 103 62
 a店 2日目 157 94
 a店 3日目 62 30
@@ -184,9 +204,9 @@ a店 4日目 131 84
 a店 5日目 189 111
 a店 6日目 350 20
 a店 7日目 412 301
-$ </pre>
-
-      <pre class="prettyprint">$ kasan +r key=4 data
+$
+</pre>
+<pre class="prettyprint">$ kasan +r key=4 data
 a店 1日目 103 62
 a店 2日目 157 156
 a店 3日目 62 186
@@ -194,69 +214,60 @@ a店 4日目 131 270
 a店 5日目 189 381
 a店 6日目 350 401
 a店 7日目 412 702
-$ </pre>
-
-      <h3>【例4】</h3>
-
-      <p>小数点のあるデータを加算する場合、それまでの行にある最大小数桁数に合わせて出力するようになる。</p>
-
-      <pre class="prettyprint">$ cat data
+$
+</pre>
+<h3>【例4】</h3>
+<p>小数点のあるデータを加算する場合、それまでの行にある最大小数桁数に合わせて出力するようになる。</p>
+<pre class="prettyprint">$ cat data
 A 1
 A 1.2
 A 1.23
 B 2
 B 2.34
 B 3
-$ </pre>
-
-      <pre class="prettyprint">$ kasan ref=1 key=2 data
+$
+</pre>
+<pre class="prettyprint">$ kasan ref=1 key=2 data
 A 1 1
 A 1.2 2.2
 A 1.23 3.43
 B 2 2
 B 2.34 4.34
 B 3 7.34
-$ </pre>
-
-      <h3>【例5】</h3>
-
-      <p>key=&lt;pos&gt;で指定できるのは数値、範囲(/)、列挙(@)、NF NF-&lt;n&gt;である。</p>
-
-      <pre class="prettyprint">$ kasan key=1 data</pre>
-
-      <p>第2から第3フィールドの各フィールドを加算し、加算値をそれぞれのフィールドの直後に挿入するには次のようにコマンドを実行する。</p>
-
-      <pre class="prettyprint">$ cat data
+$
+</pre>
+<h3>【例5】</h3>
+<p><code>key=&lt;pos&gt;</code>で指定できるのは数値、範囲(/)、列挙(@)、<code>NF NF -&lt;n&gt;</code>である。</p>
+<pre class="prettyprint">$ kasan key=1 data
+</pre>
+<p>第2から第3フィールドの各フィールドを加算し、加算値をそれぞれのフィールドの直後に挿入するには次のようにコマンドを実行する。</p>
+<pre class="prettyprint">$ cat data
 A 1 2
 A 3 4
 A 5 6
-$ </pre>
-
-      <pre class="prettyprint">$ kasan key=2/3 data
+$
+</pre>
+<pre class="prettyprint">$ kasan key=2/3 data
 A 1 1 2 2
 A 3 4 4 6
 A 5 9 6 12
-$ </pre>
-
-      <p>第2フィールドと第4フィールドの各フィールドを加算し、加算値をそれぞれのフィールドの直後に挿入するには次のようにコマンドを実行する。</p>
-
-      <pre class="prettyprint">$ kasan key=2@4 data</pre>
-
-      <p>次のようにNFも指定できる。</p>
-
-      <pre class="prettyprint">$ kasan key=NF data</pre>
-
-      <pre class="prettyprint">$ kasan key=NF-2 data</pre>
-
-      <h3>【関連項目】</h3>
-
-      <p><a href="plus.html">plus(1)</a>、<a href="ratio.html">ratio(1)</a>、<a href="sm2.html">sm2(1)</a>、<a href="sm4.html">sm4(1)</a>、<a href="sm5.html">sm5(1)</a>、<a href="ysum.html">ysum(1)</a></p>
-
+$
+</pre>
+<p>第2フィールドと第4フィールドの各フィールドを加算し、加算値をそれぞれのフィールドの直後に挿入するには次のようにコマンドを実行する。</p>
+<pre class="prettyprint">$ kasan key=2@4 data
+</pre>
+<p>次のように<code>NF</code>も指定できる。</p>
+<pre class="prettyprint">$ kasan key=NF data
+</pre>
+<pre class="prettyprint">$ kasan key=NF-2 data
+</pre>
+<h3>【関連項目】</h3>
+<p><a href="plus.html" class="command">plus(1)</a>、<a href="ratio.html" class="command">ratio(1)</a>、<a href="sm2.html" class="command">sm2(1)</a>、<a href="sm4.html" class="command">sm4(1)</a>、<a href="sm5.html" class="command">sm5(1)</a>、<a href="ysum.html" class="command">ysum(1)</a></p>
     </div>
 
-    <div id="lastmodified">last modified: 2014-08-13 16:01:13</div>
+    <div id="lastmodified">Last modified: Fri Jul 15 15:42:38 JST 2022</div>
 
-    <div id="footer">Contact us: uecinfo@usp-lab.com<br/>Copyright (c) 2012,2013 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
+    <div id="footer">Contact us: uecinfo@usp-lab.com<br>Copyright &copy; 2012-2022 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
   </div>
 </body>
 </html>
