--- a/MANUALHTML/map.html
+++ b/MANUALHTML/map.html
@@ -1,20 +1,19 @@
-<!doctype html>
-
+<!DOCTYPE html>
 <html lang="ja">
 <head>
   <meta charset="utf-8">
-  <title>UEC - usp engineers' community - Tukubaiオンラインコマンドマニュアル</title>
-  <link rel="stylesheet" href="COMMON/CSS/MAIN.CSS" />
-  <link rel="stylesheet" href="COMMON/CSS/MENU.CSS" />
-  <link rel="stylesheet" href="COMMON/CSS/PRINT.CSS" />
+  <title>map - UEC - usp engineers' community - Tukubaiオンラインコマンドマニュアル</title>
+  <link rel="stylesheet" href="COMMON/CSS/MAIN.CSS">
+  <link rel="stylesheet" href="COMMON/CSS/MENU.CSS">
+  <link rel="stylesheet" href="COMMON/CSS/PRINT.CSS">
   <!--[if lte IE 8]>
-  <link rel="stylesheet" href="COMMON/CSS/IE67HACK.CSS" />
+  <link rel="stylesheet" href="COMMON/CSS/IE67HACK.CSS">
   <![endif]-->
   <!--[if IE 7]>
-  <link rel="stylesheet" href="COMMON/CSS/IE7HACK.CSS" />
+  <link rel="stylesheet" href="COMMON/CSS/IE7HACK.CSS">
   <![endif]-->
   <!--[if IE 6]>
-  <link rel="stylesheet" href="COMMON/CSS/IE6HACK.CSS" />
+  <link rel="stylesheet" href="COMMON/CSS/IE6HACK.CSS">
   <![endif]-->
   <script src="COMMON/JS/MENU.JS"></script>
 </head>
@@ -22,74 +21,104 @@
   <div id="container">
     <div id="header">
       <div id="logo">
-        <img id="logoimage" src="COMMON/IMG/TUKUBAI_LOGO.JPG" />
+        <img id="logoimage" src="COMMON/IMG/TUKUBAI_LOGO.JPG">
       </div>
       <div id="title">
         <p id="slogan"></p>
         <ul id="megamenu">
           <li id="tukubai_man"><a href="index.html" class="target">Tukubaiマニュアル</a>
             <ul>
+              <li><a href="1bai.html">1bai(1)</a></li>
+              <li><a href="block_getlast.html">block_getlast(1)</a></li>
               <li><a href="calclock.html">calclock(1)</a></li>
+              <li><a href="calsed.html">calsed(1)</a></li>
+              <li><a href="cap.html">cap(1)</a></li>
               <li><a href="cgi-name.html">cgi-name(1)</a></li>
               <li><a href="check_attr_name.html">check_attr_name(1)</a></li>
+              <li><a href="check_cmp_name.html">check_cmp_name(1)</a></li>
+              <li><a href="check_date_name.html">check_date_name(1)</a></li>
+              <li><a href="check_dble_name.html">check_dble_name(1)</a></li>
+              <li><a href="check_inlist_name.html">check_inlist_name(1)</a></li>
               <li><a href="check_need_name.html">check_need_name(1)</a></li>
               <li><a href="cjoin0.html">cjoin0(1)</a></li>
               <li><a href="cjoin1.html">cjoin1(1)</a></li>
+              <li><a href="cjoin1x.html">cjoin1x(1)</a></li>
               <li><a href="cjoin2.html">cjoin2(1)</a></li>
+              <li><a href="cjoin2x.html">cjoin2x(1)</a></li>
               <li><a href="comma.html">comma(1)</a></li>
               <li><a href="count.html">count(1)</a></li>
               <li><a href="ctail.html">ctail(1)</a></li>
               <li><a href="dayslash.html">dayslash(1)</a></li>
               <li><a href="delf.html">delf(1)</a></li>
+              <li><a href="delr.html">delr(1)</a></li>
               <li><a href="divsen.html">divsen(1)</a></li>
+              <li><a href="exist.html">exist(1)</a></li>
+              <li><a href="extname.html">extname(1)</a></li>
               <li><a href="filehame.html">filehame(1)</a></li>
               <li><a href="formhame.html">formhame(1)</a></li>
+              <li><a href="fsed.html">fsed(1)</a></li>
               <li><a href="getfirst.html">getfirst(1)</a></li>
               <li><a href="getlast.html">getlast(1)</a></li>
               <li><a href="gyo.html">gyo(1)</a></li>
+              <li><a href="haba.html">haba(1)</a></li>
               <li><a href="han.html">han(1)</a></li>
+              <li><a href="isdate.html">isdate(1)</a></li>
+              <li><a href="itouch.html">itouch(1)</a></li>
               <li><a href="join0.html">join0(1)</a></li>
               <li><a href="join1.html">join1(1)</a></li>
+              <li><a href="join1x.html">join1x(1)</a></li>
               <li><a href="join2.html">join2(1)</a></li>
+              <li><a href="join2x.html">join2x(1)</a></li>
               <li><a href="juni.html">juni(1)</a></li>
               <li><a href="kasan.html">kasan(1)</a></li>
               <li><a href="keta.html">keta(1)</a></li>
               <li><a href="keycut.html">keycut(1)</a></li>
               <li><a href="loopj.html">loopj(1)</a></li>
               <li><a href="loopx.html">loopx(1)</a></li>
+              <li><a href="maezero.html">maezero(1)</a></li>
+              <li><a href="man2.html">man2(1)</a></li>
               <li><a href="map.html">map(1)</a></li>
               <li><a href="marume.html">marume(1)</a></li>
               <li><a href="mdate.html">mdate(1)</a></li>
               <li><a href="mime-read.html">mime-read(1)</a></li>
               <li><a href="mojihame.html">mojihame(1)</a></li>
+              <li><a href="msort.html">msort(1)</a></li>
               <li><a href="nameread.html">nameread(1)</a></li>
+              <li><a href="numchar.html">numchar(1)</a></li>
               <li><a href="plus.html">plus(1)</a></li>
               <li><a href="rank.html">rank(1)</a></li>
               <li><a href="ratio.html">ratio(1)</a></li>
               <li><a href="retu.html">retu(1)</a></li>
+              <li><a href="rjson.html">rjson(1)</a></li>
               <li><a href="self.html">self(1)</a></li>
+              <li><a href="selr.html">selr(1)</a></li>
               <li><a href="sm2.html">sm2(1)</a></li>
               <li><a href="sm4.html">sm4(1)</a></li>
               <li><a href="sm5.html">sm5(1)</a></li>
               <li><a href="tarr.html">tarr(1)</a></li>
               <li><a href="tateyoko.html">tateyoko(1)</a></li>
               <li><a href="tcat.html">tcat(1)</a></li>
+              <li><a href="uconv.html">uconv(1)</a></li>
+              <li><a href="ulock.html">ulock(1)</a></li>
               <li><a href="unmap.html">unmap(1)</a></li>
               <li><a href="up3.html">up3(1)</a></li>
+              <li><a href="xmldir.html">xmldir(1)</a></li>
               <li><a href="yarr.html">yarr(1)</a></li>
               <li><a href="ycat.html">ycat(1)</a></li>
               <li><a href="yobi.html">yobi(1)</a></li>
               <li><a href="ysum.html">ysum(1)</a></li>
               <li><a href="zen.html">zen(1)</a></li>
-              <li class="separator"><hr/></li>
-              <li class="separator"><hr/></li>
-              <li class="separator"><hr/></li>
+              <li></li>
+
+              <li class="separator"><hr></li>
+              <li class="separator"><hr></li>
+              <li class="separator"><hr></li>
               <li><a href="tag-format.html">タグ形式(5)</a></li>
               <li><a href="name-format.html">ネーム形式(5)</a></li>
               <li><a href="field-format.html">フィールド形式(5)</a></li>
               <li><a href="master-file.html">マスタファイル(5)</a></li>
               <li><a href="name-file.html">ネームファイル(5)</a></li>
-              <li><a href="transaction-file.html" class="target">トランザクションファイル(5)</a></li>
+              <li><a href="transaction-file.html">トランザクションファイル(5)</a></li>
             </ul> 
           </li>
         </ul>
@@ -99,63 +128,52 @@
     <div id="main">
       <h1>Tukubaiオンラインコマンドマニュアル</h1>
 
-      <h2>map(1)</h2>
+<h2>map(1)</h2>
+<h3>【名前】</h3>
+<p><code>map</code> :  縦型ファイルを縦キー/横キー形式の表に変換</p>
+<h3>【書式】</h3>
+<pre class="list">Usage   : map       [-&lt;l&gt;] num=&lt;n&gt;x&lt;m&gt; &lt;file&gt;
+        : map +yarr [-&lt;l&gt;] num=&lt;n&gt;x&lt;m&gt; &lt;file&gt;
+        : map +arr  [-&lt;l&gt;] num=&lt;n&gt;x&lt;m&gt; &lt;file&gt;
+Option  : -m&lt;c&gt; -n
+Version : Sat Sep 19 23:49:25 JST 2020
+Edition : 1
 
-      <h3>【名前】</h3>
-
-      <p>map : 縦型ファイルを縦キー/横キー形式の表に変換</p>
-
-      <h3>【書式】</h3>
-
-      <pre class="list">Usage	: map       [-&lt;l&gt;] num=&lt;n&gt;x&lt;m&gt; &lt;file&gt;
-	: map +yarr [-&lt;l&gt;] num=&lt;n&gt;x&lt;m&gt; &lt;file&gt;
-	: map +arr  [-&lt;l&gt;] num=&lt;n&gt;x&lt;m&gt; &lt;file&gt;
-Option	: -m&lt;c&gt; -n
-Version	: Sat Dec 10 21:04:17 JST 2011
-	: OpenUSP (LINUX+FREEBSD/PYTHON2.4/UTF-8)</pre>
-
-      <h3>【説明】</h3>
-
-      <p>引数のファイルまたは標準入力のテキストデータが縦キーフィールド&lt;n&gt;個、横キーフィールド&lt;m&gt;個(未指定時 m=1)、残りがデータフィールドであると仮定し、データを表に並べて出力する。表に展開することでデータの欠落が発生する場合は0で補完する。補完する文字は-mオプションで変更できる。</p>
-
-      <h3>【例1】</h3>
-
-      <p>縦型データをmap(1)するには次のようにコマンドを実行する。num=&lt;n&gt;の値は縦キーのフィールド数を表す。この例ではnumの値は縦キーの最後のフィールドを指し示す2を指定する必要がある。</p>
-
-      <pre class="prettyprint">$ cat data
-001 a店 01/01 103		←縦キー 縦キー 横キー データ部
+</pre>
+<h3>【説明】</h3>
+<p>引数のファイルまたは標準入力のテキストデータが縦キーフィールド<code>&lt;n&gt;</code>個、横キーフィールド<code>&lt;m&gt;</code>個(未指定時<code>m=1</code>)、残りがデータフィールドであると仮定し、データを表に並べて出力する。表に展開することでデータの欠落が発生する場合は0で補完する。補完する文字は<code>-m</code>オプションで変更できる。</p>
+<h3>【例1】</h3>
+<p>縦型データを<a href="map.html" class="command">map(1)</a>するには次のようにコマンドを実行する。<code>num=&lt;n&gt;</code>の値は縦キーのフィールド数を表す。この例ではnumの値は縦キーの最後のフィールドを指し示す2を指定する必要がある。</p>
+<pre class="prettyprint">$ cat data
+001 a店 01/01 103               ←縦キー 縦キー 横キー データ部
 001 a店 01/02 157
 002 b店 01/01 210
 002 b店 01/02 237
-$ </pre>
-
-      <pre class="prettyprint">$ map num=2 data |  <a href="keta.html">keta</a>
+$
+</pre>
+<pre class="prettyprint">$ map num=2 data |  keta
 *   * 01/01 01/02
 001 a店   103   157
 002 b店   210   237
-$ </pre>
-
-      <h3>【例2】</h3>
-
-      <p>データに欠落がある場合、データが存在しない場所に値0が補完される。</p>
-
-      <pre class="prettyprint">$ cat data
+$
+</pre>
+<h3>【例2】</h3>
+<p>データに欠落がある場合、データが存在しない場所に値0が補完される。</p>
+<pre class="prettyprint">$ cat data
 001 a店 01/01 103
 002 b店 01/02 237
-$ </pre>
-
-      <pre class="prettyprint">$ map num=2 data |  <a href="keta.html">keta</a>
+$
+</pre>
+<pre class="prettyprint">$ map num=2 data |  keta
 *   * 01/01 01/02
 001 a店   103     0
 002 b店     0   237
-$ </pre>
-
-      <h3>【例3】</h3>
-
-      <p>データ部が複数列ある場合には複数行にマッピングが実施される。この時、各行にはA B C ...と順にインデックスが追加される。</p>
-
-      <pre class="prettyprint">$ cat data
-a店 1日目 103 62		←縦キー 横キー 売数 客数
+$
+</pre>
+<h3>【例3】</h3>
+<p>データ部が複数列ある場合には複数行にマッピングが実施される。この時、各行にはA BC ...と順にインデックスが追加される。</p>
+<pre class="prettyprint">$ cat data
+a店 1日目 103 62                ←縦キー 横キー 売数 客数
 a店 2日目 157 94
 a店 3日目 62 30
 a店 4日目 131 84
@@ -163,9 +181,9 @@ a店 4日目 131 84
 ・
 d店 6日目 98 69
 d店 7日目 101 90
-$ </pre>
-
-      <pre class="prettyprint">$ map num=1 data |  <a href="keta.html">keta</a>
+$
+</pre>
+<pre class="prettyprint">$ map num=1 data |  keta
 * * 1日目 2日目 3日目 4日目 5日目 6日目 7日目
 a店 A   103   157    62   131   189   350   412
 a店 B    62    94    30    84   111    20   301
@@ -175,13 +193,11 @@ c店 A    81    76    38    81    98   109   136
 c店 B    52    49    21    48    61    91   110
 d店 A    75    72    34    74    91    98   101
 d店 B    48    42    19    43    51    69    90
-$ </pre>
-
-      <h3>【例4】</h3>
-
-      <p>例2の結果をさらにsed(1)コマンドでAを売数、Bを客数に置換すると次のような表になる。</p>
-
-      <pre class="prettyprint">$ map num=1 data |  sed -e 's/A/売数/1' -e 's/B/客数/1' | <a href="keta.html">keta</a>
+$
+</pre>
+<h3>【例4】</h3>
+<p>例2の結果をさらにsed(1)コマンドでAを売数、Bを客数に置換すると次のような表になる。</p>
+<pre class="prettyprint">$ map num=1 data |  sed -e 's/A/売数/1' -e 's/B/客数/1' | keta
 *    * 1日目 2日目 3日目 4日目 5日目 6日目 7日目
 a店 売数   103   157    62   131   189   350   412
 a店 客数    62    94    30    84   111    20   301
@@ -191,68 +207,61 @@ c店 売数    81    76    38    81    98   109   136
 c店 客数    52    49    21    48    61    91   110
 d店 売数    75    72    34    74    91    98   101
 d店 客数    48    42    19    43    51    69    90
-$ </pre>
-
-      <h3>【例5】</h3>
-
-      <p>+yarrオプションを指定することでデータ部の複数列を横に展開することができる。</p>
-
-      <pre class="prettyprint">$ map +<a href="yarr.html">yarr</a> num=1 data |  <a href="keta.html">keta</a>
+$
+</pre>
+<h3>【例5】</h3>
+<p><code>+yarr</code>オプションを指定することでデータ部の複数列を横に展開することができる。</p>
+<pre class="prettyprint">$ map +yarr num=1 data |  keta
 * 1日目 1日目 2日目 2日目 3日目 3日目  -- 7日目 7日目
-*     a     b     a     b     a     b  --     a     b	←自動的に追加される
+*     a     b     a     b     a     b  --     a     b   ←自動的に追加される
 a店   103    62   157    94    62    30  --   412   301
 b店   210   113   237   121   150    82  --   589   493
 c店    81    52    76    49    38    21  --   136   110
 d店    75    48    72    42    34    19  --   101    90
-$ </pre>
-
-      <pre class="prettyprint">$ map +<a href="yarr.html">yarr</a> num=1 data |  sed -e '2s/a/売数/g' -e '2s/b/客数/g' | <a href="keta.html">keta</a>
+$
+</pre>
+<pre class="prettyprint">$ map +yarr num=1 data |  sed -e '2s/a/売数/g' -e '2s/b/客数/g' | keta
 * 1日目 1日目 2日目 2日目 3日目 3日目  -- 7日目 7日目
 *  売数  客数  売数  客数  売数  客数  --  売数  客数
 a店   103    62   157    94    62    30  --   412   301
 b店   210   113   237   121   150    82  --   589   493
 c店    81    52    76    49    38    21  --   136   110
 d店    75    48    72    42    34    19  --   101    90
-$ </pre>
-
-      <p>横インデックスが不要な場合には+arrオプションを使用する。</p>
-
-      <pre class="prettyprint">$ map +arr num=1 data |  <a href="keta.html">keta</a>
+$
+</pre>
+<p>横インデックスが不要な場合には<code>+a</code>r<code>r</code>オプションを使用する。</p>
+<pre class="prettyprint">$ map +arr num=1 data |  keta
 * 1日目 1日目 2日目 2日目 3日目 3日目  -- 7日目 7日目
 a店   103    62   157    94    62    30  --   412   301
 b店   210   113   237   121   150    82  --   589   493
 c店    81    52    76    49    38    21  --   136   110
 d店    75    48    72    42    34    19  --   101    90
-$ </pre>
-
-      <h3>【例6】</h3>
-
-      <p>-mオプションで補完文字を指定できる。デフォルトは0。</p>
-
-      <pre class="prettyprint">$ cat data
+$
+</pre>
+<h3>【例6】</h3>
+<p><code>-m</code>オプションで補完文字を指定できる。デフォルトは0。</p>
+<pre class="prettyprint">$ cat data
 A a 1
 A b 2
 B a 4
-$ </pre>
-
-      <pre class="prettyprint">$ map -m@ num=1 data
+$
+</pre>
+<pre class="prettyprint">$ map -m@ num=1 data
 * a b
 A 1 2
 B 4 @
-$ </pre>
-
-      <h3>【例7】</h3>
-
-      <p>-&lt;数値&gt;オプションを妻うことで&lt;数値&gt;フィールド分ずつmap(1)を実施することができる。&lt;数値&gt;はデータ部のフィールド数の約数である必要がある。</p>
-
-      <pre class="prettyprint">$ cat data
-X x 1 2 3 4 5 6		←データ部を1 2 3と4 5 6というように3つずmapしたい
+$
+</pre>
+<h3>【例7】</h3>
+<p><code>-&lt;数値&gt;</code>オプションを妻うことで<code>&lt;数値&gt;</code>フィールド分ずつ<a href="map.html" class="command">map(1)</a>を実施することができる。<code>&lt;数値&gt;</code>はデータ部のフィールド数の約数である必要がある。</p>
+<pre class="prettyprint">$ cat data
+X x 1 2 3 4 5 6         ←データ部を1 2 3と4 5 6というように3つずmapしたい
 X y 1 2 3 4 5 6
 Y x 1 2 3 4 5 6
 Y y 1 2 3 4 5 6
-$ </pre>
-
-      <pre class="prettyprint">$ map -3 num=1 data		←3フィールド分ずmap(1)する
+$
+</pre>
+<pre class="prettyprint">$ map -3 num=1 data             ←3フィールド分ずmap(1)する
 * * x x y y
 * * a b a b
 X A 1 4 1 4
@@ -261,22 +270,20 @@ X C 3 6 3 6
 Y A 1 4 1 4
 Y B 2 5 2 5
 Y C 3 6 3 6
-$ </pre>
-
-      <pre class="prettyprint">$ map +<a href="yarr.html">yarr</a> -3 num=1 data		←+<a href="yarr.html">yarr</a>の場合、3フィールド分ずつ折り返し
+$
+</pre>
+<pre class="prettyprint">$ map +yarr -3 num=1 data               ←+yarrの場合、3フィールド分ずつ折り返し
 * * x x x y y y
 * * a b c a b c
 X A 1 2 3 1 2 3
 X B 4 5 6 4 5 6
 Y A 1 2 3 1 2 3
 Y B 4 5 6 4 5 6
-$ </pre>
-
-      <h3>【例8】</h3>
-
-      <p>num=&lt;n&gt;x&lt;m&gt;で縦キー&lt;n&gt;個、横キー&lt;m&gt;個にすることができる。横キーはヘッダー&lt;m&gt;行に展開される。</p>
-
-      <pre class="prettyprint">$ cat data
+$
+</pre>
+<h3>【例8】</h3>
+<p><code><code>num=&lt;n&gt;</code>x&lt;m&gt;</code>で縦キー<code>&lt;n&gt;</code>個、横キー<code>&lt;m&gt;</code>個にすることができる。横キーはヘッダー<code>&lt;m&gt;</code>行に展開される。</p>
+<pre class="prettyprint">$ cat data
 X1 Y1 Z1 1 8
 X1 Y1 Z2 2 7
 X1 Y2 Z1 3 6
@@ -285,30 +292,28 @@ X2 Y1 Z1 5 4
 X2 Y1 Z2 6 3
 X2 Y2 Z1 7 2
 X2 Y2 Z2 8 1
-$ </pre>
-
-      <pre class="prettyprint">$ map num=1x2 data
-*  * Y1 Y1 Y2 Y2		←横ヘッダーが2行になる
+$
+</pre>
+<pre class="prettyprint">$ map num=1x2 data
+*  * Y1 Y1 Y2 Y2                ←横ヘッダーが2行になる
 *  * Z1 Z2 Z1 Z2
 X1 A  1  2  3  4
 X1 B  8  7  6  5
 X2 A  5  6  7  8
 X2 B  4  3  2  1
-$ </pre>
-
-      <pre class="prettyprint">$ map +<a href="yarr.html">yarr</a> num=1x2 data
-*  Y1 Y1 Y1 Y1 Y2 Y2 Y2 Y2		←横ヘッダーが2行になる
+$
+</pre>
+<pre class="prettyprint">$ map +yarr num=1x2 data
+*  Y1 Y1 Y1 Y1 Y2 Y2 Y2 Y2              ←横ヘッダーが2行になる
 *  Z1 Z1 Z2 Z2 Z1 Z1 Z2 Z2
 *  a  b  a  b  a  b  a  b
 X1 1  8  2  7  3  6  4  5
 X2 5  4  6  3  7  2  8  1
-$ </pre>
-
-      <h3>【例9】</h3>
-
-      <p>-&lt;数字&gt;オプションとnum=&lt;n&gt;x&lt;m&gt;を組み合わせると次のように動作する。</p>
-
-      <pre class="prettyprint">$ cat data3
+$
+</pre>
+<h3>【例9】</h3>
+<p>-&lt;数字&gt;オプションと<code><code>num=&lt;n&gt;</code>x&lt;m&gt;</code>を組み合わせると次のように動作する。</p>
+<pre class="prettyprint">$ cat data3
 X1 Y1 Z1 1 8 4 5 6 7
 X1 Y1 Z2 2 7 4 5 6 7
 X1 Y2 Z1 3 6 4 5 6 7
@@ -317,9 +322,9 @@ X2 Y1 Z1 5 4 4 5 6 7
 X2 Y1 Z2 6 3 4 5 6 7
 X2 Y2 Z1 7 2 4 5 6 7
 X2 Y2 Z2 8 1 4 5 6 7
-$ </pre>
-
-      <pre class="prettyprint">$ map -3 num=1x2 data3
+$
+</pre>
+<pre class="prettyprint">$ map -3 num=1x2 data3
 * * Y1 Y1 Y1 Y1 Y2 Y2 Y2 Y2
 * * Z1 Z1 Z2 Z2 Z1 Z1 Z2 Z2
 * *  a  b  a  b  a  b  a  b
@@ -329,9 +334,9 @@ X1 C  4  7  4  7  4  7  4  7
 X2 A  5  5  6  5  7  5  8  5
 X2 B  4  6  3  6  2  6  1  6
 X2 C  4  7  4  7  4  7  4  7
-$ </pre>
-
-      <pre class="prettyprint">$ map +<a href="yarr.html">yarr</a> -3 num=1x2 data3
+$
+</pre>
+<pre class="prettyprint">$ map +yarr -3 num=1x2 data3
 * * Y1 Y1 Y1 Y1 Y1 Y1 Y2 Y2 Y2 Y2 Y2 Y2
 * * Z1 Z1 Z1 Z2 Z2 Z2 Z1 Z1 Z1 Z2 Z2 Z2
 * *  a  b  c  a  b  c  a  b  c  a  b  c
@@ -339,19 +344,17 @@ X1 A  1  8  4  2  7  4  3  6  4  4  5  4
 X1 B  5  6  7  5  6  7  5  6  7  5  6  7
 X2 A  5  4  4  6  3  4  7  2  4  8  1  4
 X2 B  5  6  7  5  6  7  5  6  7  5  6  7
-$ </pre>
-
-      <h3>【例10】</h3>
-
-      <p>-nオプションを指定すると、付加するインデックスが数値になる。-nを付けない場合にはアルファベットwが使われるのでインデックス数が26個までという制限があるが、-nを指定した場合にはインデックスが26個に制限されず、データ部が多い場合もマップすることができる。</p>
-
-      <pre class="prettyprint">$ cat data4
+$
+</pre>
+<h3>【例10】</h3>
+<p><code>-n</code>オプションを指定すると、付加するインデックスが数値になる。<code>-n</code>を付けない場合にはアルファベットwが使われるのでインデックス数が26個までという制限があるが、<code>-n</code>を指定した場合にはインデックスが26個に制限されず、データ部が多い場合もマップすることができる。</p>
+<pre class="prettyprint">$ cat data4
 X1 Y1 A1 A2 A3 A4 -- A99 A100
 X1 Y2 B1 B2 B3 B4 -- B99 B100
 X1 Y3 C1 C2 C3 C4 -- C99 C100
-$ </pre>
-
-      <pre class="prettyprint">$ map -n num=1 data4
+$
+</pre>
+<pre class="prettyprint">$ map -n num=1 data4
 *  *   Y1   Y2   Y3
 X1  1   A1   B1   C1
 X1  2   A2   B2   C2
@@ -359,17 +362,15 @@ X1  2   A2   B2   C2
 ・
 X1 29  A99  B99  C99
 X1 30 A100 B100 C100
-$ </pre>
-
-      <h3>【関連項目】</h3>
-
-      <p><a href="unmap.html">unmap(1)</a>、<a href="tateyoko.html">tateyoko(1)</a></p>
-
+$
+</pre>
+<h3>【関連項目】</h3>
+<p><a href="unmap.html" class="command">unmap(1)</a>、<a href="tateyoko.html" class="command">tateyoko(1)</a></p>
     </div>
 
-    <div id="lastmodified">last modified: 2014-08-13 16:01:13</div>
+    <div id="lastmodified">Last modified: Fri Jul 15 15:42:38 JST 2022</div>
 
-    <div id="footer">Contact us: uecinfo@usp-lab.com<br/>Copyright (c) 2012,2013 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
+    <div id="footer">Contact us: uecinfo@usp-lab.com<br>Copyright &copy; 2012-2022 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
   </div>
 </body>
 </html>
