--- a/MANUALHTML/cgi-name.html
+++ b/MANUALHTML/cgi-name.html
@@ -1,20 +1,19 @@
-<!doctype html>
-
+<!DOCTYPE html>
 <html lang="ja">
 <head>
   <meta charset="utf-8">
-  <title>UEC - usp engineers' community - Tukubaiオンラインコマンドマニュアル</title>
-  <link rel="stylesheet" href="COMMON/CSS/MAIN.CSS" />
-  <link rel="stylesheet" href="COMMON/CSS/MENU.CSS" />
-  <link rel="stylesheet" href="COMMON/CSS/PRINT.CSS" />
+  <title>cgi-name - UEC - usp engineers' community - Tukubaiオンラインコマンドマニュアル</title>
+  <link rel="stylesheet" href="COMMON/CSS/MAIN.CSS">
+  <link rel="stylesheet" href="COMMON/CSS/MENU.CSS">
+  <link rel="stylesheet" href="COMMON/CSS/PRINT.CSS">
   <!--[if lte IE 8]>
-  <link rel="stylesheet" href="COMMON/CSS/IE67HACK.CSS" />
+  <link rel="stylesheet" href="COMMON/CSS/IE67HACK.CSS">
   <![endif]-->
   <!--[if IE 7]>
-  <link rel="stylesheet" href="COMMON/CSS/IE7HACK.CSS" />
+  <link rel="stylesheet" href="COMMON/CSS/IE7HACK.CSS">
   <![endif]-->
   <!--[if IE 6]>
-  <link rel="stylesheet" href="COMMON/CSS/IE6HACK.CSS" />
+  <link rel="stylesheet" href="COMMON/CSS/IE6HACK.CSS">
   <![endif]-->
   <script src="COMMON/JS/MENU.JS"></script>
 </head>
@@ -22,74 +21,104 @@
   <div id="container">
     <div id="header">
       <div id="logo">
-        <img id="logoimage" src="COMMON/IMG/TUKUBAI_LOGO.JPG" />
+        <img id="logoimage" src="COMMON/IMG/TUKUBAI_LOGO.JPG">
       </div>
       <div id="title">
         <p id="slogan"></p>
         <ul id="megamenu">
           <li id="tukubai_man"><a href="index.html" class="target">Tukubaiマニュアル</a>
             <ul>
+              <li><a href="1bai.html">1bai(1)</a></li>
+              <li><a href="block_getlast.html">block_getlast(1)</a></li>
               <li><a href="calclock.html">calclock(1)</a></li>
+              <li><a href="calsed.html">calsed(1)</a></li>
+              <li><a href="cap.html">cap(1)</a></li>
               <li><a href="cgi-name.html">cgi-name(1)</a></li>
               <li><a href="check_attr_name.html">check_attr_name(1)</a></li>
+              <li><a href="check_cmp_name.html">check_cmp_name(1)</a></li>
+              <li><a href="check_date_name.html">check_date_name(1)</a></li>
+              <li><a href="check_dble_name.html">check_dble_name(1)</a></li>
+              <li><a href="check_inlist_name.html">check_inlist_name(1)</a></li>
               <li><a href="check_need_name.html">check_need_name(1)</a></li>
               <li><a href="cjoin0.html">cjoin0(1)</a></li>
               <li><a href="cjoin1.html">cjoin1(1)</a></li>
+              <li><a href="cjoin1x.html">cjoin1x(1)</a></li>
               <li><a href="cjoin2.html">cjoin2(1)</a></li>
+              <li><a href="cjoin2x.html">cjoin2x(1)</a></li>
               <li><a href="comma.html">comma(1)</a></li>
               <li><a href="count.html">count(1)</a></li>
               <li><a href="ctail.html">ctail(1)</a></li>
               <li><a href="dayslash.html">dayslash(1)</a></li>
               <li><a href="delf.html">delf(1)</a></li>
+              <li><a href="delr.html">delr(1)</a></li>
               <li><a href="divsen.html">divsen(1)</a></li>
+              <li><a href="exist.html">exist(1)</a></li>
+              <li><a href="extname.html">extname(1)</a></li>
               <li><a href="filehame.html">filehame(1)</a></li>
               <li><a href="formhame.html">formhame(1)</a></li>
+              <li><a href="fsed.html">fsed(1)</a></li>
               <li><a href="getfirst.html">getfirst(1)</a></li>
               <li><a href="getlast.html">getlast(1)</a></li>
               <li><a href="gyo.html">gyo(1)</a></li>
+              <li><a href="haba.html">haba(1)</a></li>
               <li><a href="han.html">han(1)</a></li>
+              <li><a href="isdate.html">isdate(1)</a></li>
+              <li><a href="itouch.html">itouch(1)</a></li>
               <li><a href="join0.html">join0(1)</a></li>
               <li><a href="join1.html">join1(1)</a></li>
+              <li><a href="join1x.html">join1x(1)</a></li>
               <li><a href="join2.html">join2(1)</a></li>
+              <li><a href="join2x.html">join2x(1)</a></li>
               <li><a href="juni.html">juni(1)</a></li>
               <li><a href="kasan.html">kasan(1)</a></li>
               <li><a href="keta.html">keta(1)</a></li>
               <li><a href="keycut.html">keycut(1)</a></li>
               <li><a href="loopj.html">loopj(1)</a></li>
               <li><a href="loopx.html">loopx(1)</a></li>
+              <li><a href="maezero.html">maezero(1)</a></li>
+              <li><a href="man2.html">man2(1)</a></li>
               <li><a href="map.html">map(1)</a></li>
               <li><a href="marume.html">marume(1)</a></li>
               <li><a href="mdate.html">mdate(1)</a></li>
               <li><a href="mime-read.html">mime-read(1)</a></li>
               <li><a href="mojihame.html">mojihame(1)</a></li>
+              <li><a href="msort.html">msort(1)</a></li>
               <li><a href="nameread.html">nameread(1)</a></li>
+              <li><a href="numchar.html">numchar(1)</a></li>
               <li><a href="plus.html">plus(1)</a></li>
               <li><a href="rank.html">rank(1)</a></li>
               <li><a href="ratio.html">ratio(1)</a></li>
               <li><a href="retu.html">retu(1)</a></li>
+              <li><a href="rjson.html">rjson(1)</a></li>
               <li><a href="self.html">self(1)</a></li>
+              <li><a href="selr.html">selr(1)</a></li>
               <li><a href="sm2.html">sm2(1)</a></li>
               <li><a href="sm4.html">sm4(1)</a></li>
               <li><a href="sm5.html">sm5(1)</a></li>
               <li><a href="tarr.html">tarr(1)</a></li>
               <li><a href="tateyoko.html">tateyoko(1)</a></li>
               <li><a href="tcat.html">tcat(1)</a></li>
+              <li><a href="uconv.html">uconv(1)</a></li>
+              <li><a href="ulock.html">ulock(1)</a></li>
               <li><a href="unmap.html">unmap(1)</a></li>
               <li><a href="up3.html">up3(1)</a></li>
+              <li><a href="xmldir.html">xmldir(1)</a></li>
               <li><a href="yarr.html">yarr(1)</a></li>
               <li><a href="ycat.html">ycat(1)</a></li>
               <li><a href="yobi.html">yobi(1)</a></li>
               <li><a href="ysum.html">ysum(1)</a></li>
               <li><a href="zen.html">zen(1)</a></li>
-              <li class="separator"><hr/></li>
-              <li class="separator"><hr/></li>
-              <li class="separator"><hr/></li>
+              <li></li>
+
+              <li class="separator"><hr></li>
+              <li class="separator"><hr></li>
+              <li class="separator"><hr></li>
               <li><a href="tag-format.html">タグ形式(5)</a></li>
               <li><a href="name-format.html">ネーム形式(5)</a></li>
               <li><a href="field-format.html">フィールド形式(5)</a></li>
               <li><a href="master-file.html">マスタファイル(5)</a></li>
               <li><a href="name-file.html">ネームファイル(5)</a></li>
-              <li><a href="transaction-file.html" class="target">トランザクションファイル(5)</a></li>
+              <li><a href="transaction-file.html">トランザクションファイル(5)</a></li>
             </ul> 
           </li>
         </ul>
@@ -99,125 +128,106 @@
     <div id="main">
       <h1>Tukubaiオンラインコマンドマニュアル</h1>
 
-      <h2>cgi-name(1)</h2>
+<h2>cgi-name(1)</h2>
+<h3>【名前】</h3>
+<p><code>cgi-name</code> :  CGI POSTメソッドで受け渡されるデータをネーム形式に変換</p>
+<h3>【書式】</h3>
+<pre class="list">Usage   : cgi-name [-d&lt;c&gt;][-i&lt;string&gt;] &lt;param_file&gt;
+Option  :          [--template &lt;html&gt;]
+Version : Wed May 20 04:47:47 JST 2020
+Edition : 1
 
-      <h3>【名前】</h3>
-
-      <p>cgi-name : CGI POSTメソッドで受け渡されるデータを<a href="name-format.html">ネーム形式</a>に変換</p>
-
-      <h3>【書式】</h3>
-
-      <pre class="list">Usage	: cgi-name [-d&lt;c&gt;][-i&lt;string&gt;] &lt;param_file&gt;
-Option	:          [--template &lt;html&gt;]
-Version	: Thu Dec 15 13:46:38 JST 2011</pre>
-
-      <h3>【説明】</h3>
-
-      <p>cgi-nameはWEBサーバのCGI POSTメソッドで受け渡されるデータを<a href="name-format.html">ネーム形式</a>へ変換する。</p>
-
-      <h3>【例1】</h3>
-
-      <p>Webサーバよりplace=tokyo&amp;country=japanという文字列が渡される場合、キー値と値を<a href="name-format.html">ネーム形式</a>に変更して出力する。</p>
-
-      <pre class="prettyprint">$ dd bs=$CONTENT_LENGTH | cgi-name
+</pre>
+<h3>【説明】</h3>
+<p><code>cgi-name</code>はWEBサーバのCGI POSTメソッドで受け渡されるデータをネーム形式へ変換する。<code>&lt;param_file&gt;</code>として<code>-</code>を指定すると標準入力を使用する。</p>
+<h3>【例1】</h3>
+<p>Webサーバより<code>place=tokyo&amp;country=japan</code>という文字列が渡される場合、キー値と値をネーム形式に変更して出力する。</p>
+<pre class="prettyprint">$ dd bs=$CONTENT_LENGTH | cgi-name -
 place tokyo
 country japan
-$ </pre>
-
-      <h3>【例2】</h3>
-
-      <p>改行(%0D%0A)はnに変換される。</p>
-
-      <pre class="prettyprint">$ echo 'place=%E6%9D%B1%E4%BA%AC%0D%0A%E5%A4%A7%E9%98%AA&amp;<a href="count.html">count</a>ry=japan' | cgi-name
-place 東京n大阪
-country japan
-$ </pre>
-
-      <h3>【例3】</h3>
-
-      <p>-dオプションを指定すると半角空白は削除あるいは指定文字に変換される。</p>
-
-      <pre class="prettyprint">$ echo 'place=tokyo osaka&amp;<a href="count.html">count</a>ry=japan' | cgi-name
+$
+</pre>
+<h3>【例2】</h3>
+<p>改行(<code>%0D%0A</code>)は文字列<code>'\n'</code>に変換される。また、記号<code>'+'</code>は半角空白に変換される。</p>
+<pre class="prettyprint">$ echo 'place=%E6%9D%B1%E4%BA%AC%0D%0A%E5%A4%A7%E9%98%AA&amp;country=ja+pan' | cgi-name
+place 東京\n大阪
+country ja pan
+$
+</pre>
+<h3>【例3】</h3>
+<p><code>-d</code>オプションを指定すると半角空白は削除あるいは指定文字に変換される。</p>
+<pre class="prettyprint">$ echo 'place=tokyo osaka&amp;country=japan' | cgi-name -
 place tokyo osaka
 country japan
-$ </pre>
-
-      <pre class="prettyprint">$ echo 'place=tokyo osaka&amp;<a href="count.html">count</a>ry=japan' | cgi-name -d_
+$
+</pre>
+<pre class="prettyprint">$ echo 'place=tokyo osaka&amp;country=japan' | cgi-name -d_ -
 place tokyo_osaka
 country japan
-$ </pre>
-
-      <pre class="prettyprint">$ echo 'place=tokyo osaka&amp;<a href="count.html">count</a>ry=japan' | cgi-name -d
+$
+</pre>
+<pre class="prettyprint">$ echo 'place=tokyo osaka&amp;country=japan' | cgi-name -d -
 place tokyoosaka
 country japan
-$ </pre>
-
-      <h3>【例4】</h3>
-
-      <p>-iオプションを指定することで、返される文字列がヌルの場合の初期値を指定できる。</p>
-
-      <pre class="prettyprint">$ echo 'place=&amp;<a href="count.html">count</a>ry=japan' | cgi-name
+$
+</pre>
+<h3>【例4】</h3>
+<p><code>-i</code>オプションを指定することで、返される文字列がヌルの場合の初期値を指定できる。</p>
+<pre class="prettyprint">$ echo 'place=&amp;country=japan' | cgi-name -
 place
 country japan
-$ </pre>
-
-      <pre class="prettyprint">$ echo 'place=&amp;<a href="count.html">count</a>ry=japan' | cgi-name -i somewhere
+$
+</pre>
+<pre class="prettyprint">$ echo 'place=&amp;country=japan' | cgi-name -isomewhere -
 place somewhere
 country japan
-$ </pre>
-
-      <h3>【例5】</h3>
-
-      <p>--templateオプションを指定することで、指定したHTMLテンプレートより、radioboxとcheckboxの名称を取り出し、その名称でデータが出力されなければ、出力をその名称で補完する。radioboxやcheckboxは選択しないでsubmitすると値そのものが出力されない。何も選択しなかったというデータを生成するためにこのオプションを使用する。</p>
-
-      <pre class="prettyprint">$ cat html
+$
+</pre>
+<h3>【例5】</h3>
+<p><code>--template</code>オプションを指定することで、指定したHTMLテンプレートより、radioboxとcheckboxの名称を取り出し、その名称でデータが出力されなければ、出力をその名称で補完する。radioboxやcheckboxは選択しないでsubmitすると値そのものが出力されない。何も選択しなかったというデータを生成するためにこのオプションを使用する。</p>
+<pre class="prettyprint">$ cat html
 -----省略
-&lt;input type="radiobox" name="XXXX" value="A" /&gt;
-&lt;input type="radiobox" name="XXXX" value="B" /&gt;
-&lt;input type="radiobox" name="XXXX" value="C" /&gt;
-&lt;input type="checkbox" name="YYYY" value="a" /&gt;
-&lt;input type="checkbox" name="YYYY" value="b" /&gt;
-&lt;input type="checkbox" name="YYYY" value="c" /&gt;
+&lt;input type=&quot;radiobox&quot; name=&quot;XXXX&quot; value=&quot;A&quot; /&gt;
+&lt;input type=&quot;radiobox&quot; name=&quot;XXXX&quot; value=&quot;B&quot; /&gt;
+&lt;input type=&quot;radiobox&quot; name=&quot;XXXX&quot; value=&quot;C&quot; /&gt;
+&lt;input type=&quot;checkbox&quot; name=&quot;YYYY&quot; value=&quot;a&quot; /&gt;
+&lt;input type=&quot;checkbox&quot; name=&quot;YYYY&quot; value=&quot;b&quot; /&gt;
+&lt;input type=&quot;checkbox&quot; name=&quot;YYYY&quot; value=&quot;c&quot; /&gt;
 -----省略
-$ </pre>
-
-      <pre class="prettyprint">$ dd bs=$CONTENT_LENGTH | cgi-name -i_ --template html
+$
+</pre>
+<pre class="prettyprint">$ dd bs=$CONTENT_LENGTH | cgi-name -i_ --template html -
 -----省略
 XXXX _
 YYYY _
 -----省略
-$ </pre>
-
-      <h3>【例6】</h3>
-
-      <p>radiobox checkboxがhtmlテンプレートのmojihame -lコマンド対象部分にある場合においても、タグ名_%数字を認識して選択値がなくてもタグ名を出力する。</p>
-
-      <pre class="prettyprint">$ cat html
+$
+</pre>
+<h3>【例6】</h3>
+<p>radiobox checkboxがhtmlテンプレートの<code>mojihame -l</code>コマンド対象部分にある場合においても、タグ名_%数字を認識して選択値がなくてもタグ名を出力する。</p>
+<pre class="prettyprint">$ cat html
 -----省略
 &lt;!-- MOJIHAME --&gt;
-&lt;input type="radiobox" name="X_%1" value="%2" /&gt;
+&lt;input type=&quot;radiobox&quot; name=&quot;X_%1&quot; value=&quot;%2&quot; /&gt;
 &lt;!-- MOJIHAME --&gt;
 -----省略
-$ </pre>
-
-      <pre class="prettyprint">$ dd bs=$CONTENT_LENGTH | cgi-name -i_ --template html
+$
+</pre>
+<pre class="prettyprint">$ dd bs=$CONTENT_LENGTH | cgi-name -i_ --template html -
 -----省略
 X _
 -----省略
-$ </pre>
-
-      <h3>【備考】</h3>
-
-      <p>CGI POSTメソッドで受け渡されるデータには改行がない。通常のファイルとして使用するには、ファイル末に改行コードを付加しておくほうが扱いやすい。cgi-nameコマンドはファイル末の改行があってもなくても正しく値を取り出す。</p>
-
-      <h3>【関連項目】</h3>
-
-      <p><a href="mime-read.html">mime-read(1)</a>、<a href="nameread.html">nameread(1)</a>、<a href="name-format.html">ネーム形式(5)</a></p>
+$
+</pre>
+<h3>【備考】</h3>
+<p>CGI POSTメソッドで受け渡されるデータには改行がない。通常のファイルとして使用するには、ファイル末に改行コードを付加しておくほうが扱いやすい。<code>cgi-name</code>コマンドはファイル末の改行があってもなくても正しく値を取り出す。</p>
+<h3>【関連項目】</h3>
+<p><a href="mime-read.html" class="command">mime-read(1)</a>、<a href="nameread.html" class="command">nameread(1)</a>、<a href="name-format.html" class="command">ネーム形式(5)</a></p>
     </div>
 
-    <div id="lastmodified">last modified: 2014-08-13 16:01:13</div>
+    <div id="lastmodified">Last modified: Fri Jul 15 16:33:19 JST 2022</div>
 
-    <div id="footer">Contact us: uecinfo@usp-lab.com<br/>Copyright (c) 2012,2013 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
+    <div id="footer">Contact us: uecinfo@usp-lab.com<br>Copyright &copy; 2012-2022 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
   </div>
 </body>
 </html>
