--- a/MANUALHTML/check_attr_name.html
+++ b/MANUALHTML/check_attr_name.html
@@ -1,20 +1,19 @@
-<!doctype html>
-
+<!DOCTYPE html>
 <html lang="ja">
 <head>
   <meta charset="utf-8">
-  <title>UEC - usp engineers' community - Tukubaiオンラインコマンドマニュアル</title>
-  <link rel="stylesheet" href="COMMON/CSS/MAIN.CSS" />
-  <link rel="stylesheet" href="COMMON/CSS/MENU.CSS" />
-  <link rel="stylesheet" href="COMMON/CSS/PRINT.CSS" />
+  <title>check_attr_name - UEC - usp engineers' community - Tukubaiオンラインコマンドマニュアル</title>
+  <link rel="stylesheet" href="COMMON/CSS/MAIN.CSS">
+  <link rel="stylesheet" href="COMMON/CSS/MENU.CSS">
+  <link rel="stylesheet" href="COMMON/CSS/PRINT.CSS">
   <!--[if lte IE 8]>
-  <link rel="stylesheet" href="COMMON/CSS/IE67HACK.CSS" />
+  <link rel="stylesheet" href="COMMON/CSS/IE67HACK.CSS">
   <![endif]-->
   <!--[if IE 7]>
-  <link rel="stylesheet" href="COMMON/CSS/IE7HACK.CSS" />
+  <link rel="stylesheet" href="COMMON/CSS/IE7HACK.CSS">
   <![endif]-->
   <!--[if IE 6]>
-  <link rel="stylesheet" href="COMMON/CSS/IE6HACK.CSS" />
+  <link rel="stylesheet" href="COMMON/CSS/IE6HACK.CSS">
   <![endif]-->
   <script src="COMMON/JS/MENU.JS"></script>
 </head>
@@ -22,74 +21,104 @@
   <div id="container">
     <div id="header">
       <div id="logo">
-        <img id="logoimage" src="COMMON/IMG/TUKUBAI_LOGO.JPG" />
+        <img id="logoimage" src="COMMON/IMG/TUKUBAI_LOGO.JPG">
       </div>
       <div id="title">
         <p id="slogan"></p>
         <ul id="megamenu">
           <li id="tukubai_man"><a href="index.html" class="target">Tukubaiマニュアル</a>
             <ul>
+              <li><a href="1bai.html">1bai(1)</a></li>
+              <li><a href="block_getlast.html">block_getlast(1)</a></li>
               <li><a href="calclock.html">calclock(1)</a></li>
+              <li><a href="calsed.html">calsed(1)</a></li>
+              <li><a href="cap.html">cap(1)</a></li>
               <li><a href="cgi-name.html">cgi-name(1)</a></li>
               <li><a href="check_attr_name.html">check_attr_name(1)</a></li>
+              <li><a href="check_cmp_name.html">check_cmp_name(1)</a></li>
+              <li><a href="check_date_name.html">check_date_name(1)</a></li>
+              <li><a href="check_dble_name.html">check_dble_name(1)</a></li>
+              <li><a href="check_inlist_name.html">check_inlist_name(1)</a></li>
               <li><a href="check_need_name.html">check_need_name(1)</a></li>
               <li><a href="cjoin0.html">cjoin0(1)</a></li>
               <li><a href="cjoin1.html">cjoin1(1)</a></li>
+              <li><a href="cjoin1x.html">cjoin1x(1)</a></li>
               <li><a href="cjoin2.html">cjoin2(1)</a></li>
+              <li><a href="cjoin2x.html">cjoin2x(1)</a></li>
               <li><a href="comma.html">comma(1)</a></li>
               <li><a href="count.html">count(1)</a></li>
               <li><a href="ctail.html">ctail(1)</a></li>
               <li><a href="dayslash.html">dayslash(1)</a></li>
               <li><a href="delf.html">delf(1)</a></li>
+              <li><a href="delr.html">delr(1)</a></li>
               <li><a href="divsen.html">divsen(1)</a></li>
+              <li><a href="exist.html">exist(1)</a></li>
+              <li><a href="extname.html">extname(1)</a></li>
               <li><a href="filehame.html">filehame(1)</a></li>
               <li><a href="formhame.html">formhame(1)</a></li>
+              <li><a href="fsed.html">fsed(1)</a></li>
               <li><a href="getfirst.html">getfirst(1)</a></li>
               <li><a href="getlast.html">getlast(1)</a></li>
               <li><a href="gyo.html">gyo(1)</a></li>
+              <li><a href="haba.html">haba(1)</a></li>
               <li><a href="han.html">han(1)</a></li>
+              <li><a href="isdate.html">isdate(1)</a></li>
+              <li><a href="itouch.html">itouch(1)</a></li>
               <li><a href="join0.html">join0(1)</a></li>
               <li><a href="join1.html">join1(1)</a></li>
+              <li><a href="join1x.html">join1x(1)</a></li>
               <li><a href="join2.html">join2(1)</a></li>
+              <li><a href="join2x.html">join2x(1)</a></li>
               <li><a href="juni.html">juni(1)</a></li>
               <li><a href="kasan.html">kasan(1)</a></li>
               <li><a href="keta.html">keta(1)</a></li>
               <li><a href="keycut.html">keycut(1)</a></li>
               <li><a href="loopj.html">loopj(1)</a></li>
               <li><a href="loopx.html">loopx(1)</a></li>
+              <li><a href="maezero.html">maezero(1)</a></li>
+              <li><a href="man2.html">man2(1)</a></li>
               <li><a href="map.html">map(1)</a></li>
               <li><a href="marume.html">marume(1)</a></li>
               <li><a href="mdate.html">mdate(1)</a></li>
               <li><a href="mime-read.html">mime-read(1)</a></li>
               <li><a href="mojihame.html">mojihame(1)</a></li>
+              <li><a href="msort.html">msort(1)</a></li>
               <li><a href="nameread.html">nameread(1)</a></li>
+              <li><a href="numchar.html">numchar(1)</a></li>
               <li><a href="plus.html">plus(1)</a></li>
               <li><a href="rank.html">rank(1)</a></li>
               <li><a href="ratio.html">ratio(1)</a></li>
               <li><a href="retu.html">retu(1)</a></li>
+              <li><a href="rjson.html">rjson(1)</a></li>
               <li><a href="self.html">self(1)</a></li>
+              <li><a href="selr.html">selr(1)</a></li>
               <li><a href="sm2.html">sm2(1)</a></li>
               <li><a href="sm4.html">sm4(1)</a></li>
               <li><a href="sm5.html">sm5(1)</a></li>
               <li><a href="tarr.html">tarr(1)</a></li>
               <li><a href="tateyoko.html">tateyoko(1)</a></li>
               <li><a href="tcat.html">tcat(1)</a></li>
+              <li><a href="uconv.html">uconv(1)</a></li>
+              <li><a href="ulock.html">ulock(1)</a></li>
               <li><a href="unmap.html">unmap(1)</a></li>
               <li><a href="up3.html">up3(1)</a></li>
+              <li><a href="xmldir.html">xmldir(1)</a></li>
               <li><a href="yarr.html">yarr(1)</a></li>
               <li><a href="ycat.html">ycat(1)</a></li>
               <li><a href="yobi.html">yobi(1)</a></li>
               <li><a href="ysum.html">ysum(1)</a></li>
               <li><a href="zen.html">zen(1)</a></li>
-              <li class="separator"><hr/></li>
-              <li class="separator"><hr/></li>
-              <li class="separator"><hr/></li>
+              <li></li>
+
+              <li class="separator"><hr></li>
+              <li class="separator"><hr></li>
+              <li class="separator"><hr></li>
               <li><a href="tag-format.html">タグ形式(5)</a></li>
               <li><a href="name-format.html">ネーム形式(5)</a></li>
               <li><a href="field-format.html">フィールド形式(5)</a></li>
               <li><a href="master-file.html">マスタファイル(5)</a></li>
               <li><a href="name-file.html">ネームファイル(5)</a></li>
-              <li><a href="transaction-file.html" class="target">トランザクションファイル(5)</a></li>
+              <li><a href="transaction-file.html">トランザクションファイル(5)</a></li>
             </ul> 
           </li>
         </ul>
@@ -99,90 +128,82 @@
     <div id="main">
       <h1>Tukubaiオンラインコマンドマニュアル</h1>
 
-      <h2>check_attr_name(1)</h2>
+<h2>check_attr_name(1)</h2>
+<h3>【名前】</h3>
+<p><code>check_attr_name</code> :  ネームファイルのデータ種類を行ごとに判定</p>
+<h3>【書式】</h3>
+<pre class="list">Usage           : check_attr_name &lt;check_file&gt; &lt;name_file&gt;
+Option          : --through &lt;string&gt; --ngword &lt;ng_file&gt;
+Attribute       : n N (0以上整数)
+                  s S (符号つき整数)
+                  f F (小数)
+                  v V (符号つき小数)
+                  e E (英字)
+                  a A (アスキー文字)
+                  b B (英数字)
+                  h H (半角文字)
+                  z Z (全角文字)
+                  k K (全角カタカナ)
+                  x X (文字)
+                  c C (チェックディジット)
+                  o O (英大文字)
+                  j J (住所=全角+半角英数)
+Version         : Mon Dec 20 21:02:03 JST 2021
+Edition         : 1
 
-      <h3>【名前】</h3>
-
-      <p>check_attr_name : <a href="name-file.html">ネームファイル</a>のデータ種類を行ごとに判定</p>
-
-      <h3>【書式】</h3>
-
-      <pre class="list">Usage		: check_attr_name &lt;check_file&gt; &lt;name_file&gt;
-Option		: --through &lt;string&gt; --ngword &lt;ng_file&gt;
-Attribute	: n N (0以上整数)
-		: s S (符号つき整数)
-		: f F (小数)
-		: v V (符号つき小数)
-		: e E (英字)
-		: a A (英数字)
-		: h H (半角文字)
-		: z Z (全角文字)
-		: k K (全角カタカナ)
-		: x X (文字)
-		: c C (チェックディジット)
-		: o O (英大文字)
-Version		: Thu Dec 15 13:46:38 JST 2011
-		: UTF-8</pre>
-
-      <h3>【説明】</h3>
-
-      <p>&lt;check_file&gt;に記述されているタグ名、桁数+属性の指定にしたがって&lt;name_file&gt;のデータを判定する。データが大文字なら桁数に等しい値を、小文字なら指定桁数以下の値を要求する。&lt;name_file&gt;のタグは、タグ名_数値であれば、_数値部分を取り除いたタグ名のみでチェックをする。エラーがあった場合は、コマンドはエラー終了し標準出力にタグ名と桁数+属性を出力する。</p>
-
-      <p>--through &lt;string&gt;オプションは、&lt;name_file&gt;のデータが&lt;string&gt;のうちいずれかに等しい場合はチェックを実施しない。&lt;string&gt;のデフォルトは_となる。このオプションは繰り返し使って複数の&lt;string&gt;を指定することができる。</p>
-
-      <p>--ngword &lt;ng_file&gt;オプションは、Z X K などの日本語文字チェックのときに、&lt;ng_file&gt;に含まれてるマルチバイト文字をエラーとする。</p>
-
-      <h3>【例1】通常のチェック</h3>
-
-      <pre class="prettyprint">$ cat check
+</pre>
+<h3>【説明】</h3>
+<p><code>&lt;check_file&gt;</code>に記述されているタグ名、属性+桁数の指定にしたがって<code>&lt;name_file&gt;</code>のデータを判定する。データが大文字なら桁数に等しい値を、小文字なら指定桁数未満の値を要求する。<code>&lt;name_file&gt;</code>のタグは、タグ名_数値であれば、_数値部分を取り除いたタグ名のみでチェックをする。エラーがあった場合は、コマンドはエラー終了し標準出力にタグ名と桁数+属性を出力する。</p>
+<p><code>--through &lt;string&gt;</code>オプションは、<code>&lt;name_file&gt;</code>のデータが<code>&lt;string&gt;</code>のうちいずれかに等しい場合はチェックを実施しない。<code>&lt;string&gt;</code>のデフォルトは_となる。このオプションは繰り返し使って複数の<code>&lt;string&gt;</code>を指定することができる。</p>
+<p><code>--ngword &lt;ng_file&gt;</code>オプションは、Z X K などの日本語文字チェックのときに、<code>&lt;ng_file&gt;</code>に含まれてるマルチバイト文字をエラーとする。</p>
+<h3>【例1】通常のチェック</h3>
+<pre class="prettyprint">$ cat check
 A N3            ←3桁整数
 B n4            ←4桁以下の整数
 C x3            ←5桁以下の文字
 D X6            ←6桁の文字
-$ </pre>
-
-      <pre class="prettyprint">$ cat data
+$
+</pre>
+<pre class="prettyprint">$ cat data
 A 200
 B 12345
 C abcde
-D_001 xxxxxx    ←"D 6X" としてチェックされる
+D_001 xxxxxx    ←&quot;D 6X&quot; としてチェックされる
 D_002 xxxxx
 D_003 xxxx
-$ </pre>
-
-      <pre class="prettyprint">$ check_attr_name check data
+$
+</pre>
+<pre class="prettyprint">$ check_attr_name check data
 B n4
 C x3
 D_002 X6
 D_003 X6
 $ echo $?
 1
-$ </pre>
-
-      <h3>【例2】--through オプションでチェックしない値を指定する</h3>
-
-      <pre class="prettyprint">$ cat data2
+$
+</pre>
+<h3>【例2】--through オプションでチェックしない値を指定する</h3>
+<pre class="prettyprint">$ cat data2
 A 200
 B _
 C _
 D_001 xxxxxx
 D_002 _
 D_003 _
-$ </pre>
-
-      <pre class="prettyprint">$ check_attr_name --through _ check data2
+$
+</pre>
+<pre class="prettyprint">$ check_attr_name --through _ check data2
 $ echo $?
 0
-$ </pre>
-
-      <h3>【関連項目】</h3>
-
-      <p><a href="name-format.html">ネーム形式(5)</a></p>
+$
+</pre>
+<h3>【関連項目】</h3>
+<p><a href="name-format.html" class="command">ネーム形式(5)</a></p>
     </div>
 
-    <div id="lastmodified">last modified: 2014-08-13 16:01:13</div>
+    <div id="lastmodified">Last modified: Wed Aug  3 08:29:48 JST 2022</div>
 
-    <div id="footer">Contact us: uecinfo@usp-lab.com<br/>Copyright (c) 2012,2013 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
+    <div id="footer">Contact us: uecinfo@usp-lab.com<br>Copyright &copy; 2012-2022 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
   </div>
 </body>
 </html>
