--- a/MANUALHTML/dayslash.html
+++ b/MANUALHTML/dayslash.html
@@ -1,20 +1,19 @@
-<!doctype html>
-
+<!DOCTYPE html>
 <html lang="ja">
 <head>
   <meta charset="utf-8">
-  <title>UEC - usp engineers' community - Tukubaiオンラインコマンドマニュアル</title>
-  <link rel="stylesheet" href="COMMON/CSS/MAIN.CSS" />
-  <link rel="stylesheet" href="COMMON/CSS/MENU.CSS" />
-  <link rel="stylesheet" href="COMMON/CSS/PRINT.CSS" />
+  <title>dayslash - UEC - usp engineers' community - Tukubaiオンラインコマンドマニュアル</title>
+  <link rel="stylesheet" href="COMMON/CSS/MAIN.CSS">
+  <link rel="stylesheet" href="COMMON/CSS/MENU.CSS">
+  <link rel="stylesheet" href="COMMON/CSS/PRINT.CSS">
   <!--[if lte IE 8]>
-  <link rel="stylesheet" href="COMMON/CSS/IE67HACK.CSS" />
+  <link rel="stylesheet" href="COMMON/CSS/IE67HACK.CSS">
   <![endif]-->
   <!--[if IE 7]>
-  <link rel="stylesheet" href="COMMON/CSS/IE7HACK.CSS" />
+  <link rel="stylesheet" href="COMMON/CSS/IE7HACK.CSS">
   <![endif]-->
   <!--[if IE 6]>
-  <link rel="stylesheet" href="COMMON/CSS/IE6HACK.CSS" />
+  <link rel="stylesheet" href="COMMON/CSS/IE6HACK.CSS">
   <![endif]-->
   <script src="COMMON/JS/MENU.JS"></script>
 </head>
@@ -22,74 +21,104 @@
   <div id="container">
     <div id="header">
       <div id="logo">
-        <img id="logoimage" src="COMMON/IMG/TUKUBAI_LOGO.JPG" />
+        <img id="logoimage" src="COMMON/IMG/TUKUBAI_LOGO.JPG">
       </div>
       <div id="title">
         <p id="slogan"></p>
         <ul id="megamenu">
           <li id="tukubai_man"><a href="index.html" class="target">Tukubaiマニュアル</a>
             <ul>
+              <li><a href="1bai.html">1bai(1)</a></li>
+              <li><a href="block_getlast.html">block_getlast(1)</a></li>
               <li><a href="calclock.html">calclock(1)</a></li>
+              <li><a href="calsed.html">calsed(1)</a></li>
+              <li><a href="cap.html">cap(1)</a></li>
               <li><a href="cgi-name.html">cgi-name(1)</a></li>
               <li><a href="check_attr_name.html">check_attr_name(1)</a></li>
+              <li><a href="check_cmp_name.html">check_cmp_name(1)</a></li>
+              <li><a href="check_date_name.html">check_date_name(1)</a></li>
+              <li><a href="check_dble_name.html">check_dble_name(1)</a></li>
+              <li><a href="check_inlist_name.html">check_inlist_name(1)</a></li>
               <li><a href="check_need_name.html">check_need_name(1)</a></li>
               <li><a href="cjoin0.html">cjoin0(1)</a></li>
               <li><a href="cjoin1.html">cjoin1(1)</a></li>
+              <li><a href="cjoin1x.html">cjoin1x(1)</a></li>
               <li><a href="cjoin2.html">cjoin2(1)</a></li>
+              <li><a href="cjoin2x.html">cjoin2x(1)</a></li>
               <li><a href="comma.html">comma(1)</a></li>
               <li><a href="count.html">count(1)</a></li>
               <li><a href="ctail.html">ctail(1)</a></li>
               <li><a href="dayslash.html">dayslash(1)</a></li>
               <li><a href="delf.html">delf(1)</a></li>
+              <li><a href="delr.html">delr(1)</a></li>
               <li><a href="divsen.html">divsen(1)</a></li>
+              <li><a href="exist.html">exist(1)</a></li>
+              <li><a href="extname.html">extname(1)</a></li>
               <li><a href="filehame.html">filehame(1)</a></li>
               <li><a href="formhame.html">formhame(1)</a></li>
+              <li><a href="fsed.html">fsed(1)</a></li>
               <li><a href="getfirst.html">getfirst(1)</a></li>
               <li><a href="getlast.html">getlast(1)</a></li>
               <li><a href="gyo.html">gyo(1)</a></li>
+              <li><a href="haba.html">haba(1)</a></li>
               <li><a href="han.html">han(1)</a></li>
+              <li><a href="isdate.html">isdate(1)</a></li>
+              <li><a href="itouch.html">itouch(1)</a></li>
               <li><a href="join0.html">join0(1)</a></li>
               <li><a href="join1.html">join1(1)</a></li>
+              <li><a href="join1x.html">join1x(1)</a></li>
               <li><a href="join2.html">join2(1)</a></li>
+              <li><a href="join2x.html">join2x(1)</a></li>
               <li><a href="juni.html">juni(1)</a></li>
               <li><a href="kasan.html">kasan(1)</a></li>
               <li><a href="keta.html">keta(1)</a></li>
               <li><a href="keycut.html">keycut(1)</a></li>
               <li><a href="loopj.html">loopj(1)</a></li>
               <li><a href="loopx.html">loopx(1)</a></li>
+              <li><a href="maezero.html">maezero(1)</a></li>
+              <li><a href="man2.html">man2(1)</a></li>
               <li><a href="map.html">map(1)</a></li>
               <li><a href="marume.html">marume(1)</a></li>
               <li><a href="mdate.html">mdate(1)</a></li>
               <li><a href="mime-read.html">mime-read(1)</a></li>
               <li><a href="mojihame.html">mojihame(1)</a></li>
+              <li><a href="msort.html">msort(1)</a></li>
               <li><a href="nameread.html">nameread(1)</a></li>
+              <li><a href="numchar.html">numchar(1)</a></li>
               <li><a href="plus.html">plus(1)</a></li>
               <li><a href="rank.html">rank(1)</a></li>
               <li><a href="ratio.html">ratio(1)</a></li>
               <li><a href="retu.html">retu(1)</a></li>
+              <li><a href="rjson.html">rjson(1)</a></li>
               <li><a href="self.html">self(1)</a></li>
+              <li><a href="selr.html">selr(1)</a></li>
               <li><a href="sm2.html">sm2(1)</a></li>
               <li><a href="sm4.html">sm4(1)</a></li>
               <li><a href="sm5.html">sm5(1)</a></li>
               <li><a href="tarr.html">tarr(1)</a></li>
               <li><a href="tateyoko.html">tateyoko(1)</a></li>
               <li><a href="tcat.html">tcat(1)</a></li>
+              <li><a href="uconv.html">uconv(1)</a></li>
+              <li><a href="ulock.html">ulock(1)</a></li>
               <li><a href="unmap.html">unmap(1)</a></li>
               <li><a href="up3.html">up3(1)</a></li>
+              <li><a href="xmldir.html">xmldir(1)</a></li>
               <li><a href="yarr.html">yarr(1)</a></li>
               <li><a href="ycat.html">ycat(1)</a></li>
               <li><a href="yobi.html">yobi(1)</a></li>
               <li><a href="ysum.html">ysum(1)</a></li>
               <li><a href="zen.html">zen(1)</a></li>
-              <li class="separator"><hr/></li>
-              <li class="separator"><hr/></li>
-              <li class="separator"><hr/></li>
+              <li></li>
+
+              <li class="separator"><hr></li>
+              <li class="separator"><hr></li>
+              <li class="separator"><hr></li>
               <li><a href="tag-format.html">タグ形式(5)</a></li>
               <li><a href="name-format.html">ネーム形式(5)</a></li>
               <li><a href="field-format.html">フィールド形式(5)</a></li>
               <li><a href="master-file.html">マスタファイル(5)</a></li>
               <li><a href="name-file.html">ネームファイル(5)</a></li>
-              <li><a href="transaction-file.html" class="target">トランザクションファイル(5)</a></li>
+              <li><a href="transaction-file.html">トランザクションファイル(5)</a></li>
             </ul> 
           </li>
         </ul>
@@ -99,48 +128,36 @@
     <div id="main">
       <h1>Tukubaiオンラインコマンドマニュアル</h1>
 
-      <h2>dayslash(1)</h2>
+<h2>dayslash(1)</h2>
+<h3>【名前】</h3>
+<p><code>dayslash</code> :  日付と時刻のフォーマット変換</p>
+<h3>【書式】</h3>
+<pre class="list">Usage   : dayslash [-r] &lt;format&gt; &lt;field&gt; &lt;file&gt;
+Version : Wed May 20 04:47:48 JST 2020
+Edition : 1
 
-      <h3>【名前】</h3>
-
-      <p>dayslash : 日付と時刻のフォーマット変換</p>
-
-      <h3>【書式】</h3>
-
-      <pre class="list">Usage   : dayslash [-r] &lt;format&gt; &lt;field&gt; &lt;file&gt;
-Version : Mon Dec 12 19:38:29 JST 2011</pre>
-
-      <h3>【説明】</h3>
-
-      <p>標準入力または入力ファイル&lt;file&gt;の指定フィールド&lt;field&gt;のデータのフォーマットが次の3パターンのいずれかである場合、&lt;format&gt;で指定した形式に変換して出力する。次の3パターンのいずれでもない場合、入力データをそのまま出力する。フォーマットは桁数のみを検証し、年月日時分秒の正当性は評価しない。</p>
-
-      <dl>
-        <dt>yyyymmdd</dt>
-        <dd>年月日(8桁)</dd>
-        <dt>HHMMSS</dt>
-        <dd>時分秒(6桁)</dd>
-        <dt>yyyymmddHHMMSS</dt>
-        <dd>年月日時分秒(14桁)</dd>
-      </dl>
-
-      <p>&lt;format&gt;でm, d, H, M, Sを単独で指定した場合、前0は削除される。</p>
-
-      <p>オプション-rを指定すると逆変換を実施する。標準入力または入力ファイル&lt;file&gt;の指定フィールド&lt;field&gt;のデータが、&lt;format&gt;で指定されたフォーマットに一致する場合、次のいずれかの形式へ変換する。一致しない場合、入力データをそのまま出力する。</p>
-
-      <dl>
-        <dt>yyyymmdd</dt>
-        <dd>年月日(8桁)</dd>
-        <dt>HHMMSS</dt>
-        <dd>時分秒(6桁)</dd>
-        <dt>yyyymmddHHMMSS</dt>
-        <dd>年月日時分秒(14桁)</dd>
-      </dl>
-
-      <p>フォーマットのみを検証し、年月日時分秒の正当性は評価しない。</p>
-
-      <h3>【例1】</h3>
-
-      <pre class="prettyprint">$ echo 20120304 | dayslash yyyy/mm/dd 1
+</pre>
+<h3>【説明】</h3>
+<p>標準入力または入力ファイル<code>&lt;file&gt;</code>の指定フィールド<code>&lt;field&gt;</code>のデータのフォーマットが次の3パターンのいずれかである場合、<code>&lt;format&gt;</code>で指定した形式に変換して出力する。次の3パターンのいずれでもない場合、入力データをそのまま出力する。フォーマットは桁数のみを検証し、年月日時分秒の正当性は評価しない。</p>
+<pre class="prettyprint">yyyymmdd
+    年月日(8桁)
+HHMMSS
+    時分秒(6桁)
+yyyymmddHHMMSS
+    年月日時分秒(14桁)
+</pre>
+<p><code>&lt;format&gt;</code>でm, d, H, M, Sを単独で指定した場合、前0は削除される。</p>
+<p>オプション<code>-r</code>を指定すると逆変換を実施する。標準入力または入力ファイル<code>&lt;file&gt;</code>の指定フィールド<code>&lt;field&gt;</code>のデータが、<code>&lt;format&gt;</code>で指定されたフォーマットに一致する場合、次のいずれかの形式へ変換する。一致しない場合、入力データをそのまま出力する。</p>
+<pre class="prettyprint">yyyymmdd
+    年月日(8桁)
+HHMMSS
+    時分秒(6桁)
+yyyymmddHHMMSS
+    年月日時分秒(14桁)
+</pre>
+<p>フォーマットのみを検証し、年月日時分秒の正当性は評価しない。</p>
+<h3>【例1】</h3>
+<pre class="prettyprint">$ echo 20120304 | dayslash yyyy/mm/dd 1
 2012/03/04
 $ echo 050607 | dayslash H時M分S秒 1
 5時6分7秒
@@ -148,27 +165,24 @@ $ echo 20111201235958 | dayslash m/d 1
 12/1
 $ echo - | dayslash yyyy/mm/dd 1
 -
-$ </pre>
-
-      <h3>【例2】</h3>
-
-      <pre class="prettyprint">$ echo 2012/03/04 | dayslash -r yyyy/mm/dd 1
+$
+</pre>
+<h3>【例2】</h3>
+<pre class="prettyprint">$ echo 2012/03/04 | dayslash -r yyyy/mm/dd 1
 20120304
 $ echo 5時6分7秒 | dayslash -r H時M分S秒 1
 050607
 $ echo 2011年12月1日_23:59:10 | dayslash -r yyyy年m月d日_HH:MM:SS 1
 20111201235910
-$ </pre>
-
-      <h3>【関連項目】</h3>
-
-      <p><a href="calclock.html">calclock(1)</a>、<a href="mdate.html">mdate(1)</a>、<a href="yobi.html">yobi(1)</a></p>
-
+$
+</pre>
+<h3>【関連項目】</h3>
+<p><a href="calclock.html" class="command">calclock(1)</a>、<a href="mdate.html" class="command">mdate(1)</a>、<a href="yobi.html" class="command">yobi(1)</a></p>
     </div>
 
-    <div id="lastmodified">last modified: 2014-08-13 16:01:13</div>
+    <div id="lastmodified">Last modified: Fri Jul 15 16:40:42 JST 2022</div>
 
-    <div id="footer">Contact us: uecinfo@usp-lab.com<br/>Copyright (c) 2012,2013 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
+    <div id="footer">Contact us: uecinfo@usp-lab.com<br>Copyright &copy; 2012-2022 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
   </div>
 </body>
 </html>
