--- a/MANUALHTML/formhame.html
+++ b/MANUALHTML/formhame.html
@@ -1,20 +1,19 @@
-<!doctype html>
-
+<!DOCTYPE html>
 <html lang="ja">
 <head>
   <meta charset="utf-8">
-  <title>UEC - usp engineers' community - Tukubaiオンラインコマンドマニュアル</title>
-  <link rel="stylesheet" href="COMMON/CSS/MAIN.CSS" />
-  <link rel="stylesheet" href="COMMON/CSS/MENU.CSS" />
-  <link rel="stylesheet" href="COMMON/CSS/PRINT.CSS" />
+  <title>formhame - UEC - usp engineers' community - Tukubaiオンラインコマンドマニュアル</title>
+  <link rel="stylesheet" href="COMMON/CSS/MAIN.CSS">
+  <link rel="stylesheet" href="COMMON/CSS/MENU.CSS">
+  <link rel="stylesheet" href="COMMON/CSS/PRINT.CSS">
   <!--[if lte IE 8]>
-  <link rel="stylesheet" href="COMMON/CSS/IE67HACK.CSS" />
+  <link rel="stylesheet" href="COMMON/CSS/IE67HACK.CSS">
   <![endif]-->
   <!--[if IE 7]>
-  <link rel="stylesheet" href="COMMON/CSS/IE7HACK.CSS" />
+  <link rel="stylesheet" href="COMMON/CSS/IE7HACK.CSS">
   <![endif]-->
   <!--[if IE 6]>
-  <link rel="stylesheet" href="COMMON/CSS/IE6HACK.CSS" />
+  <link rel="stylesheet" href="COMMON/CSS/IE6HACK.CSS">
   <![endif]-->
   <script src="COMMON/JS/MENU.JS"></script>
 </head>
@@ -22,74 +21,104 @@
   <div id="container">
     <div id="header">
       <div id="logo">
-        <img id="logoimage" src="COMMON/IMG/TUKUBAI_LOGO.JPG" />
+        <img id="logoimage" src="COMMON/IMG/TUKUBAI_LOGO.JPG">
       </div>
       <div id="title">
         <p id="slogan"></p>
         <ul id="megamenu">
           <li id="tukubai_man"><a href="index.html" class="target">Tukubaiマニュアル</a>
             <ul>
+              <li><a href="1bai.html">1bai(1)</a></li>
+              <li><a href="block_getlast.html">block_getlast(1)</a></li>
               <li><a href="calclock.html">calclock(1)</a></li>
+              <li><a href="calsed.html">calsed(1)</a></li>
+              <li><a href="cap.html">cap(1)</a></li>
               <li><a href="cgi-name.html">cgi-name(1)</a></li>
               <li><a href="check_attr_name.html">check_attr_name(1)</a></li>
+              <li><a href="check_cmp_name.html">check_cmp_name(1)</a></li>
+              <li><a href="check_date_name.html">check_date_name(1)</a></li>
+              <li><a href="check_dble_name.html">check_dble_name(1)</a></li>
+              <li><a href="check_inlist_name.html">check_inlist_name(1)</a></li>
               <li><a href="check_need_name.html">check_need_name(1)</a></li>
               <li><a href="cjoin0.html">cjoin0(1)</a></li>
               <li><a href="cjoin1.html">cjoin1(1)</a></li>
+              <li><a href="cjoin1x.html">cjoin1x(1)</a></li>
               <li><a href="cjoin2.html">cjoin2(1)</a></li>
+              <li><a href="cjoin2x.html">cjoin2x(1)</a></li>
               <li><a href="comma.html">comma(1)</a></li>
               <li><a href="count.html">count(1)</a></li>
               <li><a href="ctail.html">ctail(1)</a></li>
               <li><a href="dayslash.html">dayslash(1)</a></li>
               <li><a href="delf.html">delf(1)</a></li>
+              <li><a href="delr.html">delr(1)</a></li>
               <li><a href="divsen.html">divsen(1)</a></li>
+              <li><a href="exist.html">exist(1)</a></li>
+              <li><a href="extname.html">extname(1)</a></li>
               <li><a href="filehame.html">filehame(1)</a></li>
               <li><a href="formhame.html">formhame(1)</a></li>
+              <li><a href="fsed.html">fsed(1)</a></li>
               <li><a href="getfirst.html">getfirst(1)</a></li>
               <li><a href="getlast.html">getlast(1)</a></li>
               <li><a href="gyo.html">gyo(1)</a></li>
+              <li><a href="haba.html">haba(1)</a></li>
               <li><a href="han.html">han(1)</a></li>
+              <li><a href="isdate.html">isdate(1)</a></li>
+              <li><a href="itouch.html">itouch(1)</a></li>
               <li><a href="join0.html">join0(1)</a></li>
               <li><a href="join1.html">join1(1)</a></li>
+              <li><a href="join1x.html">join1x(1)</a></li>
               <li><a href="join2.html">join2(1)</a></li>
+              <li><a href="join2x.html">join2x(1)</a></li>
               <li><a href="juni.html">juni(1)</a></li>
               <li><a href="kasan.html">kasan(1)</a></li>
               <li><a href="keta.html">keta(1)</a></li>
               <li><a href="keycut.html">keycut(1)</a></li>
               <li><a href="loopj.html">loopj(1)</a></li>
               <li><a href="loopx.html">loopx(1)</a></li>
+              <li><a href="maezero.html">maezero(1)</a></li>
+              <li><a href="man2.html">man2(1)</a></li>
               <li><a href="map.html">map(1)</a></li>
               <li><a href="marume.html">marume(1)</a></li>
               <li><a href="mdate.html">mdate(1)</a></li>
               <li><a href="mime-read.html">mime-read(1)</a></li>
               <li><a href="mojihame.html">mojihame(1)</a></li>
+              <li><a href="msort.html">msort(1)</a></li>
               <li><a href="nameread.html">nameread(1)</a></li>
+              <li><a href="numchar.html">numchar(1)</a></li>
               <li><a href="plus.html">plus(1)</a></li>
               <li><a href="rank.html">rank(1)</a></li>
               <li><a href="ratio.html">ratio(1)</a></li>
               <li><a href="retu.html">retu(1)</a></li>
+              <li><a href="rjson.html">rjson(1)</a></li>
               <li><a href="self.html">self(1)</a></li>
+              <li><a href="selr.html">selr(1)</a></li>
               <li><a href="sm2.html">sm2(1)</a></li>
               <li><a href="sm4.html">sm4(1)</a></li>
               <li><a href="sm5.html">sm5(1)</a></li>
               <li><a href="tarr.html">tarr(1)</a></li>
               <li><a href="tateyoko.html">tateyoko(1)</a></li>
               <li><a href="tcat.html">tcat(1)</a></li>
+              <li><a href="uconv.html">uconv(1)</a></li>
+              <li><a href="ulock.html">ulock(1)</a></li>
               <li><a href="unmap.html">unmap(1)</a></li>
               <li><a href="up3.html">up3(1)</a></li>
+              <li><a href="xmldir.html">xmldir(1)</a></li>
               <li><a href="yarr.html">yarr(1)</a></li>
               <li><a href="ycat.html">ycat(1)</a></li>
               <li><a href="yobi.html">yobi(1)</a></li>
               <li><a href="ysum.html">ysum(1)</a></li>
               <li><a href="zen.html">zen(1)</a></li>
-              <li class="separator"><hr/></li>
-              <li class="separator"><hr/></li>
-              <li class="separator"><hr/></li>
+              <li></li>
+
+              <li class="separator"><hr></li>
+              <li class="separator"><hr></li>
+              <li class="separator"><hr></li>
               <li><a href="tag-format.html">タグ形式(5)</a></li>
               <li><a href="name-format.html">ネーム形式(5)</a></li>
               <li><a href="field-format.html">フィールド形式(5)</a></li>
               <li><a href="master-file.html">マスタファイル(5)</a></li>
               <li><a href="name-file.html">ネームファイル(5)</a></li>
-              <li><a href="transaction-file.html" class="target">トランザクションファイル(5)</a></li>
+              <li><a href="transaction-file.html">トランザクションファイル(5)</a></li>
             </ul> 
           </li>
         </ul>
@@ -99,107 +128,107 @@
     <div id="main">
       <h1>Tukubaiオンラインコマンドマニュアル</h1>
 
-      <h2>formhame(1)</h2>
-
-      <h3>【名前】</h3>
-
-      <p>formhame : HTML テンプレートに文字をはめ込む</p>
-
-      <h3>【書式】</h3>
-
-      <pre class="list">Usage   : formhame &lt;html_template&gt; &lt;data&gt;
-Option  : --form &lt;formname&gt;
-        : -i&lt;c&gt;
+<h2>formhame(1)</h2>
+<h3>【名前】</h3>
+<p><code>formhame</code> :  HTML テンプレートに文字をはめ込む</p>
+<h3>【書式】</h3>
+<pre class="list">Usage   : formhame &lt;html_template&gt; &lt;data&gt;
+Option  : -i&lt;c&gt;
         : -d&lt;c&gt;
-Version : Sun Mar 17 12:51:52 JST 2013</pre>
+Version : Tue Jun 28 07:39:19 JST 2022
+Edition : 1
 
-      <h3>【説明】</h3>
-
-      <p>&lt;html_template&gt;ファイルの各種inputタグ(text、radio、checkbox、hidden)とtextareaタグ、selectタグの部分に&lt;data&gt;ファイル(第1フィールド:タグ名、第2フィールド以降:値)で指定される値を挿入する。 </p>
-
-      <h3>【例】</h3>
-
-      <pre class="prettyprint">$ cat html
+</pre>
+<h3>【説明】</h3>
+<p><code>&lt;html_template&gt;</code>ファイルの各種inputタグ(text, radio,checkbox, hidden)とtextareaタグ、selectタグの部分に<code>&lt;data&gt;</code>ファイル(第1フィールド:タグ名、第2フィールド以降:値)で指定される値を挿入する。</p>
+<h3>【例】</h3>
+<pre class="prettyprint">$ cat html
 &lt;html&gt;&lt;body&gt;
-&lt;form name="name_form"&gt;
-&lt;input type="text" name="name_text1" /&gt;
-&lt;input type="text" name="name_text2" /&gt;
-&lt;input type="radio" name="name_radio" value="a"/&gt;
-&lt;input type="radio" name="name_radio" value="b"/&gt;
-&lt;input type="checkbox" name="name_checkbox" value="x"/&gt;
-&lt;input type="checkbox" name="name_checkbox" value="y"/&gt;
-&lt;textarea name="name_textarea"&gt;
+&lt;form name=&quot;name_form&quot;&gt;
+&lt;input type=&quot;text&quot; name=&quot;name_text1&quot; /&gt;
+&lt;input type=&quot;text&quot; name=&quot;name_text2&quot; /&gt;
+&lt;input type=&quot;radio&quot; name=&quot;name_radio&quot; value=&quot;a&quot;/&gt;
+&lt;input type=&quot;radio&quot; name=&quot;name_radio&quot; value=&quot;b&quot;/&gt;
+&lt;input type=&quot;checkbox&quot; name=&quot;name_checkbox&quot; value=&quot;x&quot;/&gt;
+&lt;input type=&quot;checkbox&quot; name=&quot;name_checkbox&quot; value=&quot;y&quot;/&gt;
+&lt;textarea name=&quot;name_textarea&quot;&gt;
 &lt;/textarea&gt;
-&lt;select name="name_pulldown"&gt;
-&lt;option value="pd1"&gt;pd1&lt;/option&gt;
-&lt;option value="pd2"&gt;pd2&lt;/option&gt;
-&lt;option value="pd3"&gt;pd3&lt;/option&gt;
+&lt;select name=&quot;name_pulldown&quot;&gt;
+&lt;option value=&quot;pd1&quot;&gt;pd1&lt;/option&gt;
+&lt;option value=&quot;pd2&quot;&gt;pd2&lt;/option&gt;
+&lt;option value=&quot;pd3&quot;&gt;pd3&lt;/option&gt;
 &lt;/select&gt;
-&lt;input type="submit" name="submit" /&gt;
+&lt;input type=&quot;submit&quot; name=&quot;submit&quot; /&gt;
 &lt;/form&gt;
 &lt;/body&gt;&lt;/html&gt;
-$ </pre>
-
-      <pre class="prettyprint">$ cat data
+$
+</pre>
+<pre class="prettyprint">$ cat data
 name_text1 hello
-name_text2          
+name_text2
 name_radio b
 name_checkbox y
 name_textarea usp\nlaboratory
 name_pulldown pd3
-$ </pre>
-
-      <pre class="prettyprint">$ formhame html data 
+$
+</pre>
+<pre class="prettyprint">$ formhame html data
 &lt;html&gt;&lt;body&gt;
-&lt;form name="name_form"&gt;
-&lt;input type="text" name="name_text1"  value="hello" /&gt;
-&lt;input type="text" name="name_text2" /&gt;
-&lt;input type="radio" name="name_radio" value="a"/&gt;
-&lt;input type="radio" name="name_radio" value="b" checked="checked" /&gt;
-&lt;input type="checkbox" name="name_checkbox" value="x"/&gt;
-&lt;input type="checkbox" name="name_checkbox" value="y" checked="checked" /&gt;
-&lt;textarea name="name_textarea"&gt;
+&lt;form name=&quot;name_form&quot;&gt;
+&lt;input type=&quot;text&quot; name=&quot;name_text1&quot; value=&quot;hello&quot;/&gt;
+&lt;input type=&quot;text&quot; name=&quot;name_text2&quot; /&gt;
+&lt;input type=&quot;radio&quot; name=&quot;name_radio&quot; value=&quot;a&quot;/&gt;
+&lt;input type=&quot;radio&quot; name=&quot;name_radio&quot; value=&quot;b&quot; checked=&quot;checked&quot; /&gt;
+&lt;input type=&quot;checkbox&quot; name=&quot;name_checkbox&quot; value=&quot;x&quot;/&gt;
+&lt;input type=&quot;checkbox&quot; name=&quot;name_checkbox&quot; value=&quot;y&quot; checked=&quot;checked&quot; /&gt;
+&lt;textarea name=&quot;name_textarea&quot;&gt;
 usp
 laboratory
 &lt;/textarea&gt;
-&lt;select name="name_pulldown"&gt;
-&lt;option value="pd1"&gt;pd1&lt;/option&gt;
-&lt;option value="pd2"&gt;pd2&lt;/option&gt;
-&lt;option value="pd3" selected="selected" &gt;pd3&lt;/option&gt;
+&lt;select name=&quot;name_pulldown&quot;&gt;
+&lt;option value=&quot;pd1&quot;&gt;pd1&lt;/option&gt;
+&lt;option value=&quot;pd2&quot;&gt;pd2&lt;/option&gt;
+&lt;option value=&quot;pd3&quot; selected=&quot;selected&quot;&gt;pd3&lt;/option&gt;
 &lt;/select&gt;
-&lt;input type="submit" name="submit" /&gt;
+&lt;input type=&quot;submit&quot; name=&quot;submit&quot; /&gt;
 &lt;/form&gt;
 &lt;/body&gt;&lt;/html&gt;
-$ </pre>
+$
+</pre>
+<h3>【備考】</h3>
+	  <ol>
+<li>inputタグの場合、すでに<code>value=&quot;&quot;</code>とテンプレートに記述している場合は、値を置換する。同様にtextareaタグの場合も値を置換する。selectタグの場合は、すでに<code>selected=&quot;selected&quot;</code>とテンプレートに指定されている場合、指定場所を移動する。
+</li>
+<li>textareaの場合、すでにある値を置換する。<code>\n</code>は改行に置換する。</li>
+<li>値が無い場合、値は挿入されない。</li>
+<li><code>-i</code>オプションで文字列を指定すると、その文字列に等しい値はヌル文字列にして挿入する。
+</li>
+<li><code>-d</code>オプションで文字列を指定すると、値の中の指定文字列部分は半角空白文字に置換して挿入する。ただし、\指定文字列という部分は半角空白ではなく(\をとった)指定文字列に置換して挿入する。
+</li>
+<li><code>-i</code>オプションと<code>-d</code>オプションの両方が指定された場合、<code>-i</code>オプションによる処理を先に行なう。</li>
+<li>HTMLは正しく記述されている必要がある。タグは<code>&lt;タグ /&gt;</code>あるいは、<code>&lt;タグ&gt;</code><code>&lt;/タグ&gt;</code>と記述される必要がある。変数は必ず<code>&quot; &quot;</code>で囲まれている必要がある(<code>value=&quot;1&quot;</code>など)。
+<code>input type=&quot;checkbox&quot;</code>のときは、必ず<code>value=&quot;XXX&quot;</code>が指
+定されている必要がある。
+</li>
+ <li><code class="multiline">checkbox</code>、<code class="multiline">radiobox</code>、<code class="multiline">selectbox</code>の複数選択の場合は、ネーム形式データ(5)は次のように1つのタグに対して複行となる。
 
-      <h3>【備考】</h3>
-
-      <ol start="1">
-        <li>inputタグの場合、すでにvalue=""とテンプレートに記述している場合は、値を置換する。同様にtextareaタグの場合も値を置換する。selectタグの場合は、すでにselected="selected"とテンプレートに指定されている場合、指定場所を移動する。</li>
-        <li>textareaの場合、すでにある値を置換する。\nは改行に置換する。</li>
-        <li>値が無い場合、値は挿入されない。</li>
-        <li>-iオプションで文字列を指定すると、その文字列に等しい値はヌル文字列にして挿入する。</li>
-        <li>-dオプションで文字を指定すると、その文字に等しい値は半角空白文字に置換して挿入する。ただし、\指定文字というデータは半角空白に変換しない。</li>
-        <li>HTMLは正しく記述されている必要がある。タグはすべて小文字であり、&lt;タグ /&gt;あるいは、&lt;タグ&gt;&lt;/タグ&gt;と記述される必要がある。変数は必ず" "で囲まれている必要がある(value="1"など)。input type="checkbox"のときは、必ずvalue="XXX"が指定されている必要がある。</li>
-        <li>checkbox、radiobox、selectboxの複数選択の場合は、<a href="name-format.html">ネーム形式データ(5)</a>は次のように1つのタグに対して複行となる。</li>
-      </ol>
-
-      <pre class="list">name_radio a
+</li>
+</ol>
+<pre style="margin-left: 3.5em;">
+name_radio a
 name_radio b
 name_checkbox x
 name_checkbox y
 name_pulldown pd1
-name_pulldown pd2</pre>
-
-      <h3>【関連項目】</h3>
-
-      <p><a href="filehame.html">filehame(1)</a>、<a href="mojihame.html">mojihame(1)</a></p>
-
+name_pulldown pd2
+</pre>
+<h3>【関連項目】</h3>
+<p><a href="filehame.html" class="command">filehame(1)</a>、<a href="mojihame.html" class="command">mojihame(1)</a></p>
     </div>
 
-    <div id="lastmodified">last modified: 2014-08-13 16:01:13</div>
+    <div id="lastmodified">Last modified: Mon Aug  1 16:43:39 JST 2022</div>
 
-    <div id="footer">Contact us: uecinfo@usp-lab.com<br/>Copyright (c) 2012,2013 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
+    <div id="footer">Contact us: uecinfo@usp-lab.com<br>Copyright &copy; 2012-2022 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
   </div>
 </body>
 </html>
