--- a/MANUALHTML/index.html
+++ b/MANUALHTML/index.html
@@ -29,58 +29,87 @@
         <ul id="megamenu">
           <li id="tukubai_man"><a href="index.html" class="target">Tukubaiマニュアル</a>
             <ul>
+              <li><a href="1bai.html">1bai(1)</a></li>
+              <li><a href="block_getlast.html">block_getlast(1)</a></li>
               <li><a href="calclock.html">calclock(1)</a></li>
+              <li><a href="calsed.html">calsed(1)</a></li>
+              <li><a href="cap.html">cap(1)</a></li>
               <li><a href="cgi-name.html">cgi-name(1)</a></li>
               <li><a href="check_attr_name.html">check_attr_name(1)</a></li>
+              <li><a href="check_cmp_name.html">check_cmp_name(1)</a></li>
+              <li><a href="check_date_name.html">check_date_name(1)</a></li>
+              <li><a href="check_dble_name.html">check_dble_name(1)</a></li>
+              <li><a href="check_inlist_name.html">check_inlist_name(1)</a></li>
               <li><a href="check_need_name.html">check_need_name(1)</a></li>
               <li><a href="cjoin0.html">cjoin0(1)</a></li>
               <li><a href="cjoin1.html">cjoin1(1)</a></li>
+              <li><a href="cjoin1x.html">cjoin1x(1)</a></li>
               <li><a href="cjoin2.html">cjoin2(1)</a></li>
+              <li><a href="cjoin2x.html">cjoin2x(1)</a></li>
               <li><a href="comma.html">comma(1)</a></li>
               <li><a href="count.html">count(1)</a></li>
               <li><a href="ctail.html">ctail(1)</a></li>
               <li><a href="dayslash.html">dayslash(1)</a></li>
               <li><a href="delf.html">delf(1)</a></li>
+              <li><a href="delr.html">delr(1)</a></li>
               <li><a href="divsen.html">divsen(1)</a></li>
+              <li><a href="exist.html">exist(1)</a></li>
+              <li><a href="extname.html">extname(1)</a></li>
               <li><a href="filehame.html">filehame(1)</a></li>
               <li><a href="formhame.html">formhame(1)</a></li>
+              <li><a href="fsed.html">fsed(1)</a></li>
               <li><a href="getfirst.html">getfirst(1)</a></li>
               <li><a href="getlast.html">getlast(1)</a></li>
               <li><a href="gyo.html">gyo(1)</a></li>
+              <li><a href="haba.html">haba(1)</a></li>
               <li><a href="han.html">han(1)</a></li>
+              <li><a href="isdate.html">isdate(1)</a></li>
+              <li><a href="itouch.html">itouch(1)</a></li>
               <li><a href="join0.html">join0(1)</a></li>
               <li><a href="join1.html">join1(1)</a></li>
+              <li><a href="join1x.html">join1x(1)</a></li>
               <li><a href="join2.html">join2(1)</a></li>
+              <li><a href="join2x.html">join2x(1)</a></li>
               <li><a href="juni.html">juni(1)</a></li>
               <li><a href="kasan.html">kasan(1)</a></li>
               <li><a href="keta.html">keta(1)</a></li>
               <li><a href="keycut.html">keycut(1)</a></li>
               <li><a href="loopj.html">loopj(1)</a></li>
               <li><a href="loopx.html">loopx(1)</a></li>
+              <li><a href="maezero.html">maezero(1)</a></li>
+              <li><a href="man2.html">man2(1)</a></li>
               <li><a href="map.html">map(1)</a></li>
               <li><a href="marume.html">marume(1)</a></li>
               <li><a href="mdate.html">mdate(1)</a></li>
               <li><a href="mime-read.html">mime-read(1)</a></li>
               <li><a href="mojihame.html">mojihame(1)</a></li>
+              <li><a href="msort.html">msort(1)</a></li>
               <li><a href="nameread.html">nameread(1)</a></li>
+              <li><a href="numchar.html">numchar(1)</a></li>
               <li><a href="plus.html">plus(1)</a></li>
               <li><a href="rank.html">rank(1)</a></li>
               <li><a href="ratio.html">ratio(1)</a></li>
               <li><a href="retu.html">retu(1)</a></li>
+              <li><a href="rjson.html">rjson(1)</a></li>
               <li><a href="self.html">self(1)</a></li>
+              <li><a href="selr.html">selr(1)</a></li>
               <li><a href="sm2.html">sm2(1)</a></li>
               <li><a href="sm4.html">sm4(1)</a></li>
               <li><a href="sm5.html">sm5(1)</a></li>
               <li><a href="tarr.html">tarr(1)</a></li>
               <li><a href="tateyoko.html">tateyoko(1)</a></li>
               <li><a href="tcat.html">tcat(1)</a></li>
+              <li><a href="uconv.html">uconv(1)</a></li>
+              <li><a href="ulock.html">ulock(1)</a></li>
               <li><a href="unmap.html">unmap(1)</a></li>
               <li><a href="up3.html">up3(1)</a></li>
+              <li><a href="xmldir.html">xmldir(1)</a></li>
               <li><a href="yarr.html">yarr(1)</a></li>
               <li><a href="ycat.html">ycat(1)</a></li>
               <li><a href="yobi.html">yobi(1)</a></li>
               <li><a href="ysum.html">ysum(1)</a></li>
               <li><a href="zen.html">zen(1)</a></li>
+              <li></li>
               <li class="separator"><hr/></li>
               <li class="separator"><hr/></li>
               <li class="separator"><hr/></li>
@@ -89,7 +118,7 @@
               <li><a href="field-format.html">フィールド形式(5)</a></li>
               <li><a href="master-file.html">マスタファイル(5)</a></li>
               <li><a href="name-file.html">ネームファイル(5)</a></li>
-              <li><a href="transaction-file.html" class="target">トランザクションファイル(5)</a></li>
+              <li><a href="transaction-file.html">トランザクションファイル(5)</a></li>
             </ul> 
           </li>
         </ul>
@@ -104,12 +133,28 @@
       <h3>Open usp Tukubaiコマンド 一般コマンドマニュアル</h3>
 
       <dl class="cmdlist">
+        <dt><a href="1bai.html">1bai(1)</a></dt>
+        <dd>前0をとる</dd>
+        <dt><a href="block_getlast.html">block_getlast(1)</a></dt>
+        <dd>同一キーをもつレコードから、参照キーが同じ最終ブロックをすべて出力する</dd>
         <dt><a href="calclock.html">calclock(1)</a></dt>
         <dd>日付と時刻を秒数に変換</dd>
+        <dt><a href="calsed.html">calsed(1)</a></dt>
+        <dd>軽いsed</dd>
+        <dt><a href="cap.html">cap(1)</a></dt>
+        <dd>半角英数の小文字を大文字に変換する</dd>
         <dt><a href="cgi-name.html">cgi-name(1)</a></dt>
         <dd>CGI POSTメソッドで受け渡されるデータを<a href="name-format.html">ネーム形式</a>に変換</dd>
         <dt><a href="check_attr_name.html">check_attr_name(1)</a></dt>
         <dd><a href="name-format.html">ネーム形式</a>のデータ種類を行ごとに判定</dd>
+        <dt><a href="check_cmp_name.html">check_cmp_name(1)</a></dt>
+        <dd><a href="name-format.html">ネーム形式</a>データの値の大小関係をチェックする</dd>
+        <dt><a href="check_date_name.html">check_date_name(1)</a></dt>
+        <dd><a href="name-format.html">ネーム形式</a>形式データの日付をチェックする</dd>
+        <dt><a href="check_dble_name.html">check_dble_name(1)</a></dt>
+        <dd><a href="name-format.html">ネーム形式</a>形式データの重複チェックをする</dd>
+        <dt><a href="check_inlist_name.html">check_inlist_name(1)</a></dt>
+        <dd><a href="name-format.html">ネーム形式</a>形式データのリスト内存在チェックをする</dd>
         <dt><a href="check_need_name.html">check_need_name(1)</a></dt>
         <dd><a href="name-format.html">ネーム形式</a>の整合性判定</dd>
         <dt><a href="cjoin0.html">cjoin0(1)</a></dt>
@@ -134,20 +179,30 @@
         <dd>テンプレートにファイルをはめ込み</dd>
         <dt><a href="formhame.html">formhame(1)</a></dt>
         <dd>HTML テンプレートに文字をはめ込む</dd>
+        <dt><a href="fsed.html">fsed(1)</a></dt>
+        <dd>フィールドの文字列の置換</dd>
         <dt><a href="getfirst.html">getfirst(1)</a></dt>
         <dd>同一キーの最初の行を出力</dd>
         <dt><a href="getlast.html">getlast(1)</a></dt>
         <dd>同一キーの最後の行を出力</dd>
         <dt><a href="gyo.html">gyo(1)</a></dt>
         <dd>行をカウント</dd>
+        <dt><a href="haba.html">haba(1)</a></dt>
+        <dd>表示幅をだす</dd>
         <dt><a href="han.html">han(1)</a></dt>
         <dd>半角へ変換</dd>
-        <dt><a href="join0.html">join0(1)</a></dt>
+        <dt><a href="isdate.html">isdate(1)</a></dt>
+        <dd>8桁日付のチェック</dd>
+        <dt><a href="join2.html">join2(1)</a></dt>
         <dd><a href="master-file.html">マスタファイル</a>にキーフィールドが一致する<a href="transaction-file.html">トランザクションファイル</a>の行を抽出</dd>
         <dt><a href="join1.html">join1(1)</a></dt>
         <dd><a href="transaction-file.html">トランザクションファイル</a>に<a href="master-file.html">マスタファイル</a>を連結(一致行のみ)</dd>
+        <dt><a href="join1x.html">join1x(1)</a></dt>
+        <dd>キーの値が同じレコードが複数存在するファイル同士を連結</dd>
         <dt><a href="join2.html">join2(1)</a></dt>
         <dd><a href="transaction-file.html">トランザクションファイル</a>に<a href="master-file.html">マスタファイル</a>を連結(不一致はダミーへ置換)</dd>
+        <dt><a href="join2x.html">join2x(1)</a></dt>
+        <dd>キーの値が同じレコードが複数存在するファイル同士を連結</dd>
         <dt><a href="juni.html">juni(1)</a></dt>
         <dd>同一キー内での順位を出力</dd>
         <dt><a href="kasan.html">kasan(1)</a></dt>
@@ -176,8 +231,12 @@
         <dd>MIME形式のファイル読み込み</dd>
         <dt><a href="mojihame.html">mojihame(1)</a></dt>
         <dd>テンプレートに文字をはめ込み</dd>
+        <dt><a href="msort.html">msort(1)</a></dt>
+        <dd>オンメモリソート</dd>
         <dt><a href="nameread.html">nameread(1)</a></dt>
         <dd><a href="name-format.html">ネーム形式</a>データの読み込み</dd>
+        <dt><a href="numchar.html">numchar(1)</a></dt>
+        <dd>標準入力から文字列を読んで数値文字参照に変換する</dd>
         <dt><a href="plus.html">plus(1)</a></dt>
         <dd>引数の足し算</dd>
         <dt><a href="rank.html">rank(1)</a></dt>
@@ -186,8 +245,12 @@
         <dd>構成比算出</dd>
         <dt><a href="retu.html">retu(1)</a></dt>
         <dd>列をカウント</dd>
+        <dt><a href="rjson.html">rjson(1)</a></dt>
+        <dd>JSON 形式のファイルをフィールド形式に変換する</dd>
         <dt><a href="self.html">self(1)</a></dt>
         <dd>指定したフィールドのデータ取り出し</dd>
+        <dt><a href="selr.html">selr(1)</a></dt>
+        <dd>フィールドが完全一致した行を出力する</dd>
         <dt><a href="sisu.html">sisu(1)</a></dt>
         <dd>指数(構成比)を計算</dd>
         <dt><a href="sm2.html">sm2(1)</a></dt>
@@ -196,14 +259,16 @@
         <dd>小計、中計</dd>
         <dt><a href="sm5.html">sm5(1)</a></dt>
         <dd>大計</dd>
-        <dt><a href="sorter.html">sorter(1)</a></dt>
-        <dd>キーでファイル分割(キーに関して整列不要)</dd>
         <dt><a href="tarr.html">tarr(1)</a></dt>
         <dd>横型のデータを縦型に展開</dd>
         <dt><a href="tateyoko.html">tateyoko(1)</a></dt>
         <dd>縦テキストを横テキストへ変換</dd>
         <dt><a href="tcat.html">tcat(1)</a></dt>
         <dd>ファイルを縦へ並べ替え</dd>
+        <dt><a href="uconv.html">uconv(1)</a></dt>
+        <dd>UTF-8 ⇄ Shift JIS / EUC-JP コード変換</dd>
+        <dt><a href="ulock.html">ulock(1)</a></dt>
+        <dd>排他制御コマンド</dd>
         <dt><a href="unmap.html">unmap(1)</a></dt>
         <dd>縦キー/横キー形式の表データを縦型データに変換</dd>
         <dt><a href="up3.html">up3(1)</a></dt>
