--- a/MANUALHTML/join0.html
+++ b/MANUALHTML/join0.html
@@ -1,20 +1,19 @@
-<!doctype html>
-
+<!DOCTYPE html>
 <html lang="ja">
 <head>
   <meta charset="utf-8">
-  <title>UEC - usp engineers' community - Tukubaiオンラインコマンドマニュアル</title>
-  <link rel="stylesheet" href="COMMON/CSS/MAIN.CSS" />
-  <link rel="stylesheet" href="COMMON/CSS/MENU.CSS" />
-  <link rel="stylesheet" href="COMMON/CSS/PRINT.CSS" />
+  <title>join0 - UEC - usp engineers' community - Tukubaiオンラインコマンドマニュアル</title>
+  <link rel="stylesheet" href="COMMON/CSS/MAIN.CSS">
+  <link rel="stylesheet" href="COMMON/CSS/MENU.CSS">
+  <link rel="stylesheet" href="COMMON/CSS/PRINT.CSS">
   <!--[if lte IE 8]>
-  <link rel="stylesheet" href="COMMON/CSS/IE67HACK.CSS" />
+  <link rel="stylesheet" href="COMMON/CSS/IE67HACK.CSS">
   <![endif]-->
   <!--[if IE 7]>
-  <link rel="stylesheet" href="COMMON/CSS/IE7HACK.CSS" />
+  <link rel="stylesheet" href="COMMON/CSS/IE7HACK.CSS">
   <![endif]-->
   <!--[if IE 6]>
-  <link rel="stylesheet" href="COMMON/CSS/IE6HACK.CSS" />
+  <link rel="stylesheet" href="COMMON/CSS/IE6HACK.CSS">
   <![endif]-->
   <script src="COMMON/JS/MENU.JS"></script>
 </head>
@@ -22,74 +21,104 @@
   <div id="container">
     <div id="header">
       <div id="logo">
-        <img id="logoimage" src="COMMON/IMG/TUKUBAI_LOGO.JPG" />
+        <img id="logoimage" src="COMMON/IMG/TUKUBAI_LOGO.JPG">
       </div>
       <div id="title">
         <p id="slogan"></p>
         <ul id="megamenu">
           <li id="tukubai_man"><a href="index.html" class="target">Tukubaiマニュアル</a>
             <ul>
+              <li><a href="1bai.html">1bai(1)</a></li>
+              <li><a href="block_getlast.html">block_getlast(1)</a></li>
               <li><a href="calclock.html">calclock(1)</a></li>
+              <li><a href="calsed.html">calsed(1)</a></li>
+              <li><a href="cap.html">cap(1)</a></li>
               <li><a href="cgi-name.html">cgi-name(1)</a></li>
               <li><a href="check_attr_name.html">check_attr_name(1)</a></li>
+              <li><a href="check_cmp_name.html">check_cmp_name(1)</a></li>
+              <li><a href="check_date_name.html">check_date_name(1)</a></li>
+              <li><a href="check_dble_name.html">check_dble_name(1)</a></li>
+              <li><a href="check_inlist_name.html">check_inlist_name(1)</a></li>
               <li><a href="check_need_name.html">check_need_name(1)</a></li>
               <li><a href="cjoin0.html">cjoin0(1)</a></li>
               <li><a href="cjoin1.html">cjoin1(1)</a></li>
+              <li><a href="cjoin1x.html">cjoin1x(1)</a></li>
               <li><a href="cjoin2.html">cjoin2(1)</a></li>
+              <li><a href="cjoin2x.html">cjoin2x(1)</a></li>
               <li><a href="comma.html">comma(1)</a></li>
               <li><a href="count.html">count(1)</a></li>
               <li><a href="ctail.html">ctail(1)</a></li>
               <li><a href="dayslash.html">dayslash(1)</a></li>
               <li><a href="delf.html">delf(1)</a></li>
+              <li><a href="delr.html">delr(1)</a></li>
               <li><a href="divsen.html">divsen(1)</a></li>
+              <li><a href="exist.html">exist(1)</a></li>
+              <li><a href="extname.html">extname(1)</a></li>
               <li><a href="filehame.html">filehame(1)</a></li>
               <li><a href="formhame.html">formhame(1)</a></li>
+              <li><a href="fsed.html">fsed(1)</a></li>
               <li><a href="getfirst.html">getfirst(1)</a></li>
               <li><a href="getlast.html">getlast(1)</a></li>
               <li><a href="gyo.html">gyo(1)</a></li>
+              <li><a href="haba.html">haba(1)</a></li>
               <li><a href="han.html">han(1)</a></li>
+              <li><a href="isdate.html">isdate(1)</a></li>
+              <li><a href="itouch.html">itouch(1)</a></li>
               <li><a href="join0.html">join0(1)</a></li>
               <li><a href="join1.html">join1(1)</a></li>
+              <li><a href="join1x.html">join1x(1)</a></li>
               <li><a href="join2.html">join2(1)</a></li>
+              <li><a href="join2x.html">join2x(1)</a></li>
               <li><a href="juni.html">juni(1)</a></li>
               <li><a href="kasan.html">kasan(1)</a></li>
               <li><a href="keta.html">keta(1)</a></li>
               <li><a href="keycut.html">keycut(1)</a></li>
               <li><a href="loopj.html">loopj(1)</a></li>
               <li><a href="loopx.html">loopx(1)</a></li>
+              <li><a href="maezero.html">maezero(1)</a></li>
+              <li><a href="man2.html">man2(1)</a></li>
               <li><a href="map.html">map(1)</a></li>
               <li><a href="marume.html">marume(1)</a></li>
               <li><a href="mdate.html">mdate(1)</a></li>
               <li><a href="mime-read.html">mime-read(1)</a></li>
               <li><a href="mojihame.html">mojihame(1)</a></li>
+              <li><a href="msort.html">msort(1)</a></li>
               <li><a href="nameread.html">nameread(1)</a></li>
+              <li><a href="numchar.html">numchar(1)</a></li>
               <li><a href="plus.html">plus(1)</a></li>
               <li><a href="rank.html">rank(1)</a></li>
               <li><a href="ratio.html">ratio(1)</a></li>
               <li><a href="retu.html">retu(1)</a></li>
+              <li><a href="rjson.html">rjson(1)</a></li>
               <li><a href="self.html">self(1)</a></li>
+              <li><a href="selr.html">selr(1)</a></li>
               <li><a href="sm2.html">sm2(1)</a></li>
               <li><a href="sm4.html">sm4(1)</a></li>
               <li><a href="sm5.html">sm5(1)</a></li>
               <li><a href="tarr.html">tarr(1)</a></li>
               <li><a href="tateyoko.html">tateyoko(1)</a></li>
               <li><a href="tcat.html">tcat(1)</a></li>
+              <li><a href="uconv.html">uconv(1)</a></li>
+              <li><a href="ulock.html">ulock(1)</a></li>
               <li><a href="unmap.html">unmap(1)</a></li>
               <li><a href="up3.html">up3(1)</a></li>
+              <li><a href="xmldir.html">xmldir(1)</a></li>
               <li><a href="yarr.html">yarr(1)</a></li>
               <li><a href="ycat.html">ycat(1)</a></li>
               <li><a href="yobi.html">yobi(1)</a></li>
               <li><a href="ysum.html">ysum(1)</a></li>
               <li><a href="zen.html">zen(1)</a></li>
-              <li class="separator"><hr/></li>
-              <li class="separator"><hr/></li>
-              <li class="separator"><hr/></li>
+              <li></li>
+
+              <li class="separator"><hr></li>
+              <li class="separator"><hr></li>
+              <li class="separator"><hr></li>
               <li><a href="tag-format.html">タグ形式(5)</a></li>
               <li><a href="name-format.html">ネーム形式(5)</a></li>
               <li><a href="field-format.html">フィールド形式(5)</a></li>
               <li><a href="master-file.html">マスタファイル(5)</a></li>
               <li><a href="name-file.html">ネームファイル(5)</a></li>
-              <li><a href="transaction-file.html" class="target">トランザクションファイル(5)</a></li>
+              <li><a href="transaction-file.html">トランザクションファイル(5)</a></li>
             </ul> 
           </li>
         </ul>
@@ -99,43 +128,33 @@
     <div id="main">
       <h1>Tukubaiオンラインコマンドマニュアル</h1>
 
-      <h2>join0(1)</h2>
+<h2>join0(1)</h2>
+<h3>【名前】</h3>
+<p><code>join0</code> :  マスタファイルにキーフィールドが一致するトランザクションファイルの行を抽出</p>
+<h3>【書式】</h3>
+<pre class="list">Usage   : join0 [+ng[&lt;fd&gt;]] key=&lt;n&gt; &lt;master&gt; [&lt;tran&gt;]
+Version : Sun Jun 19 23:55:51 JST 2022
+Edition : 1
 
-      <h3>【名前】</h3>
-
-      <p>join0 : <a href="master-file.html">マスタファイル</a>にキーフィールドが一致する<a href="transaction-file.html">トランザクションファイル</a>の行を抽出</p>
-
-      <h3>【書式】</h3>
-
-      <pre class="list">Usage	: join0 [+ng[&lt;fd&gt;]] key=&lt;n&gt; &lt;<a href="master-file.html">master</a>&gt; &lt;<a href="transaction-file.html">tran</a>&gt;
-Version	: Thu Dec 15 13:46:38 JST 2011</pre>
-
-      <h3>【説明】</h3>
-
-      <p><a href="transaction-file.html">tran</a>のkey=&lt;n&gt;で指定したキーフィールドが<a href="master-file.html">master</a>の第1フィールド(キーフィールド)と一致した行のみ<a href="transaction-file.html">tran</a>から抽出して出力する。</p>
-
-      <p><a href="master-file.html">master</a>に-を指定すると標準入力を<a href="master-file.html">マスタファイル</a>とする。<a href="transaction-file.html">tran</a>が無指定かまたは-が指定されている場合には、標準入力が<a href="transaction-file.html">トランザクションファイル</a>となる。</p>
-
-      <p><a href="master-file.html">master</a>の第1フィールドおよび<a href="transaction-file.html">tran</a>の第&lt;n&gt;フィールドは必ず昇順で整列されていることが条件となる。また、<a href="master-file.html">master</a>のキーフィールド(第1フィールド)はユニークでなければならない。(第1フィールドが同じ値をもつ行が複数あってはならない)。<a href="transaction-file.html">tran</a>についてはこの制約はなく、キーフィールド(第&lt;n&gt;フィールド)が同じ値を行はいくつあっても構わない。</p>
-
-      <p>キーに選択するフィールドは複数指定することもできる。たとえばkey=3/5のように指定した場合、<a href="transaction-file.html">tran</a>の第3、第4、第5フィールドを意味するようになる。またこの場合、<a href="master-file.html">master</a>のキーは第1、第2、第3フィールドとなる。いずれも、指定したkeyについて<a href="master-file.html">master</a>も<a href="transaction-file.html">tran</a>も整列されている必要がある。</p>
-
-      <p>+ngオプションをつけると、一致した行を標準出力ファイルへ、一致しなかった行をファイルデスクリプタ&lt;fd&gt;のファイルへ出力する。&lt;fd&gt;を省略した場合は標準エラー出力ファイルへ出力する。</p>
-
-      <p><a href="transaction-file.html">tran</a>でキーが整列されていないものはjoin0(1)では処理できない。その場合は一旦<a href="transaction-file.html">tran</a>を整列してからjoin0(1)で処理するか、join0(1)のかわりに<a href="cjoin0.html">cjoin0(1)</a>を使って処理すればよい。</p>
-
-      <h3>【例1】基本パターン</h3>
-
-      <p>成績ファイルkekkaから<a href="master-file.html">master</a>に登録されている4人のデータを抽出する。</p>
-
-      <pre class="prettyprint">$ cat <a href="master-file.html">master</a>
+</pre>
+<h3>【説明】</h3>
+<p>tranの<code>key=&lt;n&gt;</code>で指定したキーフィールドがmasterの第1フィールド(キーフィールド)と一致した行のみtranから抽出して出力する。</p>
+<p>masterに<code>-</code>を指定すると標準入力をマスタファイルとする。tranが無指定かまたは<code>-</code>が指定されている場合には、標準入力がトランザクションファイルとなる。</p>
+<p>masterの第1フィールドおよびtranの第<code>&lt;n&gt;</code>フィールドは必ず昇順で整列されていることが条件となる。また、masterのキーフィールド(第1フィールド)はユニークでなければならない。(第1フィールドが同じ値をもつ行が複数あってはならない)。tranについてはこの制約はなく、キーフィールド(第<code>&lt;n&gt;</code>フィールド)が同じ値の行はいくつあっても構わない。</p>
+<p>キーに選択するフィールドは複数指定することもできる。たとえば<code>key=3/5</code>のように指定した場合、tranの第3、第4、第5フィールドを意味するようになる。またこの場合、masterのキーは第1、第2、第3フィールドとなる。いずれも、指定したkeyについてmasterもtranも整列されている必要がある。</p>
+<p>キー指定にひとつでも0があると全フィールドを指定したことになる</p>
+<p><code>+ng</code>オプションをつけると、一致した行を標準出力ファイルへ、一致しなかった行をファイルデスクリプタ<code>&lt;fd&gt;</code>のファイルへ出力する。<code>&lt;fd&gt;</code>を省略した場合は標準エラー出力ファイルへ出力する。</p>
+<p><code>tran</code>でキーが整列されていないものは<a href="join0.html" class="command">join0(1)</a>では処理できない。その場合は一旦tranを整列してから<a href="join0.html" class="command">join0(1)</a>で処理するか、<a href="join0.html" class="command">join0(1)</a>のかわりに<a href="cjoin0.html" class="command">cjoin0(1)</a>を使って処理すればよい。</p>
+<h3>【例1】基本パターン</h3>
+<p>成績ファイルkekkaからmasterに登録されている4人のデータを抽出する。</p>
+<pre class="prettyprint">$ cat master
 0000003 杉山______ 26 F
 0000005 崎村______ 50 F
 0000007 梶川______ 42 F
 0000010 柳本______ 50 F
-$ </pre>
-
-      <pre class="prettyprint">$ cat kekka
+$
+</pre>
+<pre class="prettyprint">$ cat kekka
 0000000 91 59 20 76 54
 0000001 46 39 8  5  21
 0000003 30 50 71 36 30
@@ -146,29 +165,26 @@ $ </pre>
 0000009 60 89 33 18 6
 0000010 95 60 35 93 76
 0000011 92 56 83 96 75
-$ </pre>
-
-      <p>kekkaの第1フィールドが<a href="master-file.html">master</a>ファイルに存在する行のみ抽出する。</p>
-
-      <pre class="prettyprint">$ join0 key=1 <a href="master-file.html">master</a> kekka
+$
+</pre>
+<p>kekkaの第1フィールドがmasterファイルに存在する行のみ抽出する。</p>
+<pre class="prettyprint">$ join0 key=1 master kekka
 0000003 30 50 71 36 30
 0000005 82 79 16 21 80
 0000007 50 2  33 15 62
 0000010 95 60 35 93 76
-$ </pre>
-
-      <h3>【例2】</h3>
-
-      <p>左から順に複数のフィールドに連続するキーを指定できる。例えば<a href="master-file.html">master</a>ファイルに第2フィールドと第3フィールドの順にフィールドキーが存在する行のみ抽出する場合、次のようになる。</p>
-
-      <pre class="prettyprint">$ cat <a href="master-file.html">master</a>
+$
+</pre>
+<h3>【例2】</h3>
+<p>左から順に複数のフィールドに連続するキーを指定できる。例えばmasterファイルに第2フィールドと第3フィールドの順にフィールドキーが存在する行のみ抽出する場合、次のようになる。</p>
+<pre class="prettyprint">$ cat master
 A 0000003 杉山______ 26 F
 A 0000005 崎村______ 50 F
 B 0000007 梶川______ 42 F
 C 0000010 柳本______ 50 F
-$ </pre>
-
-      <pre class="prettyprint">$ cat kekka
+$
+</pre>
+<pre class="prettyprint">$ cat kekka
 1 A 0000000 91 59 20 76 54
 2 A 0000001 46 39 8  5  21
 3 A 0000003 30 50 71 36 30
@@ -179,31 +195,28 @@ $ </pre>
 8 C 0000009 60 89 33 18 6
 9 C 0000010 95 60 35 93 76
 10 C 0000011 92 56 83 96 75
-$ </pre>
-
-      <pre class="prettyprint">$ join0 key=2/3 <a href="master-file.html">master</a> kekka &gt; data
+$
+</pre>
+<pre class="prettyprint">$ join0 key=2/3 master kekka &gt; data
 3 A 0000003 30 50 71 36 30
 5 A 0000005 82 79 16 21 80
 6 B 0000007 50 2  33 15 62
 9 C 0000010 95 60 35 93 76
-$ </pre>
-
-      <p>左から順に連続していない複数のフィールドをキーに指定することも可能。この場合は複数のキーフィールドを@でつなげて指定する。</p>
-
-      <pre class="prettyprint">$ join0 key=3@1 <a href="master-file.html">master</a> <a href="transaction-file.html">tran</a></pre>
-
-      <h3>【例3】+ngオプション</h3>
-
-      <p><a href="master-file.html">master</a>とキーが一致しない"<a href="transaction-file.html">tran</a>"の行を抽出することも可能。キーに一致する行は標準出力に、一致しない行は標準エラー出力に出力される。</p>
-
-      <pre class="prettyprint">$ cat <a href="master-file.html">master</a>
+$
+</pre>
+<p>左から順に連続していない複数のフィールドをキーに指定することも可能。この場合は複数のキーフィールドを@でつなげて指定する。</p>
+<pre class="prettyprint">$ join0 key=3@1 master tran
+</pre>
+<h3>【例3】+ngオプション</h3>
+<p>masterとキーが一致しない&quot;tran&quot;の行を抽出することも可能。キーに一致する行は標準出力に、一致しない行は標準エラー出力に出力される。</p>
+<pre class="prettyprint">$ cat master
 0000003 杉山______ 26 F
 0000005 崎村______ 50 F
 0000007 梶川______ 42 F
 0000010 柳本______ 50 F
-$ </pre>
-
-      <pre class="prettyprint">$ cat kekka
+$
+</pre>
+<pre class="prettyprint">$ cat kekka
 0000000 91 59 20 76 54
 0000001 46 39 8  5  21
 0000003 30 50 71 36 30
@@ -214,64 +227,52 @@ $ </pre>
 0000009 60 89 33 18 6
 0000010 95 60 35 93 76
 0000011 92 56 83 96 75
-$ </pre>
-
-      <p>成績ファイルkekkaから<a href="master-file.html">master</a>に存在する4人のデータと、その他のデータとをそれぞれ抽出する。</p>
-
-      <pre class="prettyprint">$ join0 +ng key=1 <a href="master-file.html">master</a> kekka &gt; ok-data 2&gt; ng-data
-$ cat ok-data		←一致したデータ
+$
+</pre>
+<p>成績ファイルkekkaからmasterに存在する4人のデータと、その他のデータとをそれぞれ抽出する。</p>
+<pre class="prettyprint">$ join0 +ng key=1 master kekka &gt; ok-data 2&gt; ng-data
+$ cat ok-data           ←一致したデータ
 0000003 30 50 71 36 30
 0000005 82 79 16 21 80
 0000007 50 2  33 15 62
 0000010 95 60 35 93 76
-$ cat ng-data		←一致しなかったデータ
+$ cat ng-data           ←一致しなかったデータ
 0000000 91 59 20 76 54
 0000001 46 39 8  5  21
 0000004 58 71 20 10 6
 0000008 52 91 44 9  0
 0000009 60 89 33 18 6
 0000011 92 56 83 96 75
-$ </pre>
-
-      <h3>【例4】</h3>
-
-      <p>ファイル名を-にすることにより標準入力から<a href="master-file.html">master</a>や<a href="transaction-file.html">tran</a>を読むことができる。<a href="join1.html">join1(1)</a>や<a href="join2.html">join2(1)</a>も同様。<a href="transaction-file.html">tran</a>の-を省略した場合も標準入力から<a href="transaction-file.html">tran</a>を読み込む。</p>
-
-      <pre class="prettyprint">$ cat <a href="master-file.html">master</a> | join0 key=1 - <a href="transaction-file.html">tran</a></pre>
-
-      <pre class="prettyprint">$ cat <a href="transaction-file.html">tran</a> | join0 key=1 <a href="master-file.html">master</a> -</pre>
-
-      <pre class="prettyprint">$ cat <a href="transaction-file.html">tran</a> | join0 key=1 <a href="master-file.html">master</a>		←-を省略可能</pre>
-
-      <h3>【コラム1】+ngオプションのコメント - <a href="join1.html">join1(1)</a>も同様</h3>
-
-      <p>不一致のデータをパイプで次のコマンドへつなぐ場合は次のように記述する。</p>
-
-      <pre class="prettyprint">$ join0 +ng key=1 <a href="master-file.html">master</a> <a href="transaction-file.html">tran</a> 2&gt;&amp;1 1&gt; ok-data |  次のコマンド</pre>
-
-      <p>不一致のデータのみ出力したい場合には、一致データを/dev/nullへ出力させれば良い。</p>
-
-      <pre class="prettyprint">$ join0 +ng key=1 <a href="master-file.html">master</a> <a href="transaction-file.html">tran</a> &gt; /dev/null 2&gt; ng-data</pre>
-
-      <h3>【コラム2】</h3>
-
-      <p><a href="join0.html">join0(1)</a>および<a href="join1.html">join1(1)</a>は<a href="master-file.html">master</a>と同じキーフィールドを持つ<a href="transaction-file.html">tran</a>の行を出力するが、パイプの目詰まりを起こさないように<a href="master-file.html">master</a>を読み終わったあと読み残した<a href="transaction-file.html">tran</a>についても最後まで読むように動作する。</p>
-
-      <pre class="prettyprint">$ cat bigfile | join0 key=1 <a href="master-file.html">master</a> &gt; ok-data</pre>
-
-      <h3>【備考】</h3>
-
-      <p>keyのフィールドは合わせて128フィールドが最大で、1キーフィールドあたり最大256[byte]まで指定できる。</p>
-
-      <h3>【関連項目】</h3>
-
-      <p><a href="cjoin0.html">cjoin0(1)</a>、<a href="cjoin1.html">cjoin1(1)</a>、<a href="cjoin2.html">cjoin2(1)</a>、<a href="join1.html">join1(1)</a>、<a href="join2.html">join2(1)</a>、<a href="loopj.html">loopj(1)</a>、<a href="loopx.html">loopx(1)</a>、<a href="up3.html">up3(1)</a>、<a href="master-file.html">マスタファイル(5)</a>、<a href="transaction-file.html">トランザクションファイル(5)</a></p>
-
+$
+</pre>
+<h3>【例4】</h3>
+<p>ファイル名を-にすることにより標準入力からmasterやtranを読むことができる。<a href="join1.html" class="command">join1(1)</a>や<a href="join2.html" class="command">join2(1)</a>も同様。tranの-を省略した場合も標準入力からtranを読み込む。</p>
+<pre class="prettyprint">$ cat master | join0 key=1 - tran
+</pre>
+<pre class="prettyprint">$ cat tran | join0 key=1 master -
+</pre>
+<pre class="prettyprint">$ cat tran | join0 key=1 master         ←-を省略可能
+</pre>
+<h3>【コラム1】+ngオプションのコメント - join1(1)も同様</h3>
+<p>不一致のデータをパイプで次のコマンドへつなぐ場合は次のように記述する。</p>
+<pre class="prettyprint">$ join0 +ng key=1 master tran 2&gt;&amp;1 1&gt; ok-data |  次のコマンド
+</pre>
+<p>不一致のデータのみ出力したい場合には、一致データを/dev/nullへ出力させれば良い。</p>
+<pre class="prettyprint">$ join0 +ng key=1 master tran &gt; /dev/null 2&gt; ng-data
+</pre>
+<h3>【コラム2】</h3>
+<p><a href="join0.html" class="command">join0(1)</a>および<a href="join1.html" class="command">join1(1)</a>はmasterと同じキーフィールドを持つtranの行を出力するが、パイプの目詰まりを起こさないようにmasterを読み終わったあと読み残したtranについても最後まで読むように動作する。</p>
+<pre class="prettyprint">$ cat bigfile | join0 key=1 master &gt; ok-data
+</pre>
+<h3>【備考】</h3>
+<p>keyのフィールドは合わせて128フィールドが最大で、1キーフィールドあたり最大256[byte]まで指定できる。</p>
+<h3>【関連項目】</h3>
+<p><a href="cjoin0.html" class="command">cjoin0(1)</a>、<a href="cjoin1.html" class="command">cjoin1(1)</a>、<a href="cjoin2.html" class="command">cjoin2(1)</a>、<a href="join1.html" class="command">join1(1)</a>、<a href="join2.html" class="command">join2(1)</a>、<a href="loopj.html" class="command">loopj(1)</a>、<a href="loopx.html" class="command">loopx(1)</a>、<a href="up3.html" class="command">up3(1)</a>、<a href="master-file.html" class="command">マスタファイル(5)</a>、<a href="transaction-file.html" class="command">トランザクションファイル(5)</a></p>
     </div>
 
-    <div id="lastmodified">last modified: 2014-08-13 16:01:13</div>
+    <div id="lastmodified">Last modified: Fri Jul 15 15:42:38 JST 2022</div>
 
-    <div id="footer">Contact us: uecinfo@usp-lab.com<br/>Copyright (c) 2012,2013 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
+    <div id="footer">Contact us: uecinfo@usp-lab.com<br>Copyright &copy; 2012-2022 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
   </div>
 </body>
 </html>
