--- a/MANUALHTML/juni.html
+++ b/MANUALHTML/juni.html
@@ -1,20 +1,19 @@
-<!doctype html>
-
+<!DOCTYPE html>
 <html lang="ja">
 <head>
   <meta charset="utf-8">
-  <title>UEC - usp engineers' community - Tukubaiオンラインコマンドマニュアル</title>
-  <link rel="stylesheet" href="COMMON/CSS/MAIN.CSS" />
-  <link rel="stylesheet" href="COMMON/CSS/MENU.CSS" />
-  <link rel="stylesheet" href="COMMON/CSS/PRINT.CSS" />
+  <title>juni - UEC - usp engineers' community - Tukubaiオンラインコマンドマニュアル</title>
+  <link rel="stylesheet" href="COMMON/CSS/MAIN.CSS">
+  <link rel="stylesheet" href="COMMON/CSS/MENU.CSS">
+  <link rel="stylesheet" href="COMMON/CSS/PRINT.CSS">
   <!--[if lte IE 8]>
-  <link rel="stylesheet" href="COMMON/CSS/IE67HACK.CSS" />
+  <link rel="stylesheet" href="COMMON/CSS/IE67HACK.CSS">
   <![endif]-->
   <!--[if IE 7]>
-  <link rel="stylesheet" href="COMMON/CSS/IE7HACK.CSS" />
+  <link rel="stylesheet" href="COMMON/CSS/IE7HACK.CSS">
   <![endif]-->
   <!--[if IE 6]>
-  <link rel="stylesheet" href="COMMON/CSS/IE6HACK.CSS" />
+  <link rel="stylesheet" href="COMMON/CSS/IE6HACK.CSS">
   <![endif]-->
   <script src="COMMON/JS/MENU.JS"></script>
 </head>
@@ -22,74 +21,104 @@
   <div id="container">
     <div id="header">
       <div id="logo">
-        <img id="logoimage" src="COMMON/IMG/TUKUBAI_LOGO.JPG" />
+        <img id="logoimage" src="COMMON/IMG/TUKUBAI_LOGO.JPG">
       </div>
       <div id="title">
         <p id="slogan"></p>
         <ul id="megamenu">
           <li id="tukubai_man"><a href="index.html" class="target">Tukubaiマニュアル</a>
             <ul>
+              <li><a href="1bai.html">1bai(1)</a></li>
+              <li><a href="block_getlast.html">block_getlast(1)</a></li>
               <li><a href="calclock.html">calclock(1)</a></li>
+              <li><a href="calsed.html">calsed(1)</a></li>
+              <li><a href="cap.html">cap(1)</a></li>
               <li><a href="cgi-name.html">cgi-name(1)</a></li>
               <li><a href="check_attr_name.html">check_attr_name(1)</a></li>
+              <li><a href="check_cmp_name.html">check_cmp_name(1)</a></li>
+              <li><a href="check_date_name.html">check_date_name(1)</a></li>
+              <li><a href="check_dble_name.html">check_dble_name(1)</a></li>
+              <li><a href="check_inlist_name.html">check_inlist_name(1)</a></li>
               <li><a href="check_need_name.html">check_need_name(1)</a></li>
               <li><a href="cjoin0.html">cjoin0(1)</a></li>
               <li><a href="cjoin1.html">cjoin1(1)</a></li>
+              <li><a href="cjoin1x.html">cjoin1x(1)</a></li>
               <li><a href="cjoin2.html">cjoin2(1)</a></li>
+              <li><a href="cjoin2x.html">cjoin2x(1)</a></li>
               <li><a href="comma.html">comma(1)</a></li>
               <li><a href="count.html">count(1)</a></li>
               <li><a href="ctail.html">ctail(1)</a></li>
               <li><a href="dayslash.html">dayslash(1)</a></li>
               <li><a href="delf.html">delf(1)</a></li>
+              <li><a href="delr.html">delr(1)</a></li>
               <li><a href="divsen.html">divsen(1)</a></li>
+              <li><a href="exist.html">exist(1)</a></li>
+              <li><a href="extname.html">extname(1)</a></li>
               <li><a href="filehame.html">filehame(1)</a></li>
               <li><a href="formhame.html">formhame(1)</a></li>
+              <li><a href="fsed.html">fsed(1)</a></li>
               <li><a href="getfirst.html">getfirst(1)</a></li>
               <li><a href="getlast.html">getlast(1)</a></li>
               <li><a href="gyo.html">gyo(1)</a></li>
+              <li><a href="haba.html">haba(1)</a></li>
               <li><a href="han.html">han(1)</a></li>
+              <li><a href="isdate.html">isdate(1)</a></li>
+              <li><a href="itouch.html">itouch(1)</a></li>
               <li><a href="join0.html">join0(1)</a></li>
               <li><a href="join1.html">join1(1)</a></li>
+              <li><a href="join1x.html">join1x(1)</a></li>
               <li><a href="join2.html">join2(1)</a></li>
+              <li><a href="join2x.html">join2x(1)</a></li>
               <li><a href="juni.html">juni(1)</a></li>
               <li><a href="kasan.html">kasan(1)</a></li>
               <li><a href="keta.html">keta(1)</a></li>
               <li><a href="keycut.html">keycut(1)</a></li>
               <li><a href="loopj.html">loopj(1)</a></li>
               <li><a href="loopx.html">loopx(1)</a></li>
+              <li><a href="maezero.html">maezero(1)</a></li>
+              <li><a href="man2.html">man2(1)</a></li>
               <li><a href="map.html">map(1)</a></li>
               <li><a href="marume.html">marume(1)</a></li>
               <li><a href="mdate.html">mdate(1)</a></li>
               <li><a href="mime-read.html">mime-read(1)</a></li>
               <li><a href="mojihame.html">mojihame(1)</a></li>
+              <li><a href="msort.html">msort(1)</a></li>
               <li><a href="nameread.html">nameread(1)</a></li>
+              <li><a href="numchar.html">numchar(1)</a></li>
               <li><a href="plus.html">plus(1)</a></li>
               <li><a href="rank.html">rank(1)</a></li>
               <li><a href="ratio.html">ratio(1)</a></li>
               <li><a href="retu.html">retu(1)</a></li>
+              <li><a href="rjson.html">rjson(1)</a></li>
               <li><a href="self.html">self(1)</a></li>
+              <li><a href="selr.html">selr(1)</a></li>
               <li><a href="sm2.html">sm2(1)</a></li>
               <li><a href="sm4.html">sm4(1)</a></li>
               <li><a href="sm5.html">sm5(1)</a></li>
               <li><a href="tarr.html">tarr(1)</a></li>
               <li><a href="tateyoko.html">tateyoko(1)</a></li>
               <li><a href="tcat.html">tcat(1)</a></li>
+              <li><a href="uconv.html">uconv(1)</a></li>
+              <li><a href="ulock.html">ulock(1)</a></li>
               <li><a href="unmap.html">unmap(1)</a></li>
               <li><a href="up3.html">up3(1)</a></li>
+              <li><a href="xmldir.html">xmldir(1)</a></li>
               <li><a href="yarr.html">yarr(1)</a></li>
               <li><a href="ycat.html">ycat(1)</a></li>
               <li><a href="yobi.html">yobi(1)</a></li>
               <li><a href="ysum.html">ysum(1)</a></li>
               <li><a href="zen.html">zen(1)</a></li>
-              <li class="separator"><hr/></li>
-              <li class="separator"><hr/></li>
-              <li class="separator"><hr/></li>
+              <li></li>
+
+              <li class="separator"><hr></li>
+              <li class="separator"><hr></li>
+              <li class="separator"><hr></li>
               <li><a href="tag-format.html">タグ形式(5)</a></li>
               <li><a href="name-format.html">ネーム形式(5)</a></li>
               <li><a href="field-format.html">フィールド形式(5)</a></li>
               <li><a href="master-file.html">マスタファイル(5)</a></li>
               <li><a href="name-file.html">ネームファイル(5)</a></li>
-              <li><a href="transaction-file.html" class="target">トランザクションファイル(5)</a></li>
+              <li><a href="transaction-file.html">トランザクションファイル(5)</a></li>
             </ul> 
           </li>
         </ul>
@@ -99,71 +128,60 @@
     <div id="main">
       <h1>Tukubaiオンラインコマンドマニュアル</h1>
 
-      <h2>juni(1)</h2>
+<h2>juni(1)</h2>
+<h3>【名前】</h3>
+<p><code>juni</code> :  同一キー内での順位を出力</p>
+<h3>【書式】</h3>
+<pre class="list">Usage   : juni [&lt;k1&gt; &lt;k2&gt;] &lt;file&gt;
+        : juni -h [&lt;k1&gt; &lt;k2&gt;] &lt;file&gt;
+Version : Sat Sep 19 23:49:25 JST 2020
+Edition : 2
 
-      <h3>【名前】</h3>
-
-      <p>juni : 同一キー内での順位を出力</p>
-
-      <h3>【書式】</h3>
-
-      <pre class="list">Usage	: juni [&lt;k1&gt; &lt;k2&gt;] &lt;file&gt;
-	: juni -h [&lt;k1&gt; &lt;k2&gt;] &lt;file&gt;
-Version	: Thu Dec 15 13:46:38 JST 2011</pre>
-
-      <h3>【説明】</h3>
-
-      <p>第&lt;k1&gt;フィールドから第&lt;k2&gt;フィールドまでをキーフィールドとして、同一キーの行どうしにおける順位を行の先頭に挿入する。&lt;k1&gt; &lt;k2&gt;を指定しないときは、すべての行が同一キーとみなすものとする。この場合は単純に行の先頭に行番号を挿入するのと同じになる。</p>
-
-      <p>-hオプションを指定した場合、各キーフィールドの順位を階層的に出力する。&lt;file&gt;を指定しない、あるいは、-が指定された時には標準入力からのデータ入力を期待する。</p>
-
-      <h3>【例1】</h3>
-
-      <p>行番号を付与する。</p>
-
-      <pre class="prettyprint">$ cat data
+</pre>
+<h3>【説明】</h3>
+<p>第<code>&lt;k1&gt;</code>フィールドから第<code>&lt;k2&gt;</code>フィールドまでをキーフィールドとして、同一キーの行どうしにおける順位を行の先頭に挿入する。<code>&lt;k1&gt; &lt;k2&gt;</code>を指定しないときは、すべての行が同一キーとみなすものとする。この場合は単純に行の先頭に行番号を挿入するのと同じになる。</p>
+<p><code>-h</code>オプションを指定した場合、各キーフィールドの順位を階層的に出力する。<code>&lt;file&gt;</code>として<code>-</code>を指定すると標準入力を使用する。</p>
+<h3>【例1】</h3>
+<p>行番号を付与する。</p>
+<pre class="prettyprint">$ cat data
 0000007 セロリ 100
 0000017 練馬大根 95
 0000021 温州みかん 80
 0000025 プリンスメロン 70
 0000030 じゃが芋 30
-$ </pre>
-
-      <pre class="prettyprint">$ juni data
+$
+</pre>
+<pre class="prettyprint">$ juni data
 1 0000007 セロリ 100
 2 0000017 練馬大根 95
 3 0000021 温州みかん 80
 4 0000025 プリンスメロン 70
 5 0000030 じゃが芋 30
-$ </pre>
-
-      <h3>【例2】</h3>
-
-      <p>キーが関係する場合、キーの開始フィールドと終了フィールドを指定して、同一キーを持つ行どうしにおける順位を行頭に付与する。</p>
-
-      <pre class="prettyprint">$ cat data
+$
+</pre>
+<h3>【例2】</h3>
+<p>キーが関係する場合、キーの開始フィールドと終了フィールドを指定して、同一キーを持つ行どうしにおける順位を行頭に付与する。</p>
+<pre class="prettyprint">$ cat data
 関東 パスタ 100
 関東 おにぎり 90
 関東 パン 40
 九州 おにぎり 150
 九州 パン 140
 九州 パスタ 100
-$ </pre>
-
-      <pre class="prettyprint">$ juni 1 1 data
+$
+</pre>
+<pre class="prettyprint">$ juni 1 1 data
 1 関東 パスタ 100
 2 関東 おにぎり 90
 3 関東 パン 40
 1 九州 おにぎり 150
 2 九州 パン 140
 3 九州 パスタ 100
-$ </pre>
-
-      <h3>【例3】</h3>
-
-      <p>-hオプションを指定した場合、各キーフィールドの順位を階層的に出力する。</p>
-
-      <pre class="prettyprint">$ cat data
+$
+</pre>
+<h3>【例3】</h3>
+<p><code>-h</code>オプションを指定した場合、各キーフィールドの順位を階層的に出力する。</p>
+<pre class="prettyprint">$ cat data
 A A1 A11 A111
 A A1 A11 A112
 A A1 A12 A121
@@ -180,9 +198,9 @@ B B2 B21 B211
 B B2 B21 B212
 B B2 B22 B221
 B B2 B22 B222
-$ </pre>
-
-      <pre class="prettyprint">$ juni -h 1 3 data
+$
+</pre>
+<pre class="prettyprint">$ juni -h 1 3 data
 1 1 1 A A1 A11 A111
 1 1 1 A A1 A11 A112
 1 1 2 A A1 A12 A121
@@ -199,13 +217,11 @@ $ </pre>
 2 2 1 B B2 B21 B212
 2 2 2 B B2 B22 B221
 2 2 2 B B2 B22 B222
-$ </pre>
-
-      <h3>【例4】</h3>
-
-      <p>-hオプションでキーを指定しない場合には、第1フィールドから最終フィールドまでをキーフィールドとみなす。</p>
-
-      <pre class="prettyprint">$ juni -h data
+$
+</pre>
+<h3>【例4】</h3>
+<p><code>-h</code>オプションでキーを指定しない場合には、第1フィールドから最終フィールドまでをキーフィールドとみなす。</p>
+<pre class="prettyprint">$ juni -h data
 1 1 1 1 A A1 A11 A111
 1 1 1 2 A A1 A11 A112
 1 1 2 1 A A1 A12 A121
@@ -221,17 +237,15 @@ $ </pre>
 2 2 1 1 B B2 B21 B211
 2 2 1 2 B B2 B21 B212
 2 2 2 1 B B2 B22 B221
-2 2 2 2 B B2 B22 B222</pre>
-
-      <h3>【関連項目】</h3>
-
-      <p><a href="count.html">count(1)</a>、<a href="gyo.html">gyo(1)</a>、<a href="rank.html">rank(1)</a>、<a href="retu.html">retu(1)</a></p>
-
+2 2 2 2 B B2 B22 B222
+</pre>
+<h3>【関連項目】</h3>
+<p><a href="count.html" class="command">count(1)</a>、<a href="gyo.html" class="command">gyo(1)</a>、<a href="rank.html" class="command">rank(1)</a>、<a href="retu.html" class="command">retu(1)</a></p>
     </div>
 
-    <div id="lastmodified">last modified: 2014-08-13 16:01:13</div>
+    <div id="lastmodified">Last modified: Fri Jul 15 15:42:38 JST 2022</div>
 
-    <div id="footer">Contact us: uecinfo@usp-lab.com<br/>Copyright (c) 2012,2013 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
+    <div id="footer">Contact us: uecinfo@usp-lab.com<br>Copyright &copy; 2012-2022 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
   </div>
 </body>
 </html>
