--- a/MANUALHTML/keta.html
+++ b/MANUALHTML/keta.html
@@ -1,20 +1,19 @@
-<!doctype html>
-
+<!DOCTYPE html>
 <html lang="ja">
 <head>
   <meta charset="utf-8">
-  <title>UEC - usp engineers' community - Tukubaiオンラインコマンドマニュアル</title>
-  <link rel="stylesheet" href="COMMON/CSS/MAIN.CSS" />
-  <link rel="stylesheet" href="COMMON/CSS/MENU.CSS" />
-  <link rel="stylesheet" href="COMMON/CSS/PRINT.CSS" />
+  <title>keta - UEC - usp engineers' community - Tukubaiオンラインコマンドマニュアル</title>
+  <link rel="stylesheet" href="COMMON/CSS/MAIN.CSS">
+  <link rel="stylesheet" href="COMMON/CSS/MENU.CSS">
+  <link rel="stylesheet" href="COMMON/CSS/PRINT.CSS">
   <!--[if lte IE 8]>
-  <link rel="stylesheet" href="COMMON/CSS/IE67HACK.CSS" />
+  <link rel="stylesheet" href="COMMON/CSS/IE67HACK.CSS">
   <![endif]-->
   <!--[if IE 7]>
-  <link rel="stylesheet" href="COMMON/CSS/IE7HACK.CSS" />
+  <link rel="stylesheet" href="COMMON/CSS/IE7HACK.CSS">
   <![endif]-->
   <!--[if IE 6]>
-  <link rel="stylesheet" href="COMMON/CSS/IE6HACK.CSS" />
+  <link rel="stylesheet" href="COMMON/CSS/IE6HACK.CSS">
   <![endif]-->
   <script src="COMMON/JS/MENU.JS"></script>
 </head>
@@ -22,74 +21,104 @@
   <div id="container">
     <div id="header">
       <div id="logo">
-        <img id="logoimage" src="COMMON/IMG/TUKUBAI_LOGO.JPG" />
+        <img id="logoimage" src="COMMON/IMG/TUKUBAI_LOGO.JPG">
       </div>
       <div id="title">
         <p id="slogan"></p>
         <ul id="megamenu">
           <li id="tukubai_man"><a href="index.html" class="target">Tukubaiマニュアル</a>
             <ul>
+              <li><a href="1bai.html">1bai(1)</a></li>
+              <li><a href="block_getlast.html">block_getlast(1)</a></li>
               <li><a href="calclock.html">calclock(1)</a></li>
+              <li><a href="calsed.html">calsed(1)</a></li>
+              <li><a href="cap.html">cap(1)</a></li>
               <li><a href="cgi-name.html">cgi-name(1)</a></li>
               <li><a href="check_attr_name.html">check_attr_name(1)</a></li>
+              <li><a href="check_cmp_name.html">check_cmp_name(1)</a></li>
+              <li><a href="check_date_name.html">check_date_name(1)</a></li>
+              <li><a href="check_dble_name.html">check_dble_name(1)</a></li>
+              <li><a href="check_inlist_name.html">check_inlist_name(1)</a></li>
               <li><a href="check_need_name.html">check_need_name(1)</a></li>
               <li><a href="cjoin0.html">cjoin0(1)</a></li>
               <li><a href="cjoin1.html">cjoin1(1)</a></li>
+              <li><a href="cjoin1x.html">cjoin1x(1)</a></li>
               <li><a href="cjoin2.html">cjoin2(1)</a></li>
+              <li><a href="cjoin2x.html">cjoin2x(1)</a></li>
               <li><a href="comma.html">comma(1)</a></li>
               <li><a href="count.html">count(1)</a></li>
               <li><a href="ctail.html">ctail(1)</a></li>
               <li><a href="dayslash.html">dayslash(1)</a></li>
               <li><a href="delf.html">delf(1)</a></li>
+              <li><a href="delr.html">delr(1)</a></li>
               <li><a href="divsen.html">divsen(1)</a></li>
+              <li><a href="exist.html">exist(1)</a></li>
+              <li><a href="extname.html">extname(1)</a></li>
               <li><a href="filehame.html">filehame(1)</a></li>
               <li><a href="formhame.html">formhame(1)</a></li>
+              <li><a href="fsed.html">fsed(1)</a></li>
               <li><a href="getfirst.html">getfirst(1)</a></li>
               <li><a href="getlast.html">getlast(1)</a></li>
               <li><a href="gyo.html">gyo(1)</a></li>
+              <li><a href="haba.html">haba(1)</a></li>
               <li><a href="han.html">han(1)</a></li>
+              <li><a href="isdate.html">isdate(1)</a></li>
+              <li><a href="itouch.html">itouch(1)</a></li>
               <li><a href="join0.html">join0(1)</a></li>
               <li><a href="join1.html">join1(1)</a></li>
+              <li><a href="join1x.html">join1x(1)</a></li>
               <li><a href="join2.html">join2(1)</a></li>
+              <li><a href="join2x.html">join2x(1)</a></li>
               <li><a href="juni.html">juni(1)</a></li>
               <li><a href="kasan.html">kasan(1)</a></li>
               <li><a href="keta.html">keta(1)</a></li>
               <li><a href="keycut.html">keycut(1)</a></li>
               <li><a href="loopj.html">loopj(1)</a></li>
               <li><a href="loopx.html">loopx(1)</a></li>
+              <li><a href="maezero.html">maezero(1)</a></li>
+              <li><a href="man2.html">man2(1)</a></li>
               <li><a href="map.html">map(1)</a></li>
               <li><a href="marume.html">marume(1)</a></li>
               <li><a href="mdate.html">mdate(1)</a></li>
               <li><a href="mime-read.html">mime-read(1)</a></li>
               <li><a href="mojihame.html">mojihame(1)</a></li>
+              <li><a href="msort.html">msort(1)</a></li>
               <li><a href="nameread.html">nameread(1)</a></li>
+              <li><a href="numchar.html">numchar(1)</a></li>
               <li><a href="plus.html">plus(1)</a></li>
               <li><a href="rank.html">rank(1)</a></li>
               <li><a href="ratio.html">ratio(1)</a></li>
               <li><a href="retu.html">retu(1)</a></li>
+              <li><a href="rjson.html">rjson(1)</a></li>
               <li><a href="self.html">self(1)</a></li>
+              <li><a href="selr.html">selr(1)</a></li>
               <li><a href="sm2.html">sm2(1)</a></li>
               <li><a href="sm4.html">sm4(1)</a></li>
               <li><a href="sm5.html">sm5(1)</a></li>
               <li><a href="tarr.html">tarr(1)</a></li>
               <li><a href="tateyoko.html">tateyoko(1)</a></li>
               <li><a href="tcat.html">tcat(1)</a></li>
+              <li><a href="uconv.html">uconv(1)</a></li>
+              <li><a href="ulock.html">ulock(1)</a></li>
               <li><a href="unmap.html">unmap(1)</a></li>
               <li><a href="up3.html">up3(1)</a></li>
+              <li><a href="xmldir.html">xmldir(1)</a></li>
               <li><a href="yarr.html">yarr(1)</a></li>
               <li><a href="ycat.html">ycat(1)</a></li>
               <li><a href="yobi.html">yobi(1)</a></li>
               <li><a href="ysum.html">ysum(1)</a></li>
               <li><a href="zen.html">zen(1)</a></li>
-              <li class="separator"><hr/></li>
-              <li class="separator"><hr/></li>
-              <li class="separator"><hr/></li>
+              <li></li>
+
+              <li class="separator"><hr></li>
+              <li class="separator"><hr></li>
+              <li class="separator"><hr></li>
               <li><a href="tag-format.html">タグ形式(5)</a></li>
               <li><a href="name-format.html">ネーム形式(5)</a></li>
               <li><a href="field-format.html">フィールド形式(5)</a></li>
               <li><a href="master-file.html">マスタファイル(5)</a></li>
               <li><a href="name-file.html">ネームファイル(5)</a></li>
-              <li><a href="transaction-file.html" class="target">トランザクションファイル(5)</a></li>
+              <li><a href="transaction-file.html">トランザクションファイル(5)</a></li>
             </ul> 
           </li>
         </ul>
@@ -99,111 +128,87 @@
     <div id="main">
       <h1>Tukubaiオンラインコマンドマニュアル</h1>
 
-      <h2>keta(1)</h2>
+<h2>keta(1)</h2>
+<h3>【名前】</h3>
+<p><code>keta</code> :  テキストファイルの桁そろえ</p>
+<h3>【書式】</h3>
+<pre class="list">Usage   : keta n1 n2 .. &lt;filename&gt;
+          keta -v &lt;filename&gt;
+          keta [--] &lt;filename&gt;
+Version : Wed May 20 04:47:49 JST 2020
+Edition : 1
 
-      <h3>【名前】</h3>
-
-      <p>keta : テキストファイルの桁そろえ</p>
-
-      <h3>【書式】</h3>
-
-      <pre class="list">Usage	: keta n1 n2 .. &lt;filename&gt;
-	: keta -v &lt;filename&gt;
-	: keta [--] &lt;filename&gt;
-Version	: Thu Dec 15 13:46:38 JST 2011
-	: UTF-8</pre>
-
-      <h3>【説明】</h3>
-
-      <p>引数のファイルまたは標準入力のテキストデータの各フィールドの桁数をそろえて出力する。各フィールドの桁数を自動的に判断して出力できるほか、フィールド毎の桁を指定して出力することが可能。</p>
-
-      <h3>【例1】</h3>
-
-      <p>引数で指定したファイルの各フィールド毎に最大桁数を判断して桁数を自動出力する。</p>
-
-      <pre class="prettyprint">$ cat data
+</pre>
+<h3>【説明】</h3>
+<p>引数のファイルまたは標準入力のテキストデータの各フィールドの桁数をそろえて出力する。全フィールドに対してフィールド毎の桁数を指定する。指定桁数にそのフィールドの最大長未満を指定すると最大長がとられる。桁数指定をすべて省略すると各フィールドの桁数を自動的に判断して出力できる。フィールドは右詰めで出力するが、桁数指定に<code>-</code>を付けると左詰めにする。桁数指定をすべて省略して代わりに<code>--</code>を指定すると全フィールドを左詰めで出力する。<code>&lt;filename&gt;</code>として<code>-</code>を指定すると標準入力を使用する。桁数指定があるときは<code>&lt;filename&gt;</code>は省略可能になる。桁数指定がないときは<code>&lt;filename&gt;</code>は省略不可。<code>-v</code>または<code>--</code>指定があるときは桁数指定はできず<code>&lt;filename&gt;</code>は省略不可。<code>&lt;filename&gt;</code>が省略されたときは標準入力を仮定する。</p>
+<h3>【例1】</h3>
+<p>引数で指定したファイルの各フィールド毎に最大桁数を判断して桁数を自動出力する。</p>
+<pre class="prettyprint">$ cat data
 01 埼玉県 01 さいたま市 91 59 20 76 54
 01 埼玉県 02 川越市 46 39 8 5 21
 01 埼玉県 03 熊谷市 82 0 23 84 10
 02 東京都 04 新宿区 30 50 71 36 30
 02 東京都 06 港区 58 71 20 10 6
 04 神奈川県 13 横浜市 92 56 83 96 75
-$ </pre>
-
-      <pre class="prettyprint">$ keta data		←右詰め
+$
+</pre>
+<pre class="prettyprint">$ keta data             ←右詰め
 01   埼玉県 01 さいたま市 91 59 20 76 54
 01   埼玉県 02     川越市 46 39  8  5 21
 01   埼玉県 03     熊谷市 82  0 23 84 10
 02   東京都 04     新宿区 30 50 71 36 30
 02   東京都 06       港区 58 71 20 10  6
 04 神奈川県 13     横浜市 92 56 83 96 75
-$ </pre>
-
-      <pre class="prettyprint">$ keta -- data		←左詰め
+$
+</pre>
+<pre class="prettyprint">$ keta -- data          ←左詰め
 01 埼玉県   01 さいたま市 91 59 20 76 54
 01 埼玉県   02 川越市     46 39 8  5  21
 01 埼玉県   03 熊谷市     82 0  23 84 10
 02 東京都   04 新宿区     30 50 71 36 30
 02 東京都   06 港区       58 71 20 10 6
 04 神奈川県 13 横浜市     92 56 83 96 75
-$ </pre>
-
-      <h3>【例2】</h3>
-
-      <p>各フィールド毎の桁数を指定して出力する。引数としてファイルの各フィールドの1番目から最終フィールドまでのそれぞれの桁数を順に指定する。</p>
-
-      <pre class="list">	        ↓2フィールド目の桁数
-	keta n1 n2 n3 ・・・・nNF
-	     ↑               ↑
-	1フィールド目の桁数  最終フィールド目の桁数</pre>
-
-
-      <p>なお、桁数は半角での文字数で指定する。大文字の場合は半角2文字分の指定が必要である。keta 4は半角では4文字分、全角では2文字分になる。次のコマンドで例1と同じ出力が得られる。</p>
-
-      <pre class="prettyprint">$ keta 2 8 2 10 2 2 2 2 2 data</pre>
-
-      <h3>【例3】</h3>
-
-      <p>通常は桁は右詰めで出力されるが、左詰めで出力する場合は桁数に-をつけて指定すれば良い。例えば第2フィールドと第4フィールドを左詰めにして出力するには次のようにコマンドを実行する。</p>
-
-      <pre class="prettyprint">$ keta 2 -8 2 -10 2 2 2 2 2 data
+$
+</pre>
+<h3>【例2】</h3>
+<p>各フィールド毎の桁数を指定して出力する。引数としてファイルの各フィールドの1番目から最終フィールドまでのそれぞれの桁数を順に指定する。</p>
+<p> ↓2フィールド目の桁数<code>keta</code>n1 n2 n3 ・・・・n<code>NF</code>↑ ↑ 1フィールド目の桁数 最終フィールド目の桁数</p>
+<p>なお、桁数は半角での文字数で指定する。大文字の場合は半角2文字分の指定が必要である。<code>keta</code>4は半角では4文字分、全角では2文字分になる。次のコマンドで例1と同じ出力が得られる。</p>
+<pre class="prettyprint">$ keta 2 8 2 10 2 2 2 2 2 data
+</pre>
+<h3>【例3】</h3>
+<p>通常は桁は右詰めで出力されるが、左詰めで出力する場合は桁数に<code>-</code>をつけて指定すれば良い。例えば第2フィールドと第4フィールドを左詰めにして出力するには次のようにコマンドを実行する。</p>
+<pre class="prettyprint">$ keta 2 -8 2 -10 2 2 2 2 2 data
 01 埼玉県   01 さいたま市 91 59 20 76 54
 01 埼玉県   02 川越市     46 39  8  5 21
 01 埼玉県   03 熊谷市     82  0 23 84 10
 02 東京都   04 新宿区     30 50 71 36 30
 02 東京都   06 港区       58 71 20 10  6
 04 神奈川県 13 横浜市     92 56 83 96 7
-$ </pre>
-
-      <h3>【例4】</h3>
-
-      <p>同じ桁数を連続したフィールドに指定する場合は&lt;桁数x連続するフィールド数&gt;と表記することができる。keta 3x4はketa 3 3 3 3と同じ意味を持つ。フィールド数にはNF(1行のフィールド数)を使用しNF-xxと指定できる。次のコマンドで例3と同じ出力が得られる。</p>
-
-      <pre class="prettyprint">$ keta 2 -8 2 -10 2x5 data</pre>
-
-      <pre class="prettyprint">$ keta 2 -8 2 -10 2xNF-4 data</pre>
-
-      <h3>【例5】</h3>
-
-      <p>-vオプションを使用するとファイルの各フィールドの最大桁数を表示させることができる。</p>
-
-      <pre class="prettyprint">$ keta -v data
+$
+</pre>
+<h3>【例4】</h3>
+<p>同じ桁数を連続したフィールドに指定する場合は&lt;桁数x連続するフィールド数&gt;と表記することができる。<code>keta</code>3x4は<code>keta</code>3 3 3 3と同じ意味を持つ。フィールド数には<code>NF</code>(1行のフィールド数)を使用し<code>NF-xx</code>と指定できる。次のコマンドで例3と同じ出力が得られる。</p>
+<pre class="prettyprint">$ keta 2 -8 2 -10 2x5 data
+</pre>
+<pre class="prettyprint">$ keta 2 -8 2 -10 2xNF-4 data
+</pre>
+<h3>【例5】</h3>
+<p><code>-v</code>オプションを使用するとファイルの各フィールドの最大桁数を表示させることができる。</p>
+<pre class="prettyprint">$ keta -v data
 2 8 2 10 2 2 2 2 2
-$ </pre>
-
-      <p>次のコマンドで例1と同じ出力が得られる。</p>
-
-      <pre class="prettyprint">$ keta $keta -v data) data</pre>
-
-      <h3>【関連項目】</h3>
-
-      <p><a href="comma.html">comma(1)</a></p>
-
+$
+</pre>
+<p>次のコマンドで例1と同じ出力が得られる。</p>
+<pre class="prettyprint">$ keta $(keta -v data) data
+</pre>
+<h3>【関連項目】</h3>
+<p><a href="comma.html" class="command">comma(1)</a></p>
     </div>
 
-    <div id="lastmodified">last modified: 2014-08-13 16:01:13</div>
+    <div id="lastmodified">Last modified: Fri Jul 15 16:44:16 JST 2022</div>
 
-    <div id="footer">Contact us: uecinfo@usp-lab.com<br/>Copyright (c) 2012,2013 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
+    <div id="footer">Contact us: uecinfo@usp-lab.com<br>Copyright &copy; 2012-2022 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
   </div>
 </body>
 </html>
