--- a/MANUALHTML/keycut.html
+++ b/MANUALHTML/keycut.html
@@ -1,20 +1,19 @@
-<!doctype html>
-
+<!DOCTYPE html>
 <html lang="ja">
 <head>
   <meta charset="utf-8">
-  <title>UEC - usp engineers' community - Tukubaiオンラインコマンドマニュアル</title>
-  <link rel="stylesheet" href="COMMON/CSS/MAIN.CSS" />
-  <link rel="stylesheet" href="COMMON/CSS/MENU.CSS" />
-  <link rel="stylesheet" href="COMMON/CSS/PRINT.CSS" />
+  <title>keycut - UEC - usp engineers' community - Tukubaiオンラインコマンドマニュアル</title>
+  <link rel="stylesheet" href="COMMON/CSS/MAIN.CSS">
+  <link rel="stylesheet" href="COMMON/CSS/MENU.CSS">
+  <link rel="stylesheet" href="COMMON/CSS/PRINT.CSS">
   <!--[if lte IE 8]>
-  <link rel="stylesheet" href="COMMON/CSS/IE67HACK.CSS" />
+  <link rel="stylesheet" href="COMMON/CSS/IE67HACK.CSS">
   <![endif]-->
   <!--[if IE 7]>
-  <link rel="stylesheet" href="COMMON/CSS/IE7HACK.CSS" />
+  <link rel="stylesheet" href="COMMON/CSS/IE7HACK.CSS">
   <![endif]-->
   <!--[if IE 6]>
-  <link rel="stylesheet" href="COMMON/CSS/IE6HACK.CSS" />
+  <link rel="stylesheet" href="COMMON/CSS/IE6HACK.CSS">
   <![endif]-->
   <script src="COMMON/JS/MENU.JS"></script>
 </head>
@@ -22,74 +21,104 @@
   <div id="container">
     <div id="header">
       <div id="logo">
-        <img id="logoimage" src="COMMON/IMG/TUKUBAI_LOGO.JPG" />
+        <img id="logoimage" src="COMMON/IMG/TUKUBAI_LOGO.JPG">
       </div>
       <div id="title">
         <p id="slogan"></p>
         <ul id="megamenu">
           <li id="tukubai_man"><a href="index.html" class="target">Tukubaiマニュアル</a>
             <ul>
+              <li><a href="1bai.html">1bai(1)</a></li>
+              <li><a href="block_getlast.html">block_getlast(1)</a></li>
               <li><a href="calclock.html">calclock(1)</a></li>
+              <li><a href="calsed.html">calsed(1)</a></li>
+              <li><a href="cap.html">cap(1)</a></li>
               <li><a href="cgi-name.html">cgi-name(1)</a></li>
               <li><a href="check_attr_name.html">check_attr_name(1)</a></li>
+              <li><a href="check_cmp_name.html">check_cmp_name(1)</a></li>
+              <li><a href="check_date_name.html">check_date_name(1)</a></li>
+              <li><a href="check_dble_name.html">check_dble_name(1)</a></li>
+              <li><a href="check_inlist_name.html">check_inlist_name(1)</a></li>
               <li><a href="check_need_name.html">check_need_name(1)</a></li>
               <li><a href="cjoin0.html">cjoin0(1)</a></li>
               <li><a href="cjoin1.html">cjoin1(1)</a></li>
+              <li><a href="cjoin1x.html">cjoin1x(1)</a></li>
               <li><a href="cjoin2.html">cjoin2(1)</a></li>
+              <li><a href="cjoin2x.html">cjoin2x(1)</a></li>
               <li><a href="comma.html">comma(1)</a></li>
               <li><a href="count.html">count(1)</a></li>
               <li><a href="ctail.html">ctail(1)</a></li>
               <li><a href="dayslash.html">dayslash(1)</a></li>
               <li><a href="delf.html">delf(1)</a></li>
+              <li><a href="delr.html">delr(1)</a></li>
               <li><a href="divsen.html">divsen(1)</a></li>
+              <li><a href="exist.html">exist(1)</a></li>
+              <li><a href="extname.html">extname(1)</a></li>
               <li><a href="filehame.html">filehame(1)</a></li>
               <li><a href="formhame.html">formhame(1)</a></li>
+              <li><a href="fsed.html">fsed(1)</a></li>
               <li><a href="getfirst.html">getfirst(1)</a></li>
               <li><a href="getlast.html">getlast(1)</a></li>
               <li><a href="gyo.html">gyo(1)</a></li>
+              <li><a href="haba.html">haba(1)</a></li>
               <li><a href="han.html">han(1)</a></li>
+              <li><a href="isdate.html">isdate(1)</a></li>
+              <li><a href="itouch.html">itouch(1)</a></li>
               <li><a href="join0.html">join0(1)</a></li>
               <li><a href="join1.html">join1(1)</a></li>
+              <li><a href="join1x.html">join1x(1)</a></li>
               <li><a href="join2.html">join2(1)</a></li>
+              <li><a href="join2x.html">join2x(1)</a></li>
               <li><a href="juni.html">juni(1)</a></li>
               <li><a href="kasan.html">kasan(1)</a></li>
               <li><a href="keta.html">keta(1)</a></li>
               <li><a href="keycut.html">keycut(1)</a></li>
               <li><a href="loopj.html">loopj(1)</a></li>
               <li><a href="loopx.html">loopx(1)</a></li>
+              <li><a href="maezero.html">maezero(1)</a></li>
+              <li><a href="man2.html">man2(1)</a></li>
               <li><a href="map.html">map(1)</a></li>
               <li><a href="marume.html">marume(1)</a></li>
               <li><a href="mdate.html">mdate(1)</a></li>
               <li><a href="mime-read.html">mime-read(1)</a></li>
               <li><a href="mojihame.html">mojihame(1)</a></li>
+              <li><a href="msort.html">msort(1)</a></li>
               <li><a href="nameread.html">nameread(1)</a></li>
+              <li><a href="numchar.html">numchar(1)</a></li>
               <li><a href="plus.html">plus(1)</a></li>
               <li><a href="rank.html">rank(1)</a></li>
               <li><a href="ratio.html">ratio(1)</a></li>
               <li><a href="retu.html">retu(1)</a></li>
+              <li><a href="rjson.html">rjson(1)</a></li>
               <li><a href="self.html">self(1)</a></li>
+              <li><a href="selr.html">selr(1)</a></li>
               <li><a href="sm2.html">sm2(1)</a></li>
               <li><a href="sm4.html">sm4(1)</a></li>
               <li><a href="sm5.html">sm5(1)</a></li>
               <li><a href="tarr.html">tarr(1)</a></li>
               <li><a href="tateyoko.html">tateyoko(1)</a></li>
               <li><a href="tcat.html">tcat(1)</a></li>
+              <li><a href="uconv.html">uconv(1)</a></li>
+              <li><a href="ulock.html">ulock(1)</a></li>
               <li><a href="unmap.html">unmap(1)</a></li>
               <li><a href="up3.html">up3(1)</a></li>
+              <li><a href="xmldir.html">xmldir(1)</a></li>
               <li><a href="yarr.html">yarr(1)</a></li>
               <li><a href="ycat.html">ycat(1)</a></li>
               <li><a href="yobi.html">yobi(1)</a></li>
               <li><a href="ysum.html">ysum(1)</a></li>
               <li><a href="zen.html">zen(1)</a></li>
-              <li class="separator"><hr/></li>
-              <li class="separator"><hr/></li>
-              <li class="separator"><hr/></li>
+              <li></li>
+
+              <li class="separator"><hr></li>
+              <li class="separator"><hr></li>
+              <li class="separator"><hr></li>
               <li><a href="tag-format.html">タグ形式(5)</a></li>
               <li><a href="name-format.html">ネーム形式(5)</a></li>
               <li><a href="field-format.html">フィールド形式(5)</a></li>
               <li><a href="master-file.html">マスタファイル(5)</a></li>
               <li><a href="name-file.html">ネームファイル(5)</a></li>
-              <li><a href="transaction-file.html" class="target">トランザクションファイル(5)</a></li>
+              <li><a href="transaction-file.html">トランザクションファイル(5)</a></li>
             </ul> 
           </li>
         </ul>
@@ -99,30 +128,23 @@
     <div id="main">
       <h1>Tukubaiオンラインコマンドマニュアル</h1>
 
-      <h2>keycut(1)</h2>
+<h2>keycut(1)</h2>
+<h3>【名前】</h3>
+<p><code>keycut</code> :  キーでファイルを分割</p>
+<h3>【書式】</h3>
+<pre class="list">Usage   : keycut [options] &lt;filename&gt; &lt;file&gt;
+Options : -d : キーの削除
+        : -a : ファイル追記
+        : -z : 圧縮
+Version : Thu Jul 28 14:56:55 JST 2022
+Edition : 1
 
-      <h3>【名前】</h3>
-
-      <p>keycut : キーでファイルを分割</p>
-
-      <h3>【書式】</h3>
-
-      <pre class="list">Usage	: keycut [options] &lt;filename&gt; &lt;file&gt;
-Options	: -d : キーの削除
-	: -a : ファイル追記
-	: -z : 圧縮
-Version	: Thu Dec 15 13:46:38 JST 2011
-(Version: zlib-1.2.3 )</pre>
-
-      <h3>【説明】</h3>
-
-      <p>&lt;file&gt;を読み込み、分割先ファイル名&lt;filename&gt;で指定したキーフィールドの値が同一の行でファイルを分割する。例えば、第2フィールドが同じ値を持つ行でファイルを分割したいときは、data.%2のように&lt;filename&gt;を指定する。この時、分割先ファイル名はdata.(第2フィールドの値)となる。</p>
-
-      <p>なお、keycutを使用する場合にはキーフィールドの値は事前に整列されている必要がある(内部的にはキーフィールドが変化したところでファイルに出力している)。&lt;filename&gt;におけるキーフィールドは%(フィールド番号)と指定するが、%5.2 %5.1.3のようにサブストリング指定も可能である。</p>
-
-      <h3>【例1】基本的な使用方法</h3>
-
-      <pre class="prettyprint">$ cat data
+</pre>
+<h3>【説明】</h3>
+<p><code>&lt;file&gt;</code>を読み込み、分割先ファイル名<code>&lt;filename&gt;</code>で指定したキーフィールドの値が同一の行でファイルを分割する。例えば、第2フィールドが同じ値を持つ行でファイルを分割したいときは、data.%2のように<code>&lt;filename&gt;</code>を指定する。この時、分割先ファイル名はdata.(第2フィールドの値)となる。</p>
+<p>なお、<code>keycut</code>を使用する場合にはキーフィールドの値は事前に整列されている必要がある(内部的にはキーフィールドが変化したところでファイルに出力している)。<code>&lt;filename&gt;</code>におけるキーフィールドは%(フィールド番号)と指定するが、%5.2 %5.1.3のようにサブストリング指定も可能である。</p>
+<h3>【例1】基本的な使用方法</h3>
+<pre class="prettyprint">$ cat data
 01 埼玉県 03 熊谷市 82 0 23 84 10
 01 埼玉県 01 さいたま市 91 59 20 76 54
 02 東京都 04 新宿区 30 50 71 36 30
@@ -131,124 +153,108 @@ Version	: Thu Dec 15 13:46:38 JST 2011
 03 千葉県 12 柏市 95 60 35 93 76
 04 神奈川県 13 横浜市 92 56 83 96 75
 04 神奈川県 16 小田原市 45 21 24 39 03
-$ </pre>
-
-      <pre class="prettyprint">$ keycut data.%1 data</pre>
-
-      <pre class="prettyprint">$ ls -l data.*
--rw-r--r-- 1 usp usp 87 2009-02-19 11:14 data.01	←4つのファイルに分割
+$
+</pre>
+<pre class="prettyprint">$ keycut data.%1 data
+</pre>
+<pre class="prettyprint">$ ls -l data.*
+-rw-r--r-- 1 usp usp 87 2009-02-19 11:14 data.01        ←4つのファイルに分割
 -rw-r--r-- 1 usp usp 82 2009-02-19 11:14 data.02
 -rw-r--r-- 1 usp usp 77 2009-02-19 11:14 data.03
 -rw-r--r-- 1 usp usp 91 2009-02-19 11:14 data.04
-$ </pre>
-
-      <pre class="prettyprint">$ cat data.01
+$
+</pre>
+<pre class="prettyprint">$ cat data.01
 01 埼玉県 03 熊谷市 82 0 23 84 10
 01 埼玉県 01 さいたま市 91 59 20 76 54
-$ </pre>
-
-      <pre class="prettyprint">$ cat data.02
+$
+</pre>
+<pre class="prettyprint">$ cat data.02
 02 東京都 04 新宿区 30 50 71 36 30
 02 東京都 05 中央区 78 13 44 28 51
-$ </pre>
-
-      <pre class="prettyprint">$ cat data.03
+$
+</pre>
+<pre class="prettyprint">$ cat data.03
 03 千葉県 10 千葉市 52 91 44 9 0
 03 千葉県 12 柏市 95 60 35 93 76
-$ </pre>
-
-      <pre class="prettyprint">$ cat data.04
+$
+</pre>
+<pre class="prettyprint">$ cat data.04
 04 神奈川県 13 横浜市 92 56 83 96 75
 04 神奈川県 16 小田原市 45 21 24 39 03
-$ </pre>
-
-      <h3>【例2】サブストリング指定</h3>
-
-      <pre class="prettyprint">$ keycut data.%1.2.1 data</pre>
-
-      <pre class="prettyprint">$ ls -l data.*
+$
+</pre>
+<h3>【例2】サブストリング指定</h3>
+<pre class="prettyprint">$ keycut data.%1.2.1 data
+</pre>
+<pre class="prettyprint">$ ls -l data.*
 -rw-r--r-- 1 usp usp 87 2009-02-19 11:15 data.1
 -rw-r--r-- 1 usp usp 82 2009-02-19 11:15 data.2
 -rw-r--r-- 1 usp usp 77 2009-02-19 11:15 data.3
 -rw-r--r-- 1 usp usp 91 2009-02-19 11:15 data.4
-$ </pre>
-
-      <h3>【例3】-aオプション使用例</h3>
-
-      <p>-aオプションを指定すると分割先ファイルは追記されるようになる。分割先ファイルがないときは新たに作成される。このオプションを指定しない場合にはファイルは上書きとなる。</p>
-
-      <pre class="prettyprint">$ keycut data.%1 data</pre>
-
-      <pre class="prettyprint">$ keycut -a data.%1 data</pre>
-
-      <pre class="prettyprint">$ ls -l data.*
+$
+</pre>
+<h3>【例3】-aオプション使用例</h3>
+<p><code>-a</code>オプションを指定すると分割先ファイルは追記されるようになる。分割先ファイルがないときは新たに作成される。このオプションを指定しない場合にはファイルは上書きとなる。</p>
+<pre class="prettyprint">$ keycut data.%1 data
+</pre>
+<pre class="prettyprint">$ keycut -a data.%1 data
+</pre>
+<pre class="prettyprint">$ ls -l data.*
 -rw-r--r-- 1 usp usp 174 2009-02-19 11:16 data.01
 -rw-r--r-- 1 usp usp 164 2009-02-19 11:16 data.02
 -rw-r--r-- 1 usp usp 154 2009-02-19 11:16 data.03
 -rw-r--r-- 1 usp usp 182 2009-02-19 11:16 data.04
-$ </pre>
-
-      <pre class="prettyprint">$ cat data.01
+$
+</pre>
+<pre class="prettyprint">$ cat data.01
 01 埼玉県 03 熊谷市 82 0 23 84 10
 01 埼玉県 01 さいたま市 91 59 20 76 54
 01 埼玉県 03 熊谷市 82 0 23 84 10
 01 埼玉県 01 さいたま市 91 59 20 76 54
-$ </pre>
-
-      <h3>【例4】-dオプション使用例</h3>
-
-      <p>-dオプションを指定すると、キーフィールドを除いた行を分割先ファイルに作成するようになる。キーフィールド指定が%1.2.1等のサブストリング指定であっても、キーフィールド全体(この例だと第1フィールド全体)が取り除かれる。</p>
-
-      <pre class="prettyprint">$ keycut -d data.%1 data</pre>
-
-      <pre class="prettyprint">$ ls -l data.*
+$
+</pre>
+<h3>【例4】-dオプション使用例</h3>
+<p><code>-d</code>オプションを指定すると、キーフィールドを除いた行を分割先ファイルに作成するようになる。キーフィールド指定が%1.2.1等のサブストリング指定であっても、キーフィールド全体(この例だと第1フィールド全体)が取り除かれる。</p>
+<pre class="prettyprint">$ keycut -d data.%1 data
+</pre>
+<pre class="prettyprint">$ ls -l data.*
 -rw-r--r-- 1 usp usp 81 2009-02-19 13:13 data.01
 -rw-r--r-- 1 usp usp 76 2009-02-19 13:13 data.02
 -rw-r--r-- 1 usp usp 71 2009-02-19 13:13 data.03
 -rw-r--r-- 1 usp usp 85 2009-02-19 13:13 data.04
-$ </pre>
-
-      <pre class="prettyprint">$ cat data.01
+$
+</pre>
+<pre class="prettyprint">$ cat data.01
 埼玉県 03 熊谷市 82 0 23 84 10
 埼玉県 01 さいたま市 91 59 20 76 54
-$ </pre>
-
-      <h3>【例5】-zオプション使用例</h3>
-
-      <p>-zオプションを指定すると、出力ファイルがGzip圧縮形式になる。</p>
-
-      <pre class="prettyprint">$ keycut -z data.%1.gz data</pre>
-
-      <pre class="prettyprint">$ ls -l data.*
+$
+</pre>
+<h3>【例5】-zオプション使用例</h3>
+<p><code>-z</code>オプションを指定すると、出力ファイルがGzip圧縮形式になる。</p>
+<pre class="prettyprint">$ keycut -z data.%1.gz data
+</pre>
+<pre class="prettyprint">$ ls -l data.*
 -rw-r--r-- 1 usp usp  98 2009-02-19 13:17 data.01.gz
 -rw-r--r-- 1 usp usp  94 2009-02-19 13:17 data.02.gz
 -rw-r--r-- 1 usp usp  82 2009-02-19 13:17 data.03.gz
 -rw-r--r-- 1 usp usp 100 2009-02-19 13:17 data.04.gz
-$ </pre>
-
-      <pre class="prettyprint">$ gunzip &lt; data.01.gz
+$
+</pre>
+<pre class="prettyprint">$ gunzip &lt; data.01.gz
 01 埼玉県 03 熊谷市 82 0 23 84 10
 01 埼玉県 01 さいたま市 91 59 20 76 54
-$ </pre>
-
-      <h3>【備考1】</h3>
-
-      <p>keycut.cはzlibライブラリを使用している。コンパイル時は次のようにオプションが必要。</p>
-
-      <pre class="prettyprint">$ cckeycut.c -lz -o /home/TOOLkeycut</pre>
-
-      <h3>【備考2】</h3>
-
-      <p>-aオプションと-zオプションを併用したときは、すでに存在する圧縮ファイルに圧縮ファイルが追記される。生成されるファイルはgunzip(1)コマンドで展開できるが、仕様的に正しい動作はどうかは未調査。</p>
-
-      <h3>【関連項目】</h3>
-
-      <p><a href="sorter.html">sorter(1)</a>、<a href="master-file.html">マスタファイル(5)</a>、<a href="transaction-file.html">トランザクションファイル(5)</a></p>
+$
+</pre>
+<h3>【備考】</h3>
+<p><code>-a</code>オプションと-zオプションを併用したときは、すでに存在する圧縮ファイルに圧縮ファイルが追記される。生成されるファイルは<a href="https://linuxjm.osdn.jp/html/GNU_gzip/man1/zcat.1.html">gunzip(1)</a>コマンドで展開できるが、仕様的に正しい動作はどうかは未調査。</p>
+<h3>【関連項目】</h3>
+<p><a href="sorter.html" class="command">sorter(1)</a>、<a href="master-file.html" class="command">マスタファイル(5)</a>、<a href="transaction-file.html" class="command">トランザクションファイル(5)</a></p>
     </div>
 
-    <div id="lastmodified">last modified: 2014-29-27 17:02:27</div>
+    <div id="lastmodified">Last modified: Thu Aug 11 13:19:05 JST 2022</div>
 
-    <div id="footer">Contact us: uecinfo@usp-lab.com<br/>Copyright (c) 2012,2013 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
+    <div id="footer">Contact us: uecinfo@usp-lab.com<br>Copyright &copy; 2012-2022 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
   </div>
 </body>
 </html>
