--- a/MANUALHTML/marume.html
+++ b/MANUALHTML/marume.html
@@ -1,20 +1,19 @@
-<!doctype html>
-
+<!DOCTYPE html>
 <html lang="ja">
 <head>
   <meta charset="utf-8">
-  <title>UEC - usp engineers' community - Tukubaiオンラインコマンドマニュアル</title>
-  <link rel="stylesheet" href="COMMON/CSS/MAIN.CSS" />
-  <link rel="stylesheet" href="COMMON/CSS/MENU.CSS" />
-  <link rel="stylesheet" href="COMMON/CSS/PRINT.CSS" />
+  <title>marume - UEC - usp engineers' community - Tukubaiオンラインコマンドマニュアル</title>
+  <link rel="stylesheet" href="COMMON/CSS/MAIN.CSS">
+  <link rel="stylesheet" href="COMMON/CSS/MENU.CSS">
+  <link rel="stylesheet" href="COMMON/CSS/PRINT.CSS">
   <!--[if lte IE 8]>
-  <link rel="stylesheet" href="COMMON/CSS/IE67HACK.CSS" />
+  <link rel="stylesheet" href="COMMON/CSS/IE67HACK.CSS">
   <![endif]-->
   <!--[if IE 7]>
-  <link rel="stylesheet" href="COMMON/CSS/IE7HACK.CSS" />
+  <link rel="stylesheet" href="COMMON/CSS/IE7HACK.CSS">
   <![endif]-->
   <!--[if IE 6]>
-  <link rel="stylesheet" href="COMMON/CSS/IE6HACK.CSS" />
+  <link rel="stylesheet" href="COMMON/CSS/IE6HACK.CSS">
   <![endif]-->
   <script src="COMMON/JS/MENU.JS"></script>
 </head>
@@ -22,74 +21,104 @@
   <div id="container">
     <div id="header">
       <div id="logo">
-        <img id="logoimage" src="COMMON/IMG/TUKUBAI_LOGO.JPG" />
+        <img id="logoimage" src="COMMON/IMG/TUKUBAI_LOGO.JPG">
       </div>
       <div id="title">
         <p id="slogan"></p>
         <ul id="megamenu">
           <li id="tukubai_man"><a href="index.html" class="target">Tukubaiマニュアル</a>
             <ul>
+              <li><a href="1bai.html">1bai(1)</a></li>
+              <li><a href="block_getlast.html">block_getlast(1)</a></li>
               <li><a href="calclock.html">calclock(1)</a></li>
+              <li><a href="calsed.html">calsed(1)</a></li>
+              <li><a href="cap.html">cap(1)</a></li>
               <li><a href="cgi-name.html">cgi-name(1)</a></li>
               <li><a href="check_attr_name.html">check_attr_name(1)</a></li>
+              <li><a href="check_cmp_name.html">check_cmp_name(1)</a></li>
+              <li><a href="check_date_name.html">check_date_name(1)</a></li>
+              <li><a href="check_dble_name.html">check_dble_name(1)</a></li>
+              <li><a href="check_inlist_name.html">check_inlist_name(1)</a></li>
               <li><a href="check_need_name.html">check_need_name(1)</a></li>
               <li><a href="cjoin0.html">cjoin0(1)</a></li>
               <li><a href="cjoin1.html">cjoin1(1)</a></li>
+              <li><a href="cjoin1x.html">cjoin1x(1)</a></li>
               <li><a href="cjoin2.html">cjoin2(1)</a></li>
+              <li><a href="cjoin2x.html">cjoin2x(1)</a></li>
               <li><a href="comma.html">comma(1)</a></li>
               <li><a href="count.html">count(1)</a></li>
               <li><a href="ctail.html">ctail(1)</a></li>
               <li><a href="dayslash.html">dayslash(1)</a></li>
               <li><a href="delf.html">delf(1)</a></li>
+              <li><a href="delr.html">delr(1)</a></li>
               <li><a href="divsen.html">divsen(1)</a></li>
+              <li><a href="exist.html">exist(1)</a></li>
+              <li><a href="extname.html">extname(1)</a></li>
               <li><a href="filehame.html">filehame(1)</a></li>
               <li><a href="formhame.html">formhame(1)</a></li>
+              <li><a href="fsed.html">fsed(1)</a></li>
               <li><a href="getfirst.html">getfirst(1)</a></li>
               <li><a href="getlast.html">getlast(1)</a></li>
               <li><a href="gyo.html">gyo(1)</a></li>
+              <li><a href="haba.html">haba(1)</a></li>
               <li><a href="han.html">han(1)</a></li>
+              <li><a href="isdate.html">isdate(1)</a></li>
+              <li><a href="itouch.html">itouch(1)</a></li>
               <li><a href="join0.html">join0(1)</a></li>
               <li><a href="join1.html">join1(1)</a></li>
+              <li><a href="join1x.html">join1x(1)</a></li>
               <li><a href="join2.html">join2(1)</a></li>
+              <li><a href="join2x.html">join2x(1)</a></li>
               <li><a href="juni.html">juni(1)</a></li>
               <li><a href="kasan.html">kasan(1)</a></li>
               <li><a href="keta.html">keta(1)</a></li>
               <li><a href="keycut.html">keycut(1)</a></li>
               <li><a href="loopj.html">loopj(1)</a></li>
               <li><a href="loopx.html">loopx(1)</a></li>
+              <li><a href="maezero.html">maezero(1)</a></li>
+              <li><a href="man2.html">man2(1)</a></li>
               <li><a href="map.html">map(1)</a></li>
               <li><a href="marume.html">marume(1)</a></li>
               <li><a href="mdate.html">mdate(1)</a></li>
               <li><a href="mime-read.html">mime-read(1)</a></li>
               <li><a href="mojihame.html">mojihame(1)</a></li>
+              <li><a href="msort.html">msort(1)</a></li>
               <li><a href="nameread.html">nameread(1)</a></li>
+              <li><a href="numchar.html">numchar(1)</a></li>
               <li><a href="plus.html">plus(1)</a></li>
               <li><a href="rank.html">rank(1)</a></li>
               <li><a href="ratio.html">ratio(1)</a></li>
               <li><a href="retu.html">retu(1)</a></li>
+              <li><a href="rjson.html">rjson(1)</a></li>
               <li><a href="self.html">self(1)</a></li>
+              <li><a href="selr.html">selr(1)</a></li>
               <li><a href="sm2.html">sm2(1)</a></li>
               <li><a href="sm4.html">sm4(1)</a></li>
               <li><a href="sm5.html">sm5(1)</a></li>
               <li><a href="tarr.html">tarr(1)</a></li>
               <li><a href="tateyoko.html">tateyoko(1)</a></li>
               <li><a href="tcat.html">tcat(1)</a></li>
+              <li><a href="uconv.html">uconv(1)</a></li>
+              <li><a href="ulock.html">ulock(1)</a></li>
               <li><a href="unmap.html">unmap(1)</a></li>
               <li><a href="up3.html">up3(1)</a></li>
+              <li><a href="xmldir.html">xmldir(1)</a></li>
               <li><a href="yarr.html">yarr(1)</a></li>
               <li><a href="ycat.html">ycat(1)</a></li>
               <li><a href="yobi.html">yobi(1)</a></li>
               <li><a href="ysum.html">ysum(1)</a></li>
               <li><a href="zen.html">zen(1)</a></li>
-              <li class="separator"><hr/></li>
-              <li class="separator"><hr/></li>
-              <li class="separator"><hr/></li>
+              <li></li>
+
+              <li class="separator"><hr></li>
+              <li class="separator"><hr></li>
+              <li class="separator"><hr></li>
               <li><a href="tag-format.html">タグ形式(5)</a></li>
               <li><a href="name-format.html">ネーム形式(5)</a></li>
               <li><a href="field-format.html">フィールド形式(5)</a></li>
               <li><a href="master-file.html">マスタファイル(5)</a></li>
               <li><a href="name-file.html">ネームファイル(5)</a></li>
-              <li><a href="transaction-file.html" class="target">トランザクションファイル(5)</a></li>
+              <li><a href="transaction-file.html">トランザクションファイル(5)</a></li>
             </ul> 
           </li>
         </ul>
@@ -99,75 +128,60 @@
     <div id="main">
       <h1>Tukubaiオンラインコマンドマニュアル</h1>
 
-      <h2>marume(1)</h2>
+<h2>marume(1)</h2>
+<h3>【名前】</h3>
+<p><code>marume</code> :  四捨五入、切り上げ、切り捨て</p>
+<h3>【書式】</h3>
+<pre class="list">Usage   : marume [+age| -sage] &lt;f1.d1&gt; &lt;f2.d2&gt; .. &lt;file&gt;
+Version : Sun Apr 19 23:32:18 JST 2020
+Edition : 1
 
-      <h3>【名前】</h3>
-
-      <p>marume : 四捨五入、切り上げ、切り捨て</p>
-
-      <h3>【書式】</h3>
-
-      <pre class="list">Usage	: marume [+age| -sage] &lt;f1.d1&gt; &lt;f2.d2&gt; .. &lt;file&gt;
-Version	: Thu Dec 15 13:46:38 JST 2011</pre>
-
-      <h3>【説明】</h3>
-
-      <p>引数のファイルまたは標準入力のテキストデータの指定のフィールドを、指定された桁数にて四捨五入、切り上げ、切り捨てを実行して出力する。デフォルトの動作は四捨五入。+ageで切り上げ、-sageで切り下げを明示的に指定できる。小数点下に0を指定(n.0)すると該当フィールドを整数で出力する。また、桁数を0+桁数にすると、整数部の桁数以下を四捨五入、切り上げ、切り捨てする。</p>
-
-      <h3>【例1】</h3>
-
-      <pre class="prettyprint">$ cat data
+</pre>
+<h3>【説明】</h3>
+<p>引数のファイルまたは標準入力のテキストデータの指定のフィールドを、指定された桁数にて四捨五入、切り上げ、切り捨てを実行して出力する。デフォルトの動作は四捨五入。<code>+age</code>で切り上げ、<code>-sage</code>で切り下げを明示的に指定できる。小数点下に0を指定(n.0)すると該当フィールドを整数で出力する。また、桁数を0+桁数にすると、整数部の桁数以下を四捨五入、切り上げ、切り捨てする。</p>
+<h3>【例1】</h3>
+<pre class="prettyprint">$ cat data
 01 0.3418 1.5283 9.0023 7.1234 1234
 02 3.1242 7.1423 6.5861 2.7735 1235
 03 6.8254 2.6144 4.3234 3.4231 -1234
 04 7.0343 3.3312 7.8678 1.3295 -1235
-$ </pre>
-
-      <p>第2フィールドを整数へ四捨五入、第3フィールドを小数点下1桁で四捨五入、第4フィールドを小数点下2桁で四捨五入、第5フィールドを小数点下3桁で四捨五入、第6フィールドを1の位で四捨五入して出力すると次のようになる。</p>
-
-      <pre class="prettyprint">$ marume 2.0 3.1 4.2 5.3 6.01 data
+$
+</pre>
+<p>第2フィールドを整数へ四捨五入、第3フィールドを小数点下1桁で四捨五入、第4フィールドを小数点下2桁で四捨五入、第5フィールドを小数点下3桁で四捨五入、第6フィールドを1の位で四捨五入して出力すると次のようになる。</p>
+<pre class="prettyprint">$ marume 2.0 3.1 4.2 5.3 6.01 data
 01 0 1.5 9.00 7.123 1230
 02 3 7.1 6.59 2.774 1240
 03 7 2.6 4.32 3.423 -1230
 04 7 3.3 7.87 1.330 -1240
-$ </pre>
-
-      <h3>【例2】</h3>
-
-      <p>例1をすべて四捨五入から切る上げに変更すると次のようになる。</p>
-
-      <pre class="prettyprint">$ marume +age 2.0 3.1 4.2 5.3 6.01 data
+$
+</pre>
+<h3>【例2】</h3>
+<p>例1をすべて四捨五入から切る上げに変更すると次のようになる。</p>
+<pre class="prettyprint">$ marume +age 2.0 3.1 4.2 5.3 6.01 data
 01 1 1.6 9.01 7.124 1240
 02 4 7.2 6.59 2.774 1240
 03 7 2.7 4.33 3.424 -1240
 04 8 3.4 7.87 1.330 -1240
-$ </pre>
-
-      <h3>【例3】</h3>
-
-      <p>例1をすべて四捨五入から切り下げに変更すると次のようになる。</p>
-
-      <pre class="prettyprint">$ marume -sage 2.0 3.1 4.2 5.3 6.01 data
+$
+</pre>
+<h3>【例3】</h3>
+<p>例1をすべて四捨五入から切り下げに変更すると次のようになる。</p>
+<pre class="prettyprint">$ marume -sage 2.0 3.1 4.2 5.3 6.01 data
 01 0 1.5 9.00 7.123 1230
 02 3 7.1 6.58 2.773 1230
 03 6 2.6 4.32 3.423 -1230
 04 7 3.3 7.86 1.329 -1230
-$ </pre>
-
-      <h3>【注意】</h3>
-
-      <p>負数は正数を四捨五入、切り上げ、切り捨てしたものにマイナス符号をつけた値となる。</p>
-
-      <h3>【関連項目】</h3>
-
-      <p><a href="divsen.html">divsen(1)</a></p>
-
-
+$
+</pre>
+<h3>【注意】</h3>
+<p>負数は正数を四捨五入、切り上げ、切り捨てしたものにマイナス符号をつけた値となる。</p>
+<h3>【関連項目】</h3>
+<p><a href="divsen.html" class="command">divsen(1)</a></p>
     </div>
 
-    <div id="lastmodified">last modified: 2014-08-13 16:01:13</div>
+    <div id="lastmodified">Last modified: Fri Jul 15 15:42:38 JST 2022</div>
 
-    <div id="footer">Contact us: uecinfo@usp-lab.com<br/>Copyright (c) 2012,2013 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
+    <div id="footer">Contact us: uecinfo@usp-lab.com<br>Copyright &copy; 2012-2022 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
   </div>
 </body>
 </html>
