--- a/MANUALHTML/mdate.html
+++ b/MANUALHTML/mdate.html
@@ -1,20 +1,19 @@
-<!doctype html>
-
+<!DOCTYPE html>
 <html lang="ja">
 <head>
   <meta charset="utf-8">
-  <title>UEC - usp engineers' community - Tukubaiオンラインコマンドマニュアル</title>
-  <link rel="stylesheet" href="COMMON/CSS/MAIN.CSS" />
-  <link rel="stylesheet" href="COMMON/CSS/MENU.CSS" />
-  <link rel="stylesheet" href="COMMON/CSS/PRINT.CSS" />
+  <title>mdate - UEC - usp engineers' community - Tukubaiオンラインコマンドマニュアル</title>
+  <link rel="stylesheet" href="COMMON/CSS/MAIN.CSS">
+  <link rel="stylesheet" href="COMMON/CSS/MENU.CSS">
+  <link rel="stylesheet" href="COMMON/CSS/PRINT.CSS">
   <!--[if lte IE 8]>
-  <link rel="stylesheet" href="COMMON/CSS/IE67HACK.CSS" />
+  <link rel="stylesheet" href="COMMON/CSS/IE67HACK.CSS">
   <![endif]-->
   <!--[if IE 7]>
-  <link rel="stylesheet" href="COMMON/CSS/IE7HACK.CSS" />
+  <link rel="stylesheet" href="COMMON/CSS/IE7HACK.CSS">
   <![endif]-->
   <!--[if IE 6]>
-  <link rel="stylesheet" href="COMMON/CSS/IE6HACK.CSS" />
+  <link rel="stylesheet" href="COMMON/CSS/IE6HACK.CSS">
   <![endif]-->
   <script src="COMMON/JS/MENU.JS"></script>
 </head>
@@ -22,74 +21,104 @@
   <div id="container">
     <div id="header">
       <div id="logo">
-        <img id="logoimage" src="COMMON/IMG/TUKUBAI_LOGO.JPG" />
+        <img id="logoimage" src="COMMON/IMG/TUKUBAI_LOGO.JPG">
       </div>
       <div id="title">
         <p id="slogan"></p>
         <ul id="megamenu">
           <li id="tukubai_man"><a href="index.html" class="target">Tukubaiマニュアル</a>
             <ul>
+              <li><a href="1bai.html">1bai(1)</a></li>
+              <li><a href="block_getlast.html">block_getlast(1)</a></li>
               <li><a href="calclock.html">calclock(1)</a></li>
+              <li><a href="calsed.html">calsed(1)</a></li>
+              <li><a href="cap.html">cap(1)</a></li>
               <li><a href="cgi-name.html">cgi-name(1)</a></li>
               <li><a href="check_attr_name.html">check_attr_name(1)</a></li>
+              <li><a href="check_cmp_name.html">check_cmp_name(1)</a></li>
+              <li><a href="check_date_name.html">check_date_name(1)</a></li>
+              <li><a href="check_dble_name.html">check_dble_name(1)</a></li>
+              <li><a href="check_inlist_name.html">check_inlist_name(1)</a></li>
               <li><a href="check_need_name.html">check_need_name(1)</a></li>
               <li><a href="cjoin0.html">cjoin0(1)</a></li>
               <li><a href="cjoin1.html">cjoin1(1)</a></li>
+              <li><a href="cjoin1x.html">cjoin1x(1)</a></li>
               <li><a href="cjoin2.html">cjoin2(1)</a></li>
+              <li><a href="cjoin2x.html">cjoin2x(1)</a></li>
               <li><a href="comma.html">comma(1)</a></li>
               <li><a href="count.html">count(1)</a></li>
               <li><a href="ctail.html">ctail(1)</a></li>
               <li><a href="dayslash.html">dayslash(1)</a></li>
               <li><a href="delf.html">delf(1)</a></li>
+              <li><a href="delr.html">delr(1)</a></li>
               <li><a href="divsen.html">divsen(1)</a></li>
+              <li><a href="exist.html">exist(1)</a></li>
+              <li><a href="extname.html">extname(1)</a></li>
               <li><a href="filehame.html">filehame(1)</a></li>
               <li><a href="formhame.html">formhame(1)</a></li>
+              <li><a href="fsed.html">fsed(1)</a></li>
               <li><a href="getfirst.html">getfirst(1)</a></li>
               <li><a href="getlast.html">getlast(1)</a></li>
               <li><a href="gyo.html">gyo(1)</a></li>
+              <li><a href="haba.html">haba(1)</a></li>
               <li><a href="han.html">han(1)</a></li>
+              <li><a href="isdate.html">isdate(1)</a></li>
+              <li><a href="itouch.html">itouch(1)</a></li>
               <li><a href="join0.html">join0(1)</a></li>
               <li><a href="join1.html">join1(1)</a></li>
+              <li><a href="join1x.html">join1x(1)</a></li>
               <li><a href="join2.html">join2(1)</a></li>
+              <li><a href="join2x.html">join2x(1)</a></li>
               <li><a href="juni.html">juni(1)</a></li>
               <li><a href="kasan.html">kasan(1)</a></li>
               <li><a href="keta.html">keta(1)</a></li>
               <li><a href="keycut.html">keycut(1)</a></li>
               <li><a href="loopj.html">loopj(1)</a></li>
               <li><a href="loopx.html">loopx(1)</a></li>
+              <li><a href="maezero.html">maezero(1)</a></li>
+              <li><a href="man2.html">man2(1)</a></li>
               <li><a href="map.html">map(1)</a></li>
               <li><a href="marume.html">marume(1)</a></li>
               <li><a href="mdate.html">mdate(1)</a></li>
               <li><a href="mime-read.html">mime-read(1)</a></li>
               <li><a href="mojihame.html">mojihame(1)</a></li>
+              <li><a href="msort.html">msort(1)</a></li>
               <li><a href="nameread.html">nameread(1)</a></li>
+              <li><a href="numchar.html">numchar(1)</a></li>
               <li><a href="plus.html">plus(1)</a></li>
               <li><a href="rank.html">rank(1)</a></li>
               <li><a href="ratio.html">ratio(1)</a></li>
               <li><a href="retu.html">retu(1)</a></li>
+              <li><a href="rjson.html">rjson(1)</a></li>
               <li><a href="self.html">self(1)</a></li>
+              <li><a href="selr.html">selr(1)</a></li>
               <li><a href="sm2.html">sm2(1)</a></li>
               <li><a href="sm4.html">sm4(1)</a></li>
               <li><a href="sm5.html">sm5(1)</a></li>
               <li><a href="tarr.html">tarr(1)</a></li>
               <li><a href="tateyoko.html">tateyoko(1)</a></li>
               <li><a href="tcat.html">tcat(1)</a></li>
+              <li><a href="uconv.html">uconv(1)</a></li>
+              <li><a href="ulock.html">ulock(1)</a></li>
               <li><a href="unmap.html">unmap(1)</a></li>
               <li><a href="up3.html">up3(1)</a></li>
+              <li><a href="xmldir.html">xmldir(1)</a></li>
               <li><a href="yarr.html">yarr(1)</a></li>
               <li><a href="ycat.html">ycat(1)</a></li>
               <li><a href="yobi.html">yobi(1)</a></li>
               <li><a href="ysum.html">ysum(1)</a></li>
               <li><a href="zen.html">zen(1)</a></li>
-              <li class="separator"><hr/></li>
-              <li class="separator"><hr/></li>
-              <li class="separator"><hr/></li>
+              <li></li>
+
+              <li class="separator"><hr></li>
+              <li class="separator"><hr></li>
+              <li class="separator"><hr></li>
               <li><a href="tag-format.html">タグ形式(5)</a></li>
               <li><a href="name-format.html">ネーム形式(5)</a></li>
               <li><a href="field-format.html">フィールド形式(5)</a></li>
               <li><a href="master-file.html">マスタファイル(5)</a></li>
               <li><a href="name-file.html">ネームファイル(5)</a></li>
-              <li><a href="transaction-file.html" class="target">トランザクションファイル(5)</a></li>
+              <li><a href="transaction-file.html">トランザクションファイル(5)</a></li>
             </ul> 
           </li>
         </ul>
@@ -99,148 +128,138 @@
     <div id="main">
       <h1>Tukubaiオンラインコマンドマニュアル</h1>
 
-      <h2>mdate(1)</h2>
-
-      <h3>【名前】</h3>
-
-      <p>mdate : 日付、週、月の処理</p>
-
-      <h3>【書式】</h3>
-
-      <pre class="list">Usage	:
+<h2>mdate(1)</h2>
+<h3>【名前】</h3>
+<p><code>mdate</code> :  日付、週、月の処理</p>
+<h3>【書式】</h3>
+<pre class="list">Usage   :
 
 DIRECT-MODE
-日付	mdate -y &lt;yyyymmdd&gt;			: 曜日
-	mdate -e &lt;yyyywwdd&gt;/±&lt;dif&gt;		: dif 日先までの日付を連続出力
-	mdate -e &lt;yyyymmdd1&gt; &lt;yyyymmdd2&gt;	: 日付の範囲を連続出力
-	mdate &lt;yyyywwdd&gt;/±&lt;dif&gt;			: dif 日先の日付
-	mdate &lt;yyyymmdd1&gt; &lt;yyyymmdd2&gt;		: 日付の差
-	mdate &lt;yyyymm&gt;m/±&lt;dif&gt;			: dif 月先の月
-	mdate -e &lt;yyyymm&gt;m/±&lt;dif&gt;		: dif 月先までの月を連続出力
-	mdate &lt;yyyymm1&gt;m &lt;yyyymm2&gt;m		: 月の差
-	mdate -ly &lt;yyyymm&gt;m			: 前年月
+日付    mdate -y &lt;yyyymmdd&gt;                     : 曜日
+        mdate -e &lt;yyyywwdd&gt;/±&lt;dif&gt;              : dif 日先までの日付を連続出力
+        mdate -e &lt;yyyymmdd1&gt; &lt;yyyymmdd2&gt;        : 日付の範囲を連続出力
+        mdate &lt;yyyywwdd&gt;/±&lt;dif&gt;                 : dif 日先の日付
+        mdate &lt;yyyymmdd1&gt; &lt;yyyymmdd2&gt;           : 日付の差
+        mdate &lt;yyyymm&gt;m/±&lt;dif&gt;                  : dif 月先の月
+        mdate -e &lt;yyyymm&gt;m/±&lt;dif&gt;               : dif 月先までの月を連続出力
+        mdate &lt;yyyymm1&gt;m &lt;yyyymm2&gt;m             : 月の差
+        mdate -ly &lt;yyyymm&gt;m                     : 前年月
 
 FILTER-MODE
-日付	mdate -f -y &lt;f&gt;				: 曜日
-	mdate -f -e &lt;f&gt;/±&lt;dif&gt;			: dif 日先までの日付に展開
-	mdate -f -e &lt;f1&gt; &lt;f2&gt;			: 日付間の展開
-	mdate -f &lt;f&gt;/±&lt;dif&gt;			: dif 日先の日付
-	mdate -f &lt;f1&gt; &lt;f2&gt;			: 日付の差
-	mdate -f &lt;f1&gt; ±&lt;f2&gt;			: 日付の加算
-	mdate -f -e &lt;f1&gt; ±&lt;f2&gt;			: 日付の加算または展開
-	mdate -f -ly &lt;f&gt;			: 前年日
-月次	mdate -f -d &lt;f&gt;m			: 日付を1ヶ月分出力
-	mdate -f &lt;f&gt;m/±&lt;dif&gt;			: dif 月先の月
-	mdate -f -e &lt;f&gt;m ±&lt;dif&gt;			: dif 月先の月まで展開
-	mdate -f &lt;f1&gt;m &lt;f2&gt;m			: 月の差
-	mdate -f -e &lt;f1&gt;m &lt;f2&gt;m			: 月の展開
-	mdate -f &lt;f&gt;m ±&lt;dif&gt;			: 月の加算
-	mdate -f -e &lt;f&gt;m ±&lt;dif&gt;			: 月の加算展開
-	mdate -f -ly &lt;f&gt;m			: 前年月
+日付    mdate -f -y &lt;f&gt;                         : 曜日
+        mdate -f -e &lt;f&gt;/±&lt;dif&gt;                  : dif 日先までの日付に展開
+        mdate -f -e &lt;f1&gt; &lt;f2&gt;                   : 日付間の展開
+        mdate -f &lt;f&gt;/±&lt;dif&gt;                     : dif 日先の日付
+        mdate -f &lt;f1&gt; &lt;f2&gt;                      : 日付の差
+        mdate -f &lt;f1&gt; ±&lt;f2&gt;                     : 日付の加算
+        mdate -f -e &lt;f1&gt; ±&lt;f2&gt;                  : 日付の加算または展開
+        mdate -f -ly &lt;f&gt;                        : 前年日
+月次    mdate -f -d &lt;f&gt;m                        : 日付を1ヶ月分出力
+        mdate -f &lt;f&gt;m/±&lt;dif&gt;                    : dif 月先の月
+        mdate -f -e &lt;f&gt;m ±&lt;dif&gt;                 : dif 月先の月まで展開
+        mdate -f &lt;f1&gt;m &lt;f2&gt;m                    : 月の差
+        mdate -f -e &lt;f1&gt;m &lt;f2&gt;m                 : 月の展開
+        mdate -f &lt;f&gt;m ±&lt;dif&gt;                    : 月の加算
+        mdate -f -e &lt;f&gt;m ±&lt;dif&gt;                 : 月の加算展開
+        mdate -f -ly &lt;f&gt;m                       : 前年月
 
-Version : Wed Dec 28 15:32:10 JST 2011</pre>
+Version : Sat Jun 20 21:57:21 JST 2020
+Edition : 1
 
-      <h3>【例1】dif先の日付、月の情報を出力</h3>
-
-      <pre class="prettyprint">$ mdate 20090912/+5
+</pre>
+<h3>【例1】dif先の日付、月の情報を出力</h3>
+<pre class="prettyprint">$ mdate 20090912/+5
 20090917
-$ </pre>
-
-      <pre class="prettyprint">$ mdate 200909m/+5
+$
+</pre>
+<pre class="prettyprint">$ mdate 200909m/+5
 201002
-$ </pre>
-
-      <h3>【例2】dif先までの連続した日付、月の情報を出力</h3>
-
-      <pre class="prettyprint">$ mdate -e 20090912/+5
+$
+</pre>
+<h3>【例2】dif先までの連続した日付、月の情報を出力</h3>
+<pre class="prettyprint">$ mdate -e 20090912/+5
 20090912 20090913 20090914 20090915 20090916 20090917
-$ </pre>
-
-      <pre class="prettyprint">$ mdate -e 200909m/+5
+$
+</pre>
+<pre class="prettyprint">$ mdate -e 200909m/+5
 200909 200910 200911 200912 201001 201002
-$ </pre>
-
-      <h3>【例3】日付、月の差を出力</h3>
-
-      <pre class="prettyprint">$ mdate 20090917 20090912
+$
+</pre>
+<h3>【例3】日付、月の差を出力</h3>
+<pre class="prettyprint">$ mdate 20090917 20090912
 5
-$ </pre>
-
-      <pre class="prettyprint">$ mdate 201002m 200909m
+$
+</pre>
+<pre class="prettyprint">$ mdate 201002m 200909m
 5
-$ </pre>
-
-      <h3>【例4】日付、月の範囲を連続出力</h3>
-
-      <pre class="prettyprint">$ mdate -e 20090912 20090917
+$
+</pre>
+<h3>【例4】日付、月の範囲を連続出力</h3>
+<pre class="prettyprint">$ mdate -e 20090912 20090917
 20090912 20090913 20090914 20090915 20090916 20090917
-$ </pre>
-
-      <pre class="prettyprint">$ mdate -e 200909m 201002m
+$
+</pre>
+<pre class="prettyprint">$ mdate -e 200909m 201002m
 200909 200910 200911 200912 201001 201002
-$ </pre>
-
-      <h3>【例5】フィルターモード : dif先の日付、月の情報を挿入</h3>
-
-      <pre class="prettyprint">$ cat date_data
+$
+</pre>
+<h3>【例5】フィルターモード : dif先の日付、月の情報を挿入</h3>
+<pre class="prettyprint">$ cat date_data
 A 20090901 B
 A 20090902 B
 A 20090903 B
-$ </pre>
-
-      <pre class="prettyprint">$ mdate -f 2/+5 date_data
+$
+</pre>
+<pre class="prettyprint">$ mdate -f 2/+5 date_data
 A 20090901 20090906 B
 A 20090902 20090907 B
 A 20090903 20090908 B
-$ </pre>
-
-      <pre class="prettyprint">$ cat month_data
+$
+</pre>
+<pre class="prettyprint">$ cat month_data
 A 200909 B
 A 200910 B
 A 200911 B
-$ </pre>
-
-      <pre class="prettyprint">$ mdate -f 2m/+5 month_data
+$
+</pre>
+<pre class="prettyprint">$ mdate -f 2m/+5 month_data
 A 200909 201002 B
 A 200910 201003 B
 A 200911 201004 B
-$ </pre>
-
-      <h3>【例6】フィルターモード : dif先までの連続した日付、週、月の情報を挿入</h3>
-
-      <pre class="prettyprint">$ cat date_data
+$
+</pre>
+<h3>【例6】フィルターモード : dif先までの連続した日付、週、月の情報を挿入</h3>
+<pre class="prettyprint">$ cat date_data
 A 20090901 B
 A 20090902 B
 A 20090903 B
-$ </pre>
-
-      <pre class="prettyprint">$ mdate -f -e 2/+5 date_data
+$
+</pre>
+<pre class="prettyprint">$ mdate -f -e 2/+5 date_data
 A 20090901 20090902 20090903 20090904 20090905 20090906 B
 A 20090902 20090903 20090904 20090905 20090906 20090907 B
 A 20090903 20090904 20090905 20090906 20090907 20090908 B
-$ </pre>
-
-      <pre class="prettyprint">$ cat month_data
+$
+</pre>
+<pre class="prettyprint">$ cat month_data
 A 200909 B
 A 200910 B
 A 200911 B
-$ </pre>
-
-      <pre class="prettyprint">$ mdate -f -e 2m/+5 month_data
+$
+</pre>
+<pre class="prettyprint">$ mdate -f -e 2m/+5 month_data
 A 200909 200910 200911 200912 201001 201002 B
 A 200910 200911 200912 201001 201002 201003 B
 A 200911 200912 201001 201002 201003 201004 B
-$ </pre>
-
-      <h3>【関連項目】</h3>
-
-      <p><a href="calclock.html">calclock(1)</a>、<a href="dayslash.html">dayslash(1)</a>、<a href="yobi.html">yobi(1)</a></p>
-
+$
+</pre>
+<h3>【関連項目】</h3>
+<p><a href="calclock.html" class="command">calclock(1)</a>、<a href="dayslash.html" class="command">dayslash(1)</a>、<a href="yobi.html" class="command">yobi(1)</a></p>
     </div>
 
-    <div id="lastmodified">last modified: 2014-08-13 16:01:13</div>
+    <div id="lastmodified">Last modified: Fri Jul 15 15:42:38 JST 2022</div>
 
-    <div id="footer">Contact us: uecinfo@usp-lab.com<br/>Copyright (c) 2012,2013 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
+    <div id="footer">Contact us: uecinfo@usp-lab.com<br>Copyright &copy; 2012-2022 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
   </div>
 </body>
 </html>
