--- a/MANUALHTML/mojihame.html
+++ b/MANUALHTML/mojihame.html
@@ -1,20 +1,19 @@
-<!doctype html>
-
+<!DOCTYPE html>
 <html lang="ja">
 <head>
   <meta charset="utf-8">
-  <title>UEC - usp engineers' community - Tukubaiオンラインコマンドマニュアル</title>
-  <link rel="stylesheet" href="COMMON/CSS/MAIN.CSS" />
-  <link rel="stylesheet" href="COMMON/CSS/MENU.CSS" />
-  <link rel="stylesheet" href="COMMON/CSS/PRINT.CSS" />
+  <title>mojihame - UEC - usp engineers' community - Tukubaiオンラインコマンドマニュアル</title>
+  <link rel="stylesheet" href="COMMON/CSS/MAIN.CSS">
+  <link rel="stylesheet" href="COMMON/CSS/MENU.CSS">
+  <link rel="stylesheet" href="COMMON/CSS/PRINT.CSS">
   <!--[if lte IE 8]>
-  <link rel="stylesheet" href="COMMON/CSS/IE67HACK.CSS" />
+  <link rel="stylesheet" href="COMMON/CSS/IE67HACK.CSS">
   <![endif]-->
   <!--[if IE 7]>
-  <link rel="stylesheet" href="COMMON/CSS/IE7HACK.CSS" />
+  <link rel="stylesheet" href="COMMON/CSS/IE7HACK.CSS">
   <![endif]-->
   <!--[if IE 6]>
-  <link rel="stylesheet" href="COMMON/CSS/IE6HACK.CSS" />
+  <link rel="stylesheet" href="COMMON/CSS/IE6HACK.CSS">
   <![endif]-->
   <script src="COMMON/JS/MENU.JS"></script>
 </head>
@@ -22,74 +21,104 @@
   <div id="container">
     <div id="header">
       <div id="logo">
-        <img id="logoimage" src="COMMON/IMG/TUKUBAI_LOGO.JPG" />
+        <img id="logoimage" src="COMMON/IMG/TUKUBAI_LOGO.JPG">
       </div>
       <div id="title">
         <p id="slogan"></p>
         <ul id="megamenu">
           <li id="tukubai_man"><a href="index.html" class="target">Tukubaiマニュアル</a>
             <ul>
+              <li><a href="1bai.html">1bai(1)</a></li>
+              <li><a href="block_getlast.html">block_getlast(1)</a></li>
               <li><a href="calclock.html">calclock(1)</a></li>
+              <li><a href="calsed.html">calsed(1)</a></li>
+              <li><a href="cap.html">cap(1)</a></li>
               <li><a href="cgi-name.html">cgi-name(1)</a></li>
               <li><a href="check_attr_name.html">check_attr_name(1)</a></li>
+              <li><a href="check_cmp_name.html">check_cmp_name(1)</a></li>
+              <li><a href="check_date_name.html">check_date_name(1)</a></li>
+              <li><a href="check_dble_name.html">check_dble_name(1)</a></li>
+              <li><a href="check_inlist_name.html">check_inlist_name(1)</a></li>
               <li><a href="check_need_name.html">check_need_name(1)</a></li>
               <li><a href="cjoin0.html">cjoin0(1)</a></li>
               <li><a href="cjoin1.html">cjoin1(1)</a></li>
+              <li><a href="cjoin1x.html">cjoin1x(1)</a></li>
               <li><a href="cjoin2.html">cjoin2(1)</a></li>
+              <li><a href="cjoin2x.html">cjoin2x(1)</a></li>
               <li><a href="comma.html">comma(1)</a></li>
               <li><a href="count.html">count(1)</a></li>
               <li><a href="ctail.html">ctail(1)</a></li>
               <li><a href="dayslash.html">dayslash(1)</a></li>
               <li><a href="delf.html">delf(1)</a></li>
+              <li><a href="delr.html">delr(1)</a></li>
               <li><a href="divsen.html">divsen(1)</a></li>
+              <li><a href="exist.html">exist(1)</a></li>
+              <li><a href="extname.html">extname(1)</a></li>
               <li><a href="filehame.html">filehame(1)</a></li>
               <li><a href="formhame.html">formhame(1)</a></li>
+              <li><a href="fsed.html">fsed(1)</a></li>
               <li><a href="getfirst.html">getfirst(1)</a></li>
               <li><a href="getlast.html">getlast(1)</a></li>
               <li><a href="gyo.html">gyo(1)</a></li>
+              <li><a href="haba.html">haba(1)</a></li>
               <li><a href="han.html">han(1)</a></li>
+              <li><a href="isdate.html">isdate(1)</a></li>
+              <li><a href="itouch.html">itouch(1)</a></li>
               <li><a href="join0.html">join0(1)</a></li>
               <li><a href="join1.html">join1(1)</a></li>
+              <li><a href="join1x.html">join1x(1)</a></li>
               <li><a href="join2.html">join2(1)</a></li>
+              <li><a href="join2x.html">join2x(1)</a></li>
               <li><a href="juni.html">juni(1)</a></li>
               <li><a href="kasan.html">kasan(1)</a></li>
               <li><a href="keta.html">keta(1)</a></li>
               <li><a href="keycut.html">keycut(1)</a></li>
               <li><a href="loopj.html">loopj(1)</a></li>
               <li><a href="loopx.html">loopx(1)</a></li>
+              <li><a href="maezero.html">maezero(1)</a></li>
+              <li><a href="man2.html">man2(1)</a></li>
               <li><a href="map.html">map(1)</a></li>
               <li><a href="marume.html">marume(1)</a></li>
               <li><a href="mdate.html">mdate(1)</a></li>
               <li><a href="mime-read.html">mime-read(1)</a></li>
               <li><a href="mojihame.html">mojihame(1)</a></li>
+              <li><a href="msort.html">msort(1)</a></li>
               <li><a href="nameread.html">nameread(1)</a></li>
+              <li><a href="numchar.html">numchar(1)</a></li>
               <li><a href="plus.html">plus(1)</a></li>
               <li><a href="rank.html">rank(1)</a></li>
               <li><a href="ratio.html">ratio(1)</a></li>
               <li><a href="retu.html">retu(1)</a></li>
+              <li><a href="rjson.html">rjson(1)</a></li>
               <li><a href="self.html">self(1)</a></li>
+              <li><a href="selr.html">selr(1)</a></li>
               <li><a href="sm2.html">sm2(1)</a></li>
               <li><a href="sm4.html">sm4(1)</a></li>
               <li><a href="sm5.html">sm5(1)</a></li>
               <li><a href="tarr.html">tarr(1)</a></li>
               <li><a href="tateyoko.html">tateyoko(1)</a></li>
               <li><a href="tcat.html">tcat(1)</a></li>
+              <li><a href="uconv.html">uconv(1)</a></li>
+              <li><a href="ulock.html">ulock(1)</a></li>
               <li><a href="unmap.html">unmap(1)</a></li>
               <li><a href="up3.html">up3(1)</a></li>
+              <li><a href="xmldir.html">xmldir(1)</a></li>
               <li><a href="yarr.html">yarr(1)</a></li>
               <li><a href="ycat.html">ycat(1)</a></li>
               <li><a href="yobi.html">yobi(1)</a></li>
               <li><a href="ysum.html">ysum(1)</a></li>
               <li><a href="zen.html">zen(1)</a></li>
-              <li class="separator"><hr/></li>
-              <li class="separator"><hr/></li>
-              <li class="separator"><hr/></li>
+              <li></li>
+
+              <li class="separator"><hr></li>
+              <li class="separator"><hr></li>
+              <li class="separator"><hr></li>
               <li><a href="tag-format.html">タグ形式(5)</a></li>
               <li><a href="name-format.html">ネーム形式(5)</a></li>
               <li><a href="field-format.html">フィールド形式(5)</a></li>
               <li><a href="master-file.html">マスタファイル(5)</a></li>
               <li><a href="name-file.html">ネームファイル(5)</a></li>
-              <li><a href="transaction-file.html" class="target">トランザクションファイル(5)</a></li>
+              <li><a href="transaction-file.html">トランザクションファイル(5)</a></li>
             </ul> 
           </li>
         </ul>
@@ -99,159 +128,136 @@
     <div id="main">
       <h1>Tukubaiオンラインコマンドマニュアル</h1>
 
-      <h2>mojihame(1)</h2>
+<h2>mojihame(1)</h2>
+<h3>【名前】</h3>
+<p><code>mojihame</code> :  テンプレートに文字をはめ込み</p>
+<h3>【書式】</h3>
+<pre class="list">Usage   : mojihame &lt;template&gt; &lt;data&gt;                    (通常)
+        : mojihame -l &lt;label&gt; &lt;template&gt; &lt;data&gt;         (行単位)
+        : mojihame -h &lt;label&gt; &lt;template&gt; &lt;data&gt;         (階層データ)
+Version : Tue Oct 20 15:17:47 JST 2020
+Edition : 1
 
-      <h3>【名前】</h3>
-
-      <p>mojihame : テンプレートに文字をはめ込み</p>
-
-      <h3>【書式】</h3>
-
-      <pre class="list">Usage	: mojihame &lt;template&gt; &lt;data&gt;			(通常)
-	: mojihame -l &lt;label&gt; &lt;template&gt; &lt;data&gt;		(行単位)
-	: mojihame -h &lt;label&gt; &lt;template&gt; &lt;data&gt;		(階層データ)
-Version : Sat Jan 24 11:09:49 JST 2009
-
-Usage	: mojihame-l [-l&lt;label&gt;][-dlt;c&gt;] &lt;template&gt; &lt;data&gt;
-Version	: Sat Jan 24 13:31:13 JST 2009
-
-Usage	: mojihame-h -h&lt;label&gt; [-dlt;c&gt;] &lt;template&gt; &lt;data&gt;
-Version	: Sat Jan 24 13:59:43 JST 2009
-
-Usage	: mojihame-p [-d&lt;c&gt;] &lt;template&gt; &lt;data&gt;
-Version	: Sat Jan 24 13:30:10 JST 2009</pre>
-
-      <h3>【説明】</h3>
-
-      <p>引数に指定するtemplateファイルに、dataあるいは環境変数からデータを読んで値をはめ込む。次の3つの使い方がある。</p>
-
-      <ol>
-        <li>dataのすべてのフィールドを順番にはめ込む(通常)</li>
-        <li>dataの行単位のフィールドをtemplateの指定ラベル間繰り返しはめ込む(行単位)</li>
-        <li>dataが階層データの場合、templateの指定ラベル間、階層的にはめ込む(階層データ)</li>
-      </ol>
-
-      <h3>【例1】通常</h3>
-
-      <p>templateの中にある%1 %2 %3 ...の部分に、dataのフィールド(左上から右下に順番に%1 %2 %3 ...に対応)を読んで置換する。</p>
-
-      <pre class="prettyprint">$ cat data
+</pre>
+<h3>【説明】</h3>
+<p>引数に指定するtemplateファイルに、dataあるいは環境変数からデータを読んで値をはめ込む。次の3つの使い方がある。</p>
+	  <ol>
+<li>dataのすべてのフィールドを順番にはめ込む(通常)</li>
+<li>dataの行単位のフィールドをtemplateの指定ラベル間繰り返しはめ込む(行単位)</li>
+ <li>dataが階層データの場合、templateの指定ラベル間、階層的にはめ込む(階層データ)
+</li>
+</ol>
+<h3>【例1】通常</h3>
+<p>templateの中にある%1 %2 %3 ...の部分に、dataのフィールド(左上から右下に順番に%1%2 %3 ...に対応)を読んで置換する。</p>
+<pre class="prettyprint">$ cat data
 a b
 c d
-$ </pre>
-
-      <pre class="prettyprint">$ cat template
+$
+</pre>
+<pre class="prettyprint">$ cat template
 1st=%1
 2nd=%2
 3rd=%3 4th=%4
-$ </pre>
-
-      <pre class="prettyprint">$ mojihame template data
+$
+</pre>
+<pre class="prettyprint">$ mojihame template data
 1st=a
 2nd=b
 3rd=c 4th=d
-$ </pre>
-
-      <h3>【例2】通常その2</h3>
-
-      <p>デフォルトでは@というデータはヌル文字列として置換される。このデフォルトを変更するには-dオプションを使用する。-dオプションを単独で使用した場合には、ヌル文字列に置換する機能は無効になる。</p>
-
-      <pre class="prettyprint">$ cat data
+$
+</pre>
+<h3>【例2】通常その2</h3>
+<p>デフォルトでは@というデータはヌル文字列として置換される。このデフォルトを変更するには<code>-d</code>オプションを使用する。<code>-d</code>オプションを単独で使用した場合には、ヌル文字列に置換する機能は無効になる。</p>
+<pre class="prettyprint">$ cat data
 a @
 @ d
-$ </pre>
-
-      <pre class="prettyprint">$ cat template
+$
+</pre>
+<pre class="prettyprint">$ cat template
 1st=%1
 2nd=%2
 3rd=%3 4th=%4
-$ </pre>
-
-      <pre class="prettyprint">$ mojihame template data
+$
+</pre>
+<pre class="prettyprint">$ mojihame template data
 1st=a
 2nd=
 3rd= 4th=d
-$ </pre>
-
-      <pre class="prettyprint">$ mojihame -da template data
+$
+</pre>
+<pre class="prettyprint">$ mojihame -da template data
 1st=
 2nd=@
 3rd=@ 4th=d
-$ </pre>
-
-      <h3>【例3】行単位</h3>
-
-      <p>dataは1行単位に読み込まれ、行の各フィールドが%1 %2 ...に対応する。次の行が読み込まれるときは再びtemplateが使用され、データがはめ込まれ出力される。この使い方は旧mojihameの-rと互換性がある。mojihame -rは将来廃止される。</p>
-
-      <pre class="prettyprint">$ cat data
+$
+</pre>
+<h3>【例3】行単位</h3>
+<p>dataは1行単位に読み込まれ、行の各フィールドが%1 %2 ...に対応する。次の行が読み込まれるときは再びtemplateが使用され、データがはめ込まれ出力される。この使い方は旧<code>mojihame</code>の<code>-r</code>と互換性がある。<code>mojihame -r</code>は将来廃止される。</p>
+<pre class="prettyprint">$ cat data
 a b c d
 w x y z
-$ </pre>
-
-      <pre class="prettyprint">$ cat template
+$
+</pre>
+<pre class="prettyprint">$ cat template
 1st=%1 2nd=%2
 3rd=%3 4th=%4
-$ </pre>
-
-      <pre class="prettyprint">$ mojihame -l template data
+$
+</pre>
+<pre class="prettyprint">$ mojihame -l template data
 1st=a 2nd=b
 3rd=c 4th=d
 1st=w 2nd=x
 3rd=y 4th=z
-$ </pre>
-
-      <pre class="prettyprint">$ mojihame -r template data
+$
+</pre>
+<pre class="prettyprint">$ mojihame -r template data
 1st=a 2nd=b
 3rd=c 4th=d
 1st=w 2nd=x
 3rd=y 4th=z
-$ </pre>
-
-      <h3>【例4】行単位その2</h3>
-
-      <p>-lオプションで引数(ラベル)を指定した場合、templateのラベルで囲まれた行のみにデータが繰り返しはめ込まれる。このときラベルを含む行は出力されない。また、ラベルにはさまれていない前後の部分は何も変換されず、そのまま出力される。ラベルはtemplate内部に2回だけ記述可能で、それぞれはめ込み対象の開始行と終了行とみなされる。指定ラベルは部分一致でラベル行と判断するので注意が必要。</p>
-
-      <pre class="prettyprint">$ cat data
+$
+</pre>
+<h3>【例4】行単位その2</h3>
+<p><code>-l</code>オプションで引数(ラベル)を指定した場合、templateのラベルで囲まれた行のみにデータが繰り返しはめ込まれる。このときラベルを含む行は出力されない。また、ラベルにはさまれていない前後の部分は何も変換されず、そのまま出力される。ラベルはtemplate内部に2回だけ記述可能で、それぞれはめ込み対象の開始行と終了行とみなされる。指定ラベルは部分一致でラベル行と判断するので注意が必要。</p>
+<pre class="prettyprint">$ cat data
 a b
 y z
-$ </pre>
-
-      <pre class="prettyprint">$ cat template
+$
+</pre>
+<pre class="prettyprint">$ cat template
 header %1
 LABEL
 1st=%1 2nd=%2
 LABEL
 footer %2
-$ </pre>
-
-      <pre class="prettyprint">$ mojihame -lLABEL template data
+$
+</pre>
+<pre class="prettyprint">$ mojihame -lLABEL template data
 header %1
 1st=a 2nd=b
 1st=y 2nd=z
 footer %2
-$ </pre>
-
-      <h3>【例5】行単位その3</h3>
-
-      <p>-lオプションを繰り返し使用することにより、プルダウンなどのHTMLを簡易に生成することができる。指定ラベルはtemplateに1組しか認められていないので、次の例のように内側のラベルから順番に値をはめていくという手順でコマンドを実行する。</p>
-
-      <pre class="prettyprint">$ cat member
+$
+</pre>
+<h3>【例5】行単位その3</h3>
+<p><code>-l</code>オプションを繰り返し使用することにより、プルダウンなどのHTMLを簡易に生成することができる。指定ラベルはtemplateに1組しか認められていないので、次の例のように内側のラベルから順番に値をはめていくという手順でコマンドを実行する。</p>
+<pre class="prettyprint">$ cat member
 佐藤
 鈴木
-$ </pre>
-
-      <pre class="prettyprint">$ cat kbn1
+$
+</pre>
+<pre class="prettyprint">$ cat kbn1
 東京
 大阪
 横浜
-$ </pre>
-
-      <pre class="prettyprint">$ cat kbn2
+$
+</pre>
+<pre class="prettyprint">$ cat kbn2
 男
 女
-$ </pre>
-
-      <pre class="prettyprint">$ cat template
+$
+</pre>
+<pre class="prettyprint">$ cat template
 MEMBER
 氏名＝%1
 K1
@@ -261,9 +267,9 @@ K2
 性別＝%1
 K2
 MEMBER
-$ </pre>
-
-      <pre class="prettyprint">$ mojihame -lK1 template kbn1 |   mojihame -lK2 - kbn2 | mojihame -lMEMBER - member
+$
+</pre>
+<pre class="prettyprint">$ mojihame -lK1 template kbn1 |   mojihame -lK2 - kbn2 | mojihame -lMEMBER - member
 氏名＝佐藤
 地名＝東京
 地名＝大阪
@@ -276,31 +282,24 @@ $ </pre>
 地名＝横浜
 性別＝男
 性別＝女
-$ </pre>
-
-
-      <h3>【例6】行単位その4</h3>
-
-      <p>デフォルトでは@というデータはヌル文字列として置換される。このデフォルトを変更するには-d オプションを使用する。-d オプションは-lオプションの後に指定する必要がある。</p>
-
-      <pre class="prettyprint">$ mojihame -lLABEL -dx template data</pre>
-
-
-      <h3>【例7】階層データ</h3>
-
-      <p>-hオプションは階層的にデータのはめ込みを実施する。templateにおいて階層的ラベルに囲まれた部分に現れる%数字がdataの階層的キーフィールドに対応する。</p>
-
-      <pre class="prettyprint">$ cat data
+$
+</pre>
+<h3>【例6】行単位その4</h3>
+<p>デフォルトでは@というデータはヌル文字列として置換される。このデフォルトを変更するには<code>-d</code>オプションを使用する。<code>-d</code>オプションは<code>-l</code>オプションの後に指定する必要がある。</p>
+<pre class="prettyprint">$ mojihame -lLABEL -dx template data
+</pre>
+<h3>【例7】階層データ</h3>
+<p><code>-h</code>オプションは階層的にデータのはめ込みを実施する。templateにおいて階層的ラベルに囲まれた部分に現れる%数字がdataの階層的キーフィールドに対応する。</p>
+<pre class="prettyprint">$ cat data
 山田 東京 10:00
 山田 大阪 20:00
 山田 横浜 09:30
 鈴木 東京 16:45
 鈴木 神戸 15:30
-$ </pre>
-
-      <p>次のtemplateの場合、LABEL-1に囲まれているのは%1、LABEL-1に囲まれている部分にさらにLABEL-2があり、LABEL-2で囲まれている部分に%2と%3がある。このとき、第1フィールドが変化する回数だけ、LABEL-1で囲まれている部分が繰り返し値がはめられ、LABEL-2で囲まれている部分は、同じ第1フィールドの値を持つ第2、第3フィールドの行の数だけ繰り返し値がはめられる。</p>
-
-      <pre class="prettyprint">$ mojihame -hLABEL template dat
+$
+</pre>
+<p>次のtemplateの場合、LABEL-1に囲まれているのは%1、LABEL-1に囲まれている部分にさらにLABEL-2があり、LABEL-2で囲まれている部分に%2と%3がある。このとき、第1フィールドが変化する回数だけ、LABEL-1で囲まれている部分が繰り返し値がはめられ、LABEL-2で囲まれている部分は、同じ第1フィールドの値を持つ第2、第3フィールドの行の数だけ繰り返し値がはめられる。</p>
+<pre class="prettyprint">$ mojihame -hLABEL template dat
 表題 %1
 氏名＝山田
 地名＝東京 時刻＝10:00
@@ -309,9 +308,9 @@ $ </pre>
 氏名＝鈴木
 地名＝東京 時刻＝16:45
 地名＝神戸 時刻＝15:30
-$ </pre>
-
-      <pre class="prettyprint">$ cat template
+$
+</pre>
+<pre class="prettyprint">$ cat template
 表題 %1
 LABEL-1
 氏名＝%1
@@ -319,58 +318,52 @@ LABEL-2
 地名＝%2 時刻＝%3
 LABEL-2
 LABEL-1
-$ </pre>
-
-      <p>階層の深さに制約はない。ラベルは部分一致でラベル行と判定される。コマンドライン上は-hLABELとし、templateでは階層にあわせてLABEL-1、LABEL-2とするのが有効。このような階層ラベルはtemplateの中でそれぞれ1組ずつのみ認められている。</p>
-
-      <h3>【注意1】</h3>
-
-      <p>デフォルトでは@はヌル文字列として置換される。文字を変更するには-dオプションを使う。-dオプションは-hや-lオプションの後に指定しなくてはならない。</p>
-
-      <pre class="prettyprint">$ mojihame -dx template data</pre>
-
-      <pre class="prettyprint">$ mojihame -lLABEL -dx template data</pre>
-
-      <pre class="prettyprint">$ mojihame -hLABEL -dx template data</pre>
-
-      <h3>【注意2】アンダースコアデータの扱い</h3>
-
-      <p>データの中の_mojihame実行後には_に置換される。 エスケープのない_は半角スペースに置換される。
-
-      <pre class="prettyprint">$ cat template
-&lt;input type="text" value="%1" /&gt;
-&lt;input type="text" value="%2" /&gt;
-&lt;input type="text" value="%3" /&gt;
-$ </pre>
-
-      <pre class="prettyprint">$ cat data
+$
+</pre>
+<p>階層の深さに制約はない。ラベルは部分一致でラベル行と判定される。コマンドライン上は<code>-h</code>LABELとし、templateでは階層にあわせてLABEL-1、LABEL-2とするのが有効。このような階層ラベルはtemplateの中でそれぞれ1組ずつのみ認められている。</p>
+<h3>【注意1】</h3>
+<p>デフォルトでは@はヌル文字列として置換される。文字を変更するには<code>-d</code>オプションを使う。<code>-d</code>オプションは<code>-h</code>や<code>-l</code>オプションの後に指定しなくてはならない。</p>
+<pre class="prettyprint">$ mojihame -dx template data
+</pre>
+<pre class="prettyprint">$ mojihame -lLABEL -dx template data
+</pre>
+<pre class="prettyprint">$ mojihame -hLABEL -dx template data
+</pre>
+<h3>【注意2】アンダースコアデータの扱い</h3>
+<p>データの中の<code>\_</code>は<code>mojihame</code>実行後には_に置換される。エスケープのない_は半角スペースに置換される。</p>
+<pre class="prettyprint">$ cat template
+&lt;input type=&quot;text&quot; value=&quot;%1&quot; /&gt;
+&lt;input type=&quot;text&quot; value=&quot;%2&quot; /&gt;
+&lt;input type=&quot;text&quot; value=&quot;%3&quot; /&gt;
+$
+</pre>
+<pre class="prettyprint">$ cat data
 usp_lab
-usp_lab
-________
-$ </pre>
+usp\_lab
+______\_\_
+$
+</pre>
+<pre class="prettyprint">$ mojihame template data
+&lt;input type=&quot;text&quot; value=&quot;usp lab&quot; /&gt;
+&lt;input type=&quot;text&quot; value=&quot;usp_lab&quot; /&gt;
+&lt;input type=&quot;text&quot; value=&quot;      __&quot; /&gt;
+$
+</pre>
+<h3>【備考】</h3>
+	  <ol>
+<li>ファイル名に<code>-</code>を指定したときは標準入力からのデータを期待する。templateもdataのいずれかを指定できる。
+</li>
+ <li><code class="multiline">-d</code>オプションは文字列を指定しない場合には<code class="multiline">data</code>の値をそのまますべて<code class="multiline">template</code>にはめ込む。
 
-      <pre class="prettyprint">$ mojihame template data
-&lt;input type="text" value="usp lab" /&gt;
-&lt;input type="text" value="usp_lab" /&gt;
-&lt;input type="text" value="      __" /&gt;
-$ </pre>
-
-      <h3>【備考】</h3>
-
-      <ol>
-        <li>ファイル名に-を指定したときは標準入力からのデータを期待する。templateもdataのいずれかを指定できる。</li>
-        <li>-dオプションは文字列を指定しない場合にはdataの値をそのまますべてtemplateにはめ込む。</li>
-      </ol>
-
-      <h3>【関連項目】</h3>
-
-      <p><a href="filehame.html">filehame(1)</a>、<a href="formhame.html">formhame(1)</a></p>
-
+</li>
+</ol>
+<h3>【関連項目】</h3>
+<p><a href="filehame.html" class="command">filehame(1)</a>、<a href="formhame.html" class="command">formhame(1)</a></p>
     </div>
 
-    <div id="lastmodified">last modified: 2014-08-13 16:01:13</div>
+    <div id="lastmodified">Last modified: Fri Aug  5 16:02:27 JST 2022</div>
 
-    <div id="footer">Contact us: uecinfo@usp-lab.com<br/>Copyright (c) 2012,2013 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
+    <div id="footer">Contact us: uecinfo@usp-lab.com<br>Copyright &copy; 2012-2022 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
   </div>
 </body>
 </html>
