--- a/MANUALHTML/name-format.html
+++ b/MANUALHTML/name-format.html
@@ -3,7 +3,7 @@
 <html lang="ja">
 <head>
   <meta charset="utf-8">
-  <title>UEC - usp engineers' community - Tukubaiオンラインコマンドマニュアル</title>
+  <title>ネーム形式(5) - UEC - usp engineers' community - Tukubaiオンラインコマンドマニュアル</title>
   <link rel="stylesheet" href="COMMON/CSS/MAIN.CSS" />
   <link rel="stylesheet" href="COMMON/CSS/MENU.CSS" />
   <link rel="stylesheet" href="COMMON/CSS/PRINT.CSS" />
@@ -29,58 +29,87 @@
         <ul id="megamenu">
           <li id="tukubai_man"><a href="index.html" class="target">Tukubaiマニュアル</a>
             <ul>
+              <li><a href="1bai.html">1bai(1)</a></li>
+              <li><a href="block_getlast.html">block_getlast(1)</a></li>
               <li><a href="calclock.html">calclock(1)</a></li>
+              <li><a href="calsed.html">calsed(1)</a></li>
+              <li><a href="cap.html">cap(1)</a></li>
               <li><a href="cgi-name.html">cgi-name(1)</a></li>
               <li><a href="check_attr_name.html">check_attr_name(1)</a></li>
+              <li><a href="check_cmp_name.html">check_cmp_name(1)</a></li>
+              <li><a href="check_date_name.html">check_date_name(1)</a></li>
+              <li><a href="check_dble_name.html">check_dble_name(1)</a></li>
+              <li><a href="check_inlist_name.html">check_inlist_name(1)</a></li>
               <li><a href="check_need_name.html">check_need_name(1)</a></li>
               <li><a href="cjoin0.html">cjoin0(1)</a></li>
               <li><a href="cjoin1.html">cjoin1(1)</a></li>
+              <li><a href="cjoin1x.html">cjoin1x(1)</a></li>
               <li><a href="cjoin2.html">cjoin2(1)</a></li>
+              <li><a href="cjoin2x.html">cjoin2x(1)</a></li>
               <li><a href="comma.html">comma(1)</a></li>
               <li><a href="count.html">count(1)</a></li>
               <li><a href="ctail.html">ctail(1)</a></li>
               <li><a href="dayslash.html">dayslash(1)</a></li>
               <li><a href="delf.html">delf(1)</a></li>
+              <li><a href="delr.html">delr(1)</a></li>
               <li><a href="divsen.html">divsen(1)</a></li>
+              <li><a href="exist.html">exist(1)</a></li>
+              <li><a href="extname.html">extname(1)</a></li>
               <li><a href="filehame.html">filehame(1)</a></li>
               <li><a href="formhame.html">formhame(1)</a></li>
+              <li><a href="fsed.html">fsed(1)</a></li>
               <li><a href="getfirst.html">getfirst(1)</a></li>
               <li><a href="getlast.html">getlast(1)</a></li>
               <li><a href="gyo.html">gyo(1)</a></li>
+              <li><a href="haba.html">haba(1)</a></li>
               <li><a href="han.html">han(1)</a></li>
+              <li><a href="isdate.html">isdate(1)</a></li>
+              <li><a href="itouch.html">itouch(1)</a></li>
               <li><a href="join0.html">join0(1)</a></li>
               <li><a href="join1.html">join1(1)</a></li>
+              <li><a href="join1x.html">join1x(1)</a></li>
               <li><a href="join2.html">join2(1)</a></li>
+              <li><a href="join2x.html">join2x(1)</a></li>
               <li><a href="juni.html">juni(1)</a></li>
               <li><a href="kasan.html">kasan(1)</a></li>
               <li><a href="keta.html">keta(1)</a></li>
               <li><a href="keycut.html">keycut(1)</a></li>
               <li><a href="loopj.html">loopj(1)</a></li>
               <li><a href="loopx.html">loopx(1)</a></li>
+              <li><a href="maezero.html">maezero(1)</a></li>
+              <li><a href="man2.html">man2(1)</a></li>
               <li><a href="map.html">map(1)</a></li>
               <li><a href="marume.html">marume(1)</a></li>
               <li><a href="mdate.html">mdate(1)</a></li>
               <li><a href="mime-read.html">mime-read(1)</a></li>
               <li><a href="mojihame.html">mojihame(1)</a></li>
+              <li><a href="msort.html">msort(1)</a></li>
               <li><a href="nameread.html">nameread(1)</a></li>
+              <li><a href="numchar.html">numchar(1)</a></li>
               <li><a href="plus.html">plus(1)</a></li>
               <li><a href="rank.html">rank(1)</a></li>
               <li><a href="ratio.html">ratio(1)</a></li>
               <li><a href="retu.html">retu(1)</a></li>
+              <li><a href="rjson.html">rjson(1)</a></li>
               <li><a href="self.html">self(1)</a></li>
+              <li><a href="selr.html">selr(1)</a></li>
               <li><a href="sm2.html">sm2(1)</a></li>
               <li><a href="sm4.html">sm4(1)</a></li>
               <li><a href="sm5.html">sm5(1)</a></li>
               <li><a href="tarr.html">tarr(1)</a></li>
               <li><a href="tateyoko.html">tateyoko(1)</a></li>
               <li><a href="tcat.html">tcat(1)</a></li>
+              <li><a href="uconv.html">uconv(1)</a></li>
+              <li><a href="ulock.html">ulock(1)</a></li>
               <li><a href="unmap.html">unmap(1)</a></li>
               <li><a href="up3.html">up3(1)</a></li>
+              <li><a href="xmldir.html">xmldir(1)</a></li>
               <li><a href="yarr.html">yarr(1)</a></li>
               <li><a href="ycat.html">ycat(1)</a></li>
               <li><a href="yobi.html">yobi(1)</a></li>
               <li><a href="ysum.html">ysum(1)</a></li>
               <li><a href="zen.html">zen(1)</a></li>
+              <li></li>
               <li class="separator"><hr/></li>
               <li class="separator"><hr/></li>
               <li class="separator"><hr/></li>
@@ -88,8 +117,8 @@
               <li><a href="name-format.html">ネーム形式(5)</a></li>
               <li><a href="field-format.html">フィールド形式(5)</a></li>
               <li><a href="master-file.html">マスタファイル(5)</a></li>
-              <li><a href="name-file.html">ネームファイル(5)</a></li>
-              <li><a href="transaction-file.html" class="target">トランザクションファイル(5)</a></li>
+              <li><a href="name-file.html">ネーム形式(5)</a></li>
+              <li><a href="transaction-file.html">トランザクションファイル(5)</a></li>
             </ul> 
           </li>
         </ul>
@@ -112,9 +141,9 @@
 
       <h3>【説明】</h3>
 
-      <p>空白区切りの2フィールドテキストデータ形式。<a href="field-format.html">フィールド形式(5)</a>の特殊な形式の1つ。第2フィールドに含まれる空白は区切り文字としては解釈されない。ネーム形式のファイルは<a href="name-file.html">ネームファイル(5)</a>と呼ばれる。</p>
+      <p>空白区切りの2フィールドテキストデータ形式。<a href="field-format.html">フィールド形式(5)</a>の特殊な形式の1つ。第2フィールドに含まれる空白は区切り文字としては解釈されない。ネーム形式のファイルは<a href="name-file.html">ネーム形式(5)</a>と呼ばれる。</p>
 
-      <p><a href="name-file.html">ネームファイル(5)</a>は主にWebフォームの入力内容を保存するために使われる。POSTデータは鍵と値が対になったデータになっており、<a href="cgi-name.html">cgi-name(1)</a>を使用することでネーム形式(5)へ変換することができる。ネーム形式を使用するコマンドとしてはほかに<a href="check_attr_name.html">check_attr_name(1)</a>や<a href="check_need_name.html">check_need_name(1)</a>などがある。</p>
+      <p><a href="name-file.html">ネーム形式(5)</a>は主にWebフォームの入力内容を保存するために使われる。POSTデータは鍵と値が対になったデータになっており、<a href="cgi-name.html">cgi-name(1)</a>を使用することで<a href="name-file.html">ネーム形式(5)</a>へ変換することができる。<a href="name-file.html">ネーム形式(5)</a>を使用するコマンドとしてはほかに<a href="check_attr_name.html">check_attr_name(1)</a>や<a href="check_need_name.html">check_need_name(1)</a>などがある。</p>
 
       <h3>【例1】</h3>
 
@@ -126,7 +155,7 @@ VALUE 0.845814</pre>
 
       <h3>【例2】</h3>
 
-      <p>ネーム形式(5)では1つめの空白のみがフィールド区切り文字として認識され、2つめ以降の空白は通常の文字として認識される。</p>
+      <p><a href="name-file.html">ネーム形式(5)</a>では1つめの空白のみがフィールド区切り文字として認識され、2つめ以降の空白は通常の文字として認識される。</p>
 
       <pre class="prettyprint linenums">ID 0000 001
 DATE 2011 10/08
@@ -138,13 +167,13 @@ VALUE 1 - 0.845814</pre>
 
       <h3>【関連項目】</h3>
 
-      <p><a href="cgi-name.html">cgi-name(1)</a>、<a href="check_attr_name.html">check_attr_name(1)</a>、<a href="check_need_name.html">check_need_name(1)</a>、<a href="tag-format.html">タグ形式(5)</a>、<a href="field-format.html">フィールド形式(5)</a>、<a href="name-file.html">ネームファイル(5)</a></p>
+      <p><a href="cgi-name.html" class="command">cgi-name(1)</a>、<a href="check_attr_name.html" class="command">check_attr_name(1)</a>、<a href="check_need_name.html" class="command">check_need_name(1)</a>、<a href="tag-format.html" class="command">タグ形式(5)</a>、<a href="field-format.html" class="command">フィールド形式(5)</a></p>
 
     </div>
 
-    <div id="lastmodified">last modified: 2014-08-13 16:01:13</div>
+    <div id="lastmodified">Last modified: Thu Aug 11 13:38:51 JST 2022</div>
 
-    <div id="footer">Contact us: uecinfo@usp-lab.com<br/>Copyright (c) 2012,2013 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
+    <div id="footer">Contact us: uecinfo@usp-lab.com<br/>Copyright &copy; 2012-2022 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
   </div>
 </body>
 </html>
