--- a/MANUALHTML/nameread.html
+++ b/MANUALHTML/nameread.html
@@ -1,20 +1,19 @@
-<!doctype html>
-
+<!DOCTYPE html>
 <html lang="ja">
 <head>
   <meta charset="utf-8">
-  <title>UEC - usp engineers' community - Tukubaiオンラインコマンドマニュアル</title>
-  <link rel="stylesheet" href="COMMON/CSS/MAIN.CSS" />
-  <link rel="stylesheet" href="COMMON/CSS/MENU.CSS" />
-  <link rel="stylesheet" href="COMMON/CSS/PRINT.CSS" />
+  <title>nameread - UEC - usp engineers' community - Tukubaiオンラインコマンドマニュアル</title>
+  <link rel="stylesheet" href="COMMON/CSS/MAIN.CSS">
+  <link rel="stylesheet" href="COMMON/CSS/MENU.CSS">
+  <link rel="stylesheet" href="COMMON/CSS/PRINT.CSS">
   <!--[if lte IE 8]>
-  <link rel="stylesheet" href="COMMON/CSS/IE67HACK.CSS" />
+  <link rel="stylesheet" href="COMMON/CSS/IE67HACK.CSS">
   <![endif]-->
   <!--[if IE 7]>
-  <link rel="stylesheet" href="COMMON/CSS/IE7HACK.CSS" />
+  <link rel="stylesheet" href="COMMON/CSS/IE7HACK.CSS">
   <![endif]-->
   <!--[if IE 6]>
-  <link rel="stylesheet" href="COMMON/CSS/IE6HACK.CSS" />
+  <link rel="stylesheet" href="COMMON/CSS/IE6HACK.CSS">
   <![endif]-->
   <script src="COMMON/JS/MENU.JS"></script>
 </head>
@@ -22,74 +21,104 @@
   <div id="container">
     <div id="header">
       <div id="logo">
-        <img id="logoimage" src="COMMON/IMG/TUKUBAI_LOGO.JPG" />
+        <img id="logoimage" src="COMMON/IMG/TUKUBAI_LOGO.JPG">
       </div>
       <div id="title">
         <p id="slogan"></p>
         <ul id="megamenu">
           <li id="tukubai_man"><a href="index.html" class="target">Tukubaiマニュアル</a>
             <ul>
+              <li><a href="1bai.html">1bai(1)</a></li>
+              <li><a href="block_getlast.html">block_getlast(1)</a></li>
               <li><a href="calclock.html">calclock(1)</a></li>
+              <li><a href="calsed.html">calsed(1)</a></li>
+              <li><a href="cap.html">cap(1)</a></li>
               <li><a href="cgi-name.html">cgi-name(1)</a></li>
               <li><a href="check_attr_name.html">check_attr_name(1)</a></li>
+              <li><a href="check_cmp_name.html">check_cmp_name(1)</a></li>
+              <li><a href="check_date_name.html">check_date_name(1)</a></li>
+              <li><a href="check_dble_name.html">check_dble_name(1)</a></li>
+              <li><a href="check_inlist_name.html">check_inlist_name(1)</a></li>
               <li><a href="check_need_name.html">check_need_name(1)</a></li>
               <li><a href="cjoin0.html">cjoin0(1)</a></li>
               <li><a href="cjoin1.html">cjoin1(1)</a></li>
+              <li><a href="cjoin1x.html">cjoin1x(1)</a></li>
               <li><a href="cjoin2.html">cjoin2(1)</a></li>
+              <li><a href="cjoin2x.html">cjoin2x(1)</a></li>
               <li><a href="comma.html">comma(1)</a></li>
               <li><a href="count.html">count(1)</a></li>
               <li><a href="ctail.html">ctail(1)</a></li>
               <li><a href="dayslash.html">dayslash(1)</a></li>
               <li><a href="delf.html">delf(1)</a></li>
+              <li><a href="delr.html">delr(1)</a></li>
               <li><a href="divsen.html">divsen(1)</a></li>
+              <li><a href="exist.html">exist(1)</a></li>
+              <li><a href="extname.html">extname(1)</a></li>
               <li><a href="filehame.html">filehame(1)</a></li>
               <li><a href="formhame.html">formhame(1)</a></li>
+              <li><a href="fsed.html">fsed(1)</a></li>
               <li><a href="getfirst.html">getfirst(1)</a></li>
               <li><a href="getlast.html">getlast(1)</a></li>
               <li><a href="gyo.html">gyo(1)</a></li>
+              <li><a href="haba.html">haba(1)</a></li>
               <li><a href="han.html">han(1)</a></li>
+              <li><a href="isdate.html">isdate(1)</a></li>
+              <li><a href="itouch.html">itouch(1)</a></li>
               <li><a href="join0.html">join0(1)</a></li>
               <li><a href="join1.html">join1(1)</a></li>
+              <li><a href="join1x.html">join1x(1)</a></li>
               <li><a href="join2.html">join2(1)</a></li>
+              <li><a href="join2x.html">join2x(1)</a></li>
               <li><a href="juni.html">juni(1)</a></li>
               <li><a href="kasan.html">kasan(1)</a></li>
               <li><a href="keta.html">keta(1)</a></li>
               <li><a href="keycut.html">keycut(1)</a></li>
               <li><a href="loopj.html">loopj(1)</a></li>
               <li><a href="loopx.html">loopx(1)</a></li>
+              <li><a href="maezero.html">maezero(1)</a></li>
+              <li><a href="man2.html">man2(1)</a></li>
               <li><a href="map.html">map(1)</a></li>
               <li><a href="marume.html">marume(1)</a></li>
               <li><a href="mdate.html">mdate(1)</a></li>
               <li><a href="mime-read.html">mime-read(1)</a></li>
               <li><a href="mojihame.html">mojihame(1)</a></li>
+              <li><a href="msort.html">msort(1)</a></li>
               <li><a href="nameread.html">nameread(1)</a></li>
+              <li><a href="numchar.html">numchar(1)</a></li>
               <li><a href="plus.html">plus(1)</a></li>
               <li><a href="rank.html">rank(1)</a></li>
               <li><a href="ratio.html">ratio(1)</a></li>
               <li><a href="retu.html">retu(1)</a></li>
+              <li><a href="rjson.html">rjson(1)</a></li>
               <li><a href="self.html">self(1)</a></li>
+              <li><a href="selr.html">selr(1)</a></li>
               <li><a href="sm2.html">sm2(1)</a></li>
               <li><a href="sm4.html">sm4(1)</a></li>
               <li><a href="sm5.html">sm5(1)</a></li>
               <li><a href="tarr.html">tarr(1)</a></li>
               <li><a href="tateyoko.html">tateyoko(1)</a></li>
               <li><a href="tcat.html">tcat(1)</a></li>
+              <li><a href="uconv.html">uconv(1)</a></li>
+              <li><a href="ulock.html">ulock(1)</a></li>
               <li><a href="unmap.html">unmap(1)</a></li>
               <li><a href="up3.html">up3(1)</a></li>
+              <li><a href="xmldir.html">xmldir(1)</a></li>
               <li><a href="yarr.html">yarr(1)</a></li>
               <li><a href="ycat.html">ycat(1)</a></li>
               <li><a href="yobi.html">yobi(1)</a></li>
               <li><a href="ysum.html">ysum(1)</a></li>
               <li><a href="zen.html">zen(1)</a></li>
-              <li class="separator"><hr/></li>
-              <li class="separator"><hr/></li>
-              <li class="separator"><hr/></li>
+              <li></li>
+
+              <li class="separator"><hr></li>
+              <li class="separator"><hr></li>
+              <li class="separator"><hr></li>
               <li><a href="tag-format.html">タグ形式(5)</a></li>
               <li><a href="name-format.html">ネーム形式(5)</a></li>
               <li><a href="field-format.html">フィールド形式(5)</a></li>
               <li><a href="master-file.html">マスタファイル(5)</a></li>
               <li><a href="name-file.html">ネームファイル(5)</a></li>
-              <li><a href="transaction-file.html" class="target">トランザクションファイル(5)</a></li>
+              <li><a href="transaction-file.html">トランザクションファイル(5)</a></li>
             </ul> 
           </li>
         </ul>
@@ -99,111 +128,93 @@
     <div id="main">
       <h1>Tukubaiオンラインコマンドマニュアル</h1>
 
-      <h2>nameread(1)</h2>
+<h2>nameread(1)</h2>
+<h3>【名前】</h3>
+<p><code>nameread</code> :  ネーム形式(5)のファイル読み込み</p>
+<h3>【書式】</h3>
+<pre class="list">Usage   : nameread [-el] &lt;name&gt; &lt;namefile&gt;
+Option  : -d&lt;c&gt;       空白を置換
+        : -i&lt;string&gt;  ヌルデータの初期化
+Version : Mon Sep 20 09:31:28 JST 2021
+Edition : 1
 
-      <h3>【名前】</h3>
-
-      <p>nameread : <a href="name-format.html">ネーム形式(5)</a>のファイル読み込み</p>
-
-      <h3>【書式】</h3>
-
-      <pre class="list">Usage	: nameread [-el] &lt;name&gt; &lt;namefile&gt;
-Option	: -d&lt;c&gt;       空白を置換
-	: -i&lt;string&gt;  ヌルデータの初期化
-Version	: Thu Dec 15 13:46:38 JST 2011</pre>
-
-      <h3>【説明】</h3>
-
-      <p><a href="name-file.html">ネームファイル(5)</a>からnameを指定して値を読みる。&lt;namefile&gt;が-あるいは指定がないときは標準入力よりデータを受け取る。</p>
-
-      <p>-lオプションでnameも合わせて出力する。-eオプションで正規表現を指定でき、-dオプションで空白データを置換する文字を指定する(指定がない場合は空白データを削除する)。-iオプションでヌルデータの初期化を実施する。</pre>
-
-      <h3>【例】</h3>
-
-      <pre class="prettyprint">$ cat namefile
+</pre>
+<h3>【説明】</h3>
+<p><a href="name-file.html" class="command">ネームファイル(5)</a>からnameを指定して値を読みる。<code>&lt;namefile&gt;</code>が<code>-</code>あるいは指定がないときは標準入力よりデータを受け取る。</p>
+<p><code>-l</code>オプションでnameも合わせて出力する。<code>-e</code>オプションで正規表現を指定でき、<code>-d</code>オプションで空白データを置換する文字を指定する(指定がない場合は空白データを削除する)。<code>-i</code>オプションでヌルデータの初期化を実施する。</p>
+<h3>【例】</h3>
+<pre class="prettyprint">$ cat namefile
 A usp
 B usp laboratory
 C
-$ </pre>
-
-      <p>通常の出力</p>
-
-      <pre class="prettyprint">$ nameread A namefile
+$
+</pre>
+<p>通常の出力</p>
+<pre class="prettyprint">$ nameread A namefile
 usp
-$ </pre>
-
-      <p><a href="name-format.html">ネーム形式(5)</a>のデータは空白を含む</p>
-
-      <pre class="prettyprint">$ nameread B namefile
+$
+</pre>
+<p><a href="name-format.html" class="command">ネーム形式(5)</a>のデータは空白を含む</p>
+<pre class="prettyprint">$ nameread B namefile
 usp laboratory
-$ </pre>
-
-      <p>空白を変換したいときは-dオプションを使用</p>
-
-      <pre class="prettyprint">$ nameread -d_ B namefile
+$
+</pre>
+<p>空白を変換したいときは<code>-d</code>オプションを使用</p>
+<pre class="prettyprint">$ nameread -d_ B namefile
 usp_laboratory
-$ </pre>
-
-      <p>空白を削除したいときは-dオプションを引数なしで指定</p>
-
-      <pre class="prettyprint">$ nameread -d B namefile
+$
+</pre>
+<p>空白を削除したいときは<code>-d</code>オプションを引数なしで指定</p>
+<pre class="prettyprint">$ nameread -d B namefile
 usplaboratory
-$ </pre>
-
-      <p>名前のみ存在している場合には空行を出力</p>
-
-      <pre class="prettyprint">$ nameread C namefile
-
-$ </pre>
-
-      <p>ヌルデータを初期化する場合は-iオプションを使用</p>
-
-      <pre class="prettyprint">$ namread -i @@@ C namefile
+$
+</pre>
+<p>名前のみ存在している場合には空行を出力</p>
+<pre class="prettyprint">$ nameread C namefile
+</pre>
+<pre class="prettyprint">$
+</pre>
+<p>ヌルデータを初期化する場合は<code>-i</code>オプションを使用</p>
+<pre class="prettyprint">$ namread -i@@@ C namefile
 @@@
-$ </pre>
-
-      <p>名前が存在しない場合には何も出力しない</p>
-
-      <pre class="prettyprint">$ nameread D namefile
-$ </pre>
-
-      <p>名前も一緒に出力するには-lオプションを使用</p>
-
-      <pre class="prettyprint">$ nameread -l A namefile
+$
+</pre>
+<p>名前が存在しない場合には何も出力しない</p>
+<pre class="prettyprint">$ nameread D namefile
+$
+</pre>
+<p>名前も一緒に出力するには<code>-l</code>オプションを使用</p>
+<pre class="prettyprint">$ nameread -l A namefile
 A usp
-$ </pre>
-
-      <p>-eオプションを指定することで正規表現を利用可能</p>
-
-      <pre class="prettyprint">$ cat namefile2
+$
+</pre>
+<p><code>-e</code>オプションを指定することで正規表現を利用可能</p>
+<pre class="prettyprint">$ cat namefile2
 A01 1
 A02 2
 A03 3
 A10 5
-$ </pre>
-
-      <pre class="prettyprint">$ nameread -e '^A0[0-9]$' namefile2
+$
+</pre>
+<pre class="prettyprint">$ nameread -e '^A0[0-9]$' namefile2
 1
 2
 3
-$ </pre>
-
-      <pre class="prettyprint">$ nameread -el '^A0[0-9]$' namefile2
+$
+</pre>
+<pre class="prettyprint">$ nameread -el '^A0[0-9]$' namefile2
 A01 1
 A02 2
 A03 3
-$ </pre>
-
-      <h3>【関連項目】</h3>
-
-      <p><a href="cgi-name.html">cgi-name(1)</a>、<a href="mime-read.html">mime-read(1)</a>、<a href="name-format.html">ネーム形式(5)</a></p>
-
-
+$
+</pre>
+<h3>【関連項目】</h3>
+<p><a href="cgi-name.html" class="command">cgi-name(1)</a>、<a href="mime-read.html" class="command">mime-read(1)</a>、<a href="name-format.html" class="command">ネーム形式(5)</a></p>
     </div>
 
-    <div id="lastmodified">last modified: 2014-08-13 16:01:13</div>
+    <div id="lastmodified">Last modified: Fri Jul 15 15:42:38 JST 2022</div>
 
-    <div id="footer">Contact us: uecinfo@usp-lab.com<br/>Copyright (c) 2012,2013 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
+    <div id="footer">Contact us: uecinfo@usp-lab.com<br>Copyright &copy; 2012-2022 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
   </div>
 </body>
 </html>
