--- a/MANUALHTML/plus.html
+++ b/MANUALHTML/plus.html
@@ -1,20 +1,19 @@
-<!doctype html>
-
+<!DOCTYPE html>
 <html lang="ja">
 <head>
   <meta charset="utf-8">
-  <title>UEC - usp engineers' community - Tukubaiオンラインコマンドマニュアル</title>
-  <link rel="stylesheet" href="COMMON/CSS/MAIN.CSS" />
-  <link rel="stylesheet" href="COMMON/CSS/MENU.CSS" />
-  <link rel="stylesheet" href="COMMON/CSS/PRINT.CSS" />
+  <title>plus - UEC - usp engineers' community - Tukubaiオンラインコマンドマニュアル</title>
+  <link rel="stylesheet" href="COMMON/CSS/MAIN.CSS">
+  <link rel="stylesheet" href="COMMON/CSS/MENU.CSS">
+  <link rel="stylesheet" href="COMMON/CSS/PRINT.CSS">
   <!--[if lte IE 8]>
-  <link rel="stylesheet" href="COMMON/CSS/IE67HACK.CSS" />
+  <link rel="stylesheet" href="COMMON/CSS/IE67HACK.CSS">
   <![endif]-->
   <!--[if IE 7]>
-  <link rel="stylesheet" href="COMMON/CSS/IE7HACK.CSS" />
+  <link rel="stylesheet" href="COMMON/CSS/IE7HACK.CSS">
   <![endif]-->
   <!--[if IE 6]>
-  <link rel="stylesheet" href="COMMON/CSS/IE6HACK.CSS" />
+  <link rel="stylesheet" href="COMMON/CSS/IE6HACK.CSS">
   <![endif]-->
   <script src="COMMON/JS/MENU.JS"></script>
 </head>
@@ -22,74 +21,104 @@
   <div id="container">
     <div id="header">
       <div id="logo">
-        <img id="logoimage" src="COMMON/IMG/TUKUBAI_LOGO.JPG" />
+        <img id="logoimage" src="COMMON/IMG/TUKUBAI_LOGO.JPG">
       </div>
       <div id="title">
         <p id="slogan"></p>
         <ul id="megamenu">
           <li id="tukubai_man"><a href="index.html" class="target">Tukubaiマニュアル</a>
             <ul>
+              <li><a href="1bai.html">1bai(1)</a></li>
+              <li><a href="block_getlast.html">block_getlast(1)</a></li>
               <li><a href="calclock.html">calclock(1)</a></li>
+              <li><a href="calsed.html">calsed(1)</a></li>
+              <li><a href="cap.html">cap(1)</a></li>
               <li><a href="cgi-name.html">cgi-name(1)</a></li>
               <li><a href="check_attr_name.html">check_attr_name(1)</a></li>
+              <li><a href="check_cmp_name.html">check_cmp_name(1)</a></li>
+              <li><a href="check_date_name.html">check_date_name(1)</a></li>
+              <li><a href="check_dble_name.html">check_dble_name(1)</a></li>
+              <li><a href="check_inlist_name.html">check_inlist_name(1)</a></li>
               <li><a href="check_need_name.html">check_need_name(1)</a></li>
               <li><a href="cjoin0.html">cjoin0(1)</a></li>
               <li><a href="cjoin1.html">cjoin1(1)</a></li>
+              <li><a href="cjoin1x.html">cjoin1x(1)</a></li>
               <li><a href="cjoin2.html">cjoin2(1)</a></li>
+              <li><a href="cjoin2x.html">cjoin2x(1)</a></li>
               <li><a href="comma.html">comma(1)</a></li>
               <li><a href="count.html">count(1)</a></li>
               <li><a href="ctail.html">ctail(1)</a></li>
               <li><a href="dayslash.html">dayslash(1)</a></li>
               <li><a href="delf.html">delf(1)</a></li>
+              <li><a href="delr.html">delr(1)</a></li>
               <li><a href="divsen.html">divsen(1)</a></li>
+              <li><a href="exist.html">exist(1)</a></li>
+              <li><a href="extname.html">extname(1)</a></li>
               <li><a href="filehame.html">filehame(1)</a></li>
               <li><a href="formhame.html">formhame(1)</a></li>
+              <li><a href="fsed.html">fsed(1)</a></li>
               <li><a href="getfirst.html">getfirst(1)</a></li>
               <li><a href="getlast.html">getlast(1)</a></li>
               <li><a href="gyo.html">gyo(1)</a></li>
+              <li><a href="haba.html">haba(1)</a></li>
               <li><a href="han.html">han(1)</a></li>
+              <li><a href="isdate.html">isdate(1)</a></li>
+              <li><a href="itouch.html">itouch(1)</a></li>
               <li><a href="join0.html">join0(1)</a></li>
               <li><a href="join1.html">join1(1)</a></li>
+              <li><a href="join1x.html">join1x(1)</a></li>
               <li><a href="join2.html">join2(1)</a></li>
+              <li><a href="join2x.html">join2x(1)</a></li>
               <li><a href="juni.html">juni(1)</a></li>
               <li><a href="kasan.html">kasan(1)</a></li>
               <li><a href="keta.html">keta(1)</a></li>
               <li><a href="keycut.html">keycut(1)</a></li>
               <li><a href="loopj.html">loopj(1)</a></li>
               <li><a href="loopx.html">loopx(1)</a></li>
+              <li><a href="maezero.html">maezero(1)</a></li>
+              <li><a href="man2.html">man2(1)</a></li>
               <li><a href="map.html">map(1)</a></li>
               <li><a href="marume.html">marume(1)</a></li>
               <li><a href="mdate.html">mdate(1)</a></li>
               <li><a href="mime-read.html">mime-read(1)</a></li>
               <li><a href="mojihame.html">mojihame(1)</a></li>
+              <li><a href="msort.html">msort(1)</a></li>
               <li><a href="nameread.html">nameread(1)</a></li>
+              <li><a href="numchar.html">numchar(1)</a></li>
               <li><a href="plus.html">plus(1)</a></li>
               <li><a href="rank.html">rank(1)</a></li>
               <li><a href="ratio.html">ratio(1)</a></li>
               <li><a href="retu.html">retu(1)</a></li>
+              <li><a href="rjson.html">rjson(1)</a></li>
               <li><a href="self.html">self(1)</a></li>
+              <li><a href="selr.html">selr(1)</a></li>
               <li><a href="sm2.html">sm2(1)</a></li>
               <li><a href="sm4.html">sm4(1)</a></li>
               <li><a href="sm5.html">sm5(1)</a></li>
               <li><a href="tarr.html">tarr(1)</a></li>
               <li><a href="tateyoko.html">tateyoko(1)</a></li>
               <li><a href="tcat.html">tcat(1)</a></li>
+              <li><a href="uconv.html">uconv(1)</a></li>
+              <li><a href="ulock.html">ulock(1)</a></li>
               <li><a href="unmap.html">unmap(1)</a></li>
               <li><a href="up3.html">up3(1)</a></li>
+              <li><a href="xmldir.html">xmldir(1)</a></li>
               <li><a href="yarr.html">yarr(1)</a></li>
               <li><a href="ycat.html">ycat(1)</a></li>
               <li><a href="yobi.html">yobi(1)</a></li>
               <li><a href="ysum.html">ysum(1)</a></li>
               <li><a href="zen.html">zen(1)</a></li>
-              <li class="separator"><hr/></li>
-              <li class="separator"><hr/></li>
-              <li class="separator"><hr/></li>
+              <li></li>
+
+              <li class="separator"><hr></li>
+              <li class="separator"><hr></li>
+              <li class="separator"><hr></li>
               <li><a href="tag-format.html">タグ形式(5)</a></li>
               <li><a href="name-format.html">ネーム形式(5)</a></li>
               <li><a href="field-format.html">フィールド形式(5)</a></li>
               <li><a href="master-file.html">マスタファイル(5)</a></li>
               <li><a href="name-file.html">ネームファイル(5)</a></li>
-              <li><a href="transaction-file.html" class="target">トランザクションファイル(5)</a></li>
+              <li><a href="transaction-file.html">トランザクションファイル(5)</a></li>
             </ul> 
           </li>
         </ul>
@@ -99,48 +128,39 @@
     <div id="main">
       <h1>Tukubaiオンラインコマンドマニュアル</h1>
 
-      <h2>plus(1)</h2>
+<h2>plus(1)</h2>
+<h3>【名前】</h3>
+<p><code>plus</code> :  引数の足し算</p>
+<h3>【書式】</h3>
+<pre class="list">Usage   : plus v1 v2 ...
+Version : Sat Jun 20 21:57:21 JST 2020
+Edition : 1
 
-      <h3>【名前】</h3>
-
-      <p>plus : 引数の足し算</p>
-
-      <h3>【書式】</h3>
-
-      <pre class="list">Usage	: plus v1 v2 ...
-Version	: Thu Dec 15 13:46:38 JST 2011</pre>
-
-      <h3>【説明】</h3>
-
-      <p>v1 + v2 + v3 ...の値を出力する。</pre>
-
-      <h3>【例】</h3>
-
-      <pre class="prettyprint">$ plus 1 2 3 4
+</pre>
+<h3>【説明】</h3>
+<p>v1 + v2 + v3 ...の値を出力する。</p>
+<h3>【例】</h3>
+<pre class="prettyprint">$ plus 1 2 3 4
 10
-$ </pre>
-
-      <pre class="prettyprint">$ plus 1.21 2.345 -2.524
+$
+</pre>
+<pre class="prettyprint">$ plus 1.21 2.345 -2.524
 1.031
-$ </pre>
-
-      <h3>【例】</h3>
-
-      <p>パイプ処理の直後、パイプ各行のコマンドの結果ステータスを足し算して、0ならばすべて正常終了、異なればエラー終了である、といった判定処理に利用される。この使い方は${PIPESTATUS[@]}が提供されている<a href="/SHELL_TIPS/CGI/SHELL_TIPS.CGI?POMPA=DOC_bash">bash</a>などに限定される。</p>
-
-      <pre class="prettyprint">$ <a href="comma.html">comma</a>n1 |  <a href="comma.html">comma</a>nd2 | <a href="comma.html">comma</a>nd3 | ... &gt; result</pre>
-
-      <pre class="prettyprint">$ [ $plus ${PIPESTATUS[@]}) -ne 0 ] &amp;&amp; exit</pre>
-
-      <h3>【関連項目】</h3>
-
-      <p><a href="kasan.html">kasan(1)</a>、<a href="ratio.html">ratio(1)</a>、<a href="sm2.html">sm2(1)</a>、<a href="sm4.html">sm4(1)</a>、<a href="sm5.html">sm5(1)</a>、<a href="ysum.html">ysum(1)</a></p>
-
+$
+</pre>
+<h3>【例】</h3>
+<p>パイプ処理の直後、パイプ各行のコマンドの結果ステータスを足し算して、0ならばすべて正常終了、異なればエラー終了である、といった判定処理に利用される。この使い方は${PIPESTATUS[@]}が提供されているbashなどに限定される。</p>
+<pre class="prettyprint">$ comman1 |  command2 | command3 | ... &gt; result
+</pre>
+<pre class="prettyprint">$ [ $plus ${PIPESTATUS[@]}) -ne 0 ] &amp;&amp; exit
+</pre>
+<h3>【関連項目】</h3>
+<p><a href="kasan.html" class="command">kasan(1)</a>、<a href="ratio.html" class="command">ratio(1)</a>、<a href="sm2.html" class="command">sm2(1)</a>、<a href="sm4.html" class="command">sm4(1)</a>、<a href="sm5.html" class="command">sm5(1)</a>、<a href="ysum.html" class="command">ysum(1)</a></p>
     </div>
 
-    <div id="lastmodified">last modified: 2014-08-13 16:01:13</div>
+    <div id="lastmodified">Last modified: Fri Jul 15 15:42:38 JST 2022</div>
 
-    <div id="footer">Contact us: uecinfo@usp-lab.com<br/>Copyright (c) 2012,2013 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
+    <div id="footer">Contact us: uecinfo@usp-lab.com<br>Copyright &copy; 2012-2022 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
   </div>
 </body>
 </html>
