--- a/MANUALHTML/rank.html
+++ b/MANUALHTML/rank.html
@@ -1,20 +1,19 @@
-<!doctype html>
-
+<!DOCTYPE html>
 <html lang="ja">
 <head>
   <meta charset="utf-8">
-  <title>UEC - usp engineers' community - Tukubaiオンラインコマンドマニュアル</title>
-  <link rel="stylesheet" href="COMMON/CSS/MAIN.CSS" />
-  <link rel="stylesheet" href="COMMON/CSS/MENU.CSS" />
-  <link rel="stylesheet" href="COMMON/CSS/PRINT.CSS" />
+  <title>rank - UEC - usp engineers' community - Tukubaiオンラインコマンドマニュアル</title>
+  <link rel="stylesheet" href="COMMON/CSS/MAIN.CSS">
+  <link rel="stylesheet" href="COMMON/CSS/MENU.CSS">
+  <link rel="stylesheet" href="COMMON/CSS/PRINT.CSS">
   <!--[if lte IE 8]>
-  <link rel="stylesheet" href="COMMON/CSS/IE67HACK.CSS" />
+  <link rel="stylesheet" href="COMMON/CSS/IE67HACK.CSS">
   <![endif]-->
   <!--[if IE 7]>
-  <link rel="stylesheet" href="COMMON/CSS/IE7HACK.CSS" />
+  <link rel="stylesheet" href="COMMON/CSS/IE7HACK.CSS">
   <![endif]-->
   <!--[if IE 6]>
-  <link rel="stylesheet" href="COMMON/CSS/IE6HACK.CSS" />
+  <link rel="stylesheet" href="COMMON/CSS/IE6HACK.CSS">
   <![endif]-->
   <script src="COMMON/JS/MENU.JS"></script>
 </head>
@@ -22,74 +21,104 @@
   <div id="container">
     <div id="header">
       <div id="logo">
-        <img id="logoimage" src="COMMON/IMG/TUKUBAI_LOGO.JPG" />
+        <img id="logoimage" src="COMMON/IMG/TUKUBAI_LOGO.JPG">
       </div>
       <div id="title">
         <p id="slogan"></p>
         <ul id="megamenu">
           <li id="tukubai_man"><a href="index.html" class="target">Tukubaiマニュアル</a>
             <ul>
+              <li><a href="1bai.html">1bai(1)</a></li>
+              <li><a href="block_getlast.html">block_getlast(1)</a></li>
               <li><a href="calclock.html">calclock(1)</a></li>
+              <li><a href="calsed.html">calsed(1)</a></li>
+              <li><a href="cap.html">cap(1)</a></li>
               <li><a href="cgi-name.html">cgi-name(1)</a></li>
               <li><a href="check_attr_name.html">check_attr_name(1)</a></li>
+              <li><a href="check_cmp_name.html">check_cmp_name(1)</a></li>
+              <li><a href="check_date_name.html">check_date_name(1)</a></li>
+              <li><a href="check_dble_name.html">check_dble_name(1)</a></li>
+              <li><a href="check_inlist_name.html">check_inlist_name(1)</a></li>
               <li><a href="check_need_name.html">check_need_name(1)</a></li>
               <li><a href="cjoin0.html">cjoin0(1)</a></li>
               <li><a href="cjoin1.html">cjoin1(1)</a></li>
+              <li><a href="cjoin1x.html">cjoin1x(1)</a></li>
               <li><a href="cjoin2.html">cjoin2(1)</a></li>
+              <li><a href="cjoin2x.html">cjoin2x(1)</a></li>
               <li><a href="comma.html">comma(1)</a></li>
               <li><a href="count.html">count(1)</a></li>
               <li><a href="ctail.html">ctail(1)</a></li>
               <li><a href="dayslash.html">dayslash(1)</a></li>
               <li><a href="delf.html">delf(1)</a></li>
+              <li><a href="delr.html">delr(1)</a></li>
               <li><a href="divsen.html">divsen(1)</a></li>
+              <li><a href="exist.html">exist(1)</a></li>
+              <li><a href="extname.html">extname(1)</a></li>
               <li><a href="filehame.html">filehame(1)</a></li>
               <li><a href="formhame.html">formhame(1)</a></li>
+              <li><a href="fsed.html">fsed(1)</a></li>
               <li><a href="getfirst.html">getfirst(1)</a></li>
               <li><a href="getlast.html">getlast(1)</a></li>
               <li><a href="gyo.html">gyo(1)</a></li>
+              <li><a href="haba.html">haba(1)</a></li>
               <li><a href="han.html">han(1)</a></li>
+              <li><a href="isdate.html">isdate(1)</a></li>
+              <li><a href="itouch.html">itouch(1)</a></li>
               <li><a href="join0.html">join0(1)</a></li>
               <li><a href="join1.html">join1(1)</a></li>
+              <li><a href="join1x.html">join1x(1)</a></li>
               <li><a href="join2.html">join2(1)</a></li>
+              <li><a href="join2x.html">join2x(1)</a></li>
               <li><a href="juni.html">juni(1)</a></li>
               <li><a href="kasan.html">kasan(1)</a></li>
               <li><a href="keta.html">keta(1)</a></li>
               <li><a href="keycut.html">keycut(1)</a></li>
               <li><a href="loopj.html">loopj(1)</a></li>
               <li><a href="loopx.html">loopx(1)</a></li>
+              <li><a href="maezero.html">maezero(1)</a></li>
+              <li><a href="man2.html">man2(1)</a></li>
               <li><a href="map.html">map(1)</a></li>
               <li><a href="marume.html">marume(1)</a></li>
               <li><a href="mdate.html">mdate(1)</a></li>
               <li><a href="mime-read.html">mime-read(1)</a></li>
               <li><a href="mojihame.html">mojihame(1)</a></li>
+              <li><a href="msort.html">msort(1)</a></li>
               <li><a href="nameread.html">nameread(1)</a></li>
+              <li><a href="numchar.html">numchar(1)</a></li>
               <li><a href="plus.html">plus(1)</a></li>
               <li><a href="rank.html">rank(1)</a></li>
               <li><a href="ratio.html">ratio(1)</a></li>
               <li><a href="retu.html">retu(1)</a></li>
+              <li><a href="rjson.html">rjson(1)</a></li>
               <li><a href="self.html">self(1)</a></li>
+              <li><a href="selr.html">selr(1)</a></li>
               <li><a href="sm2.html">sm2(1)</a></li>
               <li><a href="sm4.html">sm4(1)</a></li>
               <li><a href="sm5.html">sm5(1)</a></li>
               <li><a href="tarr.html">tarr(1)</a></li>
               <li><a href="tateyoko.html">tateyoko(1)</a></li>
               <li><a href="tcat.html">tcat(1)</a></li>
+              <li><a href="uconv.html">uconv(1)</a></li>
+              <li><a href="ulock.html">ulock(1)</a></li>
               <li><a href="unmap.html">unmap(1)</a></li>
               <li><a href="up3.html">up3(1)</a></li>
+              <li><a href="xmldir.html">xmldir(1)</a></li>
               <li><a href="yarr.html">yarr(1)</a></li>
               <li><a href="ycat.html">ycat(1)</a></li>
               <li><a href="yobi.html">yobi(1)</a></li>
               <li><a href="ysum.html">ysum(1)</a></li>
               <li><a href="zen.html">zen(1)</a></li>
-              <li class="separator"><hr/></li>
-              <li class="separator"><hr/></li>
-              <li class="separator"><hr/></li>
+              <li></li>
+
+              <li class="separator"><hr></li>
+              <li class="separator"><hr></li>
+              <li class="separator"><hr></li>
               <li><a href="tag-format.html">タグ形式(5)</a></li>
               <li><a href="name-format.html">ネーム形式(5)</a></li>
               <li><a href="field-format.html">フィールド形式(5)</a></li>
               <li><a href="master-file.html">マスタファイル(5)</a></li>
               <li><a href="name-file.html">ネームファイル(5)</a></li>
-              <li><a href="transaction-file.html" class="target">トランザクションファイル(5)</a></li>
+              <li><a href="transaction-file.html">トランザクションファイル(5)</a></li>
             </ul> 
           </li>
         </ul>
@@ -99,26 +128,20 @@
     <div id="main">
       <h1>Tukubaiオンラインコマンドマニュアル</h1>
 
-      <h2>rank(1)</h2>
+<h2>rank(1)</h2>
+<h3>【名前】</h3>
+<p><code>rank</code> :  行に階数を追加</p>
+<h3>【書式】</h3>
+<pre class="list">Usage   : rank ref=&lt;ref&gt; key=&lt;key&gt; &lt;file&gt;
+Version : Fri Jul 15 16:18:04 JST 2022
+Edition : 1
 
-      <h3>【名前】</h3>
-
-      <p>rank : 行に階数を追加</p>
-
-      <h3>【書式】</h3>
-
-      <pre class="list">Usage	: rank ref=&lt;ref&gt; key=&lt;key&gt; &lt;file&gt;
-Version	: Thu Dec 15 13:46:38 JST 2011</pre>
-
-      <h3>【説明】</h3>
-
-      <p>fileの各行に階数を追加する。ref=&lt;ref&gt;で参照キーフィールドを指定した場合、参照キーフィールドが変化した段階で階数を1に初期化する。key=&lt;key&gt;で値フィールドを指定した場合、値が同じ間は同じ階数を追加する。</p>
-
-      <h3>【例1】基本パターン</h3>
-
-      <p>引数を何も指定しないときは、単純に行番号を追加する。</p>
-
-      <pre class="prettyprint">$ cat data
+</pre>
+<h3>【説明】</h3>
+<p>fileの各行に階数を追加する。<code>ref=&lt;ref&gt;</code>で参照キーフィールドを指定した場合、参照キーフィールドが変化した段階で階数を1に初期化する。<code>key=&lt;key&gt;</code>で値フィールドを指定した場合、値が同じ間は同じ階数を追加する。<code>&lt;file&gt;</code>として<code>-</code>を指定すると標準入力を使用する。<code>ref=</code>指定または<code>key=</code>指定があるときは<code>&lt;file&gt;</code>を省略して標準入力を使用する。</p>
+<h3>【例1】基本パターン</h3>
+<p>引数を何も指定しないときは、単純に行番号を追加する。</p>
+<pre class="prettyprint">$ cat data
 JPN 杉山______ 26
 JPN 崎村______ 27
 JPN 梶川______ 27
@@ -127,9 +150,9 @@ USA BOB_______ 25
 USA GEROGE____ 29
 USA SAM_______ 29
 USA TOM_______ 35
-$ </pre>
-
-      <pre class="prettyprint">$ rank data
+$
+</pre>
+<pre class="prettyprint">$ rank data
 1 JPN 杉山______ 26
 2 JPN 崎村______ 27
 3 JPN 梶川______ 27
@@ -138,13 +161,11 @@ $ </pre>
 6 USA GEROGE____ 29
 7 USA SAM_______ 29
 8 USA TOM_______ 35
-$ </pre>
-
-      <h3>【例2】ref指定</h3>
-
-      <p>ref=&lt;ref&gt;で参照フィールドを指定したときは、参照フィールドが変化した行で、階数を1に初期化する。ref=1/2 ref=3@2/5 などの連続・不連続のフィールドを指定することも可能。</p>
-
-      <pre class="prettyprint">$ rank ref=1 data
+$
+</pre>
+<h3>【例2】ref=指定</h3>
+<p><code>ref=&lt;ref&gt;</code>で参照フィールドを指定したときは、参照フィールドが変化した行で、階数を1に初期化する。<code>ref=1/2 ref=3@2/5</code>などの連続・不連続のフィールドを指定することも可能。</p>
+<pre class="prettyprint">$ rank ref=1 data
 1 JPN 杉山______ 26
 2 JPN 崎村______ 27
 3 JPN 梶川______ 27
@@ -153,13 +174,11 @@ $ </pre>
 2 USA GEROGE____ 29
 3 USA SAM_______ 29
 4 USA TOM_______ 35
-$ </pre>
-
-      <h3>【例3】key指定</h3>
-
-      <p>key=&lt;key&gt;で値フィールドを1つだけ指定できる。この場合、値が同じフィールドを持つ行には同じ階数が追加される。次の行には、はじめから数えた階数が追加される。</p>
-
-      <pre class="prettyprint">$ rank key=3 data
+$
+</pre>
+<h3>【例3】key指定</h3>
+<p><code>key=&lt;key&gt;</code>で値フィールドを1つだけ指定できる。この場合、値が同じフィールドを持つ行には同じ階数が追加される。次の行には、はじめから数えた階数が追加される。</p>
+<pre class="prettyprint">$ rank key=3 data
 1 JPN 杉山______ 26
 2 JPN 崎村______ 27
 2 JPN 梶川______ 27
@@ -168,13 +187,11 @@ $ </pre>
 6 USA GEROGE____ 29
 6 USA SAM_______ 29
 8 USA TOM_______ 35
-$ </pre>
-
-      <h3>【例4】refとkey指定</h3>
-
-      <p>参照キーが変化するところで、行番号が初期化され、かつ同じ値フィールドを持つ行には同じ階数が追加される。</p>
-
-      <pre class="prettyprint">$ rank ref=1 key=3 data
+$
+</pre>
+<h3>【例4】refとkey指定</h3>
+<p>参照キーが変化するところで、行番号が初期化され、かつ同じ値フィールドを持つ行には同じ階数が追加される。</p>
+<pre class="prettyprint">$ rank ref=1 key=3 data
 1 JPN 杉山______ 26
 2 JPN 崎村______ 27
 2 JPN 梶川______ 27
@@ -183,23 +200,18 @@ $ </pre>
 2 USA GEROGE____ 29
 2 USA SAM_______ 29
 4 USA TOM_______ 35
-$ </pre>
-
-      <h3>【注意】</h3>
-
-      <p>入力ファイルが-あるいは指定がない場合には、標準入力のデータが使用される。</p>
-
-      <p>同じ階数を追加するかどうかは、値が文字列として同じかどうかで判断しており、数字としては判定していない。</p>
-
-      <h3>【関連項目】</h3>
-
-      <p><a href="count.html">count(1)</a>、<a href="gyo.html">gyo(1)</a>、<a href="juni.html">juni(1)</a>、<a href="retu.html">retu(1)</a></p>
-
+$
+</pre>
+<h3>【注意】</h3>
+<p>入力ファイルが<code>-</code>あるいは指定がない場合には、標準入力のデータが使用される。</p>
+<p>同じ階数を追加するかどうかは、値が文字列として同じかどうかで判断しており、数字としては判定していない。</p>
+<h3>【関連項目】</h3>
+<p><a href="count.html" class="command">count(1)</a>、<a href="gyo.html" class="command">gyo(1)</a>、<a href="juni.html" class="command">juni(1)</a>、<a href="retu.html" class="command">retu(1)</a></p>
     </div>
 
-    <div id="lastmodified">last modified: 2014-08-13 16:01:13</div>
+    <div id="lastmodified">Last modified: Thu Aug 11 10:01:38 JST 2022</div>
 
-    <div id="footer">Contact us: uecinfo@usp-lab.com<br/>Copyright (c) 2012,2013 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
+    <div id="footer">Contact us: uecinfo@usp-lab.com<br>Copyright &copy; 2012-2022 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
   </div>
 </body>
 </html>
