--- a/MANUALHTML/self.html
+++ b/MANUALHTML/self.html
@@ -1,20 +1,19 @@
-<!doctype html>
-
+<!DOCTYPE html>
 <html lang="ja">
 <head>
   <meta charset="utf-8">
-  <title>UEC - usp engineers' community - Tukubaiオンラインコマンドマニュアル</title>
-  <link rel="stylesheet" href="COMMON/CSS/MAIN.CSS" />
-  <link rel="stylesheet" href="COMMON/CSS/MENU.CSS" />
-  <link rel="stylesheet" href="COMMON/CSS/PRINT.CSS" />
+  <title>self - UEC - usp engineers' community - Tukubaiオンラインコマンドマニュアル</title>
+  <link rel="stylesheet" href="COMMON/CSS/MAIN.CSS">
+  <link rel="stylesheet" href="COMMON/CSS/MENU.CSS">
+  <link rel="stylesheet" href="COMMON/CSS/PRINT.CSS">
   <!--[if lte IE 8]>
-  <link rel="stylesheet" href="COMMON/CSS/IE67HACK.CSS" />
+  <link rel="stylesheet" href="COMMON/CSS/IE67HACK.CSS">
   <![endif]-->
   <!--[if IE 7]>
-  <link rel="stylesheet" href="COMMON/CSS/IE7HACK.CSS" />
+  <link rel="stylesheet" href="COMMON/CSS/IE7HACK.CSS">
   <![endif]-->
   <!--[if IE 6]>
-  <link rel="stylesheet" href="COMMON/CSS/IE6HACK.CSS" />
+  <link rel="stylesheet" href="COMMON/CSS/IE6HACK.CSS">
   <![endif]-->
   <script src="COMMON/JS/MENU.JS"></script>
 </head>
@@ -22,74 +21,104 @@
   <div id="container">
     <div id="header">
       <div id="logo">
-        <img id="logoimage" src="COMMON/IMG/TUKUBAI_LOGO.JPG" />
+        <img id="logoimage" src="COMMON/IMG/TUKUBAI_LOGO.JPG">
       </div>
       <div id="title">
         <p id="slogan"></p>
         <ul id="megamenu">
           <li id="tukubai_man"><a href="index.html" class="target">Tukubaiマニュアル</a>
             <ul>
+              <li><a href="1bai.html">1bai(1)</a></li>
+              <li><a href="block_getlast.html">block_getlast(1)</a></li>
               <li><a href="calclock.html">calclock(1)</a></li>
+              <li><a href="calsed.html">calsed(1)</a></li>
+              <li><a href="cap.html">cap(1)</a></li>
               <li><a href="cgi-name.html">cgi-name(1)</a></li>
               <li><a href="check_attr_name.html">check_attr_name(1)</a></li>
+              <li><a href="check_cmp_name.html">check_cmp_name(1)</a></li>
+              <li><a href="check_date_name.html">check_date_name(1)</a></li>
+              <li><a href="check_dble_name.html">check_dble_name(1)</a></li>
+              <li><a href="check_inlist_name.html">check_inlist_name(1)</a></li>
               <li><a href="check_need_name.html">check_need_name(1)</a></li>
               <li><a href="cjoin0.html">cjoin0(1)</a></li>
               <li><a href="cjoin1.html">cjoin1(1)</a></li>
+              <li><a href="cjoin1x.html">cjoin1x(1)</a></li>
               <li><a href="cjoin2.html">cjoin2(1)</a></li>
+              <li><a href="cjoin2x.html">cjoin2x(1)</a></li>
               <li><a href="comma.html">comma(1)</a></li>
               <li><a href="count.html">count(1)</a></li>
               <li><a href="ctail.html">ctail(1)</a></li>
               <li><a href="dayslash.html">dayslash(1)</a></li>
               <li><a href="delf.html">delf(1)</a></li>
+              <li><a href="delr.html">delr(1)</a></li>
               <li><a href="divsen.html">divsen(1)</a></li>
+              <li><a href="exist.html">exist(1)</a></li>
+              <li><a href="extname.html">extname(1)</a></li>
               <li><a href="filehame.html">filehame(1)</a></li>
               <li><a href="formhame.html">formhame(1)</a></li>
+              <li><a href="fsed.html">fsed(1)</a></li>
               <li><a href="getfirst.html">getfirst(1)</a></li>
               <li><a href="getlast.html">getlast(1)</a></li>
               <li><a href="gyo.html">gyo(1)</a></li>
+              <li><a href="haba.html">haba(1)</a></li>
               <li><a href="han.html">han(1)</a></li>
+              <li><a href="isdate.html">isdate(1)</a></li>
+              <li><a href="itouch.html">itouch(1)</a></li>
               <li><a href="join0.html">join0(1)</a></li>
               <li><a href="join1.html">join1(1)</a></li>
+              <li><a href="join1x.html">join1x(1)</a></li>
               <li><a href="join2.html">join2(1)</a></li>
+              <li><a href="join2x.html">join2x(1)</a></li>
               <li><a href="juni.html">juni(1)</a></li>
               <li><a href="kasan.html">kasan(1)</a></li>
               <li><a href="keta.html">keta(1)</a></li>
               <li><a href="keycut.html">keycut(1)</a></li>
               <li><a href="loopj.html">loopj(1)</a></li>
               <li><a href="loopx.html">loopx(1)</a></li>
+              <li><a href="maezero.html">maezero(1)</a></li>
+              <li><a href="man2.html">man2(1)</a></li>
               <li><a href="map.html">map(1)</a></li>
               <li><a href="marume.html">marume(1)</a></li>
               <li><a href="mdate.html">mdate(1)</a></li>
               <li><a href="mime-read.html">mime-read(1)</a></li>
               <li><a href="mojihame.html">mojihame(1)</a></li>
+              <li><a href="msort.html">msort(1)</a></li>
               <li><a href="nameread.html">nameread(1)</a></li>
+              <li><a href="numchar.html">numchar(1)</a></li>
               <li><a href="plus.html">plus(1)</a></li>
               <li><a href="rank.html">rank(1)</a></li>
               <li><a href="ratio.html">ratio(1)</a></li>
               <li><a href="retu.html">retu(1)</a></li>
+              <li><a href="rjson.html">rjson(1)</a></li>
               <li><a href="self.html">self(1)</a></li>
+              <li><a href="selr.html">selr(1)</a></li>
               <li><a href="sm2.html">sm2(1)</a></li>
               <li><a href="sm4.html">sm4(1)</a></li>
               <li><a href="sm5.html">sm5(1)</a></li>
               <li><a href="tarr.html">tarr(1)</a></li>
               <li><a href="tateyoko.html">tateyoko(1)</a></li>
               <li><a href="tcat.html">tcat(1)</a></li>
+              <li><a href="uconv.html">uconv(1)</a></li>
+              <li><a href="ulock.html">ulock(1)</a></li>
               <li><a href="unmap.html">unmap(1)</a></li>
               <li><a href="up3.html">up3(1)</a></li>
+              <li><a href="xmldir.html">xmldir(1)</a></li>
               <li><a href="yarr.html">yarr(1)</a></li>
               <li><a href="ycat.html">ycat(1)</a></li>
               <li><a href="yobi.html">yobi(1)</a></li>
               <li><a href="ysum.html">ysum(1)</a></li>
               <li><a href="zen.html">zen(1)</a></li>
-              <li class="separator"><hr/></li>
-              <li class="separator"><hr/></li>
-              <li class="separator"><hr/></li>
+              <li></li>
+
+              <li class="separator"><hr></li>
+              <li class="separator"><hr></li>
+              <li class="separator"><hr></li>
               <li><a href="tag-format.html">タグ形式(5)</a></li>
               <li><a href="name-format.html">ネーム形式(5)</a></li>
               <li><a href="field-format.html">フィールド形式(5)</a></li>
               <li><a href="master-file.html">マスタファイル(5)</a></li>
               <li><a href="name-file.html">ネームファイル(5)</a></li>
-              <li><a href="transaction-file.html" class="target">トランザクションファイル(5)</a></li>
+              <li><a href="transaction-file.html">トランザクションファイル(5)</a></li>
             </ul> 
           </li>
         </ul>
@@ -99,170 +128,138 @@
     <div id="main">
       <h1>Tukubaiオンラインコマンドマニュアル</h1>
 
-      <h2>self(1)</h2>
+<h2>self(1)</h2>
+<h3>【名前】</h3>
+<p><code>self</code> :  指定したフィールドのデータ取り出し</p>
+<h3>【書式】</h3>
+<pre class="list">Usage   : self &lt;f1&gt; &lt;f2&gt; ... &lt;file&gt;
+        : self -d &lt;f1&gt; &lt;f2&gt; ... &lt;string&gt;
+Version : Mon Feb 21 00:32:55 JST 2022
+Edition : 1
 
-      <h3>【名前】</h3>
-
-      <p>self : 指定したフィールドのデータ取り出し</p>
-
-      <h3>【書式】</h3>
-
-      <pre class="list">Usage	: self f1 f2 ... file
-	: self -d f1 f2 ... string
-Version	: Wed Dec 14 15:20:01 JST 2011
-	: OpenUSP (LINUX+FREEBSD/PYTHON2.4/UTF-8)</pre>
-
-      <h3>【説明】</h3>
-
-      <p>fileから指定したフィールドのデータだけを取り出して出力する(self=select field)。fileの指定がないとき、あるいはファイル名が-の時は、標準入力よりデータを取り込む。-dオプションが指定された場合、引数の文字列に対して処理が適用される。</p>
-
-      <h3>【例1】</h3>
-
-      <p>テキストデータの第4フィールドと第2フィールドを取り出して出力する。</p>
-
-      <pre class="prettyprint">$ cat data
+</pre>
+<h3>【説明】</h3>
+<p>fileから指定したフィールドのデータだけを取り出して出力する(<code>self=select</code>field)。第0フィールドは行全体を意味する。fileの指定がないとき、あるいはファイル名が<code>-</code>の時は、標準入力よりデータを取り込む。<code>-d</code>オプションが指定された場合、引数の文字列に対して処理が適用される。</p>
+<h3>【例1】</h3>
+<p>テキストデータの第4フィールドと第2フィールドを取り出して出力する。</p>
+<pre class="prettyprint">$ cat data
 0000000 浜地______ 50 F 91 59 20 76 54
 0000001 鈴田______ 50 F 46 39 8  5  21
 0000003 杉山______ 26 F 30 50 71 36 30
 0000004 白土______ 40 M 58 71 20 10 6
 0000005 崎村______ 50 F 82 79 16 21 80
-$ </pre>
-
-      <pre class="prettyprint">$ self 4 2 data
+$
+</pre>
+<pre class="prettyprint">$ self 4 2 data
 F 浜地______
 F 鈴田______
 F 杉山______
 M 白土______
 F 崎村______
-$ </pre>
-
-      <h3>【例2】</h3>
-
-      <p>self(1)はフィールド中の部分を切り出して出力することもできる。処理としてはawk(1)のsubstr関数と同じ処理となる。</p>
-
-      <p>たとえば第1フィールドの4文字目以降を出力するには次のようにコマンドを実行する。</p>
-
-      <pre class="prettyprint">$ self 1.4 2 data
+$
+</pre>
+<h3>【例2】</h3>
+<p><a href="self.html" class="command">self(1)</a>はフィールド中の部分を切り出して出力することもできる。処理としてはawk(1)のsubstr関数と同じ処理となる。</p>
+<p>たとえば第1フィールドの4文字目以降を出力するには次のようにコマンドを実行する。</p>
+<pre class="prettyprint">$ self 1.4 2 data
 0000 浜地______
 0001 鈴田______
 0003 杉山______
 0004 白土______
 0005 崎村______
-$ </pre>
-
-      <p>第2フィールドの1文字目から半角4文字分(全角2文字分)出力する。</p>
-
-      <pre class="prettyprint">$ self 2.1.4 3 data
+$
+</pre>
+<p>第2フィールドの1文字目から半角4文字分(全角2文字分)出力する。</p>
+<pre class="prettyprint">$ self 2.1.4 3 data
 浜地 50
 鈴田 50
 杉山 26
 白土 40
 崎村 50
-$ </pre>
-
-      <h3>【例3】</h3>
-
-      <p>0で行全体を指定できる。</p>
-
-      <pre class="prettyprint">$ self 0 data
+$
+</pre>
+<h3>【例3】</h3>
+<p>0で行全体を指定できる。</p>
+<pre class="prettyprint">$ self 0 data
 0000000 浜地______ 50 F 91 59 20 76 54
 0000001 鈴田______ 50 F 46 39 8  5  21
 0000003 杉山______ 26 F 30 50 71 36 30
 0000004 白土______ 40 M 58 71 20 10 6
 0000005 崎村______ 50 F 82 79 16 21 80
-$ </pre>
-
-      <pre class="prettyprint">$ self 4 0 data
+$
+</pre>
+<pre class="prettyprint">$ self 4 0 data
 F 0000000 浜地______ 50 F 91 59 20 76 54
 F 0000001 鈴田______ 50 F 46 39 8 5 21
 F 0000003 杉山______ 26 F 30 50 71 36 30
 M 0000004 白土______ 40 M 58 71 20 10 6
 F 0000005 崎村______ 50 F 82 79 16 21 80
-$ </pre>
-
-      <h3>【例4】</h3>
-
-      <p>連続したフィールドも記述できる。</p>
-
-      <pre class="prettyprint">$ self 2/5 data
+$
+</pre>
+<h3>【例4】</h3>
+<p>連続したフィールドも記述できる。</p>
+<pre class="prettyprint">$ self 2/5 data
 浜地______ 50 F 91
 鈴田______ 50 F 46
 杉山______ 26 F 30
 白土______ 40 M 58
 崎村______ 50 F 82
-$ </pre>
-
-      <h3>【例5】</h3>
-
-      <p>NF(現在の行のフィールド数)を使用することができる。</p>
-
-      <pre class="prettyprint">$ self 1 NF-3 NF data
+$
+</pre>
+<h3>【例5】</h3>
+<p><code>NF</code>(現在の行のフィールド数)を使用することができる。</p>
+<pre class="prettyprint">$ self 1 NF-3 NF data
 0000000 59 54
 0000001 39 21
 0000003 50 30
 0000004 71 6
 0000005 79 80
-$ </pre>
-
-      <h3>【例6】</h3>
-
-      <p>複数の空白があるフィールドを1つの空白にすることができる。</p>
-
-      <pre class="prettyprint">$ cat data2
+$
+</pre>
+<h3>【例6】</h3>
+<p>複数の空白があるフィールドを1つの空白にすることができる。</p>
+<pre class="prettyprint">$ cat data2
 a    b
 c   d e
-$ </pre>
-
-      <pre class="prettyprint">$ self 1/NF data2
+$
+</pre>
+<pre class="prettyprint">$ self 1/NF data2
 a b
 c d e
-$ </pre>
-
-      <h3>【例7】</h3>
-
-      <p>ダイレクトモードを使用して文字列を加工することができる。</p>
-
-      <pre class="prettyprint">$ self -d 1.1.4 "20070401 12345"
+$
+</pre>
+<h3>【例7】</h3>
+<p>ダイレクトモードを使用して文字列を加工することができる。</p>
+<pre class="prettyprint">$ self -d 1.1.4 &quot;20070401 12345&quot;
 2007
-$ </pre>
-
-      <h3>【例8】</h3>
-
-      <p>selfの切り出し指定は画面表示長の半角文字分を1として扱う。</p>
-
-      <pre class="prettyprint">$ echo ｱｲｳｴｵｶｷｸｹｺ | self 1.3.4
+$
+</pre>
+<h3>【例8】</h3>
+<p><code>self</code>の切り出し指定は画面表示長の半角文字分を1として扱う。</p>
+<pre class="prettyprint">$ echo ｱｲｳｴｵｶｷｸｹｺ | self 1.3.4
 ｳｴｵｶ
-$ </pre>
-
-      <h3>【注意】</h3>
-
-      <p>入力ファイルが改行文字で終了していない場合、つまり行が尻切れになっている場合はファイル末尾に改行文字が追加されて完結した行になる。</p>
-
-      <h3>【バグ】</h3>
-
-      <p>数字名のファイルを使用してはならない。もし10という名前のファイルが存在するとself 1 10はファイル名が10であるファイルから第1フィールドを抽出するという動作をして、標準入力ファイルから第1および第10フィールドを抽出するという動作をしなくなる。ただし2のように数字1文字だけを指定した場合は、そのファイルが存在しても、それは無視してフィールドとして扱う。</p>
-
-      <p>また、文字列切り出し指定において、切り取りや長さが文字の区切りに一致しないときにはエラーとなる。</p>
-
-      <pre class="prettyprint">$ echo ＵＳＰ研究所 | self 1.2.4
+$
+</pre>
+<h3>【注意】</h3>
+<p>入力ファイルが改行文字で終了していない場合、つまり行が尻切れになっている場合はファイル末尾に改行文字が追加されて完結した行になる。</p>
+<p><code>-d</code>指定がないとき 数字名のファイルを使用してはならない。 もし10という名前のファイルが存在しても<code>self</code>1 10は標準入力ファイルから第1および第10フィールドを抽出するという動作をする 数字名以外であっても最後のパラメータがフィールド指定形式に見合った文字列のとき それはファイル名ではなくフィールド指定とみなされて入力は標準入力から行なわれる</p>
+<p>また、文字列切り出し指定において、切り取りや長さが文字の区切りに一致しないときにはエラーとなる。</p>
+<pre class="prettyprint">$ echo ＵＳＰ研究所 | self 1.2.4
 Errorself] : Rec 1. エラー
-$ </pre>
-
-      <p>フィールドの幅より大きい開始位置を指定してもエラーとなる。</p>
-
-      <pre class="prettyprint">$ echo ＵＳＰ研究所 | self 1.20
+$
+</pre>
+<p>フィールドの幅より大きい開始位置を指定してもエラーとなる。</p>
+<pre class="prettyprint">$ echo ＵＳＰ研究所 | self 1.20
 Errorself] : Rec 1. エラー
-$ </pre>
-
-      <h3>【関連項目】</h3>
-
-      <p><a href="delf.html">delf(1)</a></p>
-
+$
+</pre>
+<h3>【関連項目】</h3>
+<p><a href="delf.html" class="command">delf(1)</a></p>
     </div>
 
-    <div id="lastmodified">last modified: 2014-08-13 16:01:13</div>
+    <div id="lastmodified">Last modified: Fri Jul 15 15:42:38 JST 2022</div>
 
-    <div id="footer">Contact us: uecinfo@usp-lab.com<br/>Copyright (c) 2012,2013 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
+    <div id="footer">Contact us: uecinfo@usp-lab.com<br>Copyright &copy; 2012-2022 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
   </div>
 </body>
 </html>
