--- a/MANUALHTML/sm2.html
+++ b/MANUALHTML/sm2.html
@@ -1,20 +1,19 @@
-<!doctype html>
-
+<!DOCTYPE html>
 <html lang="ja">
 <head>
   <meta charset="utf-8">
-  <title>UEC - usp engineers' community - Tukubaiオンラインコマンドマニュアル</title>
-  <link rel="stylesheet" href="COMMON/CSS/MAIN.CSS" />
-  <link rel="stylesheet" href="COMMON/CSS/MENU.CSS" />
-  <link rel="stylesheet" href="COMMON/CSS/PRINT.CSS" />
+  <title>sm2 - UEC - usp engineers' community - Tukubaiオンラインコマンドマニュアル</title>
+  <link rel="stylesheet" href="COMMON/CSS/MAIN.CSS">
+  <link rel="stylesheet" href="COMMON/CSS/MENU.CSS">
+  <link rel="stylesheet" href="COMMON/CSS/PRINT.CSS">
   <!--[if lte IE 8]>
-  <link rel="stylesheet" href="COMMON/CSS/IE67HACK.CSS" />
+  <link rel="stylesheet" href="COMMON/CSS/IE67HACK.CSS">
   <![endif]-->
   <!--[if IE 7]>
-  <link rel="stylesheet" href="COMMON/CSS/IE7HACK.CSS" />
+  <link rel="stylesheet" href="COMMON/CSS/IE7HACK.CSS">
   <![endif]-->
   <!--[if IE 6]>
-  <link rel="stylesheet" href="COMMON/CSS/IE6HACK.CSS" />
+  <link rel="stylesheet" href="COMMON/CSS/IE6HACK.CSS">
   <![endif]-->
   <script src="COMMON/JS/MENU.JS"></script>
 </head>
@@ -22,74 +21,104 @@
   <div id="container">
     <div id="header">
       <div id="logo">
-        <img id="logoimage" src="COMMON/IMG/TUKUBAI_LOGO.JPG" />
+        <img id="logoimage" src="COMMON/IMG/TUKUBAI_LOGO.JPG">
       </div>
       <div id="title">
         <p id="slogan"></p>
         <ul id="megamenu">
           <li id="tukubai_man"><a href="index.html" class="target">Tukubaiマニュアル</a>
             <ul>
+              <li><a href="1bai.html">1bai(1)</a></li>
+              <li><a href="block_getlast.html">block_getlast(1)</a></li>
               <li><a href="calclock.html">calclock(1)</a></li>
+              <li><a href="calsed.html">calsed(1)</a></li>
+              <li><a href="cap.html">cap(1)</a></li>
               <li><a href="cgi-name.html">cgi-name(1)</a></li>
               <li><a href="check_attr_name.html">check_attr_name(1)</a></li>
+              <li><a href="check_cmp_name.html">check_cmp_name(1)</a></li>
+              <li><a href="check_date_name.html">check_date_name(1)</a></li>
+              <li><a href="check_dble_name.html">check_dble_name(1)</a></li>
+              <li><a href="check_inlist_name.html">check_inlist_name(1)</a></li>
               <li><a href="check_need_name.html">check_need_name(1)</a></li>
               <li><a href="cjoin0.html">cjoin0(1)</a></li>
               <li><a href="cjoin1.html">cjoin1(1)</a></li>
+              <li><a href="cjoin1x.html">cjoin1x(1)</a></li>
               <li><a href="cjoin2.html">cjoin2(1)</a></li>
+              <li><a href="cjoin2x.html">cjoin2x(1)</a></li>
               <li><a href="comma.html">comma(1)</a></li>
               <li><a href="count.html">count(1)</a></li>
               <li><a href="ctail.html">ctail(1)</a></li>
               <li><a href="dayslash.html">dayslash(1)</a></li>
               <li><a href="delf.html">delf(1)</a></li>
+              <li><a href="delr.html">delr(1)</a></li>
               <li><a href="divsen.html">divsen(1)</a></li>
+              <li><a href="exist.html">exist(1)</a></li>
+              <li><a href="extname.html">extname(1)</a></li>
               <li><a href="filehame.html">filehame(1)</a></li>
               <li><a href="formhame.html">formhame(1)</a></li>
+              <li><a href="fsed.html">fsed(1)</a></li>
               <li><a href="getfirst.html">getfirst(1)</a></li>
               <li><a href="getlast.html">getlast(1)</a></li>
               <li><a href="gyo.html">gyo(1)</a></li>
+              <li><a href="haba.html">haba(1)</a></li>
               <li><a href="han.html">han(1)</a></li>
+              <li><a href="isdate.html">isdate(1)</a></li>
+              <li><a href="itouch.html">itouch(1)</a></li>
               <li><a href="join0.html">join0(1)</a></li>
               <li><a href="join1.html">join1(1)</a></li>
+              <li><a href="join1x.html">join1x(1)</a></li>
               <li><a href="join2.html">join2(1)</a></li>
+              <li><a href="join2x.html">join2x(1)</a></li>
               <li><a href="juni.html">juni(1)</a></li>
               <li><a href="kasan.html">kasan(1)</a></li>
               <li><a href="keta.html">keta(1)</a></li>
               <li><a href="keycut.html">keycut(1)</a></li>
               <li><a href="loopj.html">loopj(1)</a></li>
               <li><a href="loopx.html">loopx(1)</a></li>
+              <li><a href="maezero.html">maezero(1)</a></li>
+              <li><a href="man2.html">man2(1)</a></li>
               <li><a href="map.html">map(1)</a></li>
               <li><a href="marume.html">marume(1)</a></li>
               <li><a href="mdate.html">mdate(1)</a></li>
               <li><a href="mime-read.html">mime-read(1)</a></li>
               <li><a href="mojihame.html">mojihame(1)</a></li>
+              <li><a href="msort.html">msort(1)</a></li>
               <li><a href="nameread.html">nameread(1)</a></li>
+              <li><a href="numchar.html">numchar(1)</a></li>
               <li><a href="plus.html">plus(1)</a></li>
               <li><a href="rank.html">rank(1)</a></li>
               <li><a href="ratio.html">ratio(1)</a></li>
               <li><a href="retu.html">retu(1)</a></li>
+              <li><a href="rjson.html">rjson(1)</a></li>
               <li><a href="self.html">self(1)</a></li>
+              <li><a href="selr.html">selr(1)</a></li>
               <li><a href="sm2.html">sm2(1)</a></li>
               <li><a href="sm4.html">sm4(1)</a></li>
               <li><a href="sm5.html">sm5(1)</a></li>
               <li><a href="tarr.html">tarr(1)</a></li>
               <li><a href="tateyoko.html">tateyoko(1)</a></li>
               <li><a href="tcat.html">tcat(1)</a></li>
+              <li><a href="uconv.html">uconv(1)</a></li>
+              <li><a href="ulock.html">ulock(1)</a></li>
               <li><a href="unmap.html">unmap(1)</a></li>
               <li><a href="up3.html">up3(1)</a></li>
+              <li><a href="xmldir.html">xmldir(1)</a></li>
               <li><a href="yarr.html">yarr(1)</a></li>
               <li><a href="ycat.html">ycat(1)</a></li>
               <li><a href="yobi.html">yobi(1)</a></li>
               <li><a href="ysum.html">ysum(1)</a></li>
               <li><a href="zen.html">zen(1)</a></li>
-              <li class="separator"><hr/></li>
-              <li class="separator"><hr/></li>
-              <li class="separator"><hr/></li>
+              <li></li>
+
+              <li class="separator"><hr></li>
+              <li class="separator"><hr></li>
+              <li class="separator"><hr></li>
               <li><a href="tag-format.html">タグ形式(5)</a></li>
               <li><a href="name-format.html">ネーム形式(5)</a></li>
               <li><a href="field-format.html">フィールド形式(5)</a></li>
               <li><a href="master-file.html">マスタファイル(5)</a></li>
               <li><a href="name-file.html">ネームファイル(5)</a></li>
-              <li><a href="transaction-file.html" class="target">トランザクションファイル(5)</a></li>
+              <li><a href="transaction-file.html">トランザクションファイル(5)</a></li>
             </ul> 
           </li>
         </ul>
@@ -99,25 +128,19 @@
     <div id="main">
       <h1>Tukubaiオンラインコマンドマニュアル</h1>
 
-      <h2>sm2(1)</h2>
+<h2>sm2(1)</h2>
+<h3>【名前】</h3>
+<p><code>sm2</code> :  キー単位での値の集計</p>
+<h3>【書式】</h3>
+<pre class="list">Usage   : sm2 [+count] &lt;k1&gt; &lt;k2&gt; &lt;s1&gt; &lt;s2&gt; [&lt;file&gt;]
+Version : Fri Jul 29 15:32:20 JST 2022
 
-      <h3>【名前】</h3>
-
-      <p>sm2 : キー単位での値の集計</p>
-
-      <h3>【書式】</h3>
-
-      <pre class="list">Usage	: sm2 [+count] &lt;k1&gt; &lt;k2&gt; &lt;s1&gt; &lt;s2&gt; &lt;file&gt;
-Version	: Thu Dec 15 13:46:38 JST 2011</pre>
-
-      <h3>【説明】</h3>
-
-      <p>&lt;file&gt;ファイルから、キーが同じ行の各フィールドの値を集計する。k1で指定したフィールドからk2で指定したフィールドまでをキーとして、s1で指定したフィールドからs2で指定したフィールドまでの各フィールドを集計する。同じキーをもつ行は1行に集計されて出力される。なお、キーまたは集計フィールドいずれの範囲にも指定していないフィールドについては出力はされない。</p>
-
-      <h3>【例1】</h3>
-
-      <pre class="prettyprint">$ cat data
-0001 新橋店 20060201 91 59 20 76 54	←店別番号 店名 日付 商品別売数
+</pre>
+<h3>【説明】</h3>
+<p><code>&lt;file&gt;</code>ファイルから、キーが同じ行の各フィールドの値を集計する。k1で指定したフィールドからk2で指定したフィールドまでをキーとして、s1で指定したフィールドからs2で指定したフィールドまでの各フィールドを集計する。同じキーをもつ行は1行に集計されて出力される。なお、キーまたは集計フィールドいずれの範囲にも指定していないフィールドについては出力はされない。</p>
+<h3>【例1】</h3>
+<pre class="prettyprint">$ cat data
+0001 新橋店 20060201 91 59 20 76 54     ←店別番号 店名 日付 商品別売数
 0001 新橋店 20060202 46 39 8  5  21
 0001 新橋店 20060203 82 0  23 84 10
 0002 池袋店 20060201 30 50 71 36 30
@@ -129,22 +152,19 @@ Version	: Thu Dec 15 13:46:38 JST 2011</pre>
 0004 上野店 20060201 60 89 33 18 6
 0004 上野店 20060202 95 60 35 93 76
 0004 上野店 20060203 92 56 83 96 75
-$ </pre>
-
-      <p>店別の売れ数の合計を出力させる。第1フィールドから第2フィールドをキーとして第4フィールドから第8フィールドを集計する。</p>
-
-      <pre class="prettyprint">$ sm2 1 2 4 8 data
+$
+</pre>
+<p>店別の売れ数の合計を出力させる。第1フィールドから第2フィールドをキーとして第4フィールドから第8フィールドを集計する。</p>
+<pre class="prettyprint">$ sm2 1 2 4 8 data
 0001 新橋店 219 98 51 165 85
 0002 池袋店 166 134 135 74 87
 0003 新宿店 184 172 93 45 142
 0004 上野店 247 205 151 207 157
-$ </pre>
-
-      <h3>【例2】</h3>
-
-      <p>+countオプションはキー毎の集計すると同時に、元データの各キー毎の行の行数をキーの直後に挿入出力する。</p>
-
-      <pre class="prettyprint">$ cat data
+$
+</pre>
+<h3>【例2】</h3>
+<p><code>+c</code>oun<code>t</code>オプションはキー毎の集計すると同時に、元データの各キー毎の行の行数をキーの直後に挿入出力する。</p>
+<pre class="prettyprint">$ cat data
 1111 3
 1111 5
 1111 2
@@ -154,59 +174,51 @@ $ </pre>
 3333 8
 3333 9
 3333 6
-$ </pre>
-
-      <p>キーが同一の行を出力する。</p>
-
-      <pre class="prettyprint">$ sm2 +count 1 1 2 2 data
+$
+</pre>
+<p>キーが同一の行を出力する。</p>
+<pre class="prettyprint">$ sm2 +count 1 1 2 2 data
 1111 3 10
 2222 2 13
 3333 4 27
-$ </pre>
-
-      <h3>【例3】</h3>
-
-      <p>sm2(1)は小数点がある場合、各キー、各フィールド毎に一番精度の高い数に合わせて出力する。</p>
-
-      <pre class="prettyprint">$ cat data3
+$
+</pre>
+<h3>【例3】</h3>
+<p><a href="sm2.html" class="command">sm2(1)</a>は小数点がある場合、各キー、各フィールド毎に一番精度の高い数に合わせて出力する。</p>
+<pre class="prettyprint">$ cat data3
 a 1.4 2.55
 a 2   4
 b 1.33 2.1
 b 5.222 3.12
-$ </pre>
-
-      <pre class="prettyprint">$ sm2 1 1 2 3 data3
+$
+</pre>
+<pre class="prettyprint">$ sm2 1 1 2 3 data3
 a 3.4 6.55
 b 6.552 5.22
-$ </pre>
-
-      <h3>【例4】</h3>
-
-      <p>キーを0 0に指定すると、集計フィールドの総合計を出力する。</p>
-
-      <pre class="prettyprint">$ cat data4
+$
+</pre>
+<h3>【例4】</h3>
+<p>キーを0 0に指定すると、集計フィールドの総合計を出力する。</p>
+<pre class="prettyprint">$ cat data4
 a 1
 b 2
 c 3
-$ </pre>
-
-      <pre class="prettyprint">$ sm2 0 0 2 2 data4
+$
+</pre>
+<pre class="prettyprint">$ sm2 0 0 2 2 data4
 6
-$ </pre>
-
-      <p>指定したディレクトリに存在するファイルのサイズを合計するには次のようにコマンドを実行する。</p>
-
-      <pre class="prettyprint">$ ls -l directory | sm2 0 0 5 5</pre>
-
-      <h3>【関連項目】</h3>
-
-      <p><a href="kasan.html">kasan(1)</a>、<a href="plus.html">plus(1)</a>、<a href="ratio.html">ratio(1)</a>、<a href="sm4.html">sm4(1)</a>、<a href="sm5.html">sm5(1)</a>、<a href="ysum.html">ysum(1)</a></p>
-
+$
+</pre>
+<p>指定したディレクトリに存在するファイルのサイズを合計するには次のようにコマンドを実行する。</p>
+<pre class="prettyprint">$ ls -l directory | sm2 0 0 5 5
+</pre>
+<h3>【関連項目】</h3>
+<p><a href="kasan.html" class="command">kasan(1)</a>、<a href="plus.html" class="command">plus(1)</a>、<a href="ratio.html" class="command">ratio(1)</a>、<a href="sm4.html" class="command">sm4(1)</a>、<a href="sm5.html" class="command">sm5(1)</a>、<a href="ysum.html" class="command">ysum(1)</a></p>
     </div>
 
-    <div id="lastmodified">last modified: 2014-08-13 16:01:13</div>
+    <div id="lastmodified">Last modified: Fri Jul 29 15:44:45 JST 2022</div>
 
-    <div id="footer">Contact us: uecinfo@usp-lab.com<br/>Copyright (c) 2012,2013 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
+    <div id="footer">Contact us: uecinfo@usp-lab.com<br>Copyright &copy; 2012-2022 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
   </div>
 </body>
 </html>
