--- a/MANUALHTML/sm4.html
+++ b/MANUALHTML/sm4.html
@@ -1,20 +1,19 @@
-<!doctype html>
-
+<!DOCTYPE html>
 <html lang="ja">
 <head>
   <meta charset="utf-8">
-  <title>UEC - usp engineers' community - Tukubaiオンラインコマンドマニュアル</title>
-  <link rel="stylesheet" href="COMMON/CSS/MAIN.CSS" />
-  <link rel="stylesheet" href="COMMON/CSS/MENU.CSS" />
-  <link rel="stylesheet" href="COMMON/CSS/PRINT.CSS" />
+  <title>sm4 - UEC - usp engineers' community - Tukubaiオンラインコマンドマニュアル</title>
+  <link rel="stylesheet" href="COMMON/CSS/MAIN.CSS">
+  <link rel="stylesheet" href="COMMON/CSS/MENU.CSS">
+  <link rel="stylesheet" href="COMMON/CSS/PRINT.CSS">
   <!--[if lte IE 8]>
-  <link rel="stylesheet" href="COMMON/CSS/IE67HACK.CSS" />
+  <link rel="stylesheet" href="COMMON/CSS/IE67HACK.CSS">
   <![endif]-->
   <!--[if IE 7]>
-  <link rel="stylesheet" href="COMMON/CSS/IE7HACK.CSS" />
+  <link rel="stylesheet" href="COMMON/CSS/IE7HACK.CSS">
   <![endif]-->
   <!--[if IE 6]>
-  <link rel="stylesheet" href="COMMON/CSS/IE6HACK.CSS" />
+  <link rel="stylesheet" href="COMMON/CSS/IE6HACK.CSS">
   <![endif]-->
   <script src="COMMON/JS/MENU.JS"></script>
 </head>
@@ -22,74 +21,104 @@
   <div id="container">
     <div id="header">
       <div id="logo">
-        <img id="logoimage" src="COMMON/IMG/TUKUBAI_LOGO.JPG" />
+        <img id="logoimage" src="COMMON/IMG/TUKUBAI_LOGO.JPG">
       </div>
       <div id="title">
         <p id="slogan"></p>
         <ul id="megamenu">
           <li id="tukubai_man"><a href="index.html" class="target">Tukubaiマニュアル</a>
             <ul>
+              <li><a href="1bai.html">1bai(1)</a></li>
+              <li><a href="block_getlast.html">block_getlast(1)</a></li>
               <li><a href="calclock.html">calclock(1)</a></li>
+              <li><a href="calsed.html">calsed(1)</a></li>
+              <li><a href="cap.html">cap(1)</a></li>
               <li><a href="cgi-name.html">cgi-name(1)</a></li>
               <li><a href="check_attr_name.html">check_attr_name(1)</a></li>
+              <li><a href="check_cmp_name.html">check_cmp_name(1)</a></li>
+              <li><a href="check_date_name.html">check_date_name(1)</a></li>
+              <li><a href="check_dble_name.html">check_dble_name(1)</a></li>
+              <li><a href="check_inlist_name.html">check_inlist_name(1)</a></li>
               <li><a href="check_need_name.html">check_need_name(1)</a></li>
               <li><a href="cjoin0.html">cjoin0(1)</a></li>
               <li><a href="cjoin1.html">cjoin1(1)</a></li>
+              <li><a href="cjoin1x.html">cjoin1x(1)</a></li>
               <li><a href="cjoin2.html">cjoin2(1)</a></li>
+              <li><a href="cjoin2x.html">cjoin2x(1)</a></li>
               <li><a href="comma.html">comma(1)</a></li>
               <li><a href="count.html">count(1)</a></li>
               <li><a href="ctail.html">ctail(1)</a></li>
               <li><a href="dayslash.html">dayslash(1)</a></li>
               <li><a href="delf.html">delf(1)</a></li>
+              <li><a href="delr.html">delr(1)</a></li>
               <li><a href="divsen.html">divsen(1)</a></li>
+              <li><a href="exist.html">exist(1)</a></li>
+              <li><a href="extname.html">extname(1)</a></li>
               <li><a href="filehame.html">filehame(1)</a></li>
               <li><a href="formhame.html">formhame(1)</a></li>
+              <li><a href="fsed.html">fsed(1)</a></li>
               <li><a href="getfirst.html">getfirst(1)</a></li>
               <li><a href="getlast.html">getlast(1)</a></li>
               <li><a href="gyo.html">gyo(1)</a></li>
+              <li><a href="haba.html">haba(1)</a></li>
               <li><a href="han.html">han(1)</a></li>
+              <li><a href="isdate.html">isdate(1)</a></li>
+              <li><a href="itouch.html">itouch(1)</a></li>
               <li><a href="join0.html">join0(1)</a></li>
               <li><a href="join1.html">join1(1)</a></li>
+              <li><a href="join1x.html">join1x(1)</a></li>
               <li><a href="join2.html">join2(1)</a></li>
+              <li><a href="join2x.html">join2x(1)</a></li>
               <li><a href="juni.html">juni(1)</a></li>
               <li><a href="kasan.html">kasan(1)</a></li>
               <li><a href="keta.html">keta(1)</a></li>
               <li><a href="keycut.html">keycut(1)</a></li>
               <li><a href="loopj.html">loopj(1)</a></li>
               <li><a href="loopx.html">loopx(1)</a></li>
+              <li><a href="maezero.html">maezero(1)</a></li>
+              <li><a href="man2.html">man2(1)</a></li>
               <li><a href="map.html">map(1)</a></li>
               <li><a href="marume.html">marume(1)</a></li>
               <li><a href="mdate.html">mdate(1)</a></li>
               <li><a href="mime-read.html">mime-read(1)</a></li>
               <li><a href="mojihame.html">mojihame(1)</a></li>
+              <li><a href="msort.html">msort(1)</a></li>
               <li><a href="nameread.html">nameread(1)</a></li>
+              <li><a href="numchar.html">numchar(1)</a></li>
               <li><a href="plus.html">plus(1)</a></li>
               <li><a href="rank.html">rank(1)</a></li>
               <li><a href="ratio.html">ratio(1)</a></li>
               <li><a href="retu.html">retu(1)</a></li>
+              <li><a href="rjson.html">rjson(1)</a></li>
               <li><a href="self.html">self(1)</a></li>
+              <li><a href="selr.html">selr(1)</a></li>
               <li><a href="sm2.html">sm2(1)</a></li>
               <li><a href="sm4.html">sm4(1)</a></li>
               <li><a href="sm5.html">sm5(1)</a></li>
               <li><a href="tarr.html">tarr(1)</a></li>
               <li><a href="tateyoko.html">tateyoko(1)</a></li>
               <li><a href="tcat.html">tcat(1)</a></li>
+              <li><a href="uconv.html">uconv(1)</a></li>
+              <li><a href="ulock.html">ulock(1)</a></li>
               <li><a href="unmap.html">unmap(1)</a></li>
               <li><a href="up3.html">up3(1)</a></li>
+              <li><a href="xmldir.html">xmldir(1)</a></li>
               <li><a href="yarr.html">yarr(1)</a></li>
               <li><a href="ycat.html">ycat(1)</a></li>
               <li><a href="yobi.html">yobi(1)</a></li>
               <li><a href="ysum.html">ysum(1)</a></li>
               <li><a href="zen.html">zen(1)</a></li>
-              <li class="separator"><hr/></li>
-              <li class="separator"><hr/></li>
-              <li class="separator"><hr/></li>
+              <li></li>
+
+              <li class="separator"><hr></li>
+              <li class="separator"><hr></li>
+              <li class="separator"><hr></li>
               <li><a href="tag-format.html">タグ形式(5)</a></li>
               <li><a href="name-format.html">ネーム形式(5)</a></li>
               <li><a href="field-format.html">フィールド形式(5)</a></li>
               <li><a href="master-file.html">マスタファイル(5)</a></li>
               <li><a href="name-file.html">ネームファイル(5)</a></li>
-              <li><a href="transaction-file.html" class="target">トランザクションファイル(5)</a></li>
+              <li><a href="transaction-file.html">トランザクションファイル(5)</a></li>
             </ul> 
           </li>
         </ul>
@@ -99,28 +128,21 @@
     <div id="main">
       <h1>Tukubaiオンラインコマンドマニュアル</h1>
 
-      <h2>sm4(1)</h2>
+<h2>sm4(1)</h2>
+<h3>【名前】</h3>
+<p><code>sm4</code> :  小計、中計</p>
+<h3>【書式】</h3>
+<pre class="list">Usage   : sm4 [+h] &lt;k1&gt; &lt;k2&gt; &lt;d1&gt; &lt;d2&gt; &lt;s1&gt; &lt;s2&gt; &lt;file&gt;
+Version : Tue Oct 20 15:17:47 JST 2020
+Edition : 1
 
-      <h3>【名前】</h3>
-
-      <p>sm4 : 小計、中計</p>
-
-      <h3>【書式】</h3>
-
-      <pre class="list">Usage	: sm4 [+h] &lt;k1&gt; &lt;k2&gt; &lt;d1&gt; &lt;d2&gt; &lt;s1&gt; &lt;s2&gt; &lt;file&gt;
-Version	: Thu Dec 15 13:46:38 JST 2011
-	: UTF-8</pre>
-
-      <h3>【説明】</h3>
-
-      <p>&lt;file&gt;ファイルにおけるサブキーによる小計や中計を計算する。k1で指定したフィールドからk2で指定したフィールドまでを主キー、d1からd2までのフィールドがサブキー、s1からs2までのフィールドまでのフィールドを集計フィールドとして、主キーの値が同じキーをサブキーのフィールドを飛ばして集計フィールドを集計して各主キーの行の最終行に挿入する。</p>
-
-      <p>集計行におけるサブキーのフィールドは@で補完される。小計および中計を段階的に付与するためにsm4(1)を複数回使用する場合には、 サブキーに@が含まれる行は集計から除外される。キーまたは集計フィールドいずれの範囲にも指定していないフィールドについては出力は実行されない。</p>
-
-      <h3>【例1】</h3>
-
-      <pre class="prettyprint">$ cat data
-01 埼玉県 01 さいたま市 91 59 20 76 54		←各都市での調査データ
+</pre>
+<h3>【説明】</h3>
+<p><code>&lt;file&gt;</code>ファイルにおけるサブキーによる小計や中計を計算する。k1で指定したフィールドからk2で指定したフィールドまでを主キー、d1からd2までのフィールドがサブキー、s1からs2までのフィールドまでのフィールドを集計フィールドとして、主キーの値が同じキーをサブキーのフィールドを飛ばして集計フィールドを集計して各主キーの行の最終行に挿入する。</p>
+<p>集計行におけるサブキーのフィールドは@で補完される。小計および中計を段階的に付与するために<a href="sm4.html" class="command">sm4(1)</a>を複数回使用する場合には、サブキーに@が含まれる行は集計から除外される。キーまたは集計フィールドいずれの範囲にも指定していないフィールドについては出力は実行されない。</p>
+<h3>【例1】</h3>
+<pre class="prettyprint">$ cat data
+01 埼玉県 01 さいたま市 91 59 20 76 54          ←各都市での調査データ
 01 埼玉県 02 川越市 46 39 8 5 21
 01 埼玉県 03 熊谷市 82 0 23 84 10
 02 東京都 04 新宿区 30 50 71 36 30
@@ -134,21 +156,20 @@ Version	: Thu Dec 15 13:46:38 JST 2011
 04 神奈川県 12 横浜市 92 56 83 96 75
 04 神奈川県 13 川崎市 30 12 32 44 19
 04 神奈川県 14 厚木市 48 66 23 71 24
-$ </pre>
-
-      <p>県別に小計を出する。</p>
-
-      <pre class="prettyprint">$ sm4 1 2 3 4 5 NF data
+$
+</pre>
+<p>県別に小計を出力する。</p>
+<pre class="prettyprint">$ sm4 1 2 3 4 5 NF data
 01 埼玉県 01 さいたま市 91 59 20 76 54
 01 埼玉県 02 川越市 46 39 8 5 21
 01 埼玉県 03 熊谷市 82 0 23 84 10
-01 埼玉県 @@ @@@@@@@@@@ 173 59 43 160 64
+01 埼玉県 @@ @@@@@@@@@@ 219 98 51 165 85
 02 東京都 04 新宿区 30 50 71 36 30
 02 東京都 05 中央区 78 13 44 28 51
 02 東京都 06 港区 58 71 20 10 6
 02 東京都 07 八王子市 82 79 16 21 80
 02 東京都 08 立川市 50 2 33 15 62
-02 東京都 @@ @@@@@@@@@@ 248 213 151 95 167
+02 東京都 @@ @@@@@@@@@@ 298 215 184 110 229
 03 千葉県 09 千葉市 52 91 44 9 0
 03 千葉県 10 市川市 60 89 33 18 6
 03 千葉県 11 柏市 95 60 35 93 76
@@ -156,14 +177,12 @@ $ </pre>
 04 神奈川県 12 横浜市 92 56 83 96 75
 04 神奈川県 13 川崎市 30 12 32 44 19
 04 神奈川県 14 厚木市 48 66 23 71 24
-04 神奈川県 @@ @@@@@@@@@ 170 134 138 211 118
-$ </pre>
-
-      <h3>【例2】</h3>
-
-      <p>小計と中計を出す。</p>
-
-      <pre class="prettyprint">$ cat data
+04 神奈川県 @@ @@@@@@@@@@ 170 134 138 211 118
+$
+</pre>
+<h3>【例2】</h3>
+<p>小計と中計を出す。</p>
+<pre class="prettyprint">$ cat data
 01 関東地区 01 埼玉県 01 さいたま市 91 59 20 76 54
 01 関東地区 01 埼玉県 03 熊谷市 82 0 23 84 10
 01 関東地区 02 東京都 04 新宿区 30 50 71 36 30
@@ -179,9 +198,9 @@ $ </pre>
 02 関西地区 02 兵庫県 08 芦屋市 50 2 33 15 62
 02 関西地区 03 京都府 09 京都市 52 91 44 9 0
 02 関西地区 03 京都府 10 舞鶴市 60 89 33 18 6
-$ </pre>
-
-      <pre class="prettyprint">$ sm4 1 4 5 6 7 11 data > data2
+$
+</pre>
+<pre class="prettyprint">$ sm4 1 4 5 6 7 11 data &gt; data2
 $ cat data2
 01 関東地区 01 埼玉県 01 さいたま市 91 59 20 76 54
 01 関東地区 01 埼玉県 03 熊谷市 82 0 23 84 10
@@ -203,9 +222,9 @@ $ cat data2
 02 関西地区 03 京都府 09 京都市 52 91 44 9 0
 02 関西地区 03 京都府 10 舞鶴市 60 89 33 18 6
 02 関西地区 03 京都府 @@ @@@@@@@@@@ 112 180 77 27 6
-$ </pre>
-
-      <pre class="prettyprint">$ sm4 1 2 3 6 7 11 data2
+$
+</pre>
+<pre class="prettyprint">$ sm4 1 2 3 6 7 11 data2
 01 関東地区 01 埼玉県 01 さいたま市 91 59 20 76 54
 01 関東地区 01 埼玉県 03 熊谷市 82 0 23 84 10
 01 関東地区 01 埼玉県 @@ @@@@@@@@@@ 173 59 43 160 64
@@ -228,13 +247,11 @@ $ </pre>
 02 関西地区 03 京都府 10 舞鶴市 60 89 33 18 6
 02 関西地区 03 京都府 @@ @@@@@@@@@@ 112 180 77 27 6
 02 関西地区 @@ @@@@@@ @@ @@@@@@@@@@ 629 493 312 302 320
-$ </pre>
-
-      <h3>【例3】</h3>
-
-      <p>サブキーがない場合には次のような実行結果が得られる。</p>
-
-      <pre class="prettyprint">$ cat data
+$
+</pre>
+<h3>【例3】</h3>
+<p>サブキーがない場合には次のような実行結果が得られる。</p>
+<pre class="prettyprint">$ cat data
 埼玉県 91 59 20 76 54
 埼玉県 46 39 8 5 21
 埼玉県 82 0 23 84 10
@@ -249,9 +266,9 @@ $ </pre>
 神奈川県 92 56 83 96 75
 神奈川県 30 12 32 44 19
 神奈川県 48 66 23 71 24
-$ </pre>
-
-      <pre class="prettyprint">$ sm4 1 1 x x 2 6 data
+$
+</pre>
+<pre class="prettyprint">$ sm4 1 1 x x 2 6 data
 埼玉県 91 59 20 76 54
 埼玉県 46 39 8 5 21
 埼玉県 82 0 23 84 10
@@ -270,17 +287,15 @@ $ </pre>
 神奈川県 30 12 32 44 19
 神奈川県 48 66 23 71 24
 @@@@@@ 170 134 138 211 118
-$ </pre>
-
-      <h3>【関連項目】</h3>
-
-      <p><a href="kasan.html">kasan(1)</a>、<a href="plus.html">plus(1)</a>、<a href="ratio.html">ratio(1)</a>、<a href="sm2.html">sm2(1)</a>、<a href="sm5.html">sm5(1)</a>、<a href="ysum.html">ysum(1)</a></p>
-
+$
+</pre>
+<h3>【関連項目】</h3>
+<p><a href="kasan.html" class="command">kasan(1)</a>、<a href="plus.html" class="command">plus(1)</a>、<a href="ratio.html" class="command">ratio(1)</a>、<a href="sm2.html" class="command">sm2(1)</a>、<a href="sm5.html" class="command">sm5(1)</a>、<a href="ysum.html" class="command">ysum(1)</a></p>
     </div>
 
-    <div id="lastmodified">last modified: 2014-08-13 16:01:13</div>
+    <div id="lastmodified">Last modified: Fri Jul 15 15:42:38 JST 2022</div>
 
-    <div id="footer">Contact us: uecinfo@usp-lab.com<br/>Copyright (c) 2012,2013 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
+    <div id="footer">Contact us: uecinfo@usp-lab.com<br>Copyright &copy; 2012-2022 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
   </div>
 </body>
 </html>
