--- a/MANUALHTML/tarr.html
+++ b/MANUALHTML/tarr.html
@@ -1,20 +1,19 @@
-<!doctype html>
-
+<!DOCTYPE html>
 <html lang="ja">
 <head>
   <meta charset="utf-8">
-  <title>UEC - usp engineers' community - Tukubaiオンラインコマンドマニュアル</title>
-  <link rel="stylesheet" href="COMMON/CSS/MAIN.CSS" />
-  <link rel="stylesheet" href="COMMON/CSS/MENU.CSS" />
-  <link rel="stylesheet" href="COMMON/CSS/PRINT.CSS" />
+  <title>tarr - UEC - usp engineers' community - Tukubaiオンラインコマンドマニュアル</title>
+  <link rel="stylesheet" href="COMMON/CSS/MAIN.CSS">
+  <link rel="stylesheet" href="COMMON/CSS/MENU.CSS">
+  <link rel="stylesheet" href="COMMON/CSS/PRINT.CSS">
   <!--[if lte IE 8]>
-  <link rel="stylesheet" href="COMMON/CSS/IE67HACK.CSS" />
+  <link rel="stylesheet" href="COMMON/CSS/IE67HACK.CSS">
   <![endif]-->
   <!--[if IE 7]>
-  <link rel="stylesheet" href="COMMON/CSS/IE7HACK.CSS" />
+  <link rel="stylesheet" href="COMMON/CSS/IE7HACK.CSS">
   <![endif]-->
   <!--[if IE 6]>
-  <link rel="stylesheet" href="COMMON/CSS/IE6HACK.CSS" />
+  <link rel="stylesheet" href="COMMON/CSS/IE6HACK.CSS">
   <![endif]-->
   <script src="COMMON/JS/MENU.JS"></script>
 </head>
@@ -22,74 +21,104 @@
   <div id="container">
     <div id="header">
       <div id="logo">
-        <img id="logoimage" src="COMMON/IMG/TUKUBAI_LOGO.JPG" />
+        <img id="logoimage" src="COMMON/IMG/TUKUBAI_LOGO.JPG">
       </div>
       <div id="title">
         <p id="slogan"></p>
         <ul id="megamenu">
           <li id="tukubai_man"><a href="index.html" class="target">Tukubaiマニュアル</a>
             <ul>
+              <li><a href="1bai.html">1bai(1)</a></li>
+              <li><a href="block_getlast.html">block_getlast(1)</a></li>
               <li><a href="calclock.html">calclock(1)</a></li>
+              <li><a href="calsed.html">calsed(1)</a></li>
+              <li><a href="cap.html">cap(1)</a></li>
               <li><a href="cgi-name.html">cgi-name(1)</a></li>
               <li><a href="check_attr_name.html">check_attr_name(1)</a></li>
+              <li><a href="check_cmp_name.html">check_cmp_name(1)</a></li>
+              <li><a href="check_date_name.html">check_date_name(1)</a></li>
+              <li><a href="check_dble_name.html">check_dble_name(1)</a></li>
+              <li><a href="check_inlist_name.html">check_inlist_name(1)</a></li>
               <li><a href="check_need_name.html">check_need_name(1)</a></li>
               <li><a href="cjoin0.html">cjoin0(1)</a></li>
               <li><a href="cjoin1.html">cjoin1(1)</a></li>
+              <li><a href="cjoin1x.html">cjoin1x(1)</a></li>
               <li><a href="cjoin2.html">cjoin2(1)</a></li>
+              <li><a href="cjoin2x.html">cjoin2x(1)</a></li>
               <li><a href="comma.html">comma(1)</a></li>
               <li><a href="count.html">count(1)</a></li>
               <li><a href="ctail.html">ctail(1)</a></li>
               <li><a href="dayslash.html">dayslash(1)</a></li>
               <li><a href="delf.html">delf(1)</a></li>
+              <li><a href="delr.html">delr(1)</a></li>
               <li><a href="divsen.html">divsen(1)</a></li>
+              <li><a href="exist.html">exist(1)</a></li>
+              <li><a href="extname.html">extname(1)</a></li>
               <li><a href="filehame.html">filehame(1)</a></li>
               <li><a href="formhame.html">formhame(1)</a></li>
+              <li><a href="fsed.html">fsed(1)</a></li>
               <li><a href="getfirst.html">getfirst(1)</a></li>
               <li><a href="getlast.html">getlast(1)</a></li>
               <li><a href="gyo.html">gyo(1)</a></li>
+              <li><a href="haba.html">haba(1)</a></li>
               <li><a href="han.html">han(1)</a></li>
+              <li><a href="isdate.html">isdate(1)</a></li>
+              <li><a href="itouch.html">itouch(1)</a></li>
               <li><a href="join0.html">join0(1)</a></li>
               <li><a href="join1.html">join1(1)</a></li>
+              <li><a href="join1x.html">join1x(1)</a></li>
               <li><a href="join2.html">join2(1)</a></li>
+              <li><a href="join2x.html">join2x(1)</a></li>
               <li><a href="juni.html">juni(1)</a></li>
               <li><a href="kasan.html">kasan(1)</a></li>
               <li><a href="keta.html">keta(1)</a></li>
               <li><a href="keycut.html">keycut(1)</a></li>
               <li><a href="loopj.html">loopj(1)</a></li>
               <li><a href="loopx.html">loopx(1)</a></li>
+              <li><a href="maezero.html">maezero(1)</a></li>
+              <li><a href="man2.html">man2(1)</a></li>
               <li><a href="map.html">map(1)</a></li>
               <li><a href="marume.html">marume(1)</a></li>
               <li><a href="mdate.html">mdate(1)</a></li>
               <li><a href="mime-read.html">mime-read(1)</a></li>
               <li><a href="mojihame.html">mojihame(1)</a></li>
+              <li><a href="msort.html">msort(1)</a></li>
               <li><a href="nameread.html">nameread(1)</a></li>
+              <li><a href="numchar.html">numchar(1)</a></li>
               <li><a href="plus.html">plus(1)</a></li>
               <li><a href="rank.html">rank(1)</a></li>
               <li><a href="ratio.html">ratio(1)</a></li>
               <li><a href="retu.html">retu(1)</a></li>
+              <li><a href="rjson.html">rjson(1)</a></li>
               <li><a href="self.html">self(1)</a></li>
+              <li><a href="selr.html">selr(1)</a></li>
               <li><a href="sm2.html">sm2(1)</a></li>
               <li><a href="sm4.html">sm4(1)</a></li>
               <li><a href="sm5.html">sm5(1)</a></li>
               <li><a href="tarr.html">tarr(1)</a></li>
               <li><a href="tateyoko.html">tateyoko(1)</a></li>
               <li><a href="tcat.html">tcat(1)</a></li>
+              <li><a href="uconv.html">uconv(1)</a></li>
+              <li><a href="ulock.html">ulock(1)</a></li>
               <li><a href="unmap.html">unmap(1)</a></li>
               <li><a href="up3.html">up3(1)</a></li>
+              <li><a href="xmldir.html">xmldir(1)</a></li>
               <li><a href="yarr.html">yarr(1)</a></li>
               <li><a href="ycat.html">ycat(1)</a></li>
               <li><a href="yobi.html">yobi(1)</a></li>
               <li><a href="ysum.html">ysum(1)</a></li>
               <li><a href="zen.html">zen(1)</a></li>
-              <li class="separator"><hr/></li>
-              <li class="separator"><hr/></li>
-              <li class="separator"><hr/></li>
+              <li></li>
+
+              <li class="separator"><hr></li>
+              <li class="separator"><hr></li>
+              <li class="separator"><hr></li>
               <li><a href="tag-format.html">タグ形式(5)</a></li>
               <li><a href="name-format.html">ネーム形式(5)</a></li>
               <li><a href="field-format.html">フィールド形式(5)</a></li>
               <li><a href="master-file.html">マスタファイル(5)</a></li>
               <li><a href="name-file.html">ネームファイル(5)</a></li>
-              <li><a href="transaction-file.html" class="target">トランザクションファイル(5)</a></li>
+              <li><a href="transaction-file.html">トランザクションファイル(5)</a></li>
             </ul> 
           </li>
         </ul>
@@ -99,32 +128,26 @@
     <div id="main">
       <h1>Tukubaiオンラインコマンドマニュアル</h1>
 
-      <h2>tarr(1)</h2>
+<h2>tarr(1)</h2>
+<h3>【名前】</h3>
+<p><code>tarr</code> :  横型のデータを縦型に展開</p>
+<h3>【書式】</h3>
+<pre class="list">Usage   : tarr [-&lt;n&gt;] [-d&lt;str&gt;] [num=&lt;m&gt;] &lt;file&gt;
+Version : Mon Jul 25 20:20:42 JST 2022
+Edition : 1
 
-      <h3>【名前】</h3>
-
-      <p>tarr : 横型のデータを縦型に展開</p>
-
-      <h3>【書式】</h3>
-
-      <pre class="list">Usage	: tarr [-&lt;n&gt;][-d&lt;str&gt;] &lt;file&gt;
-	: tarr [-&lt;n&gt;][-d&lt;str&gt;] num=&lt;n&gt; &lt;file&gt;
-Version	: Thu Dec 15 13:46:38 JST 2011</pre>
-
-      <h3>【説明】</h3>
-
-      <p>指定したファイルの第1フィールドからnum=&lt;n&gt;で指定したフィールドまでのフィールドをキーとして、横に並んでいるフィールドデータを縦に展開して並べ直す。</p>
-
-      <h3>【例1】基本的な使い方</h3>
-
-      <pre class="prettyprint">$ cat data
+</pre>
+<h3>【説明】</h3>
+<p>指定したファイルの第1フィールドから<code>num=&lt;n&gt;</code>で指定したフィールドまでのフィールドをキーとして、横に並んでいるフィールドデータを縦に展開して並べ直す。<code>&lt;file&gt;</code>として<code>-</code>を指定すると標準入力を使用する。</p>
+<h3>【例1】基本的な使い方</h3>
+<pre class="prettyprint">$ cat data
 0000000 浜地______ 50 F 91 59 20 76
 0000001 鈴田______ 50 F 46 39 8 5
 0000003 杉山______ 26 F 30 50 71 36
 0000004 白土______ 40 M 58 71 20 10
-$ </pre>
-
-      <pre class="prettyprint">$ tarr num=4 data		←第4フィールドまでをキーに縦に展開
+$
+</pre>
+<pre class="prettyprint">$ tarr num=4 data               ←第4フィールドまでをキーに縦に展開
 0000000 浜地______ 50 F 91
 0000000 浜地______ 50 F 59
 0000000 浜地______ 50 F 20
@@ -141,13 +164,11 @@ $ </pre>
 0000004 白土______ 40 M 71
 0000004 白土______ 40 M 20
 0000004 白土______ 40 M 10
-$ </pre>
-
-      <h3>【例2】</h3>
-
-      <p>-&lt;n&gt;オプションを使用すると&lt;n&gt;フィールドごとに縦展開する。</p>
-
-      <pre class="prettyprint">$ tarr -2 num=4 data		←2フィールド毎に縦展開する。
+$
+</pre>
+<h3>【例2】</h3>
+<p><code>-&lt;n&gt;</code>オプションを使用すると<code>&lt;n&gt;</code>フィールドごとに縦展開する。</p>
+<pre class="prettyprint">$ tarr -2 num=4 data            ←2フィールド毎に縦展開する。
 0000000 浜地______ 50 F 91 59
 0000000 浜地______ 50 F 20 76
 0000001 鈴田______ 50 F 46 39
@@ -156,38 +177,34 @@ $ </pre>
 0000003 杉山______ 26 F 71 36
 0000004 白土______ 40 M 58 71
 0000004 白土______ 40 M 20 10
-$ </pre>
-
-      <h3>【例3】</h3>
-
-      <p>num=&lt;n&gt;を指定しないと単純に縦展開する。</p>
-
-      <pre class="prettyprint">$ cat data3
+$
+</pre>
+<h3>【例3】</h3>
+<p><code>num=&lt;n&gt;</code>を指定しないと単純に縦展開する。</p>
+<pre class="prettyprint">$ cat data3
 1 2 3 4
 5 6
-$ </pre>
-
-      <pre class="prettyprint">$ tarr data3
+$
+</pre>
+<pre class="prettyprint">$ tarr data3
 1
 2
 3
 4
 5
 6
-$ </pre>
-
-      <h3>【例4】</h3>
-
-      <p>-d&lt;str&gt;オプションを使うことで縦展開するフィールドのフィールドセパレータを指定できる。num=&lt;n&gt;で指定されるキーフィールドは空白区切りである必要がある。</p>
-
-      <pre class="prettyprint">$ cat data
+$
+</pre>
+<h3>【例4】</h3>
+<p><code>-d &lt;str&gt;</code>オプションを使うことで縦展開するフィールドのフィールドセパレータを指定できる。<code>num=&lt;n&gt;</code>で指定されるキーフィールドは空白区切りである必要がある。</p>
+<pre class="prettyprint">$ cat data
 0000000 浜地______ 50 F 91@59@20@76@54
 0000001 鈴田______ 50 F 46@39@8@5@21
 0000003 杉山______ 26 F 30@50@71@36@30
 0000004 白土______ 40 M 58@71@20@10@6
-$ </pre>
-
-      <pre class="prettyprint">$ tarr -d@ num=4 data
+$
+</pre>
+<pre class="prettyprint">$ tarr -d@ num=4 data
 0000000 浜地______ 50 F 91
 0000000 浜地______ 50 F 59
 0000000 浜地______ 50 F 20
@@ -208,31 +225,29 @@ $ </pre>
 0000004 白土______ 40 M 20
 0000004 白土______ 40 M 10
 0000004 白土______ 40 M 6
-$ </pre>
-
-      <pre class="prettyprint">$ cat data2
+$
+</pre>
+<pre class="prettyprint">$ cat data2
 0001 1n2n3
 0002 4n5n6
-$ </pre>
-
-      <pre class="prettyprint">$ tarr -d'n' num=1 data2
+$
+</pre>
+<pre class="prettyprint">$ tarr -d'n' num=1 data2
 0001 1
 0001 2
 0001 3
 0002 4
 0002 5
 0002 6
-$ </pre>
-
-      <h3>【関連項目】</h3>
-
-      <p><a href="yarr.html">yarr(1)</a></p>
-
+$
+</pre>
+<h3>【関連項目】</h3>
+<p><a href="yarr.html" class="command">yarr(1)</a></p>
     </div>
 
-    <div id="lastmodified">last modified: 2014-08-13 16:01:13</div>
+    <div id="lastmodified">Last modified: Fri Jul 15 15:42:38 JST 2022</div>
 
-    <div id="footer">Contact us: uecinfo@usp-lab.com<br/>Copyright (c) 2012,2013 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
+    <div id="footer">Contact us: uecinfo@usp-lab.com<br>Copyright &copy; 2012-2022 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
   </div>
 </body>
 </html>
