--- a/MANUALHTML/tcat.html
+++ b/MANUALHTML/tcat.html
@@ -1,20 +1,19 @@
-<!doctype html>
-
+<!DOCTYPE html>
 <html lang="ja">
 <head>
   <meta charset="utf-8">
-  <title>UEC - usp engineers' community - Tukubaiオンラインコマンドマニュアル</title>
-  <link rel="stylesheet" href="COMMON/CSS/MAIN.CSS" />
-  <link rel="stylesheet" href="COMMON/CSS/MENU.CSS" />
-  <link rel="stylesheet" href="COMMON/CSS/PRINT.CSS" />
+  <title>tcat - UEC - usp engineers' community - Tukubaiオンラインコマンドマニュアル</title>
+  <link rel="stylesheet" href="COMMON/CSS/MAIN.CSS">
+  <link rel="stylesheet" href="COMMON/CSS/MENU.CSS">
+  <link rel="stylesheet" href="COMMON/CSS/PRINT.CSS">
   <!--[if lte IE 8]>
-  <link rel="stylesheet" href="COMMON/CSS/IE67HACK.CSS" />
+  <link rel="stylesheet" href="COMMON/CSS/IE67HACK.CSS">
   <![endif]-->
   <!--[if IE 7]>
-  <link rel="stylesheet" href="COMMON/CSS/IE7HACK.CSS" />
+  <link rel="stylesheet" href="COMMON/CSS/IE7HACK.CSS">
   <![endif]-->
   <!--[if IE 6]>
-  <link rel="stylesheet" href="COMMON/CSS/IE6HACK.CSS" />
+  <link rel="stylesheet" href="COMMON/CSS/IE6HACK.CSS">
   <![endif]-->
   <script src="COMMON/JS/MENU.JS"></script>
 </head>
@@ -22,74 +21,104 @@
   <div id="container">
     <div id="header">
       <div id="logo">
-        <img id="logoimage" src="COMMON/IMG/TUKUBAI_LOGO.JPG" />
+        <img id="logoimage" src="COMMON/IMG/TUKUBAI_LOGO.JPG">
       </div>
       <div id="title">
         <p id="slogan"></p>
         <ul id="megamenu">
           <li id="tukubai_man"><a href="index.html" class="target">Tukubaiマニュアル</a>
             <ul>
+              <li><a href="1bai.html">1bai(1)</a></li>
+              <li><a href="block_getlast.html">block_getlast(1)</a></li>
               <li><a href="calclock.html">calclock(1)</a></li>
+              <li><a href="calsed.html">calsed(1)</a></li>
+              <li><a href="cap.html">cap(1)</a></li>
               <li><a href="cgi-name.html">cgi-name(1)</a></li>
               <li><a href="check_attr_name.html">check_attr_name(1)</a></li>
+              <li><a href="check_cmp_name.html">check_cmp_name(1)</a></li>
+              <li><a href="check_date_name.html">check_date_name(1)</a></li>
+              <li><a href="check_dble_name.html">check_dble_name(1)</a></li>
+              <li><a href="check_inlist_name.html">check_inlist_name(1)</a></li>
               <li><a href="check_need_name.html">check_need_name(1)</a></li>
               <li><a href="cjoin0.html">cjoin0(1)</a></li>
               <li><a href="cjoin1.html">cjoin1(1)</a></li>
+              <li><a href="cjoin1x.html">cjoin1x(1)</a></li>
               <li><a href="cjoin2.html">cjoin2(1)</a></li>
+              <li><a href="cjoin2x.html">cjoin2x(1)</a></li>
               <li><a href="comma.html">comma(1)</a></li>
               <li><a href="count.html">count(1)</a></li>
               <li><a href="ctail.html">ctail(1)</a></li>
               <li><a href="dayslash.html">dayslash(1)</a></li>
               <li><a href="delf.html">delf(1)</a></li>
+              <li><a href="delr.html">delr(1)</a></li>
               <li><a href="divsen.html">divsen(1)</a></li>
+              <li><a href="exist.html">exist(1)</a></li>
+              <li><a href="extname.html">extname(1)</a></li>
               <li><a href="filehame.html">filehame(1)</a></li>
               <li><a href="formhame.html">formhame(1)</a></li>
+              <li><a href="fsed.html">fsed(1)</a></li>
               <li><a href="getfirst.html">getfirst(1)</a></li>
               <li><a href="getlast.html">getlast(1)</a></li>
               <li><a href="gyo.html">gyo(1)</a></li>
+              <li><a href="haba.html">haba(1)</a></li>
               <li><a href="han.html">han(1)</a></li>
+              <li><a href="isdate.html">isdate(1)</a></li>
+              <li><a href="itouch.html">itouch(1)</a></li>
               <li><a href="join0.html">join0(1)</a></li>
               <li><a href="join1.html">join1(1)</a></li>
+              <li><a href="join1x.html">join1x(1)</a></li>
               <li><a href="join2.html">join2(1)</a></li>
+              <li><a href="join2x.html">join2x(1)</a></li>
               <li><a href="juni.html">juni(1)</a></li>
               <li><a href="kasan.html">kasan(1)</a></li>
               <li><a href="keta.html">keta(1)</a></li>
               <li><a href="keycut.html">keycut(1)</a></li>
               <li><a href="loopj.html">loopj(1)</a></li>
               <li><a href="loopx.html">loopx(1)</a></li>
+              <li><a href="maezero.html">maezero(1)</a></li>
+              <li><a href="man2.html">man2(1)</a></li>
               <li><a href="map.html">map(1)</a></li>
               <li><a href="marume.html">marume(1)</a></li>
               <li><a href="mdate.html">mdate(1)</a></li>
               <li><a href="mime-read.html">mime-read(1)</a></li>
               <li><a href="mojihame.html">mojihame(1)</a></li>
+              <li><a href="msort.html">msort(1)</a></li>
               <li><a href="nameread.html">nameread(1)</a></li>
+              <li><a href="numchar.html">numchar(1)</a></li>
               <li><a href="plus.html">plus(1)</a></li>
               <li><a href="rank.html">rank(1)</a></li>
               <li><a href="ratio.html">ratio(1)</a></li>
               <li><a href="retu.html">retu(1)</a></li>
+              <li><a href="rjson.html">rjson(1)</a></li>
               <li><a href="self.html">self(1)</a></li>
+              <li><a href="selr.html">selr(1)</a></li>
               <li><a href="sm2.html">sm2(1)</a></li>
               <li><a href="sm4.html">sm4(1)</a></li>
               <li><a href="sm5.html">sm5(1)</a></li>
               <li><a href="tarr.html">tarr(1)</a></li>
               <li><a href="tateyoko.html">tateyoko(1)</a></li>
               <li><a href="tcat.html">tcat(1)</a></li>
+              <li><a href="uconv.html">uconv(1)</a></li>
+              <li><a href="ulock.html">ulock(1)</a></li>
               <li><a href="unmap.html">unmap(1)</a></li>
               <li><a href="up3.html">up3(1)</a></li>
+              <li><a href="xmldir.html">xmldir(1)</a></li>
               <li><a href="yarr.html">yarr(1)</a></li>
               <li><a href="ycat.html">ycat(1)</a></li>
               <li><a href="yobi.html">yobi(1)</a></li>
               <li><a href="ysum.html">ysum(1)</a></li>
               <li><a href="zen.html">zen(1)</a></li>
-              <li class="separator"><hr/></li>
-              <li class="separator"><hr/></li>
-              <li class="separator"><hr/></li>
+              <li></li>
+
+              <li class="separator"><hr></li>
+              <li class="separator"><hr></li>
+              <li class="separator"><hr></li>
               <li><a href="tag-format.html">タグ形式(5)</a></li>
               <li><a href="name-format.html">ネーム形式(5)</a></li>
               <li><a href="field-format.html">フィールド形式(5)</a></li>
               <li><a href="master-file.html">マスタファイル(5)</a></li>
               <li><a href="name-file.html">ネームファイル(5)</a></li>
-              <li><a href="transaction-file.html" class="target">トランザクションファイル(5)</a></li>
+              <li><a href="transaction-file.html">トランザクションファイル(5)</a></li>
             </ul> 
           </li>
         </ul>
@@ -99,76 +128,64 @@
     <div id="main">
       <h1>Tukubaiオンラインコマンドマニュアル</h1>
 
-      <h2>tcat(1)</h2>
+<h2>tcat(1)</h2>
+<h3>【名前】</h3>
+<p><code>tcat</code> :  ファイルを縦へ並べ替え</p>
+<h3>【書式】</h3>
+<pre class="list">Usage   : tcat [-n] &lt;file1&gt; &lt;file2&gt;...
+Version : Sat Jun 20 21:57:22 JST 2020
+Edition : 1
 
-      <h3>【名前】</h3>
-
-      <p>tcat : ファイルを縦へ並べ替え</p>
-
-      <h3>【書式】</h3>
-
-      <pre class="list">Usage	: tcat [-n] &lt;file1&gt; &lt;file2&gt;...
-Version	: Thu Dec 15 13:46:38 JST 2011</pre>
-
-      <h3>【説明】</h3>
-
-      <p>引数で指定した複数のファイルを縦に並べて連結して出力する。</p>
-
-      <h3>【例1】</h3>
-
-      <pre class="prettyprint">$ cat file1
+</pre>
+<h3>【説明】</h3>
+<p>引数で指定した複数のファイルを縦に並べて連結して出力する。</p>
+<h3>【例1】</h3>
+<pre class="prettyprint">$ cat file1
 ---試験結果---
 氏名No  氏名       年齢 性別  A  B  C  D  E
-$ </pre>
-
-      <pre class="prettyprint">$ cat file2
+$
+</pre>
+<pre class="prettyprint">$ cat file2
 0000008 角屋______   50    F 52 91 44  9  0
 0000009 米原______   68    F 60 89 33 18  6
 0000010 柳本______   50    F 95 60 35 93 76
 0000011 安武______   55    F 92 56 83 96 75
-$ </pre>
-
-      <pre class="prettyprint">$ tcat file1 file2
+$
+</pre>
+<pre class="prettyprint">$ tcat file1 file2
 ---試験結果---
 氏名No  氏名       年齢 性別  A  B  C  D  E
 0000008 角屋______   50    F 52 91 44  9  0
 0000009 米原______   68    F 60 89 33 18  6
 0000010 柳本______   50    F 95 60 35 93 76
 0000011 安武______   55    F 92 56 83 96 75
-$ </pre>
-
-      <h3>【例2】</h3>
-
-      <p>-&lt;n&gt;オプションを使用すると、ファイルを&lt;n&gt;-で指定した行数分だけ間をあけて連結することができる。</p>
-
-      <p>2行あけて連結するには次のようにコマンドを実行する。</p>
-
-      <pre class="prettyprint">$ tcat -2 file1 file2
+$
+</pre>
+<h3>【例2】</h3>
+<p><code>-&lt;n&gt;</code>オプションを使用すると、ファイルを<code>&lt;n&gt; -</code>で指定した行数分だけ間をあけて連結することができる。</p>
+<p>2行あけて連結するには次のようにコマンドを実行する。</p>
+<pre class="prettyprint">$ tcat -2 file1 file2
 ---試験結果---
 氏名No  氏名       年齢 性別  A  B  C  D  E
-
-
+ 
+ 
 0000008 角屋______   50    F 52 91 44  9  0
 0000009 米原______   68    F 60 89 33 18  6
 0000010 柳本______   50    F 95 60 35 93 76
 0000011 安武______   55    F 92 56 83 96 75
-$ </pre>
-
-      <h3>【例3】</h3>
-
-      <p>標準入力から読み込む場合、標準入力側のテキストを引数-で指定する。</p>
-
-      <pre class="prettyprint">$ cat file1 | tcat - file2</pre>
-
-      <h3>【関連項目】</h3>
-
-      <p><a href="ctail.html">ctail(1)</a>、<a href="getfirst.html">getfirst(1)</a>、<a href="getlast.html">getlast(1)</a>、<a href="ycat.html">ycat(1)</a></p>
-
+$
+</pre>
+<h3>【例3】</h3>
+<p>標準入力から読み込む場合、標準入力側のテキストを引数<code>-</code>で指定する。</p>
+<pre class="prettyprint">$ cat file1 | tcat - file2
+</pre>
+<h3>【関連項目】</h3>
+<p><a href="ctail.html" class="command">ctail(1)</a>、<a href="getfirst.html" class="command">getfirst(1)</a>、<a href="getlast.html" class="command">getlast(1)</a>、<a href="ycat.html" class="command">ycat(1)</a></p>
     </div>
 
-    <div id="lastmodified">last modified: 2014-08-13 16:01:13</div>
+    <div id="lastmodified">Last modified: Mon Aug  8 10:45:09 JST 2022</div>
 
-    <div id="footer">Contact us: uecinfo@usp-lab.com<br/>Copyright (c) 2012,2013 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
+    <div id="footer">Contact us: uecinfo@usp-lab.com<br>Copyright &copy; 2012-2022 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
   </div>
 </body>
 </html>
