--- a/MANUALHTML/transaction-file.html
+++ b/MANUALHTML/transaction-file.html
@@ -1,20 +1,19 @@
-<!doctype html>
-
+<!DOCTYPE html>
 <html lang="ja">
 <head>
   <meta charset="utf-8">
-  <title>UEC - usp engineers' community - Tukubaiオンラインコマンドマニュアル</title>
-  <link rel="stylesheet" href="COMMON/CSS/MAIN.CSS" />
-  <link rel="stylesheet" href="COMMON/CSS/MENU.CSS" />
-  <link rel="stylesheet" href="COMMON/CSS/PRINT.CSS" />
+  <title>transaction-file - UEC - usp engineers' community - Tukubaiオンラインコマンドマニュアル</title>
+  <link rel="stylesheet" href="COMMON/CSS/MAIN.CSS">
+  <link rel="stylesheet" href="COMMON/CSS/MENU.CSS">
+  <link rel="stylesheet" href="COMMON/CSS/PRINT.CSS">
   <!--[if lte IE 8]>
-  <link rel="stylesheet" href="COMMON/CSS/IE67HACK.CSS" />
+  <link rel="stylesheet" href="COMMON/CSS/IE67HACK.CSS">
   <![endif]-->
   <!--[if IE 7]>
-  <link rel="stylesheet" href="COMMON/CSS/IE7HACK.CSS" />
+  <link rel="stylesheet" href="COMMON/CSS/IE7HACK.CSS">
   <![endif]-->
   <!--[if IE 6]>
-  <link rel="stylesheet" href="COMMON/CSS/IE6HACK.CSS" />
+  <link rel="stylesheet" href="COMMON/CSS/IE6HACK.CSS">
   <![endif]-->
   <script src="COMMON/JS/MENU.JS"></script>
 </head>
@@ -22,74 +21,103 @@
   <div id="container">
     <div id="header">
       <div id="logo">
-        <img id="logoimage" src="COMMON/IMG/TUKUBAI_LOGO.JPG" />
+        <img id="logoimage" src="COMMON/IMG/TUKUBAI_LOGO.JPG">
       </div>
       <div id="title">
         <p id="slogan"></p>
         <ul id="megamenu">
           <li id="tukubai_man"><a href="index.html" class="target">Tukubaiマニュアル</a>
             <ul>
+              <li><a href="1bai.html">1bai(1)</a></li>
+              <li><a href="block_getlast.html">block_getlast(1)</a></li>
               <li><a href="calclock.html">calclock(1)</a></li>
+              <li><a href="calsed.html">calsed(1)</a></li>
+              <li><a href="cap.html">cap(1)</a></li>
               <li><a href="cgi-name.html">cgi-name(1)</a></li>
               <li><a href="check_attr_name.html">check_attr_name(1)</a></li>
+              <li><a href="check_cmp_name.html">check_cmp_name(1)</a></li>
+              <li><a href="check_date_name.html">check_date_name(1)</a></li>
+              <li><a href="check_dble_name.html">check_dble_name(1)</a></li>
+              <li><a href="check_inlist_name.html">check_inlist_name(1)</a></li>
               <li><a href="check_need_name.html">check_need_name(1)</a></li>
               <li><a href="cjoin0.html">cjoin0(1)</a></li>
               <li><a href="cjoin1.html">cjoin1(1)</a></li>
+              <li><a href="cjoin1x.html">cjoin1x(1)</a></li>
               <li><a href="cjoin2.html">cjoin2(1)</a></li>
+              <li><a href="cjoin2x.html">cjoin2x(1)</a></li>
               <li><a href="comma.html">comma(1)</a></li>
               <li><a href="count.html">count(1)</a></li>
               <li><a href="ctail.html">ctail(1)</a></li>
               <li><a href="dayslash.html">dayslash(1)</a></li>
               <li><a href="delf.html">delf(1)</a></li>
+              <li><a href="delr.html">delr(1)</a></li>
               <li><a href="divsen.html">divsen(1)</a></li>
+              <li><a href="exist.html">exist(1)</a></li>
+              <li><a href="extname.html">extname(1)</a></li>
               <li><a href="filehame.html">filehame(1)</a></li>
               <li><a href="formhame.html">formhame(1)</a></li>
+              <li><a href="fsed.html">fsed(1)</a></li>
               <li><a href="getfirst.html">getfirst(1)</a></li>
               <li><a href="getlast.html">getlast(1)</a></li>
               <li><a href="gyo.html">gyo(1)</a></li>
+              <li><a href="haba.html">haba(1)</a></li>
               <li><a href="han.html">han(1)</a></li>
+              <li><a href="isdate.html">isdate(1)</a></li>
+              <li><a href="itouch.html">itouch(1)</a></li>
               <li><a href="join0.html">join0(1)</a></li>
               <li><a href="join1.html">join1(1)</a></li>
+              <li><a href="join1x.html">join1x(1)</a></li>
               <li><a href="join2.html">join2(1)</a></li>
+              <li><a href="join2x.html">join2x(1)</a></li>
               <li><a href="juni.html">juni(1)</a></li>
               <li><a href="kasan.html">kasan(1)</a></li>
               <li><a href="keta.html">keta(1)</a></li>
               <li><a href="keycut.html">keycut(1)</a></li>
               <li><a href="loopj.html">loopj(1)</a></li>
               <li><a href="loopx.html">loopx(1)</a></li>
+              <li><a href="maezero.html">maezero(1)</a></li>
+              <li><a href="man2.html">man2(1)</a></li>
               <li><a href="map.html">map(1)</a></li>
               <li><a href="marume.html">marume(1)</a></li>
               <li><a href="mdate.html">mdate(1)</a></li>
               <li><a href="mime-read.html">mime-read(1)</a></li>
               <li><a href="mojihame.html">mojihame(1)</a></li>
+              <li><a href="msort.html">msort(1)</a></li>
               <li><a href="nameread.html">nameread(1)</a></li>
+              <li><a href="numchar.html">numchar(1)</a></li>
               <li><a href="plus.html">plus(1)</a></li>
               <li><a href="rank.html">rank(1)</a></li>
               <li><a href="ratio.html">ratio(1)</a></li>
               <li><a href="retu.html">retu(1)</a></li>
+              <li><a href="rjson.html">rjson(1)</a></li>
               <li><a href="self.html">self(1)</a></li>
+              <li><a href="selr.html">selr(1)</a></li>
               <li><a href="sm2.html">sm2(1)</a></li>
               <li><a href="sm4.html">sm4(1)</a></li>
               <li><a href="sm5.html">sm5(1)</a></li>
               <li><a href="tarr.html">tarr(1)</a></li>
               <li><a href="tateyoko.html">tateyoko(1)</a></li>
               <li><a href="tcat.html">tcat(1)</a></li>
+              <li><a href="uconv.html">uconv(1)</a></li>
+              <li><a href="ulock.html">ulock(1)</a></li>
               <li><a href="unmap.html">unmap(1)</a></li>
               <li><a href="up3.html">up3(1)</a></li>
+              <li><a href="xmldir.html">xmldir(1)</a></li>
               <li><a href="yarr.html">yarr(1)</a></li>
               <li><a href="ycat.html">ycat(1)</a></li>
               <li><a href="yobi.html">yobi(1)</a></li>
               <li><a href="ysum.html">ysum(1)</a></li>
               <li><a href="zen.html">zen(1)</a></li>
-              <li class="separator"><hr/></li>
-              <li class="separator"><hr/></li>
-              <li class="separator"><hr/></li>
+              <li></li>
+              <li class="separator"><hr></li>
+              <li class="separator"><hr></li>
+              <li class="separator"><hr></li>
               <li><a href="tag-format.html">タグ形式(5)</a></li>
               <li><a href="name-format.html">ネーム形式(5)</a></li>
               <li><a href="field-format.html">フィールド形式(5)</a></li>
               <li><a href="master-file.html">マスタファイル(5)</a></li>
               <li><a href="name-file.html">ネームファイル(5)</a></li>
-              <li><a href="transaction-file.html" class="target">トランザクションファイル(5)</a></li>
+              <li><a href="transaction-file.html">トランザクションファイル(5)</a></li>
             </ul> 
           </li>
         </ul>
@@ -99,49 +127,33 @@
     <div id="main">
       <h1>Tukubaiオンラインコマンドマニュアル</h1>
 
-      <h2>トランザクションファイル(5)</h2>
-
-      <h3>【名前】</h3>
-
-      <p>トランザクションファイル : トランザクションの性質を満たす<a href="field-format.html">フィールド形式(5)</a>のファイル</p>
-
-      <h3>【書式】</h3>
-
-      <pre class="list">第1フィールド 第2フィールド 第3フィールド ...
-...</pre>
-
-      <h3>【説明】</h3>
-
-      <p>売上データなど随時データの追加などが実施されるタイプのデータはトランザクションと呼ばれている。トランザクションは短縮してトランと呼ばれることも多い。</p>
-
-      <p><a href="/INFO/CGI/INFO.CGI?POMPA=ABOUTUNICAGE">ユニケージ開発手法</a>では、トランザクションに該当する<a href="field-format.html">フィールド形式(5)</a>のファイルをトランザクションファイル(5)と呼んでいる。</p>
-
-      <p>トランザクションファイル(5)は短縮してトランと呼ばれることがあり、また、<a href="index.html">Tukubaiコマンドマニュアル</a>ではtranと表記される。トランザクションファイル(5)とは対照的にデータ変更のタイミングがあらかじめ定めされており、キーフィールドが重複せずかつ整列されているようなフィールド形式(5)のファイルは<a href="master-file.html">マスタファイル(5)</a>と呼ばれている。</p>
-
-      <h3>【例1】</h3>
-
-      <p>トランザクションファイル(5)の例は次のとおり。</p>
-
-      <pre class="prettyprint linenums">20110405 001 13513543
-20110405 002 3403346
-20110406 001 3543024
-20110406 002 12412311
-20110406 003 88797982
-20110407 001 1354131
-20110407 002 12343423
-20110407 003 7657765</pre>
-
-      <h3>【関連項目】</h3>
-
-      <p><a href="master-file.html">マスタファイル(5)</a>、<a href="name-file.html">ネームファイル(5)</a>、<a href="field-format.html">フィールド形式(5)</a>、<a href="tag-format.html">タグ形式(5)</a>、<a href="name-format.html">ネーム形式(5)</a></p>
-
-      <p class="annotation">※ <a href="/INFO/CGI/INFO.CGI?POMPA=ABOUTUNICAGE">ユニケージ</a>は<a href="http://www.usp-lab.com/">ユニバーサル・シェル・プログラミング研究所</a>の登録商標。</p>
-
+<h2>トランザクションファイル(5)</h2>
+<h3>【名前】</h3>
+<p>トランザクションファイル : トランザクションの性質を満たすフィールド形式(5)のファイル</p>
+<h3>【書式】</h3>
+<p>第1フィールド 第2フィールド 第3フィールド ......</p>
+<h3>【説明】</h3>
+<p>売上データなど随時データの追加などが実施されるタイプのデータはトランザクションと呼ばれている。トランザクションは短縮してトランと呼ばれることも多い。</p>
+<p>ユニケージ開発手法では、トランザクションに該当する<a href="field-format.html" class="command">フィールド形式(5)</a>のファイルを<a href="transaction-file.html" class="command">トランザクションファイル(5)</a>と呼んでいる。</p>
+<p><a href="transaction-file.html" class="command">トランザクションファイル(5)</a>は短縮してトランと呼ばれることがあり、また、Tukubaiコマンドマニュアルではtranと表記される。<a href="transaction-file.html" class="command">トランザクションファイル(5)</a>とは対照的にデータ変更のタイミングがあらかじめ定めされており、キーフィールドが重複せずかつ整列されているような<a href="field-format.html" class="command">フィールド形式(5)</a>のファイルは<a href="master-file.html" class="command">マスタファイル(5)</a>と呼ばれている。</p>
+<h3>【例1】</h3>
+<p><a href="transaction-file.html" class="command">トランザクションファイル(5)</a>の例は次のとおり。</p>
+<pre class="prettyprint">   20110405 001 13513543
+   20110405 002 3403346
+   20110406 001 3543024
+   20110406 002 12412311
+   20110406 003 88797982
+   20110407 001 1354131
+   20110407 002 12343423
+   20110407 003 7657765
+</pre>
+<h3>【関連項目】</h3>
+<p><a href="master-file.html" class="command">マスタファイル(5)</a>、<a href="name-file.html" class="command">ネームファイル(5)</a>、<a href="field-format.html" class="command">フィールド形式(5)</a>、<a href="tag-format.html" class="command">タグ形式(5)</a>、<a href="name-format.html" class="command">ネーム形式(5)</a></p>
     </div>
 
-    <div id="lastmodified">last modified: 2014-08-13 16:01:13</div>
+    <div id="lastmodified">Last modified: Thu Aug 11 13:41:19 JST 2022</div>
 
-    <div id="footer">Contact us: uecinfo@usp-lab.com<br/>Copyright (c) 2012,2013 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
+    <div id="footer">Contact us: uecinfo@usp-lab.com<br>Copyright &copy; 2012-2022 <a href="http://www.usp-lab.com/">Universal Shell Programming Laboratory</a> All Rights Reserved.</div>
   </div>
 </body>
 </html>
